March Localization II-update

--- a/learn-certs-pr/courses/20334.yml
+++ b/learn-certs-pr/courses/20334.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Основные решения Skype for Business 2015
+title: Core Solutions of Skype for Business 2015/2019
 metadata:
-  title: 'Курс 20334-C: Основные решения Skype for Business 2015/2019'
-  description: 'Курс 20334-C: Основные решения Skype for Business 2015/2019'
+  title: 'Course 20334-C: Core Solutions of Skype for Business 2015/2019'
+  description: 'Course 20334-C: Core Solutions of Skype for Business 2015/2019'
 uid: course.20334
 courseNumber: '20334-C'
 hoursToComplete: 120
@@ -25,24 +25,24 @@ learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
 levels:
-- advanced
+- intermediate
 roles:
 - administrator
 products:
-- m365
+- skype
 exams:
 - uid: exam.70-334
 summary: |-
   Этот курс дает студентам знания и навыки, необходимые для планирования, развертывания, настройки и администрирования решения Microsoft Skype for Business. Студенты узнают, как развертывать многосайтовую и высокодоступную инфраструктуру Skype for Business, которая поддерживает обмен мгновенными сообщениями, конференц-связь, корпоративную голосовую связь, архивирование и мониторинг. Студенты также узнают, как управлять, поддерживать и устранять проблемы в инфраструктуре.
-  
+
   Этот курс в основном посвящен локальному развертыванию Skype for Business, а также содержит информацию о том, как интегрировать локальное развертывание с Teams или Skype for Business Online, а также о том, как выполнить переход с предыдущих версий Skype for Business Server. Этот курс помогает студентам подготовиться к экзамену 70-334&#58; Основные решения Skype for Business 2015.
 
   #### Профиль аудитории
-  Основная аудитория этого курса - специалисты по информационным технологиям (ИТ), которые отвечают за развертывание Skype for Business в своих организациях. Для студентов, проходящих этот курс, опыт работы с предыдущими версиями будет полезен, но не обязателен. Студенты должны хорошо разбираться в доменных службах Active Directory (AD DS), сетях передачи данных, а также в стандартах и компонентах телекоммуникаций, поддерживающих конфигурацию Skype for Business. Студенты также должны быть знакомы с Microsoft Exchange Server и Microsoft 365.
-  
+  Основная аудитория этого курса - специалисты по информационным технологиям (ИТ), которые отвечают за развертывание Skype for Business в своих организациях. Для студентов, проходящих этот курс, опыт работы с предыдущими версиями будет полезен, но не обязателен. Студенты должны хорошо разбираться в доменных службах Active Directory (AD DS), сетях передачи данных, а также в стандартах и компонентах телекоммуникаций, поддерживающих конфигурацию  Skype for Business. Студенты также должны быть знакомы с Microsoft Exchange Server и Microsoft 365.
+
   Вторичная аудитория этого курса - ИТ-специалисты, которые планируют сдать Экзамен 70-334&#58; Основные решения Skype for Business 2015 в качестве отдельного экзамена или в качестве одного из требований для Microsoft Certified Solutions Expert (MCSE)&#58; Сертификационный экзамен по коммуникациям.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58; 
+  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58;
   - Минимум два года опыта администрирования Windows Server, включая Windows Server 2016 или Windows Server 2019
   - Минимум два года опыта работы с AD DS
   - Минимум два года опыта работы с разрешением имен, включая систему доменных имен (DNS)
@@ -54,14 +54,14 @@ outlineSection: |-
   В этом модуле описаны высокоуровневые компоненты и функции Skype for Business 2015. В нем также описывается, как работать с инструментами администрирования Skype for Business , основными компонентами Skype for Business Online и сосуществовать с локальными серверами Skype for Business Server 2015.
   #### Уроки
   - Обзор компонентов и функций Skype for Business
-  - Введение в инструменты администрирования Skype for Business
+  - Введение в инструменты администрирования Skype for Business 
 
 
   #### Лабораторная работа&#58; Проектирование и публикация топологии Skype for Business Server 
   - Проектирование и создание топологии
   - Обновление топологии для сайта Нью-Йорка
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать компоненты и функции высокого уровня Skype for Business 2015.
   - Работать с административными инструментами Skype for Business.
 
@@ -72,7 +72,7 @@ outlineSection: |-
   - Зависимости сервера и служб
   - Планирование SIP доменов
   - Установка Skype for Business Server
-  - Интеграция Skype for Business Server с Exchange Server и SharePoint Server
+  - Интеграция Skype for Business Server с Exchange Server и  SharePoint Server
 
 
   #### Лабораторная работа&#58; Настройка записей DNS и простых URL-адресов для Skype for Business Server
@@ -81,9 +81,9 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Развертывание Skype for Business Server
   - Установка и настройка Skype for Business Server 
-  - Установка сертификатов Skype for Business Server
+  - Установка сертификатов Skype for Business Server 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Определять внешние зависимости для Skype for Business Server 2015.
   - Определять требования к домену SIP, чтобы обеспечить успешную реализацию.
   - Устанавливать Skype for Business Server.
@@ -112,10 +112,10 @@ outlineSection: |-
   - Использование централизованной службы ведения журналов
   - Выполнение запись параметров сети с помощью анализатора сообщений
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Использовать панель управления Skype for Business Server.
   - Используйте командную консоль Skype for Business Server 
-  - Внедрять RBAC в Skype for Business 2015.
+  - Внедрять RBAC в  Skype for Business 2015.
   - Использовать важные командлеты для тестирования.
   - Использовать различные инструменты для устранения неполадок Skype for Business.
 
@@ -132,7 +132,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; настройка пользователей и клиентов в Skype for Business 2015
-  - Включение пользователей для Skype for Business с помощью командной консоли
+  - Включение пользователей для  Skype for Business с помощью командной консоли
   - Устранение неполадок при входе пользователя
 
 
@@ -140,17 +140,11 @@ outlineSection: |-
   - Настройка клиентских политик
   - Настройка адресной книги
 
-  После завершения этого модуля студенты смогут&#58;
-  - Настройка пользователей с помощью панели управления Skype for Business Server и
-  командной консоли Skype для бизнеса Server.
-
+  После завершения этого модуля студенты получат следующее&#58;
+  - Настройка пользователей с помощью панели управления Skype for Business Server и командной консоли Skype для бизнеса Server.
   - Развертывание клиентов Skype for Business.
-
-  - Объяснение процесса регистрации, входа и аутентификации в Skype for
-  Business.
-
+  - Объяснение процесса регистрации, входа и аутентификации в Skype for Business.
   - Настройка внутриполосных политик и групповых политик.
-
   - Описание процесса управления адресной книгой Skype for Business.
 
 
@@ -170,18 +164,15 @@ outlineSection: |-
   #### Лабораторная работа&#58; настройка конференц-связи в Skype for Business Server
   - Настройка, назначение и проверка политик конференц-связи
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать функции и условия проведения конференций Skype for Business.
-
   - Интегрировать Skype for Business Server 2015 с сервером Office Web Apps.
-
   - Планировать использование пропускной способности конференции.
-
   - Настройка параметров и политик конференц-связи.
 
 
   ### Модуль 6&#58; Реализация дополнительных параметров конференц-связи в Skype for Business Server 2015
-  Этот модуль описывает жизненный цикл конференц-связи и объясняет, как его администрировать. Затем объясняется, как использовать политику конференций и собраний. Также объясняется, как развертывать конференц-связь с набором номера и настраивать инфраструктуру для SRS. И наконец, в нем объясняется, как настраивать большие собрания и трансляции собраний Skype Meeting Broadcasts.
+  Этот модуль описывает жизненный цикл конференц-связи и объясняет, как его администрировать. Затем объясняется, как использовать политику конференций и собраний. Также объясняется, как развертывать конференц-связь  с набором номера и настраивать инфраструктуру для SRS. И наконец, в нем объясняется, как настраивать большие собрания и трансляции собраний Skype Meeting Broadcasts.
 
   #### Уроки
   - Обзор жизненного цикла конференции
@@ -200,15 +191,11 @@ outlineSection: |-
   - Развертывание конференц-связи с набором номера
   - Подготовка к развертыванию LRS
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Администрировать жизненный цикл конференции.
-
   - Настраивать конференц-связь и политики собраний.
-
   - Развертывать конференц-связь с набором номера.
-
   - Настраивать инфраструктуру для Lync Room System (LRS).
-
   - Настраивать большие собрания и трансляции собраний Skype Meeting Broadcasts
 
 
@@ -228,13 +215,10 @@ outlineSection: |-
   #### Лабораторная работа&#58; внедрение архивации
   - Включение архивирования Skype for Business Server на Microsoft Exchange Server 2013
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать компоненты службы мониторинга в Skype for Business Server.
-
   - Осуществлять мониторинг.
-
   - Разработка политики архивирования.
-
   - Внедрение архивирования.
 
 
@@ -258,17 +242,12 @@ outlineSection: |-
   - Установка и настройка обратного прокси
   - Проверить внешний обмен сообщениями
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Определять компоненты для внешнего доступа.
-
   - Настраивать политики и безопасность внешнего доступа External Access.
-
   - Настраивать сети и сертификаты внешнего доступа External Access.
-
   - Настраивать обратный прокси.
-
   - Настраивать Skype for Business Server 2015 для мобильных клиентов.
-
   - Проектировать и настраивать федерации в Skype for Business Server.
 
 
@@ -291,11 +270,9 @@ outlineSection: |-
   - Проверка развертывания сохраняемого чата
   - Устранение неполадок сохраняемого чата
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разрабатывать топологию Skype for Business, включающую сохраняемый чат.
-
   - Развертывать сохраняемый чат в Skype for Business.
-
   - Настройка и управление сохраняемым чатом в Skype for Business.
 
 
@@ -316,13 +293,9 @@ outlineSection: |-
   - Управление интерфейсными пулами
   - Настройка аппаратного выравнивания нагрузки
 
-  После завершения этого модуля студенты смогут&#58;
-  - Проектирование и внедрение решений высокой доступности для серверов переднего плана в
-  среде Skype for Business Server.
-
-  - Проектирование и внедрение решений высокой доступности для внутренних серверов в
-  среде Skype for Business Server.
-
+  После завершения этого модуля студенты получат следующее&#58;
+  - Проектирование и внедрение решений высокой доступности для серверов переднего плана в среде Skype for Business Server.
+  - Проектирование и внедрение решений высокой доступности для внутренних серверов в среде Skype for Business Server.
   - Разработка и внедрение решений высокой доступности для хранилищ файлов,
   пограничных серверов, серверов-посредников, ферм серверов Office Online и обратных прокси-серверов 
   в среде Skype for Business Server.
@@ -340,17 +313,15 @@ outlineSection: |-
   - Настройка сопряжения пулов
   - Выполнение отказоустройчивости пула и восстановления после отказа
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать варианты аварийного восстановления в Skype for Business Server.
-
   - Реализовывать аварийное восстановление в Skype for Business Server.
-
   - Описывать варианты аварийного восстановления для сохраняемого чата, центрального 
   центрального хранилища управления, базы данных службы определения местоположения (LIS) и пользовательских 
   данных.
 
 
-  ### Модуль 12&#58; Интеграция со Skype for Business Online
+  ### Модуль 12. Интеграция со Skype for Business Online
   В этом модуле описаны функции Skype for Business Online. Затем объясняется, как подготовить локальную среду для гибридного развертывания Skype for Business. Также объясняется, как настроить гибридное развертывание Skype for Business.
   #### Уроки
   - Обзор Skype for Business Online
@@ -361,11 +332,9 @@ outlineSection: |-
   #### Лабораторная работа&#58; разработка гибридного развертывания Skype for Business 
   - Разработка гибридного Skype for Business 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать функции Skype for Business Online
-
   - Готовить локальную среду для гибридного развертывания Skype for Business.
-
   - Настраивать гибридное развертывание Skype for Business.
 
 
@@ -381,11 +350,8 @@ outlineSection: |-
   - Установка административных инструментов Skype for Business
   - Выполнение обновления на месте с Lync Server 2013 до Skype for Business Server 2015
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать поддерживаемые пути миграции и обновления для Skype for Business
-  Server.
-
-  - Выполнять обновление на месте Lync Server 2013 до Skype for Business
-  Server.
-
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описывать поддерживаемые пути миграции и обновления для Skype for Business Server.
+  - Выполнять обновление на месте Lync Server 2013 до Skype for Business Server.
   - Описывать, как управлять пользовательским интерфейсом во время обновления.
+
