--- a/learn-certs-pr/courses/20339-1.yml
+++ b/learn-certs-pr/courses/20339-1.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Планирование и администрирование SharePoint 2016
+title: Planning and Administering SharePoint 2016
 metadata:
-  title: 'Курс 20339-1-A: Планирование и администрирование SharePoint 2016'
-  description: 'Курс 20339-1-A: Планирование и администрирование SharePoint 2016'
+  title: 'Course 20339-1A: Planning and Administering SharePoint 2016'
+  description: 'Course 20339-1A: Planning and Administering SharePoint 2016'
 uid: course.20339-1
 courseNumber: '20339-1A'
 hoursToComplete: 120
@@ -40,21 +40,20 @@ summary: |-
 
   #### Профиль аудитории
   Курс ориентирован на опытных ИТ-специалистов, которые заинтересованы в получении знаний и навыков, как устанавливать, настраивать, развертывать и управлять SharePoint 2016 как в центре обработки данных, так и в облаке.
-  
+
   Слушатели курса должны иметь более одного года практического опыта* по планированию и поддержке SharePoint и два года опыта работы с другими основными технологиями, от которых зависит SharePoint, включая Windows Server 2012 R2 или более поздней версии, службы IIS, Microsoft SQL Server 2014 или более поздней версии, доменные службы Active Directory (AD DS) и службы сетевой инфраструктуры.
-  
-  Ниже перечислен минимальный набор навыков кандидата&#58; 
+
+  Ниже перечислен минимальный набор навыков кандидата&#58;
   - ИТ-специалист, который планирует, внедряет и поддерживает развертывание SharePoint 2016 на нескольких серверах.
   - Имеет практические знания и, желательно, практический опыт работы с SharePoint Online.
   - Наличие хороших знаний рабочих нагрузок SharePoint.
-  - Наличие опыта управления непрерывностью бизнеса, включая резервное копирование и восстановление данных и обеспечение высокой доступности.
+  - Опыт управления непрерывностью бизнеса, включая резервное копирование, восстановление и высокую доступность данных.
   - Наличие опыта работы с технологиями безопасности и проверки подлинности.
   - Наличие опыта работы с Windows PowerShell.
 
   *Практический опыт или опыт работы должны быть получены из роли, основанной на решениях, где кандидат работал над несколькими решениями в пространстве SharePoint, которые включают управление документами, управление контентом и поиск.
 prerequisitesSection: |-
-  Перед началом этого курса,
-  слушатели должны знать&#58; 
+  Перед началом этого курса, слушатели должны знать&#58;
   - Управление программным обеспечением в среде корпоративного сервера Windows Server 2012 или Windows Server 2012 R2.
   - Развертывание и управление приложениями внутри самих приложений, виртуально, и в облаке.
   - Администрирование IIS.
@@ -74,7 +73,7 @@ outlineSection: |-
   - Новые функции в SharePoint 2016
   - Варианты развертывания SharePoint 2016
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Определять архитектуру и возможности SharePoint 2016.
   - Определять новые и устаревшие функции в SharePoint 2016.
   - Определять варианты развертывания для SharePoint 2016.
@@ -96,13 +95,10 @@ outlineSection: |-
   #### Лабораторная работа&#58; Создание информационной архитектуры. Часть вторая
   - Разработка бизнес-таксономии
 
-  После завершения этого модуля студенты смогут&#58;
-  - Объяснять, как понимание бизнес-требований влияет
-  на проектирование организационной информационной архитектуры.
-  - Описывать ключевые компоненты, доступные в SharePoint 2016 
-  для развертывания информационной архитектуры.
-  - Планировать обнаружение, как часть развертывания 
-  информационной архитектуры.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Объяснять, как понимание бизнес-требований влияет на проектирование организационной информационной архитектуры.
+  - Описывать ключевые компоненты, доступные в SharePoint 2016 для развертывания информационной архитектуры.
+  - Планировать обнаружение, как часть развертывания информационной архитектуры.
 
 
   ### Модуль 3&#58; Проектирование логической архитектуры
@@ -116,10 +112,9 @@ outlineSection: |-
   - Планирование логической архитектуры
   - Создание логической диаграммы архитектуры
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Сопоставлять бизнес-требования с компонентами архитектуры SharePoint 2016.
-  - Объяснять важность документации и описывать варианты
-  документирования логической архитектуры.
+  - Объяснять важность документации и описывать варианты документирования логической архитектуры.
 
 
   ### Модуль 4&#58; Проектирование физической архитектуры
@@ -136,16 +131,14 @@ outlineSection: |-
   - Разработка схемы проектирования физической архитектуры
 
   После
-  завершения этого модуля слушатели смогут&#58; 
-  - Описывать требования к физическим
-  компонентам, необходимым для развертывания SharePoint 2016.
-  - Описать требования к поддерживающим 
-  компонентам, которые необходимы для успешного развертывания SharePoint 2016.
+  завершения этого модуля слушатели смогут&#58;
+  - Описывать требования к физическим компонентам, необходимым для развертывания SharePoint 2016.
+  - Описать требования к поддерживающим компонентам, которые необходимы для успешного развертывания SharePoint 2016.
   - Определять топологии фермы SharePoint.
   - Сопоставлять логическую архитектуру с физической конструкцией архитектуры.
 
 
-  ### Модуль 5&#58; Установка и настройка SharePoint 2016
+  Модуль 5&#58; Установка и настройка SharePoint 2016
   В этом модуле объясняется, как установить SharePoint 2016 в различных топологиях, выполнить сценарий установки и настроить среду SharePoint 2016. В этом модуле также объясняется, как настроить основные параметры фермы в развертывании SharePoint 2016.
   #### Уроки
   - Установка SharePoint 2016
@@ -163,11 +156,10 @@ outlineSection: |-
   - Настройка интеграции с Office Online Server
 
   После
-  завершения этого модуля слушатели смогут&#58; 
+  завершения этого модуля слушатели смогут&#58;
   - Установить SharePoint 2016.
   - Развернуть и настроить SharePoint 2016. 
-  - Написать сценарий установки и настройки 
-  SharePoint 2016.
+  - Написать сценарий установки и настройки SharePoint 2016.
   - Настроить параметры фермы SharePoint 2016.
 
 
@@ -190,7 +182,7 @@ outlineSection: |-
   - Использование создания Fast Site Collection
 
   После
-  завершения этого модуля слушатели смогут&#58; 
+  завершения этого модуля слушатели смогут&#58;
   - Создать веб-приложения.
   - Настроить веб-приложения.
   - Создание и настройка семейств сайтов.
@@ -209,7 +201,7 @@ outlineSection: |-
   - Настройка приложения-службы Word Automation Services для преобразования документа
   - Настройка прокси-групп приложений-служб
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить основные компоненты и топологии для архитектуры приложения-службы SharePoint 2016.
   - Планировать учетные записи служб и зависимостей приложений-служб.
   - Понимать цель сопоставления приложений-служб с бизнес-требованиями.
@@ -234,7 +226,7 @@ outlineSection: |-
   - Управление безопасностью сайта
   - Включение анонимного доступа к сайту
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управление пользователями и разрешениями в SharePoint 2016.
   - Управлять доступом к контенту в SharePoint 2016.
 
@@ -253,7 +245,7 @@ outlineSection: |-
   - Настройка SharePoint для доверия AD FS в качестве поставщика удостоверений
   - Настройка веб-приложения для использования поставщика удостоверений AD FS
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснять инфраструктуру проверки подлинности SharePoint 2016.
   - Настраивать поставщиков утверждений и федерацию удостоверений для SharePoint 2016.
   - Настраивать межсерверную аутентификацию для SharePoint 2016.
@@ -273,7 +265,7 @@ outlineSection: |-
   - Настройка безопасности веб-частей
   - Внедрение аудита безопасности
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Безопасное развертывание SharePoint 2016 на уровне платформы.
   - Настройка параметров безопасности на уровне фермы для развертывания SharePoint 2016.
 
@@ -296,7 +288,7 @@ outlineSection: |-
   - Создание наборов терминов и терминов
   - Использование наборов терминов
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и управлять типами контента и распространением типов контента.
   - Объяснять реализацию управляемых метаданных в веб-приложениях SharePoint и семействах сайтов.
   - Настраивать приложение-службу управления управляемыми метаданными в SharePoint 2016.
@@ -318,7 +310,7 @@ outlineSection: |-
   - Настройка My Sites
   - Настройка аудитории
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать приложение-службу профилей пользователей.
   - Управлять профилями пользователей и аудиториями.
 
@@ -345,7 +337,7 @@ outlineSection: |-
   - Настройка экстракторов и уточнений сущностей 
   - Управление исправлением орфографии запросов
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать архитектуру службы поиска в SharePoint 2016.
   - Настройка службы поиска в SharePoint 2016.
   - Управление поиском в SharePoint 2016.
@@ -371,9 +363,10 @@ outlineSection: |-
   - Анализ сетевого трафика
   - Анализ производительности страницы SharePoint
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разрабатывать и внедрять план мониторинга для среды SharePoint 2016.
   - Настраивать и оптимизировать фермы серверов SharePoint 2016 на постоянной основе.
   - Планировать и настраивать кэширование для повышения производительности развертывания SharePoint 2016.
-  
+
   Устранение ошибок и других проблем в развертывании SharePoint 2016
+
