--- a/learn-certs-pr/courses/20339-2.yml
+++ b/learn-certs-pr/courses/20339-2.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Передовые технологии SharePoint 2016
+title: Advanced Technologies of SharePoint 2016
 metadata:
-  title: 'Курс 20339-2-A: Передовые технологии SharePoint 2016'
-  description: 'Курс 20339-2-A: Передовые технологии SharePoint 2016'
+  title: 'Course 20339-2-A: Advanced Technologies of SharePoint 2016'
+  description: 'Course 20339-2-A: Advanced Technologies of SharePoint 2016'
 uid: course.20339-2
 courseNumber: '20339-2-A'
 hoursToComplete: 120
@@ -33,28 +33,27 @@ exams:
 - uid: exam.70-339
 summary: |-
   Этот пятидневный курс научит вас, как планировать, настраивать и управлять дополнительными функциями в среде SharePoint 2016 года.  Особое внимание в этом курсе уделяется внедрению высокой доступности, аварийному восстановлению, архитектуре службы приложений и Microsoft Business Connectivity Services. Этот курс также фокусируется на функциях социальных сетей, производительности и платформах, а также возможностях для совместной работы. Слушатели также узнают о бизнес-аналитике, Enterprise Content Management, инфраструктуре управления веб-контентом, решениями и приложениями. В этом курсе также рассказывается, как разработать и внедрить план управления, а также как выполнить обновление или переход на SharePoint 2016.
-
+  
   Это второй курс из двух курсов для ИТ-специалистов, который соответствует сертификации SharePoint 2016 IT Pro.
 
   #### Профиль аудитории
   Курс ориентирован на опытных ИТ-специалистов, которые заинтересованы в получении знаний и навыков, как устанавливать, настраивать, развертывать и управлять SharePoint 2016 как в центре обработки данных, так и в облаке.  
-  
+
   Слушатели курса должны иметь практический опыт более четырех лет* в планировании и обслуживании SharePoint Server и других основных технологий, от которых зависит SharePoint, включая Windows Server 2012 R2 или более поздней версии, службы IIS, Microsoft SQL Server 2014 R2 или более поздней версии, доменные службы Active Directory (AD DS) и службы сетевой инфраструктуры.
-  
-  Студенты должны завершить курс 20339-1A&#58; Планирование и управление Microsoft SharePoint 2016 или иметь эквивалентные знания и опыт, прежде чем проходить этот курс. Ниже перечислен минимальный набор навыков кандидата&#58; 
-  
+
+  Студенты должны завершить курс 20339-1A&#58; Планирование и управление Microsoft SharePoint 2016 или иметь эквивалентные знания и опыт, прежде чем проходить этот курс. Ниже перечислен минимальный набор навыков кандидата&#58;
+
   - Практические знания, а предпочтительно практический опыт, с Microsoft SharePoint Online.
   - Знание рабочих нагрузок SharePoint Server.
   - Опыт управления непрерывностью бизнеса, включая резервное копирование, восстановление и высокую доступность данных.
   - Наличие опыта работы с технологиями безопасности и проверки подлинности.
   - Наличие опыта работы с Windows PowerShell.
-  
+
   Практический опыт или опыт работы должны быть получены из роли, основанной на решениях, где кандидат работал над несколькими решениями в пространстве SharePoint, которые включают управление документами, управление контентом и поиск.
-  
 prerequisitesSection: |-
   Идеальный кандидат для этого курса должен иметь минимум один год опыта развертывания и администрирования нескольких ферм SharePoint Server 2013 на крупном предприятии. Перед началом данного курса кандидат должен был пройти курс 20339-1A&#58; Планирование и администрирование Microsoft SharePoint 2016 или продемонстрировать наличие эквивалентных навыков.
-  
-  Перед прохождением этого курса слушатели должны продемонстрировать наличие следующих навыков&#58; 
+
+  Перед прохождением этого курса слушатели должны продемонстрировать наличие следующих навыков&#58;
   - Минимум один год опыта сопоставления бизнес-требований с логическими и физическими техническими проектами.
   - Практические знания по проектированию сети, включая безопасность сети.
   - Опыт управления программным обеспечением на корпоративном сервере Windows Server 2012 R2 или в среде Windows Server 2016.
@@ -78,11 +77,11 @@ outlineSection: |-
   - Создание и настройка семейств сайтов и сайтов
   - Предоставление приложений-служб с помощью командной консоли SharePoint 2016
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать архитектурные особенности Microsoft SharePoint 2016.
   - Определять новые, устаревшие и удаленные функции в SharePoint 2016.
   - Описывать локально релизы SharePoint 2016 
-  и Microsoft SharePoint Online.
+  - и Microsoft SharePoint Online.
 
 
   ### Модуль 2&#58; Введение в гибридные сценарии для SharePoint 2016
@@ -100,7 +99,7 @@ outlineSection: |-
   - Подготовка среды SharePoint
   - Запуск средства выбора SharePoint Hybrid
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать ключевые гибридные функции в SharePoint Server 2016.
   - Подготовка к гибридному развертыванию SharePoint 2016.
 
@@ -117,7 +116,7 @@ outlineSection: |-
   - Создание плана резервного копирования и восстановления
   - Тестирование процесса резервного копирования и восстановления
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Выбирать подходящую конфигурацию сервера базы данных для соответствия требованиям доступности.
   - Разработать физическую архитектуру и инфраструктуру для удовлетворения требований к высокой доступности.
   - Разработать и внедрять стратегию резервного копирования и восстановления.
@@ -140,7 +139,7 @@ outlineSection: |-
   - Настройка целевого приложения службы Secure Store
   - Импорт и настройка моделей BDC
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать и настраивать приложения-службы Business Connectivity.
   - Планировать и настраивать приложение-службу Secure Store
   - Управлять моделями Business Data Connectivity.
@@ -159,9 +158,9 @@ outlineSection: |-
   - Создание и настройка корпоративного каталога приложений
   - Развертывание и мониторинг приложений
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать надстройки Microsoft SharePoint и поддерживающую инфраструктуру SharePoint
-  - Готовить к работе и настраивать надстройки SharePoint и каталоги приложений
+  - Готовить к работе  и настраивать надстройки SharePoint и каталоги приложений
   - Управлять использованием приложений в развертывании SharePoint 2016
 
 
@@ -177,11 +176,9 @@ outlineSection: |-
   - Настройка сайта SharePoint для поддержки изолированных решений
   - Развертывание решений с фермами
 
-  После завершения этого модуля студенты смогут&#58;
-  - Управление функциями и решениями в Microsoft SharePoint
-  2016 г.
-  - Управление изолированными решениями в SharePoint 2016
-  развертывании.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Управление функциями и решениями в Microsoft SharePoint 2016.
+  - Управление изолированными решениями в SharePoint 2016 развертывании.
 
 
   ### Модуль 7&#58; Соединение людей
@@ -201,7 +198,7 @@ outlineSection: |-
   - Создание инфраструктуры сайта сообщества
   - Настройка участия на сайте сообщества
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять профилями пользователей в Microsoft SharePoint 2016 и
   настраивать синхронизацию профилей пользователей с помощью Microsoft Identity Manager
   (MIM) 2016.
@@ -222,19 +219,17 @@ outlineSection: |-
   #### Лабораторная работа&#58; Настройка управляемой навигации и сайтами каталогов 
   - Настройка сайта с каталогом товаров 
   - Настройка публикаций на нескольких сайтах
-   Настройка сайтов издательств
+  - Настройка сайтов издательств
 
 
   #### Лабораторная работа&#58; Настройка каналов устройства
   - Настройка каналов устройства
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать и настраивать инфраструктуру управления веб-контентом
   - Настраивать управляемую навигации и сайты с каталогами
-  - Планировать и настраивать поддержку многоязычных
-  сайтов и локалей.
-  - Управлять проектированием и настройкой
-  сайтов издательств.
+  - Планировать и настраивать поддержку многоязычных сайтов и локалей.
+  - Управлять проектированием и настройкой сайтов издательств.
   - Планировать и настраивать поддержку мобильных пользователей.
 
 
@@ -255,7 +250,7 @@ outlineSection: |-
   #### Лабораторная работа&#58; Настройка управления записями в SharePoint Server 2016
   - Настройка управлением записями на месте
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать управление контентом и документами.
   - Планировать и настраивать eDiscovery.
   - Планировать управление записями и обеспечивать соответствие требованиям.
@@ -277,13 +272,10 @@ outlineSection: |-
   - Настройка PowerPivot для SharePoint 2016
   - Настройка Power View для SharePoint
 
-  После завершения этого модуля студенты смогут&#58;
-  - Объяснять архитектуру бизнес-аналитики (BI) Microsoft SharePoint, 
-  ее компоненты и план бизнес-аналитики.
-  - Планировать, развертывать и управлять основными Microsoft SharePoint
-  2016 BI-службами.
-  - Настраивать расширенные параметры BI, доступные в
-  SharePoint 2016 и Microsoft SQL Server 2014.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Объяснять архитектуру бизнес-аналитики (BI) Microsoft SharePoint, ее компоненты и план бизнес-аналитики.
+  - Планировать, развертывать и управлять основными Microsoft SharePoint 2016 BI-службами.
+  - Настраивать расширенные параметры BI, доступные в SharePoint 2016 и Microsoft SQL Server 2014.
 
 
   ### Модуль 11&#58; Планирование и настройка производительности и совместной работы.
@@ -305,9 +297,8 @@ outlineSection: |-
   - Настройка рабочего процесса Microsoft Azure и служб рабочего процесса Microsoft SharePoint
   - Создание и тестирование рабочего процесса
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать планирование и настройку вариантов
-  сотрудничества и соавторства в SharePoint.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описывать планирование и настройку вариантов сотрудничества и соавторства в SharePoint.
   - Настраивать сайты проекта и привлекать команды
   - Планировать и настраивать компоненты
   - Настраивать рабочие процессы в SharePoint 2016
@@ -330,8 +321,9 @@ outlineSection: |-
   - Подготовка семейств сайтов к обновлению
   - Обновление семейств сайтов
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать и осуществлять подготовку к обновлению
   - Выполнять обновление данных и сервисных приложений
   - Обновлять семейства сайтов
   - Обновлять расширенный контент с SharePoint Server 2013 до SharePoint 2016.
+
