--- a/learn-certs-pr/courses/20345-1.yml
+++ b/learn-certs-pr/courses/20345-1.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Администрирование Microsoft Exchange Server 2016/2019
+title: Administering Microsoft Exchange Server 2016/2019
 metadata:
-  title: 'Курс 20345-1-B: Администрирование Microsoft Exchange Server 2016/2019'
-  description: 'Курс 20345-1-B: Администрирование Microsoft Exchange Server 2016/2019'
+  title: 'Course 20345-1-B: Administering Microsoft Exchange Server 2016/2019'
+  description: 'Course 20345-1-B: Administering Microsoft Exchange Server 2016/2019'
 uid: course.20345-1
 courseNumber: '20345-1-B'
 hoursToComplete: 120
@@ -15,7 +15,7 @@ skillsGained:
 - skill: Развертывание служб клиентского доступа на сервере Exchange.
 - skill: Управление высокой доступностью в Exchange Server.
 - skill: Внедрение аварийного восстановления в Exchange Server.
-- skill: Настройка и управление передачей сообщений в Exchange 
+- skill: Настройка и управление передачей сообщений в Exchange
 - skill: Настройка безопасности сообщений в Exchange Server.
 - skill: Мониторинг и устранение неполадок в Exchange Server.
 - skill: Настройка разрешений контроля доступа на основе ролей Exchange Server и настройка ведения журнала аудита для администраторов и пользователей.
@@ -32,12 +32,12 @@ products:
 exams:
 - uid: exam.70-345
 summary: |-
- Этот курс учит ИТ-специалистов администрировать и поддерживать Exchange Server. Курс рассказывает, как установить и настроить Exchange Server. В нем также рассказывается, как управлять получателями почты и общими папками, в том числе выполнять массовые операции с помощью командной консоли Exchange. Кроме того, в курсе рассказывается, как управлять подключениями клиентов, передачей сообщений и гигиеной сообщений, а также развертыванием Exchange Server высокой доступности. В нем также рассказывается, как внедрять решения для аварийного восстановления. И, наконец, в курсе рассматривается, как поддерживать и контролировать развертывание Exchange Server и как администрировать Exchange Online в развертывании Office 365.
+  Этот курс учит ИТ-специалистов администрировать и поддерживать Exchange Server. Курс рассказывает, как установить и настроить Exchange Server. В нем также рассказывается, как управлять получателями почты и общими папками, в том числе выполнять массовые операции с помощью командной консоли Exchange. Кроме того, в курсе рассказывается, как управлять подключениями клиентов, передачей сообщений и гигиеной сообщений, а также развертыванием Exchange Server высокой доступности. В нем также рассказывается, как внедрять решения для аварийного восстановления. И, наконец, в курсе рассматривается, как поддерживать и контролировать развертывание Exchange Server и как администрировать Exchange Online в развертывании Office 365.
 
   #### Профиль аудитории
   Аудитория этого курса - администраторы обмена сообщениями корпоративного уровня на сервере Exchange. Этот курс могут также пройти специалисты по ИТ и специалисты службы поддержки, желающие узнать об Exchange Server. Для прохождения этого курса, слушателям необходимо иметь минимум два года опыта работы в области информационных технологий, как правило, в области администрирования Windows Server, сетевого администрирования, службы поддержки или системного администрирования. Также ожидается, что они имеют некоторый опыт работы с концепциями Exchange Server, но предыдущий опыт управления Exchange Server не является обязательным.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту слушатели данного курса должны обладать следующими техническими знаниями&#58; 
+  - В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58;
   - Минимум два года опыта администрирования Windows Server
   - Минимум два года опыта работы с доменными службами Active Directory (AD DS)
   - Минимум два года опыта работы с разрешением имен, включая систему доменных имен (DNS)
@@ -62,11 +62,11 @@ outlineSection: |-
   - Проверка функциональности Exchange Server
   - Установка Exchange Server 2019 на Windows Server Core 2019 (необязательно)
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать основные функции и возможности Exchange Server
   - Описывать архитектуру сервера Exchange
   - Описывать требования и параметры для развертывания Exchange Server
-  - Развертывать Exchange Server
+  - Развертывание Exchange Server.
   - Описывать использование инструментов управления для управления Exchange Server
 
 
@@ -81,7 +81,7 @@ outlineSection: |-
   #### Лабораторная работа&#58; Настройка хранилища Exchange Server
   - Создание и настройка баз данных почтовых ящиков.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать функции баз данных почтовых ящиков Exchange Server
   - Объяснять варианты хранения, доступные для Exchange Server
   - Настраивать базы данных и хранилища почтовых ящиков Exchange Server
@@ -105,7 +105,7 @@ outlineSection: |-
   - Управление политиками адресов электронной почты
   - Управление списками адресов и политиками адресных книг
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять почтовыми ящиками пользователей в Exchange Server
   - Управлять общими, ресурсными, общими папками и арбитражными почтовыми ящиками в Exchange Server
   - Управление контактами, пользователями почты и группами рассылки в Exchange Server
@@ -124,7 +124,7 @@ outlineSection: |-
   - Использование командной консоли Exchange для управления получателями
   - Использование командной консоли Exchange для управления сервером Exchange
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять получателями с помощью командлетов Exchange Server
   - Управлять серверами Exchange с помощью командлетов Exchange Server
   - Управлять серверами Exchange с помощью скриптов
@@ -151,11 +151,11 @@ outlineSection: |-
   - Настройка Outlook в интернете
   - Настройка Microsoft Exchange ActiveSync
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать службы клиентского доступа в Exchange Server
   - Управлять услугами клиентского доступа
   - Описывать клиентское подключение и публикацию служб Exchange Server
-  - Настраивать Outlook в интернете.
+  - Настройка Outlook в Сети
   - Настраивать обмен мобильными сообщениями на Exchange Server
 
 
@@ -175,7 +175,7 @@ outlineSection: |-
   - Развертывание решения высокой доступности для служб клиентского доступа
   - Тестирование конфигурации высокой доступности
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать высокую доступность в Exchange Server
   - Настраивать высокодоступные базы данных почтовых ящиков
   - Настройка высокодоступных служб клиентского доступа
@@ -196,7 +196,7 @@ outlineSection: |-
   - Восстановление почтового ящика Exchange Server
   - Восстановление члена группы обеспечения доступности баз данных (DAG) (необязательно)
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Обеспечивать резервное копирование данных на Exchange Server
   - Восстанавливать данные с сервера Exchange Server с помощью настроенных резервных копий
 
@@ -215,7 +215,7 @@ outlineSection: |-
   - Настройка правила отправки сообщения с отказом от ответственности
   - Настройка политики DLP для финансовых данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать передачу сообщений в Exchange Server
   - Настроить передачу сообщений в Exchange Server
   - Управление правилами передачи сообщений в Exchange Server
@@ -233,7 +233,7 @@ outlineSection: |-
   - Настройка и тестирование EdgeSync
   - Настройка функций защиты от вирусов, спама и вредоносных программ
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Развертывать и управлять пограничным транспортным сервером для обеспечения безопасности сообщений
   - Внедрять антивирусное решение для Exchange Server
   - Внедрять антиспам-решение для Exchange Server
@@ -251,7 +251,7 @@ outlineSection: |-
   - Устранение неполадок доступности базы данных
   - Устранение неполадок серверов клиентского доступа
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать мониторинг производительности в Exchange Server
   - Устранение неполадок в Exchange Server
 
@@ -269,7 +269,7 @@ outlineSection: |-
   - Настройка ведения журнала аудита
   - Обслуживание Exchange Server
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Обеспечивать безопасность Exchange Server с использованием RBAC.
   - Настраивать ведение журнала аудита в Exchange Server.
   - Поддерживать и обновлять Exchange Server.
@@ -287,7 +287,8 @@ outlineSection: |-
   #### Лабораторная работа&#58; Управление Exchange Online
   - Управление Exchange Online
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Обеспечивать обзор Exchange Online и Office 365.
   - Управлять Exchange Online.
   - Реализовать миграцию на Exchange Online.
+
