--- a/learn-certs-pr/courses/20345-2.yml
+++ b/learn-certs-pr/courses/20345-2.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Проектирование и развертывание Microsoft Exchange Server 2016/2019
+title: Designing and Deploying Microsoft Exchange Server 2016/2019
 metadata:
-  title: 'Курс 20345-2-B: Проектирование и развертывание Microsoft Exchange Server 2016/2019'
-  description: 'Курс 20345-2-B: Проектирование и развертывание Microsoft Exchange Server 2016/2019'
+  title: 'Course 20345-2-B: Designing and Deploying Microsoft Exchange Server 2016/2019'
+  description: 'Course 20345-2-B: Designing and Deploying Microsoft Exchange Server 2016/2019'
 uid: course.20345-2
 courseNumber: '20345-2-B'
 hoursToComplete: 120
@@ -37,7 +37,7 @@ summary: |-
   #### Профиль аудитории
   Слушателями этого курса - ИТ-специалисты, которые являются опытными администраторами обмена сообщениями, архитекторами обмена сообщениями или консультантами. Этот курс предназначен для людей в корпоративной среде, которые отвечают за разработку и развертывание решений Exchange Server, в том числе сред, которые содержат предыдущие версии Exchange Server или Exchange Online. Ожидается, что слушатели, прошедшие этот курс, будут иметь опыт работы с Exchange Server 2019 или предыдущими версиями Exchange Server.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58; 
+  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58;
    - Курс 20345-1B&#58; Администрирование Microsoft Exchange Server 2016/2019 или эквивалентные знания
    - Минимум два года опыта работы с любой версией Exchange Server
    - Минимум шесть месяцев опыта работы с Exchange Server 2013 или Exchange Server 2016
@@ -49,7 +49,7 @@ prerequisitesSection: |-
 outlineSection: |-
   ### Модуль 1&#58; Планирование развертываний Exchange Server
   Этот модуль объясняет основные функции Exchange Server и объясняет, как собирать бизнес-требования. Также объясняется, как спланировать развертывание Exchange Server и миграцию единой системы обмена сообщениями в облачную голосовую почту.
-  
+
   #### Уроки
   - Новые функции в Exchange Server 2019
   - Сбор бизнес-требований для развертывания Exchange Server
@@ -62,9 +62,9 @@ outlineSection: |-
   - Определение требований
   - Обсуждение&#58; Проект развертывания для Exchange Server 2019
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать новые функции в Exchange Server 2019
-  - Описывать процесс сбора бизнес-требований для развертывания Exchange Server
+  - Описывать  процесс сбора бизнес-требований для развертывания Exchange Server
   - Планировать развертывание Exchange Server
   - Планировать миграцию единой системы обмена сообщениями Exchange Server 2016 в облачную голосовую почту
 
@@ -83,7 +83,7 @@ outlineSection: |-
   - Реализация баз данных почтовых ящиков
   - Планирование и реализация общих папок
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать и внедрять оборудования Exchange Server
   - Планировать виртуализацию Exchange Server и интеграцию Microsoft Azure
   - Планирование и реализация общих папок
@@ -103,7 +103,7 @@ outlineSection: |-
   - Планирование соответствия транспорта
   - Осуществление транспортного соответствия
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Проектировать маршрутизацию сообщений
   - Проектировать службы передачи сообщений
   - Проектировать внешнюю маршрутизацию сообщений
@@ -126,9 +126,9 @@ outlineSection: |-
   - Планирование и развертывание Office Online Server
   - Планирование и внедрение обратного прокси
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать клиентов Exchange Server
-  - Планировать клиентский доступ
+  - Планировать  клиентский доступ
   - Планировать и внедрять Office Online Server
   - Планировать и внедрять SharePoint, а также сосуществование с Exchange Server
   - Разрабатывать внешний клиентский доступ
@@ -149,7 +149,7 @@ outlineSection: |-
   - Создание запаздывающей копии базы данных
   - Восстановление данных из запаздывающей копии базы данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать высокую доступность для сервера Exchange
   - Планировать балансировку нагрузки при развертывании Exchange Server
   - Планировать устойчивость сайта при развертывании Exchange Server
@@ -166,7 +166,7 @@ outlineSection: |-
   - Использование Windows PowerShell для исследования и настройки управляемой доступности
   - Внедрение DSC
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Использовать управляемую доступность для улучшения высокой доступности
   - Внедрять DSC
 
@@ -184,12 +184,12 @@ outlineSection: |-
   - Интеграция AD RMS с Exchange Server
   - Создание правил передачи сообщений для защиты электронной почты
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать безопасности обмена сообщениями
   - Разрабатывать и внедрять AD RMS и Azure RMS
 
 
-  ### Модуль 8&#58; Разработка и реализация хранения и архивирования сообщений
+  ### Модуль 8. Разработка и реализация хранения и архивирования сообщений
   Этот модуль объясняет цель архивирования и управления записями сообщений. Также объясняется, как проектировать и реализовывать архивирование на месте и хранить сообщения.
   #### Уроки
   - Обзор архивирования и управления записями сообщений
@@ -201,7 +201,7 @@ outlineSection: |-
   - Проектирование хранения и архивирования сообщений
   - Реализация хранения и архивирования сообщений
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснять цель архивирования и управления записями сообщений
   - Разрабатывать и внедрять архивацию на месте
   - Разрабатывать и внедрять хранение сообщений
@@ -221,14 +221,14 @@ outlineSection: |-
   - Внедрение In-Place eDiscovery
   - Сравнение политики обмена сообщениями и параметров соответствия
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разрабатывать и внедрять предотвращение потери данных
   - Разрабатывать и внедрять хранение на месте
   - Разрабатывать и внедрять In-Place eDiscovery
 
 
   ### Модуль 10&#58; Проектирование и реализация сосуществования сообщений
-  Этот модуль объясняет, как проектировать и внедрять федерации. Также объясняется, как проектировать сосуществование организаций Exchange Server. И, наконец, в нем объясняется, как проектировать и реализовывать перемещения почтовых ящиков между лесами.
+  Этот модуль объясняет, как проектировать и внедрять федерации. Также объясняется, как проектировать сосуществование  организаций Exchange Server. И, наконец, в нем объясняется, как проектировать и реализовывать перемещения почтовых ящиков между лесами.
   #### Уроки
   - Разработка и внедрение федерации
   - Проектирование сосуществования между организациями Exchange
@@ -239,7 +239,7 @@ outlineSection: |-
   - Реализация сосуществования маршрутизаций сообщений
   - Миграция почтовых ящиков пользователей
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разрабатывать и внедрять федерации
   - Проектировать сосуществование между организациями Exchange Server
   - Разрабатывать и внедрять перемещение почтовых ящиков между лесами
@@ -258,7 +258,7 @@ outlineSection: |-
   - Обновление с Exchange Server 2013 до Exchange Server 2019
   - Удаление Exchange Server 2013
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать обновление до Exchange Server 2019
   - Реализовывать обновление до Exchange Server 2019
 
@@ -276,9 +276,10 @@ outlineSection: |-
   #### Лабораторная работа&#58; Планирование гибридного развертывания Exchange
   - Создание плана гибридного развертывания Exchange
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснять основы гибридного развертывания
   - Планировать аутентификацию в гибридной среде
   - Внедрять Azure AD Connect
   - Реализовывать гибридное развертывание
   - Реализовывать расширенную функциональность для гибридных развертываний
+
