--- a/learn-certs-pr/courses/40409.yml
+++ b/learn-certs-pr/courses/40409.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Развертывание голосовых рабочих нагрузок для Skype для бизнеса Online и Server 2015
+title: Deploying Voice Workloads for Skype for Business Online and Server 2015
 metadata:
-  title: 'Курс 40409-A: Развертывание голосовых рабочих нагрузок для Skype для бизнеса Online и Server 2015'
-  description: 'Курс 40409-A: Развертывание голосовых рабочих нагрузок для Skype для бизнеса Online и Server 2015'
+  title: 'Course 40409-A: Deploying Voice Workloads for Skype for Business Online and Server 2015'
+  description: 'Course 40409-A: Deploying Voice Workloads for Skype for Business Online and Server 2015'
 uid: course.40409
 courseNumber: '40409-A'
 hoursToComplete: 120
@@ -32,17 +32,17 @@ products:
 exams:
 - uid: exam.70-333
 summary: |-
-  Этот пятидневный курс под руководством инструктора позволяет слушателям приобрести такие навыки, как проектирование, планирование и развертывание различных голосовых решений, доступных в Skype for Business Online и Skype for Business Server 2015. Этот курс обеспечит знаниями и навыками по настройке и управлению Cloud PBX с помощью PSTN Calling, Cloud PBX с локальной связью PSTN, Cloud Connector Edition и локальной корпоративной голосовой связью. Этот курс также содержит процедуры, практические задания, рекомендации и другие важные аспекты, которые помогут внедрять, оптимизировать и устранять неполадки голосовых решений Skype for Business Online и Skype for Business Server 2015 . Этот курс поможет слушателям лучше подготовиться к экзамену Microsoft 70-333 “Развертывание Enterprise Voice с помощью Skype for Business 2015.”
+  Этот пятидневный курс под руководством инструктора позволяет слушателям приобрести такие навыки, как проектирование, планирование и развертывание различных голосовых решений, доступных в Skype for Business Online и Skype for Business Server 2015. Этот курс обеспечит знаниями и навыками по настройке и управлению Cloud PBX с помощью PSTN Calling, Cloud PBX с локальной связью PSTN, Cloud Connector Edition и локальной корпоративной голосовой связью. Этот курс также содержит процедуры, практические задания, рекомендации и другие важные аспекты, которые помогут внедрять, оптимизировать и устранять неполадки голосовых решений Skype for Business Online и Skype for Business Server 2015 . Этот курс поможет слушателям лучше подготовиться к экзамену Microsoft 70-333 "Развертывание Enterprise Voice с помощью Skype for Business 2015.”
 
   #### Профиль аудитории
   Этот курс предназначен для ИТ-консультантов и специалистов в области телекоммуникаций, которые проектируют, планируют, внедряют и поддерживают решения для унифицированных коммуникаций (UC) и нуждаются в преобразовании бизнес-требований в технические архитектуры и проекты для UC-решений. Он также будет полезен специалистам, отвечающим за поддержку решений UC. Для прохождения данного курса слушатели должны быть знакомы с технологиями Skype for Business Server 2015 или Lync Server 2013, а также с телекоммуникационными стандартами и сетевыми компонентами, которые поддерживают настройку и развертывание архитектур Skype for Business.
 prerequisitesSection: |-
-  - Опыт работы с технологиями Skype for Business Server 2015 или Lync Server 2013 и знание поддерживаемых сценариев миграции.
+  - Опыт работы с технологиями Skype for Business Server 2015 или  Lync Server 2013 и знание поддерживаемых сценариев миграции.
   - Владение навыками планирования и развертывания решений Skype for Business Server 2015 и Skype for Business Online для конечных пользователей, конечных устройств, телефонии, аудио/видео и веб-конференций, обеспечения безопасности, высокой доступности и аварийного восстановления.
   - Возможность мониторинга и устранения неполадок в Skype for Business Server 2015 на базовом уровне с помощью инструментов мониторинга и устранения неполадок Microsoft (Snooper, централизованная служба ведения журналов (CLS), ключевые показатели состояния (KHI)).
   - Навыки для работы с доменными службами Active Directory, сетями передачи данных, доменными службами Azure Active Directory, синхронизацией каталогов, телекоммуникационными стандартами и сетевыми компонентами, которые поддерживают настройку и развертывание архитектур Skype for Business.
   - Знание требований и процесса интеграции Skype for Business Server 2015 с Microsoft Exchange Server и Office 365.
-  - Знание следующих технологий&#58; Windows, Windows Server и Hyper-V, QoS, TCP/IP, балансировка сетевой нагрузки, PowerShell, понимание протокола инициации сеанса (SIP) базовые концепции телефонии, включая транкинг SIP, шлюз и контроллер границы сеанса (SBC) межкомпонентные соединения и архитектуры развертывания общих АТС.
+  - Знание следующих технологий&#58; Windows, Windows Server и Hyper-V, QoS, TCP/IP, балансировка сетевой нагрузки, PowerShell, понимание протокола инициации сеанса (SIP) ( (базовые концепции телефонии, включая транкинг SIP, шлюз и контроллер границы сеанса ( SBC) межкомпонентные соединения и архитектуры развертывания общих АТС).
 outlineSection: |-
   ### Модуль 1&#58; Введение в голосовую нагрузку
   Разработка голосового решения на базе Skype for Business требует понимания многих технологий.  С последними голосовыми сервисами Microsoft на основе облачных решений, клиенты получают большую гибкость при развертывании голосового решения для своего предприятия, но для таких решений существуют свои особенности применения, которые важно понимать. В этом модуле рассказано об основных понятиях VoIP, эволюции ранних технологий телефонии, а также служб Office 365 и вкладе Microsoft в мир голосовой связи.  Дополнительно в модуле рассмотрены возможности Skype for Business Online и Skype for Business Server.
@@ -56,14 +56,14 @@ outlineSection: |-
   #### Лабораторная работа&#58; Подготовка лабораторной среды
   - Настройка среды компании
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать различные голосовые рабочие нагрузки, доступные в различных возможных голосовых архитектурах с помощью Skype for Business Server 2015 и Skype for Business Online.
   - Понимать и объяснять, как облачные технологии влияют на разработку, развертывание и управление голосовыми архитектурами.
   - Соотносить свой предыдущий опыт с тем, что они будут изучать на протяжении всего курса.
 
 
   ### Модуль 2&#58; Оценка сети и параметры развертывания голосовых сервисов
-  В этом модуле рассказано, как провести оценку готовности сети для внедрения Skype for Business Server 2015 или Skype for Business Online. Этот модуль совпадает с этапом плана Skype Operations Framework (SOF). В частности, этот модуль соответствует этапам подготовки, оценки и проектирования В нем рассказывается о возможностях и функциях Skype for Business Online и Skype for Business Server 2015. Также уделяется внимание изучению поддерживаемых архитектур для Skype for Business Online и Skype for Business Server 2015.
+  В этом модуле рассказано, как провести оценку готовности сети для внедрения Skype for Business Server 2015 или Skype for Business Online. Этот модуль совпадает с этапом плана Skype Operations Framework (SOF). В частности, этот модуль соответствует этапам подготовки, оценки и проектирования В нем рассказывается о возможностях и функциях Skype for Business Online и Skype for Business Server 2015. Также уделяется внимание изучению поддерживаемых архитектур для  Skype for Business Online и Skype for Business Server 2015.
   #### Уроки
   - Оценка и планирование сети 
   - Преимущества и функциональные возможности Skype for Business
@@ -76,7 +76,7 @@ outlineSection: |-
   - Установка и настройка служб федерации Active Directory
   - Включение единого входа в систему с Office 365
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать этапы оценки сети
   - Определять планы Skype for Business Online 
   - Описывать поддерживаемые голосовые архитектуры
@@ -84,7 +84,7 @@ outlineSection: |-
 
 
   ### Модуль 3&#58; Конфигурация разделенного домена
-  В этом модуле вы узнаете, что подразумевается под термином "разделенный домен" и что он значит относительно продукта Skype for Business. Также показаны преимущества разделенного домена, предварительные требования для развертывания среды и настройка подключения пользователей.  Дополнительно описаны основные проблемы реализации и способы их устранения.
+  В этом модуле вы узнаете, что подразумевается под термином \"разделенный домен\" и что он значит относительно продукта Skype for Business. Также показаны преимущества разделенного домена, предварительные требования для развертывания среды и настройка подключения пользователей.  Дополнительно описаны основные проблемы реализации и способы их устранения.
 
   #### Уроки
   - Обзор разделенного домена
@@ -116,7 +116,7 @@ outlineSection: |-
   - Предоставление пользователям возможности использовать PSTN конференц-связь в облаке
   - Настройка PSTN конференц-связи в Skype for Business Online
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать облачную АТС с функциями PSTN-вызовов и конференц-связью
   - Развертывать и настраивать функций конференций и собраний
   - Развертывать и настраивать PSTN конференц-связь
@@ -139,9 +139,9 @@ outlineSection: |-
   - Настройка политик голосовой связи, использования PSTN и маршрутов
   - Добавление пользователей в абонентские группы и назначение политик
   - Тестирование маршрутизации голоса
-  - Настройка абонентской группы Лондон
+  - Настройка абонентской группы «Лондон»
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разрабатывать и внедрять Skype for Business Enterprise Voice.
   - Настраивать параметры корпоративной голосовой связи, включая абонентские группы, политику обмена голосовыми сообщениями, использование PSTN, маршрутизацию голосовых сообщений, магистрали и планы нумерации для DID и добавочных номеров.
   - Описывать маршрутизацию голосовых сообщений Skype for Business.
@@ -154,7 +154,7 @@ outlineSection: |-
   #### Уроки
   - Подключение к PSTN
   - Подключение к локальной АТС
-  - Межсетевая маршрутизация (M&#58; N Interworking Routing)
+  - Межсетевая маршрутизация (M&#58;N Interworking Routing)
   - Возможности маршрутизации звонков
   - Звонок с рабочего телефона
   - Общие линии
@@ -164,22 +164,22 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Настройка взаимодействия с IP-PBX
-  - Настройка корпоративной голосовой связи для группы Лондон
+  - Настройка корпоративной голосовой связи для группы «Лондон»
   - Настройка межтранковой маршрутизации
   - Изучение настроек интеграции Skype for Business Server 2015 
   - Настройки интеграции с IP-PBX 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать роль сервера-посредника
   - Подключать Skype for Business Server 2015 к PSTN
-  - Реализовывать межсетевую маршрутизацию M&#58; N
+  - Реализовывать межсетевую маршрутизацию M&#58;N
   - Определять надежный маршрут для звонков, используя PSTN
   - Описывать звонок через рабочий телефон
   - Опишите общие линии
 
 
   ### Модуль 7&#58; Облачная АТС с локальным подключением к PSTN с использованием существующего развертывания
-  В этом модуле рассмотрены внедрение и настройка облачных АТС с локальным подключением к PSTN с использованием существующего развертывания.  Имея множество вариантов реализации, слушатели должны быть знакомы с различными методами и вариантами подключения. Внедрение облачных АТС требует наличие подписки Office 365 и сетевой инфраструктуры, позволяющей пользователям из офиса или через другие выходы в интернет подключаться к своим аккаунтам.  При этом конференц-связь должна быть реализована через PSTN Conferencing или Audio Conferencing Provider (ACP).  Подключение к локальной PSTN через Cloud Connector Edition будет рассмотрено в следующем модуле.
+  В этом модуле рассмотрены внедрение и настройка облачных АТС с локальным подключением к PSTN с использованием существующего развертывания.  Имея множество вариантов реализации, слушатели должны быть знакомы с различными методами и вариантами подключения. Внедрение облачных АТС требует  наличие подписки Office 365 и сетевой инфраструктуры, позволяющей пользователям из офиса или через другие выходы в интернет подключаться к своим аккаунтам.  При этом конференц-связь должна быть реализована через PSTN Conferencing или Audio Conferencing Provider (ACP).  Подключение к локальной PSTN через Cloud Connector Edition будет рассмотрено в следующем модуле.
 
   #### Уроки
   - Потоки вызовов (Call Flows) и управляемость
@@ -190,7 +190,7 @@ outlineSection: |-
   - *Упражнение 2&#58; Подключение облачной АТС с локальной связью через PSTN 
   - *Упражнение 3&#58; Тестирование облачной АТС с локальной связью через PSTN 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - *Объяснять облачные АТС с локальной архитектурой и сценариями подключения к PSTN 
 
 
@@ -214,7 +214,7 @@ outlineSection: |-
   - Завершение настройки и тестирование высокой доступности Cloud Connector Edition
   - Тестирование автоматического восстановления через службу управления Cloud Connector Edition
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Точно знать, когда Cloud Connector Edition является правильным решением для организации
   - Определить требования Cloud Connector Edition
   - Развертывать и управлять Cloud Connector Edition
@@ -245,7 +245,7 @@ outlineSection: |-
   - Определение положения с помощью службы определения местоположения
   - Испытание возможностей службы определения местоположения
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснять различные функции голоса
   - Настраивать функции вызова, которые расширяют возможности корпоративной голосовой связи Skype for Business
   - Настраивать распределение вызовов с группами ответа
@@ -274,7 +274,7 @@ outlineSection: |-
   - Настройка контроля допуска звонков для управления пропускной способностью канала
   - Анализ значений DSCP и диапазоны портов для приоритезации сетевого трафика
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснять, какие мультимедийные стеки доступны для Skype for Business Server 2015 и Skype for Business Online
   - Планировать потребление в сети
   - Оптимизировать голосовую связь в сети
@@ -298,7 +298,7 @@ outlineSection: |-
   - Мониторинг искусственных транзакций
   - Мониторинг здоровья серверов
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Использовать методологию определения качества вызовов (CQM) и инструменты мониторинга
   - Эффективно определять и подтверждать качество звонка
 
@@ -319,7 +319,7 @@ outlineSection: |-
   - Обнаружение несоответствий в абонентских группах
   - Устранение неполадок в вопросах маршрутизации голоса
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Устранение неполадок качества звонков
   - Определение инструментов для устранения неполадок
   - Определение сценариев устранения неполадок
@@ -329,3 +329,4 @@ outlineSection: |-
 
   #### Дополнительные сведения
   Нет
+
