--- a/learn-certs-pr/courses/az-103t00.yml
+++ b/learn-certs-pr/courses/az-103t00.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Администратор Microsoft Azure
+title: Microsoft Azure Administrator
 metadata:
-  title: 'Курс AZ-103T00-A: Администратор Microsoft Azure'
-  description: 'Курс AZ-103T00-A: Администратор Microsoft Azure'
+  title: 'Course AZ-103T00-A: Microsoft Azure Administrator'
+  description: 'Course AZ-103T00-A: Microsoft Azure Administrator'
 uid: course.az-103t00
 courseNumber: 'AZ-103T00-A'
 hoursToComplete: 96
@@ -49,19 +49,19 @@ outlineSection: |-
   #### Уроки
   - Планирование виртуальных машин
   - Создание виртуальных машин
-  - Доступность виртуальных машин
+  - Доступность  виртуальных машин
   - Расширения виртуальных машин
 
 
   #### Лабораторная работа&#58; Развертывание и управление виртуальными машинами
 
-  #### Лабораторная работа&#58; Виртуальные машины и настройки масштабирования
+  #### Лабораторная работа&#58; Виртуальные машины и настройки  масштабирования
 
   ### Модуль 3&#58; Хранилище Azure
   Этот модуль рассказывает об основных функциях хранилища, включая учетные записи хранилища, хранилище больших двоичных объектов, файлы Azure и безопасность хранилища.
   #### Уроки
   - Учетные записи хранилища
-  - Служба Azure Blob
+  - Azure Blobs
   - Файлы Azure
   - Безопасность хранилища 
 
@@ -93,9 +93,9 @@ outlineSection: |-
   Этот модуль посвящен мониторингу инфраструктуры Azure, включая Azure Monitor, оповещения, аналитику журналов и Network Watcher.
 
   #### Уроки
-  - Мониторинг Azure Monitor
+  - Azure Monitor
   - Оповещения Azure Alerts
-  - Аналитика журналов Log Analytics
+  - Log Analytics
   - Network Watcher
 
 
@@ -151,9 +151,9 @@ outlineSection: |-
 
   #### Уроки
   - Подписки и аккаунты
-  - Управление доступом на основе ролей (RBAC)
+  - Ролевое управление доступом (RBAC)
   - Пользователи и группы
-  - Политика Azure 
+  - Azure Policy
 
 
   #### Лабораторная работа&#58; Управление доступом на основе ролей
@@ -171,3 +171,4 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Синхронизация файлов File Sync
+
