--- a/learn-certs-pr/courses/az-120t00.yml
+++ b/learn-certs-pr/courses/az-120t00.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Course
-title: Планирование и администрирование Microsoft Azure для SAP Workloads
+title: Planning and Administering Microsoft Azure for SAP Workloads
 metadata:
-  title: 'Курс AZ-120T00-A: Планирование и администрирование Microsoft Azure для SAP Workloads'
-  description: 'Курс AZ-120T00-A: Планирование и администрирование Microsoft Azure для SAP Workloads'
+  title: 'Course AZ-120T00-A: Planning and Administering Microsoft Azure for SAP Workloads'
+  description: 'Course AZ-120T00-A: Planning and Administering Microsoft Azure for SAP Workloads'
 uid: course.az-120t00
 courseNumber: 'AZ-120T00-A'
 hoursToComplete: 96
-iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Миграция и SAP HANA, S/4HANA, SAP NetWeaver в Azure
 - skill: Использование портала Azure, облачной оболочки, Azure PowerShell, интерфейса командной строки и диспетчера ресурсов
 - skill: Использование функций межсайтового подключения, включая пиринговое соединение VNet и соединения VNet-VNet
 - skill: Работа с Azure Active Directory (AAD) и Azure AD Connect
+iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -28,33 +28,35 @@ summary: |-
   Этот курс, разработанный для ИТ-специалистов, имеющих опыт работы с решениями SAP, учит как использовать ресурсы Azure, включая развертывание и настройку виртуальных машин, виртуальных сетей, учетных записей хранения, и Azure AD, включая внедрение и управление гибридными идентификаторами. Слушатели этого курса изучат концепции, сценарии, процедуры и узнают на практике, как наилучшим образом спланировать и внедрить миграцию и эксплуатацию решения SAP в Azure. Содержатся рекомендации по подпискам, созданию и масштабированию виртуальных машин, внедрению решений для хранения данных, настройке виртуальных сетей, резервному копированию и обмену данными, подключению Azure и локальных сайтов, управлению сетевым трафиком, внедрению Azure Active Directory, защите идентификаторов и контролю решений.
 
   #### Профиль аудитории
-  
-  Этот курс предназначен для администраторов Azure, которые осуществляют миграцию и управление решениями SAP в Azure. Администраторы Azure управляют облачными службами, которые охватывают возможности хранения, сетей и вычислительных облаков, с глубоким пониманием каждой службы на протяжении всего жизненного цикла ИТ. Они принимают запросы конечных пользователей касающиеся новых облачных приложений и дают рекомендации по службам, которые следует использовать для достижения оптимальной производительности и масштаба, а также, по мере необходимости, обеспечивают наличие, измерение, контроль и корректировку ресурсов.  Эта роль требует общения и согласования действий с поставщиками. Администраторы Azure должны обладать навыками работы с порталом Azure, а по мере повышения квалификации использовать PowerShell и интерфейс командной строки.
-  
+
+  Этот курс предназначен для администраторов Azure, которые осуществляют миграцию и управление решениями SAP в Azure. Администраторы Azure управляют облачными службами, которые охватывают возможности хранения, сетей и вычислительных облаков, с глубоким пониманием каждой службы на протяжении всего жизненного цикла ИТ. Они принимают запросы конечных пользователей на новые облачные приложения и дают рекомендации относительно служб, которые следует использовать для достижения оптимальной производительности и масштаба, а также обеспечения, размера, контроля и корректировки ресурсов по мере необходимости Эта роль требует общения и согласования действий с поставщиками. Администраторы Azure должны обладать навыками работы с порталом Azure, а по мере повышения квалификации использовать PowerShell и интерфейс командной строки.
 prerequisitesSection: |-
   - Администраторы и архитекторы решений Azure для SAP должны обладать глубокими знаниями приложений SAP, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, серверов OS для приложений SAP и баз данных.
-  - Перед прохождением этого курса рекомендуется пройти курс Azure Administrator (AZ-103) или Azure Solutions Architect (AZ-300), а также по SAP HANA и Linux.
+  -  Перед прохождением этого курса рекомендуется пройти курс Azure Administrator (AZ-103) или Azure Solutions Architect (AZ-300), а также по SAP HANA и Linux.
 outlineSection: |-
-  ### Модуль 1&#58; Введение
-  
+  ### Модуль1&#58; Введение
   Содержит обзор партнерства компаний SAP и Microsoft.
 
   ### Модуль 2&#58; Основы SAP в Azure
-  
+
   Содержит краткие уроки по вычислениям Azure, хранилищу Azure, сетям Azure, SAP HANA для Azure (большие экземпляры), службам идентификации, управлению и управляемости, службам резервного копирования и защиты данных, а также службам миграции.
 
   ### Модуль 3&#58; Сертифицированные предложения SAP в Azure
-  
+
   Содержит уроки по общим требованиям программы обучения (поддержка SAP в общедоступных облачных средах), параметры развертывания Azure для рабочих нагрузок SAP, поддержка конкретных продуктов SAP для Azure, поддержка операционной системы Azure для рабочих нагрузок SAP, поддержка хранилища Azure для рабочих нагрузок SAP, сетевая поддержка для SAP, поддержка баз данных для SAP, поддержка высокой доступности и аварийного восстановления для SAP, а также требования к мониторингу для SAP.
-  
+
   #### Лабораторная работа&#58; интерактивная лабораторная работа&#58; Реализация кластеризации Linux на виртуальных машинах Azure
-  
+
   #### Лабораторная работа&#58; интерактивная лабораторная работа&#58; Реализация кластеризации Windows на виртуальных машинах Azure
-  
+
   ### Модуль 4&#58; SAP на эталонной архитектуре Azure
-  
+
   Содержит уроки по SAP NetWeaver с AnyDB, SAP S4 HANA и SAP HANA в Azure (большие экземпляры) на виртуальных машинах Azure.
-  
+
+  ### Модуль 4&#58; SAP на эталонной архитектуре Azure
+
+  Содержит уроки по SAP NetWeaver с AnyDB, SAP S4 HANA и SAP HANA в Azure (большие экземпляры) на виртуальных машинах Azure.
+
   ### Модуль 5&#58; Планирование внедрения решений SAP в Azure
     
   Содержит уроки по вычислениям, сети и хранилищу виртуальной машины Azure. Кроме того, содержатся уроки по высокой доступности и аварийному восстановлению виртуальной машины Azure, резервному копированию виртуальной машины Azure, мониторингу виртуальной машины Azure, безопасности виртуальной машины Azure, а также по проверке подлинности и контролю доступа к виртуальной машины Azure.
@@ -62,27 +64,28 @@ outlineSection: |-
   ### Модуль 6&#58; Планирование миграции рабочих нагрузок SAP на Azure
     
   Содержит уроки по стратегиям миграции систем SAP на Microsoft Azure и SAP, контрольным спискам планирования и развертывания рабочей нагрузки.
-  
+
   ### Модуль 7&#58; Внедрение решений SAP на основе виртуальной машины Azure
     
   Содержит уроки по методологиям развертывания виртуальных машин Azure, реализациям с одним экземпляром (2-уровневая или 3-уровневая), реализации HA SAP NetWeaver с AnyDB на виртуальных машинах Azure, реализации HA SAP HANA на виртуальных машинах Azure, настройке расширения расширенного мониторинга Azure для SAP и реализации AD и Azure AD на основе аутентификации.
-  
+
   ### Модуль 8&#58; Развертывание больших экземпляров HANA (HLI)
     
   Содержит занятие по внедрению больших экземпляров HANA (HLI).
-  
+
   ### Модуль 9&#58; Перенос рабочих нагрузок SAP в Azure
     
   Содержит уроки по вариантам миграции, методологиям DMO, вариантам облачной миграции и миграции очень большой базы данных в Azure.
-  
-  #### Лабораторная работа&#58; интерактивная лабораторная работа; реализация архитектуры SAP на виртуальных машинах Azure на базе Linux
-  
-  #### Лабораторная работа&#58; интерактивная лабораторная работа; реализация архитектуры SAP на виртуальных машинах Azure на базе Windows
-  
+
+  #### Лабораторная работа&#58; интерактивная лабораторная работа&#58; реализация архитектуры SAP на виртуальных машинах Azure на базе Linux
+
+  #### Лабораторная работа&#58; интерактивная лабораторная работа&#58; реализация архитектуры SAP на виртуальных машинах Azure на базе Windows
+
   ### Модуль 10&#58; Обслуживание SAP в Azure
     
   Содержит уроки по дистанционному управлению, выполнению резервного копирования и восстановления, обновлениям ОС и рабочей нагрузки, вертикальному и горизонтальному масштабированию и аварийному восстановлению (DR).
-  
+
   ### Модуль 11&#58; Мониторинг и устранение неполадок в SAP в Azure
     
   Содержит уроки по мониторингу виртуальных машин Azure, мониторингу SAP HANA в Azure (большие экземпляры) и интеграции решений SAP с облачными службами Microsoft.
+
