--- a/learn-certs-pr/courses/az-203t01.yml
+++ b/learn-certs-pr/courses/az-203t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Разработка инфраструктуры Azure как сервиса вычислительных служб
+title: Develop Azure Infrastructure as a Service compute solutions
 metadata:
-  title: 'Курс AZ-203T01-A: Разработка инфраструктуры Azure как службы вычислительных решений'
-  description: 'Курс AZ-203T01-A: Разработка инфраструктуры Azure как службы вычислительных решений'
+  title: 'Course AZ-203T01-A: Develop Azure Infrastructure as a Service compute solutions'
+  description: 'Course AZ-203T01-A: Develop Azure Infrastructure as a Service compute solutions'
 uid: course.az-203t01
 courseNumber: 'AZ-203T01-A'
 hoursToComplete: 24
@@ -43,7 +43,7 @@ outlineSection: |-
   - Создание шаблонов ARM
   - Настройка шифрования диска Azure Disk Encryption для виртуальных машин
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и развертывать виртуальные машины с помощью портала Azure, PowerShell и с помощью кода.
   - Создавать и развертывать шаблоны ARM с помощью портала Azure и Visual Studio.
   - Понимать различные варианты шифрования для существующих и новых развертываний.
@@ -57,9 +57,9 @@ outlineSection: |-
   - Запуск пакетных заданий с использованием кода
   - Управление пакетными заданиями с помощью Batch Service API
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как работает пакетный сервис Azure
-  - Создавать и запускать пакетные задания с помощью Azure CLI
+  - Создавать и запускать пакетные задания с помощью Azure  CLI
   - Создавать и запускать пакетные задания с помощью кода
   - Использовать API пакетной службы Azure для управления заданиями
 
@@ -72,8 +72,9 @@ outlineSection: |-
   - Публиковать изображения в реестре контейнеров Azure
   - Запуск контейнеров с помощью Azure Container или AKS 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Изучать основные понятия для AKS
   - Изучать развертывание кластеров AKS
   - Публиковать изображения в реестре контейнеров Azure
   - Изучать экземпляры контейнеров Azure и о том, как их развертывать
+
