--- a/learn-certs-pr/courses/az-203t02.yml
+++ b/learn-certs-pr/courses/az-203t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Разработка платформы Azure как сервиса вычислительных служб
+title: Develop Azure Platform as a Service compute solutions
 metadata:
-  title: 'Курс AZ-203T02-A: Разработка Azure Platform как службы вычислительных решений'
-  description: 'Курс AZ-203T02-A: Разработка Azure Platform как службы вычислительных решений'
+  title: 'Course AZ-203T02-A: Develop Azure Platform as a Service compute solutions'
+  description: 'Course AZ-203T02-A: Develop Azure Platform as a Service compute solutions'
 uid: course.az-203t02
 courseNumber: 'AZ-203T02-A'
 hoursToComplete: 24
@@ -44,7 +44,7 @@ outlineSection: |-
   - Создание веб-приложения службы приложений Azure
   - Создание фоновых задач с помощью WebJobs в службе приложений Azure
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать основные понятия и возможности службы приложений
   - Создавать веб-приложения службы приложений с помощью Azure CLI, портала Azure и PowerShell
   - Создавать непрерывные и запускаемые веб-задания
@@ -57,7 +57,7 @@ outlineSection: |-
   - Настройка push-уведомления для приложения
   - Настройка автономной синхронизации для приложения
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разместить приложение в службе мобильных приложений
   - Зарегистрировать приложения для push-уведомлений
 
@@ -68,7 +68,7 @@ outlineSection: |-
   - Создание API
   - Использование Swagger для документирования API
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создать экземпляр APIM и создать новый API
   - Использовать Swashbuckle для создания объектов Swagger в ASP.NET Core
 
@@ -80,7 +80,8 @@ outlineSection: |-
   - Разработка функций Azure с использованием Visual Studio
   - Реализация долговечных функций
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать основные функции и возможности функций Azure
   - Создавать функции, привязки и триггеры
   - Иметь представление об общих шаблонах для долговременных функций и уметь их создавать
+
