--- a/learn-certs-pr/courses/az-203t03.yml
+++ b/learn-certs-pr/courses/az-203t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Разработка для службы хранилища Azure
+title: Develop for Azure storage
 metadata:
-  title: 'Курс AZ-203T03-A: Разработка для хранилища Azure'
-  description: 'Курс AZ-203T03-A: Разработка для хранилища Azure'
+  title: 'Course AZ-203T03-A: Develop for Azure storage'
+  description: 'Course AZ-203T03-A: Develop for Azure storage'
 uid: course.az-203t03
 courseNumber: 'AZ-203T03-A'
 hoursToComplete: 24
@@ -43,7 +43,7 @@ outlineSection: |-
   - Авторизация в хранилище Table
   - Table-сервис REST API
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать функции и использование хранилища таблиц Azure
   - Понимать, как использовать авторизацию общего ключа
   - Использовать службу REST хранилища таблиц Azure для управления данными
@@ -56,7 +56,7 @@ outlineSection: |-
   - Управление контейнерами и объектами
   - Создание и обновление документов, используя код
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать основные функции и возможности Azure Cosmos DB
   - Управлять контейнерами и объектами
   - Создавать и обновлять документы
@@ -68,7 +68,7 @@ outlineSection: |-
   - Обзор Azure SQL 
   - Создание, чтение, обновление и удаление таблиц базы данных с использованием кода
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как работает служба базы данных SQL Azure
   - Выполнять операции с базой данных, используя код
 
@@ -79,7 +79,8 @@ outlineSection: |-
   - Обзор хранилища Blob-объектов Azure
   - Работа с хранилищем Blob-объектов Azure
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, когда и зачем использовать хранилище BLOB-объектов Azure
   - Устанавливать и получать свойства хранилища BLOB-объектов и метаданные
   - Реплицировать и копировать BLOB-объекты
+
