--- a/learn-certs-pr/courses/az-203t04.yml
+++ b/learn-certs-pr/courses/az-203t04.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Внедрение безопасности Azure
+title: Implement Azure security
 metadata:
-  title: 'Курс AZ-203T04-A: Внедрение безопасности Azure'
-  description: 'Курс AZ-203T04-A: Внедрение безопасности Azure'
+  title: 'Course AZ-203T04-A: Implement Azure security'
+  description: 'Course AZ-203T04-A: Implement Azure security'
 uid: course.az-203t04
 courseNumber: 'AZ-203T04-A'
 hoursToComplete: 24
@@ -46,7 +46,7 @@ outlineSection: |-
   - Реализация аутентификаций с использованием сертификатов, на основе форм или токенов
   - Реализация многофакторной аутентификации
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать архитектуру платформы идентификации Microsoft
   - Применять аутентификацию OAuth2 в своих решениях
   - Использовать хранилище ключей Azure для хранения и получения информации об аутентификации
@@ -58,7 +58,7 @@ outlineSection: |-
   - Авторизация на основе утверждений (claims-based)
   - Авторизация управления доступом на основе ролей (RBAC - Role-based access control)
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как использовать авторизацию на основе утверждений в своих решениях для разработки
   - Понимать, как управлять доступом к ресурсам с помощью RBAC через REST API
 
@@ -71,7 +71,8 @@ outlineSection: |-
   - Внедрение конфиденциальных вычислений Azure
   - Управление криптографическими ключами в хранилище ключей Azure
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать параметры шифрования
   - Шифровать данные с помощью прозрачного шифрования данных
   - Управлять ключами шифрования и использовать их с помощью хранилища ключей Azure
+
