--- a/learn-certs-pr/courses/az-203t05.yml
+++ b/learn-certs-pr/courses/az-203t05.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Мониторинг, устранение неполадок и оптимизация решений Azure
+title: Monitor, troubleshoot, and optimize Azure solutions
 metadata:
-  title: 'Курс AZ-203T05-A: Мониторинг, устранение неполадок и оптимизация решений Azure'
-  description: 'Курс AZ-203T05-A: Мониторинг, устранение неполадок и оптимизация решений Azure'
+  title: 'Course AZ-203T05-A: Monitor, troubleshoot, and optimize Azure solutions'
+  description: 'Course AZ-203T05-A: Monitor, troubleshoot, and optimize Azure solutions'
 uid: course.az-203t05
 courseNumber: 'AZ-203T05-A'
 hoursToComplete: 24
@@ -42,19 +42,19 @@ outlineSection: |-
   #### Уроки
   - Обзор Azure Monitor
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как работает Azure Monitor, где и как собирает данные
-  - Узнайте, где и как Azure Monitor собирает данные
+  - Понимать шаблоны автоматического масштабирования и лучшие практики для масштабирования их решений
 
 
   ### Модуль 2&#58; Разработка кода для поддержки масштабируемости приложений и сервисов
-  Модуль посвящен масштабированию приложени и устранению неполадок.
+  Модуль посвящен масштабированию приложени1 и устранению неполадок.
   #### Уроки
   - Реализация автомасштабирования
   - Реализация кода для обращения к экземплярам одиночного приложения
   - Реализация кода для обработки переходных ошибок
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать шаблоны автоматического масштабирования и лучшие практики для масштабирования их решений
   - Использовать интерфейс командной строки Azure для связи с определенной копией ресурса
   - Обрабатывать переходные ошибки в своем решении
@@ -66,7 +66,7 @@ outlineSection: |-
   - Настройка инструментария в приложении или на сервере с помощью Application Insights
   - Анализ и устранение неполадок с помощью Azure Monitor
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Добавить код по умолчанию к веб-страницам, консольным приложениям и настольным приложениям Windows для поддержки телеметрии
   - Использовать инструментальные панели и другие инструменты для мониторинга и устранения неполадок в своем приложении
 
@@ -77,6 +77,7 @@ outlineSection: |-
   - Azure Cache для Redis
   - Разработка для хранения на CDN
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как работает Azure Cache для Redis, как его настраивать и взаимодействовать с ним
   - Управлять Azure CDN
+
