--- a/learn-certs-pr/courses/az-203t06.yml
+++ b/learn-certs-pr/courses/az-203t06.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Подключение и использование служб Azure и сторонних служб
+title: Connect to and consume Azure and third-party services
 metadata:
-  title: 'Курс AZ-203T06-A: Подключение и использование служб Azure и сторонних служб'
-  description: 'Курс AZ-203T06-A: Подключение и использование служб Azure и сторонних служб'
+  title: 'Course AZ-203T06-A: Connect to and consume Azure and third-party services'
+  description: 'Course AZ-203T06-A: Connect to and consume Azure and third-party services'
 uid: course.az-203t06
 courseNumber: 'AZ-203T06-A'
 hoursToComplete: 24
@@ -35,13 +35,9 @@ summary: |-
   - Слушатели должны иметь 1-2 года опыта работы в качестве разработчика. Предполагается, что слушатели курса уже знают, как кодировать, и имеют фундаментальные знания Azure.
   - Рекомендуется иметь некоторый опыт работы с PowerShell или Azure CLI, работы на портале Azure и хотя бы с одним языком программирования, поддерживаемым Azure. Большинство примеров в этом курсе представлены в C# .NET.
 prerequisitesSection: |-
-  - Слушатели должны иметь 1-2 года опыта работы в качестве разработчика. Этот
-  курс предполагает, что слушатели знают, как кодировать, и имеют фундаментальные 
-  знания Azure.
-  - Рекомендуется иметь некоторый опыт работы с 
-  PowerShell или Azure CLI, опыт работы на портале Azure и хотя бы 
-  с одним языком программирования, поддерживаемым Azure.  Большинство примеров в этом 
-  курсе представлены в C# .NET.
+  - Слушатели должны иметь 1-2 года опыта работы в качестве разработчика. Этот курс предполагает, что слушатели знают, как кодировать, и имеют фундаментальные знания Azure.
+  - Рекомендуется иметь некоторый опыт работы с PowerShell или Azure CLI, опыт работы на портале Azure и хотя бы с одним языком программирования, поддерживаемым Azure.  Большинство примеров в этом 
+  курсе представлены в  C# .NET.
 outlineSection: |-
   ### Модуль 1&#58; Разработка приложения логики сервиса приложения
   Приложения логики помогают создавать решения, которые интегрируют в приложения, данные, системы и сервисы на предприятиях или в организациях, автоматизируя задачи и бизнес-процессы в виде рабочих процессов. Этот модуль описывает, что они из себя представляют и как их создавать.
@@ -51,7 +47,7 @@ outlineSection: |-
   - Создание пользовательских соединителей для приложений логики
   - Создание пользовательских шаблонов для приложений логики
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как создавать приложения Azure Logic и управлять ими
 
 
@@ -61,7 +57,7 @@ outlineSection: |-
   - Создание и запрос поискового индекса Azure
   - Полнотекстовый поиск в Azure Search
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Обеспечить службу, создать индекс, загрузить данные и выполнить поиск
 
 
@@ -72,7 +68,7 @@ outlineSection: |-
   - Защита API
   - Определение политик API
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Подготовить службу APIM с помощью портала Azure, защитить API с подписками и клиентскими сертификатами и использовать политики API для изменения поведения API.
 
 
@@ -83,7 +79,7 @@ outlineSection: |-
   - Внедрение решений, использующих Azure Event Hubs
   - Внедрение решений, использующих центры уведомлений Azure (Azure Notification Hubs)
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как работают службы и как интегрировать их в свои решения
 
 
@@ -93,5 +89,6 @@ outlineSection: |-
   - Внедрение решений, использующих Azure Service Bus
   - Внедрение решений, использующих очереди хранилища Azure Queue Storage
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать, как использовать службы Azure на основе сообщений в своих решениях
+
