--- a/learn-certs-pr/courses/az-300t02.yml
+++ b/learn-certs-pr/courses/az-300t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Внедрение рабочих нагрузок и безопасности
+title: Implementing Workloads and Security
 metadata:
-  title: 'Курс AZ-300T02-A: Внедрение рабочих нагрузок и безопасности'
-  description: 'Курс AZ-300T02-A: Внедрение рабочих нагрузок и безопасности'
+  title: 'Course AZ-300T02-A: Implementing Workloads and Security'
+  description: 'Course AZ-300T02-A: Implementing Workloads and Security'
 uid: course.az-300t02
 courseNumber: 'AZ-300T02-A'
 hoursToComplete: 24
@@ -51,33 +51,34 @@ summary: |-
   Рассматривается управление и поддержка инфраструктуры для основных веб-приложений и служб, которые разработчики создают и развертывают. А также использование Azure App Service в качестве «Платформы как услуги» (PaaS) для развертывания облачных приложений для веб-и мобильных сред.
 
   В курсе дается представление о том, как реализовать расширенные сетевые функции, такие как Application Gateway и как настроить балансировку нагрузки, а также как интегрировать локальные сети с виртуальными сетями Azure и использовать Network Watcher для мониторинга и устранения неполадок.
-
+  
   #### Профиль аудитории
   Успешные архитекторы Azure Solutions начинают эту роль с опыта работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингом и сетями.
 outlineSection: |-
   ### Модуль 1&#58; Оценка и выполнение миграции сервера в Azure
   В этом модуле описывается миграция рабочих нагрузок в новую среду, будь то другой центр обработки данных или в общедоступное облако, и определение четких целей миграции. Цели миграции могут быть как ориентированы на технологии и бизнес, а также на преимущества для бизнеса организации. Действия включают компоненты процесса миграции Azure&#58; создание проекта, создание сборщика, оценка готовности и оценка затрат. Кроме того, будет возможность оценить Azure Site Recovery (ASR), включающий сквозные сценарии.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Оценивать и выполнять миграцию сервера в Azure
 
 
-  ### Модуль 2&#58; Внедрение и управление службами приложений
+  ### Модуль 3&#58; Оценивать и выполнять миграцию сервера в Azure
   Этот модуль включает следующие темы&#58; Развертывание веб-приложений; Управление веб-приложениями; Безопасность службы приложений; Концепции бессерверных вычислений; Управление сетью событий; Управление служебной шиной; и управление логическим приложением Logic App.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Внедрять и управлять службами приложений
 
 
   ### Модуль 3&#58; Внедрение расширенной виртуальной сети
   Этот модуль включает следующие темы&#58; Балансировщик нагрузки Azure; Шлюз приложений Azure; VPN-соединения между сайтами; а также обзор ExpressRoute, который позволяет компаниям расширять локальные сети в облаке Microsoft через выделенное частное соединение, поддерживаемое провайдером связи.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Внедрять расширенную виртуальную сеть
 
 
   ### Модуль 4&#58; Защита личных данных
   Этот модуль включает следующие темы и особое внимание уделяется идентификации и ролям&#58; Azure AD Identity Protection; Azure Домены и Арендаторы; Пользователи и группы Azure; Роли Azure; а также обзор параметров интеграции Azure AD, который ориентирован на Azure AD Connect для интеграции локальных каталогов с Azure Active Directory.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Защищать идентификаторы с помощью Azure AD
+
