--- a/learn-certs-pr/courses/az-300t03.yml
+++ b/learn-certs-pr/courses/az-300t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Понимание технологических решений Cloud Architect
+title: Understanding Cloud Architect Technology Solutions
 metadata:
-  title: 'Курс AZ-300T03-A: Понимание технологических решений Cloud Architect'
-  description: 'Курс AZ-300T03-A: Понимание технологических решений Cloud Architect'
+  title: 'Course AZ-300T03-A: Understanding Cloud Architect Technology Solutions'
+  description: 'Course AZ-300T03-A: Understanding Cloud Architect Technology Solutions'
 uid: course.az-300t03
 courseNumber: 'AZ-300T03-A'
 hoursToComplete: 24
@@ -10,7 +10,7 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Шаблоны проектирования и подключения
 - skill: Гибридная сеть
-- skill: Обеспечение надежности адреса данных и кэширования
+- skill: Работать с устойчивостью данных и кешированием
 - skill: Измерение пропускной способности и структуры доступа к данным
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -47,7 +47,7 @@ summary: |-
   В этом курсе ИТ-специалисты учатся выполнять операции параллельно и асинхронно. И насколько важно, чтобы корпоративная система была устойчивой при сбоях, а внедрения были автоматизированы и предсказуемы. Используя в качестве основы Руководство по архитектуре приложений Azure и эталонные архитектуры Azure, можно понять насколько значимую роль мониторинг и телеметрия играют в понимании системы. 
 
   Слушатели изучат шаблоны проектирования облака, такие как разделение рабочих нагрузок, когда модульное приложение разделено на функциональные блоки, которые можно интегрировать в более крупное приложение.  В таких случаях каждый модуль обрабатывает часть общей функциональности приложения и представляет набор связанных вопросов. 
-  
+
   Также рассматривается балансировка нагрузки, когда трафик приложения или нагрузка распределяется между различными конечными точками с использованием алгоритмов. Балансировка нагрузки позволяет создавать несколько экземпляров сайта для улучшения надежности и предсказуемости.  Если компании требуется более специфическая конфигурация балансировщика нагрузки, в Azure можно использовать виртуальные балансировщики нагрузки, которые размещаются на виртуальных машинах.
 
   Кроме того, имеется обработка кратковременных сбоев, которая помогает определить основные различия между разработкой локальных приложений, а также в обработке временных ошибок. Временные ошибки - это ошибки, возникающие из-за временных перерывов в обслуживании или из-за чрезмерной задержки. 
@@ -60,20 +60,22 @@ outlineSection: |-
   ### Модуль 1&#58; Выбор решений для вычислений и хранения 
   Этот модуль включает следующие темы&#58; Центр архитектуры Azure; шаблоны облачного проектирования; шаблоны конкурирующих потребителей; шаблон кэширования; а также шаблоны сегментирования для разделения хранилища данных на горизонтальные разделы или сегменты. Каждый сегмент имеет одну и ту же схему, но содержит свое собственное отдельное подмножество данных.
 
-  После завершения этого модуля слушатели будут понимать&#58; 
+  После завершения этого модуля слушатели будут понимать&#58;
   - Шаблоны проектирования и подключения
 
 
   ### Модуль 2&#58; Гибридная сеть
   Этот модуль включает следующие темы&#58; Соединение между сайтами (site-to-site); соединение Point-to-site; объединение соединений site-to-site и point-to-site; соединение между виртуальными сетями (virtual network–to–virtual network); а также подключение к облачным провайдерам для переключения при сбое, резервного копирования или даже для миграции между провайдерами, такими как AWS.
-  
-  После завершения этого модуля слушатели будут понимать&#58; 
+
+  После завершения этого модуля слушатели будут понимать&#58;
   - Гибридная сеть
 
 
   ### Модуль 3&#58; Измерение пропускной способности и доступ к структуре данных
   Этот модуль включает следующие темы&#58; DTU - база данных SQL Azure; RU - Azure Cosmos DB; структурированные и неструктурированные данные; и использование структурированных хранилищ данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Работать с устойчивостью данных и кешированием
-  - Измерять пропускную способность и доступ к структуре данных
+  - Измерение пропускной способности и структуры доступа к данным
+
+
