--- a/learn-certs-pr/courses/az-300t06.yml
+++ b/learn-certs-pr/courses/az-300t06.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Разработка для облака
+title: Developing for the Cloud
 metadata:
-  title: 'Курс AZ-300T06-A: Разработка для облака'
-  description: 'Курс AZ-300T06-A: Разработка для облака'
+  title: 'Course AZ-300T06-A: Developing for the Cloud'
+  description: 'Course AZ-300T06-A: Developing for the Cloud'
 uid: course.az-300t06
 courseNumber: 'AZ-300T06-A'
 hoursToComplete: 24
@@ -47,7 +47,7 @@ summary: |-
   В курсе рассматриваются вопросы, как настроить архитектуру интеграции на основе сообщений, разработать асинхронную обработку, создать приложения для автоматического масштабирования и лучше понять решения Azure Cognitive Services.
 
   #### Профиль аудитории
-  Для успешного прохождения курса Cloud Solutions Architects необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
+  Для успешного прохождения курса Cloud Solutions Architects  необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
 outlineSection: |-
   ### Модуль 1&#58; Разработка долгосрочных задач и распределенных транзакций
   Темы этого модуля&#58; внедрение крупномасштабных, параллельных и высокопроизводительных приложений с использованием пакетов; HPC с использованием виртуальных машин Microsoft Azure; внедрение устойчивых приложений с использованием очередей; а также внедрение кода для адресации событий приложений с помощью веб-хуков. Внедрение веб-перехватчиков дает внешнему ресурсу URL-адрес для приложения; внешний ресурс затем отправляет HTTP-запрос на этот URL-адрес каждый раз, когда вносится изменение, требующее действия от приложения.
@@ -60,8 +60,8 @@ outlineSection: |-
   - Настройка публикации события и модели подписки
   - Настройка службы ретрансляции Azure
   - Настройка приложений и служб с помощью Microsoft Graph
-  
-  После завершения этого модуля студенты смогут&#58;
+
+  После завершения этого модуля студенты получат следующее&#58;
   - Настроить архитектуру интеграции на основе сообщений
 
 
@@ -73,8 +73,8 @@ outlineSection: |-
   - Реализация подходящих моделей асинхронных вычислений
   - Реализация правил и шаблонов автомасштабирования
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понять, как разрабатывать для асинхронной обработки
+  После завершения этого модуля студенты получат следующее&#58;
+  - Понимание процесса разработки асинхронной обработки
 
 
   ### Модуль 4&#58; Разработка для автомасштабирования
@@ -83,8 +83,8 @@ outlineSection: |-
   - Внедрение кода, который обращается к экземплярам одиночного приложения
   - Внедрение кода, который обращается к переходному состоянию
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать приложения для автомасштабирования
+  После завершения этого модуля студенты получат следующее&#58;
+  - Начало создания приложения для автомасштабирования
 
 
   ### Модуль 5&#58; Разработка решений для когнитивных служб Azure
@@ -94,8 +94,8 @@ outlineSection: |-
   - Разработка решений с использованием Custom Speech Service
   - Разработка решений с использованием QnA Maker
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понимать решения Azure Cognitive Services
+  После завершения этого модуля студенты получат следующее&#58;
+  - Понимание решений Azure Cognitive Services
 
 
   ### Модуль 6&#58; Разработка для хранилища Azure
@@ -106,5 +106,6 @@ outlineSection: |-
   - Разработка решений, использующих хранилище Blob -объектов Microsoft Azure
   - Управление свойствами контейнера Blob -объектов в .NET
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать службы хранения Azure, такие как BLOB-объекты и Cosmos DB
+
