--- a/learn-certs-pr/courses/az-301t02.yml
+++ b/learn-certs-pr/courses/az-301t02.yml
@@ -1,14 +1,14 @@
 ### YamlMime:Course
-title: Проектирование решения для платформы данных
+title: Designing a Data Platform Solution
 metadata:
-  title: 'Курс AZ-301T02-A: Проектирование решения для платформы данных'
-  description: 'Курс AZ-301T02-A: Проектирование решения для платформы данных'
+  title: 'Course AZ-301T02-A: Designing a Data Platform Solution'
+  description: 'Course AZ-301T02-A: Designing a Data Platform Solution'
 uid: course.az-301t02
 courseNumber: 'AZ-301T02-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Определение идеальных вариантов цены хранилища Azure в соответствии с требованиями решения
+- skill: Определять идеальный вариант цены хранилища Azure на основе требований решения
 - skill: Определение порогов производительности для службы хранилища Azure
 - skill: Определение типа хранилища больших двоичных объектов, которые будут использоваться для конкретных компонентов решения
 - skill: Использование службы файлов Azure для операций SMB
@@ -52,12 +52,12 @@ summary: |-
   Курс предоставляет знания и навыки работы с различными параметрами баз данных в Azure, определение параметров потоковой передачи данных для крупномасштабных загрузок и долгосрочных параметров для хранения данных.
 
   #### Профиль аудитории
-  Для успешного прохождения курса Cloud Solutions Architects необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
+  Для успешного прохождения курса Cloud Solutions Architects  необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
 outlineSection: |-
   ### Модуль 1&#58; Поддержка решений Azure с помощью хранилища Azure
   В этом модуле описывается, сколько служб Azure используют службу хранилища Azure в качестве резервного хранилища для другого решения приложения в Azure. При рассмотрении вопроса об использовании хранилища Azure в качестве дополнительной службы для комплексного решения Azure этот модуль приобретает критическое значение.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Определять идеальный вариант цены хранилища Azure на основе требований решения
   - Определять пороги производительности для службы хранилища Azure
   - Определять тип больших двоичных объектов хранилища, которые будут использоваться для конкретных компонентов решения
@@ -69,7 +69,7 @@ outlineSection: |-
   Этот модуль сравнивает различные параметры реляционных и нереляционных хранилищ данных, которые доступны в Azure. Параметры рассматриваются группами, такими как реляционные базы данных (база данных SQL Azure, MySQL и PostgreSQL в Azure), нереляционные базы данных (базы данных и таблицы хранения Azure Cosmos), потоковая передача (Stream Analytics) и хранилище (фабрика данных, хранилище данных, и озеро данных).
 
   #### Лабораторная работа&#58; Развертывание экземпляров базы данных в Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Сравнивать и сопоставлять службы мониторинга для приложений, платформы Azure и сетей
   - Определить параметры потоковой передачи данных для крупномасштабной загрузки данных
   - Определить долгосрочные варианты хранения данных
@@ -79,8 +79,9 @@ outlineSection: |-
   Этот модуль содержит решения для мониторинга и автоматизации, доступные после того, как решение Azure было спроектировано, разработано и, возможно, развернуто. В модуле рассматриваются службы, используемые для мониторинга отдельных приложений, платформы Azure и сетевых компонентов. В этом модуле также рассматриваются параметры автоматизации и резервного копирования для обеспечения непрерывности бизнес-процессов для решений, размещенных в Azure.
 
   #### Лабораторная работа&#58; Развертывание решений для управления конфигурацией в Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Сравнивать и сопоставлять службы мониторинга для приложений, платформы Azure и сетей
   - Разрабатывать схему оповещения для решения, размещенного в Azure
   - Выбирать подходящий вариант резервного копирования для инфраструктуры и данных, размещенных в Azure
   - Автоматизировать развертывание будущих ресурсов для резервного копирования, восстановления или масштабирования
+
