--- a/learn-certs-pr/courses/az-301t03.yml
+++ b/learn-certs-pr/courses/az-301t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Проектирование для развертывания, миграции и интеграции
+title: Designing for Deployment, Migration, and Integration
 metadata:
-  title: 'Курс AZ-301T03-A: Проектирование для развертывания, миграции и интеграции'
-  description: 'Курс AZ-301T03-A: Проектирование для развертывания, миграции и интеграции'
+  title: 'Course AZ-301T03-A: Designing for Deployment, Migration, and Integration'
+  description: 'Course AZ-301T03-A: Designing for Deployment, Migration, and Integration'
 uid: course.az-301t03
 courseNumber: 'AZ-301T03-A'
 hoursToComplete: 24
@@ -48,15 +48,15 @@ exams:
 - uid: exam.az-301
 summary: |-
   Курс содержит знания и навыки, которые помогут слушателям развернуть шаблон Azure Resource Manager (ARM) в группе ресурсов, создать сложное развертывание с помощью инструментов строительных блоков Azure и интегрировать API или приложение логики со службой управления API.
-
+  
   #### Профиль аудитории
-  Для успешного прохождения курса Cloud Solutions Architects необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
+  Для успешного прохождения курса Cloud Solutions Architects  необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
 outlineSection: |-
   ### Модуль 1&#58; Развертывание ресурсов с помощью Azure Resource Manager
   Этот модуль обеспечивает базовое понимание Azure Resource Manager (ARM) и основных концепций развертываний, ресурсов, шаблонов, групп ресурсов и тегов. Модуль позволяет глубоко погрузится в изучение автоматизированного развертывания ресурсов с использованием шаблонов ARM.
 
   #### Лабораторная работа&#58; Развертывание ресурсов с помощью Azure Resource Manager
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создать группу ресурсов
   - Добавить ресурсы в группу ресурсов
   - Развертывать шаблон ARM в группе ресурсов
@@ -69,7 +69,7 @@ outlineSection: |-
   для размещения веб-приложений, API-интерфейсов REST, рабочих процессов интеграции и рабочих нагрузок HPC без необходимости управления определенными ресурсами сервера. Модуль тщательно освещает компоненты, относящиеся к службам приложений, такие как веб-приложения, приложения API, мобильные приложения, приложения логики и функции.
 
   #### Лабораторная работа&#58; Развертывание управляемых контейнезироваными рабочими нагрузками в Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Выбирать между размещением кода приложения или контейнеров в экземпляре службы приложений
   - Описывать различия между API, мобильными и веб-приложениями
   - Интегрировать API или приложение логики со службой управления API
@@ -81,8 +81,9 @@ outlineSection: |-
   для размещения веб-приложений, API-интерфейсов REST, рабочих процессов интеграции и рабочих нагрузок HPC без необходимости управления определенными ресурсами сервера. Модуль тщательно освещает компоненты, относящиеся к службам приложений, такие как веб-приложения, приложения API, мобильные приложения, приложения логики и функции.
 
   #### Лабораторная работа&#58; Развертывание бессерверных рабочих нагрузок в Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Выбирать между размещением кода приложения или контейнеров в экземпляре службы приложений
   - Описывать различия между API, мобильными и веб-приложениями
   - Интегрировать API или приложение логики со службой управления API
   - Разработка плана обслуживания приложений или развертывания в нескольких регионах для обеспечения высокой производительности и масштаба
+
