--- a/learn-certs-pr/courses/az-301t04.yml
+++ b/learn-certs-pr/courses/az-301t04.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Разработка Стратегии развития инфраструктуры
+title: Designing an Infrastructure Strategy
 metadata:
-  title: 'Курс AZ-301T04-A: Разработка стратегии инфраструктуры'
-  description: 'Курс AZ-301T04-A: Разработка стратегии инфраструктуры'
+  title: 'Course AZ-301T04-A: Designing an Infrastructure Strategy'
+  description: 'Course AZ-301T04-A: Designing an Infrastructure Strategy'
 uid: course.az-301t04
 courseNumber: 'AZ-301T04-A'
 hoursToComplete: 24
@@ -49,12 +49,12 @@ summary: |-
   Этот курс позволяет слушателям получать навыки, позволяющие описывать стратегии DNS и IP для сетей VNET в Azure, сравнивать варианты подключения для ad-hoc и гибридных подключений, распределять сетевой трафик между несколькими нагрузками с помощью балансировщиков нагрузки и разрабатывать гибридный сценарий подключения между облаком и локальным оборудованием.
 
   #### Профиль аудитории
-  Для успешного прохождения курса Cloud Solutions Architects необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
+  Для успешного прохождения курса Cloud Solutions Architects  необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
 outlineSection: |-
   ### Модуль 1&#58; Шаблоны архитектуры приложений в Azure
   Этот модуль описывает и рассматривает общие шаблоны и архитектуры Azure в соответствии с рекомендациями группы Microsoft Patterns & Practices. Каждый шаблон сгруппирован по категориям производительности, отказоустойчивости и масштабируемости и описан в контексте аналогичных шаблонов внутри категории.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Находить и ссылаться на документацию Cloud Design Patterns
   - Находить и ссылаться на Центр архитектуры Azure
   - Описывать различные шаблоны, извлеченные из шаблонов облачного дизайна
@@ -64,7 +64,7 @@ outlineSection: |-
   Этот модуль идентифицирует рабочие нагрузки, которые в идеале развертываются с помощью служб Infrastructure-as-a-Service в Azure. В этом модуле рассматриваются масштабируемые наборы виртуальных машин (VM) и службы виртуальных машин в Azure, а также способы оптимального развертывания рабочих нагрузок на эти службы с использованием передовых методов и функций, таких как наборы доступности.
 
   #### Лабораторная работа&#58; Создание серверных приложений на основе IaaS Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разрабатывать наборы доступности для одной или нескольких виртуальных машин
   - Описывать различия между сбоями и обновлениями доменов
   - Создавать шаблоны менеджера ресурсов Azure (ARM) для масштабируемых наборов виртуальной машины.
@@ -75,7 +75,7 @@ outlineSection: |-
   В этом модуле описаны различные параметры сети и подключения, доступные для решений, развернутых в Azure. Модуль исследует варианты подключения, начиная от подключений ad-hoc и заканчивая сценариями долгосрочного гибридного подключения. В модуле также обсуждаются некоторые проблемы производительности и безопасности, связанные с балансировкой рабочих нагрузок между несколькими вычислительными экземплярами, подключением локальной инфраструктуры к облаку и созданием шлюзов для локальных данных.
 
   #### Лабораторная работа&#58; Развертывание сетевой инфраструктуры для использования в решениях Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать стратегии DNS и IP для сетей VNET в Azure
   - Сравнивать варианты подключения для подключений ad-hoc и гибридных подключений
   - Распределять сетевой трафик между несколькими нагрузками с помощью балансировщиков нагрузки
@@ -86,7 +86,8 @@ outlineSection: |-
   В этом модуле описываются и сравниваются службы интеграции и обмена сообщениями, доступные для решений, размещенных на платформе Azure. Описанные службы обмена сообщениями включают&#58; Azure Storage Queues, Service Bus Queues, Service Bus Relay, IoT Hubs, Event Hubs, и Notification Hubs. К службам интеграции относятся Azure Functions и Logic Apps.
 
   #### Лабораторная работа&#58; Интеграция компонентов решения Azure с использованием служб обмена сообщениями
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Сравнивать Storage Queues с Service Bus Queues
-  - Определять, когда следует использовать Azure Functions или Logic Apps для компонентов интеграции в решении
+  - Определять, когда следует использовать Azure Functions или Logic Apps  для компонентов интеграции в решении
   - Описывать различия между IoT Hubs, Event Hubs, и Time Series Insights
+
