--- a/learn-certs-pr/courses/az-400t01.yml
+++ b/learn-certs-pr/courses/az-400t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Внедрение процессов разработки DevOps
+title: Implementing DevOps Development Processes
 metadata:
-  title: 'Курс AZ-400T01-A: Внедрение процессов разработки DevOps'
-  description: 'Курс AZ-400T01-A: Внедрение процессов разработки DevOps'
+  title: 'Course AZ-400T01-A: Implementing DevOps Development Processes'
+  description: 'Course AZ-400T01-A: Implementing DevOps Development Processes'
 uid: course.az-400t01
 courseNumber: 'AZ-400T01-A'
 hoursToComplete: 24
@@ -46,7 +46,7 @@ outlineSection: |-
   - Переход с Team Foundation Version Control (TFVC) на Git
   - Аутентификация в Git Repos
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать преимущества использования Source Control
   - Осуществлять миграцию из TFVC в Git
 
@@ -54,15 +54,15 @@ outlineSection: |-
   ### Модуль 2&#58; Масштабирование Git для корпоративных DevOps
   #### Уроки
   - Как структурировать Git repo
-  - Рабочие процессы Git Branching
+  -  Рабочие процессы Git Branching
   - Совместная работа с Pull Requests
   - Зачем заботиться о GitHooks?
   - Поощрение Internal Open Source
-  - Версия Git 
+  -  Версия Git 
   - Общественные проекты
   - Файлы в Git
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Масштабировать Git для корпоративных DevOps
 
 
@@ -74,13 +74,13 @@ outlineSection: |-
   - Пулы агентов
   - Конвейеры и параллелизм
   - Проекты Azure DevOps и Open Source 
-  - Сравнение Azure Pipelines YAML и Visual Designer
+  - Azure Pipelines YAML vs Visual Designer
   - Настройка частных агентов
   - Интеграция Jenkins с конвейерами Azure
   - Интеграция внешнего контроля источника с конвейерами Azure.
   - Анализ и интеграция многоэтапных сборок Docker
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Внедрять и управлять инфраструктурой сборки
 
 
@@ -92,7 +92,7 @@ outlineSection: |-
   - Управление секретами, токенами и сертификатами
   - Внедрение инструментов для управления безопасностью и соответствием в конвейере
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять конфигурацией и секретами приложений
 
 
@@ -105,5 +105,6 @@ outlineSection: |-
   - Предоставление тестера устройств для развертывания
   - Создание публичных и частных групп рассылки
 
-  После завершения этого модуля студенты смогут&#58;
-  - Реализация стратегии мобильного DevOps
+  После завершения этого модуля студенты получат следующее&#58;
+  - Реализация стратегии мобильного DevOps 
+
