--- a/learn-certs-pr/courses/az-400t03.yml
+++ b/learn-certs-pr/courses/az-400t03.yml
@@ -1,15 +1,15 @@
 ### YamlMime:Course
-title: Реализация непрерывной доставки
+title: Implementing Continuous Delivery
 metadata:
-  title: 'Курс AZ-400T03-A: Реализация непрерывной доставки'
-  description: 'Курс AZ-400T03-A: Реализация непрерывной доставки'
+  title: 'Course AZ-400T03-A: Implementing Continuous Delivery'
+  description: 'Course AZ-400T03-A: Implementing Continuous Delivery'
 uid: course.az-400t03
 courseNumber: 'AZ-400T03-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Умение различать релизы и развертывания
-- skill: Определение компонентов релизного конвейера 
+- skill: Определение компонентов релизного конвейера
 - skill: Умение объяснять детали, которые нужно учитывать при разработке стратегии релиза
 - skill: Умение классифицировать релиз и процесс релиза и понимание процесса контроля качества обоих
 - skill: Умение описывать принцип выпуска релизов и процесс работы с примечаниями к релизам и документацией
@@ -62,7 +62,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Создание стратегии выпуска
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Различать релиз и развертывание
   - Определять компоненты релизного конвейера 
   - Объяснять вещи, которые следует учитывать при разработке стратегии выпуска
@@ -86,20 +86,20 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; Настройка секретов в конвейере с хранилищем ключей Azure
 
-  #### Лабораторная работа&#58; Настройка и запуск нагрузочных тестов
+  #### Лабораторная работа&#58; Настройка  и запуск нагрузочных тестов
 
   #### Лабораторная работа&#58; Настройка и запуск функциональных тестов
 
   #### Лабораторная работа&#58; Использование Azure Monitor в качестве release gate
 
   #### Лабораторная работа&#58; Создание панели Release Dashboard
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснять терминологию, используемую в Azure DevOps и других средствах управления выпуском
   - Описывать, что такое задача Build and Release, что она может сделать, а также некоторые доступные задачи развертывания
   - Классифицировать Agent, Agent Queue, и Agent Pool 
   - Объяснять почему иногда требуется несколько заданий на выпуск в одном конвейере выпуска
   - Различать задание по выпуску с несколькими агентами и с несколькими конфигурациями
-  - Использовать переменные выпуска и переменные стадии в конвейере выпуска
+  - Использовать переменные выпуска и переменные стадии в  конвейере выпуска
   - Выполнять безопасное развертывание в среде с использованием служебного соединения
   - Интегрировать тесты в конвейер
   - Перечислять различные способы проверки работоспособности вашего конвейера и выпуска с помощью предупреждений, сервисных хуков и отчетов
@@ -120,8 +120,9 @@ outlineSection: |-
   #### Лабораторная работа&#58; Сине-зеленое развертывание (Blue Green Deployment)
 
   #### Лабораторная работа&#58; Диспетчер трафика (Traffic Manager)
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать шаблоны развертывания
   - Реализация сине-зеленого развертывания 
   - Реализовывать Canary Release
   - Реализовывать прогрессивное развертывание экспозиции (Progressive Exposure Deployment)
+
