--- a/learn-certs-pr/courses/az-400t04.yml
+++ b/learn-certs-pr/courses/az-400t04.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Внедрение управления зависимостями
+title: Implementing Dependency Management
 metadata:
-  title: 'Курс AZ-400T04-A: Внедрение управления зависимостями'
-  description: 'Курс AZ-400T04-A: Внедрение управления зависимостями'
+  title: 'Course AZ-400T04-A: Implementing Dependency Management'
+  description: 'Course AZ-400T04-A: Implementing Dependency Management'
 uid: course.az-400t04
 courseNumber: 'AZ-400T04-A'
 hoursToComplete: 24
@@ -49,7 +49,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Обновление пакетов
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Рекомендовать инструменты и методы управления артефактами
   - Абстрагировать общие пакеты, чтобы разрешить совместное использование и повторное использование
   - Изучать кодовую базу, чтобы определять зависимости кода, которые могут быть преобразованы в пакеты
@@ -65,7 +65,8 @@ outlineSection: |-
   - Программное обеспечение с открытым исходным кодом
   - Интеграция сканирования лицензий и уязвимостей
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Проверять пакеты программного обеспечения с открытым исходным кодом на соответствие требованиям безопасности и лицензий в соответствии с корпоративными стандартами
   - Настраивать конвейер сборки для доступа к безопасности пакета и рейтингу лицензии
   - Настраивать безопасный доступ к фидам пакетов
+
