--- a/learn-certs-pr/courses/az-400t05.yml
+++ b/learn-certs-pr/courses/az-400t05.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Реализация инфраструктуры приложения
+title: Implementing Application Infrastructure
 metadata:
-  title: 'Курс AZ-400T05-A: Реализация инфраструктуры приложения'
-  description: 'Курс AZ-400T05-A: Реализация инфраструктуры приложения'
+  title: 'Course AZ-400T05-A: Implementing Application Infrastructure'
+  description: 'Course AZ-400T05-A: Implementing Application Infrastructure'
 uid: course.az-400t05
 courseNumber: 'AZ-400T05-A'
 hoursToComplete: 24
@@ -37,7 +37,7 @@ summary: |-
   Слушателями данного курса являются специалисты, заинтересованные в реализации инфраструктуры приложений, а также в управлении и настройке этой инфраструктуры или в прохождении сертификационного экзамена Microsoft Azure DevOps Solutions.
 prerequisitesSection: |-
   Для успешного прохождения курса слушателям необходимо обладать базовыми знаниями об Azure, иметь опыт работы с виртуальными машинами и контейнерами, а также иметь представление об автоматизации и сценариях.
-  
+
   Также желательно, но не обязательно, иметь опыт работы в среде разработки программного обеспечения или операционной системы с Windows или Linux.
   
   Слушатели также должны знать общие процессы разработки и развертывания приложений..
@@ -54,7 +54,7 @@ outlineSection: |-
   - Развертывание лаборатории в Azure с использованием шаблонов ARM
   - Вопросы по модулю для проверки знаний 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Применять инфраструктуру и конфигурацию как принципы кода
   - Производить развертывание и управление инфраструктурой с использованием технологий автоматизации Microsoft, таких как шаблоны ARM, PowerShell и Azure CLI
 
@@ -71,7 +71,7 @@ outlineSection: |-
   - Lab Azure Automation - развертывание IaaS или PaaS
   - Вопросы по модулю для проверки знаний 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать модели и службы развертывания, доступные в Azure
 
 
@@ -82,7 +82,7 @@ outlineSection: |-
   - Развертывание лаборатории и масштабирование кластера AKS
   - Вопросы по модулю для проверки знаний
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Развертывать и настраивать управляемый кластер Kubernetes
 
 
@@ -97,7 +97,7 @@ outlineSection: |-
   - Лабораторная работа&#58; Настройка приложения в Azure с помощью X
   - Вопросы по модулю для проверки знаний
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Развертывать и настраивать инфраструктуру с использованием сторонних инструментов и сервисов, таких как Chef, Puppet, Ansible, SaltStack и Terraform, доступных в Azure
 
 
@@ -108,7 +108,7 @@ outlineSection: |-
   - Лабораторная работа&#58; Включение модуля или инструмента сканирования в конвейер/центр безопасности Azure DevOps.
   - Вопросы по модулю для проверки знаний
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Определять стратегию и конфигурацию инфраструктуры, а также соответствующий набор инструментов для релизного конвейера и инфраструктуры приложений
   - Внедрять соответствие и безопасность в инфраструктуру приложений
 
@@ -116,3 +116,4 @@ outlineSection: |-
   ### Модуль 6&#58; Завершение курса
   #### Уроки
   - Заключительный экзамен
+
