--- a/learn-certs-pr/courses/az-400t06.yml
+++ b/learn-certs-pr/courses/az-400t06.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Реализация непрерывной обратной связи
+title: Implementing Continuous Feedback
 metadata:
-  title: 'Курс AZ-400T06-A: Реализация непрерывной обратной связи'
-  description: 'Курс AZ-400T06-A: Реализация непрерывной обратной связи'
+  title: 'Course AZ-400T06-A: Implementing Continuous Feedback'
+  description: 'Course AZ-400T06-A: Implementing Continuous Feedback'
 uid: course.az-400t06
 courseNumber: 'AZ-400T06-A'
 hoursToComplete: 24
@@ -57,7 +57,7 @@ outlineSection: |-
   #### Лабораторная работа&#58; Интеграция DevOps Azure и Teams
 
   #### Лабораторная работа&#58; Функция Flags
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разрабатывать способы измерения удовлетворенности конечных пользователей
   - Разрабатывать процессы для сбора и анализа отзывов пользователей из внешних источников
   - Разрабатывать маршрутизацию для данных отчета о сбоях клиентских приложений
@@ -72,7 +72,7 @@ outlineSection: |-
   - Разрабатывать панели мониторинга и состояния
   - Интеграция и настройка системы тикетов
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать интеграцию отчетов о сбоях для клиентских приложений
   - Разрабатывать панели мониторинга и состояния
   - Реализовывать маршрутизацию для данных отчета о сбоях клиентского приложения
@@ -88,8 +88,9 @@ outlineSection: |-
   - Анализировать оповещения для определения базового уровня
   - Blameless PostMortems и Just Culture
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Анализировать оповещения для определения базового уровня
   - Анализировать телеметрию для определения базового уровня
   - Выполнять обзоры сайтов в режиме реального времени и собирать отзывы о сбоях системы
   - Выполнять текущие настройки для уменьшения количества бессмысленных оповещений или предупреждений, не требующих действия
+
