--- a/learn-certs-pr/courses/az-400t07.yml
+++ b/learn-certs-pr/courses/az-400t07.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Разработка стратегии DevOps
+title: Designing a DevOps Strategy
 metadata:
-  title: 'Курс AZ-400T07-A: Разработка стратегии DevOps'
-  description: 'Курс AZ-400T07-A: Разработка стратегии DevOps'
+  title: 'Course AZ-400T07-A: Designing a DevOps Strategy'
+  description: 'Course AZ-400T07-A: Designing a DevOps Strategy'
 uid: course.az-400t07
 courseNumber: 'AZ-400T07-A'
 hoursToComplete: 24
@@ -48,7 +48,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Agile-планирование и управление портфелями с помощью Azure Boards
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать трансформации с общими целями и сроками
   - Выбирать проект и определять метрики проекта и KPI
   - Создавать команду и гибкую организационную структуру
@@ -61,8 +61,8 @@ outlineSection: |-
   - Планирование безопасного развития
 
 
-  #### Лабораторная работа&#58; Управление Feature Flag с помощью LaunchDarkly и AzureDevOps
-  После завершения этого модуля студенты смогут&#58;
+  #### Лабораторная работа&#58; Управление Feature Flag с помощью  LaunchDarkly и AzureDevOps
+  После завершения этого модуля студенты получат следующее&#58;
   - Разработать стратегию качества проекта
   - Планировать безопасные методы разработки и соблюдения правил
 
@@ -75,6 +75,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Интеграция Azure Repos и Azure Pipelines с Eclipse
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Выполнять миграцию и консолидацию артефактов
   - Выполнять миграцию и интеграцию Source Control
+
