--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Основы Microsoft Azure
+title: Microsoft Azure Fundamentals
 metadata:
-  title: 'Курс AZ-900T01-A: Основы Microsoft Azure'
-  description: 'Курс AZ-900T01-A: Основы Microsoft Azure'
+  title: 'Course AZ-900T01-A: Microsoft Azure Fundamentals'
+  description: 'Course AZ-900T01-A: Microsoft Azure Fundamentals'
 uid: course.az-900t01
 courseNumber: 'AZ-900T01-A'
 hoursToComplete: 24
@@ -34,7 +34,6 @@ summary: |-
   Для прохождения этого курса не требуется никакой предварительной подготовки. Он подходит для всех, кто хочет узнать больше о Microsoft Azure.
 prerequisitesSection: |-
   Для прохождения этого курса не требуется никакой предварительной подготовки. Технический опыт в области IT не требуется, однако некоторые общие знания или опыт в области IT могли бы быть полезны.
-
 outlineSection: |-
   ### Модуль 1&#58; Облачные принципы
   В этом модуле освещаются основные концепции облачных вычислений.
@@ -44,7 +43,7 @@ outlineSection: |-
   - «Инфраструктура как услуга» (IaaS), «Платформа как услуга» (PaaS) и «Программное обеспечение как услуга» (SaaS)
   - Общедоступные, частные и гибридные облачные модели
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать общие концепции облачных вычислений
 
 
@@ -56,8 +55,9 @@ outlineSection: |-
   - Решения Azure
   - Инструменты управления Azure
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понимать основные службы, доступные в  Microsoft Azure
+  После завершения этого модуля студенты получат следующее&#58;
+  - Понимать основные службы, доступные в
+  Microsoft Azure
 
   ### Модуль 3&#58; Безопасность, конфиденциальность, соответствие и доверие
   В этом модуле слушатели получают сведения о безопасности, конфиденциальности, совместимости и доверии с Microsoft Azure.
@@ -69,8 +69,9 @@ outlineSection: |-
   - Мониторинг и отчетность в Azure
   - Стандарты конфиденциальности, соответствия и защиты данных в Azure
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понимать  положения о безопасности, конфиденциальности, соответствии и доверии в Microsoft Azure
+  После завершения этого модуля студенты получат следующее&#58;
+  - Понимать
+  положения о безопасности, конфиденциальности, соответствии и доверии в Microsoft Azure
 
   ### Модуль 4&#58; Цены и поддержка Azure
   В этом модуле слушатели изучают модели ценообразования и поддержки, доступные в Microsoft.
@@ -80,5 +81,6 @@ outlineSection: |-
   - Варианты поддержки, доступные в Azure
   - Жизненный цикл службы в Azure
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать модели ценообразования и поддержки, доступные в Microsoft.
+
