--- a/learn-certs-pr/courses/dp-050t00.yml
+++ b/learn-certs-pr/courses/dp-050t00.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Перенос рабочих нагрузок SQL в Azure
+title: Migrate SQL workloads to Azure
 metadata:
-  title: 'Курс DP-050T00-A: Перенос рабочих нагрузок SQL в Azure'
-  description: 'Курс DP-050T00-A: Перенос рабочих нагрузок SQL в Azure'
+  title: 'Course DP-050T00-A: Migrate SQL workloads to Azure'
+  description: 'Course DP-050T00-A: Migrate SQL workloads to Azure'
 uid: course.dp-050t00
 courseNumber: 'DP-050T00-A'
 hoursToComplete: 48
@@ -24,14 +24,14 @@ products:
 - azure
 summary: |-
   В этом курсе слушатели изучат цели модернизации платформы данных и ее подход к бизнес-требованиям. Они также изучат каждый этап процесса модернизации платформы данных и определят, какие задачи выполняются на каждом этапе, например этап оценки и планирования. Кроме того, слушатели узнают о доступных инструментах миграции и о том, как они подходят для каждого этапа процесса миграции данных.
-  Учащиеся узнают, как перейти на три целевые платформы для рабочих нагрузок на основе SQL: Виртуальные машины Azure, базы данных Azure SQL и управляемые экземпляры базы данных Azure SQL. Слушатель узнает о преимуществах и ограничениях каждой целевой платформы и о том, как их можно использовать для выполнения как деловых, так и технических требований для современных рабочих нагрузок SQL. Также данный курс освещает изменения, которые могут потребоваться в существующих приложениях на основе SQL, для того, чтобы можно было использовать современные платформы данных в Azure наилучшим образом.
+  Учащиеся узнают, как перейти на три целевые платформы для рабочих нагрузок на основе SQL&#58; Виртуальные машины Azure, базы данных Azure SQL и управляемые экземпляры базы данных Azure SQL. Слушатель узнает о преимуществах и ограничениях каждой целевой платформы и о том, как их можно использовать для выполнения как деловых, так и технических требований для современных рабочих нагрузок SQL. Также данный курс освещает изменения, которые могут потребоваться в существующих приложениях на основе SQL, для того, чтобы можно было использовать современные платформы данных в Azure наилучшим образом.
 
   #### Профиль аудитории
   Аудитория этого курса - специалисты по данным и архитекторы данных, которые хотят узнать о миграции технологий платформы данных, существующих в Microsoft Azure, и о том, как можно перенести и модернизировать существующие рабочие нагрузки на основе SQL.
   Вторичной аудиторией этого курса являются люди, которые управляют платформами данных или разрабатывают приложения, которые доставляют контент из существующих технологий платформ данных.
 prerequisitesSection: |-
   В дополнение к своему профессиональному опыту работы с SQL Server слушатели, проходящие данный курс, должны обладать техническими знаниями, эквивалентными следующим курсам&#58;
-  - Azure fundamentals
+  - [Azure fundamentals](https://docs.microsoft.com/en-us/learn/modules/welcome-to-azure/)
 outlineSection: |-
   ### Модуль 1&#58; Введение в модернизацию платформы данных
   В этом модуле раскрывается цель модернизации платформы данных и рассказывается о выгоде, которую модернизация платформы данных может принести организации. Затем слушатели изучат различные этапы проектов миграции платформы данных, чтобы понять, что входит в каждый этап, чтобы максимально увеличить шансы на успешные проекты модернизации платформы данных. И, наконец, студенты изучат различные пути миграции данных, чтобы понять, чем отличается каждый подход и почему следует предпочесть один подход миграции другому.
@@ -46,13 +46,13 @@ outlineSection: |-
   - Понимать этапов миграции
   - Пути миграции данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимание модернизации платформы данных
   - Понимать этапов миграции
   - Пути миграции данных
 
 
-  ### Модуль 2&#58; Выбор правильных инструментов для миграции данных
+  ### Модуль 2. Выбор правильных инструментов для миграции данных
   В этом модуле слушатели познакомятся с Руководством по миграции данных в качестве отправной точки для источника информации, которую организации должны использовать для пошагового руководства по модернизации существующей платформы данных. Далее они изучат ценность Microsoft Assessment and Planning Toolkit, помогающего обнаружить активы данных, которые в настоящее время существуют в их средах.
   Затем учащиеся изучат инструменты, которые можно использовать для оценки проблем совместимости или рабочей нагрузки с помощью Data Migration и Data Experimentation Assistant. Позже слушателям покажут, как можно использовать службу миграции баз данных Azure для облегчения онлайн-миграции баз данных с целью сокращения времени простоя. И, наконец, слушатели познакомятся с помощником по миграции SQL (SQL Migration assistant), который покажет, как переносить рабочие нагрузки без использования SQL Server.
 
@@ -69,7 +69,7 @@ outlineSection: |-
   - Определение кандидатов на миграцию с помощью Data Migration Assistant
   - Оценка рабочей нагрузки данных с помощью Database Experimentation Assistant
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Определение кандидатов на миграцию с помощью Data Migration Assistant
   - Оценка рабочей нагрузки данных с помощью Database Experimentation Assistant
 
@@ -86,13 +86,13 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Перенос рабочих нагрузок SQL на виртуальные машины Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Говорить о миграции SQL Server на виртуальную машину Azure
   - Знать варианты переноса рабочих нагрузок SQL на виртуальной машины Azure
   - Знать о реализации сценариев высокой доступности и аварийного восстановления
 
 
-  ### Модуль 4&#58; Перенос рабочих нагрузок SQL в базы данных SQL Azure
+  ### Модуль 4. Перенос рабочих нагрузок SQL в базы данных SQL Azure
   В этом модуле слушатели узнают, что такое база данных SQL Azure и почему она подходит для рабочих нагрузок на основе SQL. Благодаря этому курсу, слушатели смогут выбрать подходящий вариант экземпляра SQL Server и будут знать, почему он может соответствовать бизнес-требованиям для модернизации платформы данных.
 
   Модули также позволят узнать, как выполнять автономную и онлайн-миграцию в базу данных SQL Azure. Таким образом, слушатели могут оценить, какой метод может соответствовать их сценариям на работе. Также будут показаны инструменты, которые можно использовать для включения процесса миграции данных. И, наконец, слушатели изучат методы, которые можно использовать для загрузки данных в базу данных SQL Azure из локального экземпляра.
@@ -105,7 +105,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Перенос рабочих нагрузок SQL в базы данных SQL Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Выбирать правильный вариант экземпляра SQL Server в Azure
   - Выполнять миграцию SQL Server в Azure SQL DB в автономном режиме
   - Выполнять миграцию SQL Server в Azure SQL DB в режиме онлайн
@@ -124,8 +124,9 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Перенос рабочих нагрузок SQL в управляемый экземпляр базы данных SQL Azure
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Производить оценку сценариев миграции в управляемый экземпляр базы данных SQL
   - Осуществлять миграцию на управляемый экземпляр базы данных SQL
   - Осуществлять загрузку и перемещение данных в управляемый экземпляр базы данных SQL
   - Производить конфигурацию и оптимизацию приложений
+
