--- a/learn-certs-pr/courses/dp-100t01.yml
+++ b/learn-certs-pr/courses/dp-100t01.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Course
+### YamlMime:Course
 title: Designing and Implementing a Data Science Solution on Azure
 metadata:
   title: 'Course DP-100T01-A: Designing and Implementing a Data Science Solution on Azure'
@@ -20,136 +20,40 @@ products:
 exams:
 - uid: exam.dp-100
 summary: |-
-  Узнайте, как использовать решения на основе машинного обучения в облачном масштабе с помощью машинного обучения Azure. Этот курс научит вас использовать имеющиеся у вас знания Python и машинного обучения для управления приемом и подготовкой данных, обучением и развертыванием моделей и мониторингом решений на основе машинного обучения в Microsoft Azure.
+  Данный курс предоставляет слушателям знания и навыки использования служб Azure для разработки, обучения и развертывания решений машинного обучения.  Курс начинается с обзора служб Azure, поддерживающих науку о данных. С этого момента основное внимание уделяется использованию службы первичных данных Azure, службы машинного обучения Azure, для автоматизации конвейера данных. Этот курс ориентирован на изучение Azure и не является пособием по изучению data science. Предполагается, что слушатели уже обладают этими данными.
 
   #### Профиль аудитории
-  Этот курс предназначен для специалистов по анализу данных, обладающих знаниями в области Python и систем машинного обучения, таких как Scikit-Learn, PyTorch и Tensorflow, которые хотят создавать и эксплуатировать решения для машинного обучения в облаке.
+  Этот курс предназначен для специалистов по данным и тех, кто несет значительную ответственность за обучение и развертывание моделей машинного обучения.
 prerequisitesSection: |-
   Перед посещением этого курса студенты должны иметь&#58;
-  - Фундаментальные знания Microsoft Azure
-  - Опыт написания кода Python для работы с данными с использованием таких библиотек, как Numpy, Pandas и Matplotlib. 
-  - Понимание науки о данных; включая подготовку данных и подготовка моделей машинного обучения с использованием общих библиотек машинного обучения, таких как Scikit-Learn, PyTorch или Tensorflow.
+  - Earned [Azure Fundamentals certification](https://docs.microsoft.com/learn/certifications/azure-fundamentals).
+  - Понимание data science, в том числе знание процесса подготовки данных, обучения моделей и оценки конкурирующих моделей, для того, чтобы выбрать лучшую.
+  - Умение программировать на языке программирования Python и использовать библиотеки Python&#58; pandas, scikit-learn, matplotlib и seaborn.
 outlineSection: |-
-  ### Модуль 1&#58; Введение в машинное обучение Azure
-  В этом модуле вы узнаете, как подготовить рабочее пространство машинного обучения Azure и использовать его для управления ресурсами машинного обучения, такими как данные, вычисления, учебный код модели, зарегистрированные метрики и подготовленные (обученные) модели. Вы узнаете, как использовать веб-интерфейс студии машинного обучения Azure, а также SDK машинного обучения Azure и инструменты разработчика, такие как Visual Studio Code и Jupyter Notebooks, для работы с активами в рабочей области.
-  
+  ### Модуль 1&#58; Работа с данными в Azure
+  Слушатели узнают о data science и роли Data Scientist.  Затем эти знания понадобятся, чтобы понять, как службы Azure могут поддерживать и расширять процесс обработки данных.
   #### Уроки
-  - Начало работы с машинным обучением Azure
-  - Инструменты машинного обучения Azure
+  - Знакомство с Data Science Process
+  - Обзор вариантов  Azure Data Science 
+  - Знакомство с Azure Notebooks
 
-  #### Лабораторная работа&#58; создание рабочей области машинного обучения Azure
-  
-  #### Лабораторная работа&#58; работа с инструментами машинного обучения Azure
-  
-  После завершения этого модуля вы сможете
-  - Подготовить рабочую область машинного обучения Azure.
-  - Использовать инструменты и код для работы с машинным обучением Azure.
 
-  ### Модуль 2&#58; Машинное обучение без кода с конструктором
-  Этот модуль знакомит вас с инструментом конструктора - интерфейсом перетаскивания (drag and drop) для создания моделей машинного обучения без написания кода. Вы узнаете, как создать обучающий конвейер, который включает подготовку данных и обучение модели, а затем преобразовать этот обучающий конвейер в конвейер логического вывода, который можно использовать для прогнозирования значений из новых данных, прежде чем окончательно развернуть конвейер логического вывода как службу для использования клиентских приложений.
+  ### Модуль 2&#58; Работа с данными с помощью службы машинного обучения Azure (Azure Machine Learning)
+  Слушатель узнает, как использовать службу машинного обучения Azure (AML) для автоматизации сквозного процесса обработки данных.
   #### Уроки
-  - Обучение моделей с помощью конструктора
-  - Публикация моделей с помощью конструктора
-  
-  #### Лабораторная работа&#58; создание обучающего конвейера с помощью Azure ML Designer
-  #### Лабораторная работа&#58; развертывание службы с помощью Azure ML Designer
-  - После завершения этого модуля вы сможете
-  - Использование конструктора для подготовки модели машинного обучения
-  - Развертывание конвейера конструктора как службы.
+  - Знакомство со службой AML
+  - Регистрация и внедрение ML моделей в службе AML
 
-  ### Модуль 3&#58; Эксперименты и модели обучения
-  В этом модуле вы начнете проводить эксперименты, которые инкапсулируют обработку данных, моделируют обучающий код и используют их для подготовки моделей машинного обучения.
+
+  ### Модуль 3&#58; Автоматизация машинного обучения с помощью службы AML
+  В этом модуле слушатели узнают о конвейере машинного обучения и о том, как службы AML AutoML и HyperDrive могут автоматизировать некоторые трудоемкие части.
   #### Уроки
-  - Введение в эксперименты
-  - Обучение и регистрация моделей
-  
-  #### Лабораторная работа&#58; проведение экспериментов
-  #### Лабораторная работа&#58; обучение и регистрация моделей
-  После завершения этого модуля вы сможете
-  - Запуск экспериментов на основе кода в рабочей области машинного обучения Azure.
-  - Обучение и регистрация моделей машинного обучения
-  
-  ### Модуль 4&#58; Работа с данными
-  Данные являются фундаментальным элементом любой рабочей нагрузки машинного обучения, поэтому в этом модуле вы узнаете, как создавать хранилища данных и наборы данных и управлять ими в рабочей области машинного обучения Azure, а также как использовать их в экспериментах по обучению модели.
+  - Автоматизация выбора модели машинного обучения
+  - Автоматическая настройка гиперпараметра с помощью HyperDrive
+
+
+  ### Модуль 4&#58; Управление и мониторинг моделей машинного обучения с помощью службы AML
+  В этом модуле слушатели узнают, как автоматически управлять и отслеживать модели машинного обучения в службе AML.
   #### Уроки
-  - Работа с хранилищами данных
-  - Работа с наборами данных
-  
-  #### Лабораторная работа&#58; работа с хранилищами данных
-  #### Лабораторная работа&#58; работа с наборами данных
-  - После завершения этого модуля вы сможете
-  - Создание и использование хранилищ данных
-  - Создание и использование наборов данных
-  
-  
-  ### Модуль 5&#58; Вычисление контекстов
-  Одним из ключевых преимуществ облака является возможность увеличивать вычислительные ресурсы по требованию и использовать их для масштабирования процессов машинного обучения до такой степени, которая была бы невозможна на вашем собственном оборудовании. В этом модуле вы узнаете, как управлять средами эксперимента, которые обеспечивают согласованность во время выполнения экспериментов, и как создавать и использовать вычислительные цели для экспериментов.
-  #### Уроки
-  - Работа со средами
-  - Работа с вычислительными целями
-  
-  #### Лабораторная работа&#58; работа со средами
-  #### Лабораторная работа&#58; работа с вычислительными целями  
-  - После завершения этого модуля вы сможете
-  - Создание и использование сред
-  - Создание и использование вычислительных целей  
-  
-  ### Модуль 6&#58; Управление операциями с помощью конвейеров
-  Теперь, когда вы понимаете основы запуска рабочих нагрузок как экспериментов, которые заимствуют наборы данных и вычислительный ресурс, пришло время узнать, как организовать эти рабочие нагрузки в виде конвейеров из связанных шагов. Конвейеры - это ключ к реализации эффективного решения для операций с машинным обучением (ML Ops) в Azure, поэтому  в этом модуле вы узнаете, как их определить и запустить.
-  #### Уроки
-  - Введение в конвейеры
-  - Публикация и эксплуатация трубопроводов
-  
-  #### Лабораторная работа&#58; создание конвейера
-  #### Лабораторная работа&#58; публикация конвейера
-  - После завершения этого модуля вы сможете
-  - Создание конвейеров для автоматизации рабочих процессов машинного обучения.
-  - Публикация и запуск сервисов конвейера.
-  
-  ### Модуль 7&#58; Развертывание и использование моделей
-  Модели предназначены для облегчения принятия решений с помощью прогнозов, поэтому они будут полезны только если они развернуты и доступны для использования каким-либо приложением. В этом модуле вы узнаете, как развертывать модели для по логического вывода в реальном времени и для пакетного логического вывода.
-  #### Уроки
-  - Логический вывод реальном времени
-  - Пакетный логический вывод
-  
-  #### Лабораторная работа&#58; создание службы логического вывода в реальном времени
-  #### Лабораторная работа&#58; создание службы пакетного логического вывода
-  - После завершения этого модуля вы сможете
-  - Опубликуйте модель как сервис логического вывода в реальном времени.
-  - Опубликуйте модель как службу пакетного вывода
-  
-  ### Модуль 8&#58; Обучение оптимальных моделей
-  На этом этапе курса вы изучили сквозной процесс обучения, развертывания и использования моделей машинного обучения; но как вы гарантируете, что ваша модель дает лучшие прогнозирующие результаты для ваших данных? В этом модуле вы узнаете, как использовать настройку гиперпараметров и автоматизированное машинное обучение, чтобы воспользоваться преимуществами облачных вычислений и найти лучшую модель для ваших данных.
-  #### Уроки
-  - настройка гиперпараметра
-  - Автоматизированное машинное обучение
-  
-  #### Лабораторная работа&#58; настройка гиперпараметров
-  #### Лабораторная работа&#58; использование автоматизированного машинного обучения
-  - После завершения этого модуля вы сможете
-  - Оптимизируйте гиперпараметры для модельного обучения
-  - Используйте автоматическое машинное обучение, чтобы найти оптимальную модель для ваших данных
-  
-  ### Модуль 9&#58; Интерпретация моделей
-  Многие решения, принимаемые сегодня организациями и автоматизированными системами, основаны на прогнозах, сделанных моделями машинного обучения. Все более важно уметь понимать факторы, которые влияют на прогнозы, сделанные моделью, и уметь определять любые непреднамеренные искажения в поведении модели. Этот модуль описывает, как вы можете интерпретировать модели, чтобы объяснить, как важность функций определяет их прогнозы.
-  #### Уроки
-  - Введение в интерпретацию модели
-  - Использование Разъяснителя моделей
-  
-  #### Лабораторная работа&#58; обзор толкований автоматического машинного обучения
-  #### Лабораторная работа&#58; интерпретация моделей
-  - После завершения этого модуля вы сможете
-  - Сгенерируйте толкование модели с помощью автоматического машинного обучения
-  - Используйте Разъяснитель (Explainer) для интерпретации моделей машинного обучения.
-  
-  ### Модуль 10&#58; Мониторинг моделей
-  После того, как модель была развернута, важно понять, как эта модель используется в производстве, и обнаружить любое снижение ее эффективности из-за отклонения данных. Этот модуль описывает методы мониторинга моделей и их данных.
-  #### Уроки
-  - Мониторинг моделей  с применением Идей приложения (Application Insights)
-  - Мониторинг отклонения Данных
-  
-  #### Лабораторная работа&#58; мониторинг модели с помощью Идей приложения
-  #### Лабораторная работа&#58; мониторинг отклонения данных
-  - После завершения этого модуля вы сможете
-  - Используйте Application Insights для мониторинга опубликованной модели
-  - Проведите мониторинг отклонения данных
+  - Управление и контроль моделей машинного обучения
+
