--- a/learn-certs-pr/courses/dp-200t01.yml
+++ b/learn-certs-pr/courses/dp-200t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
 title: Implementing an Azure Data Solution
 metadata:
-  title: 'Курс DP-200T01-A: Внедрение решения для данных Azure'
-  description: 'Курс DP-200T01-A: Внедрение решения для данных Azure'
+  title: 'Course DP-200T01-A: Implementing an Azure Data Solution'
+  description: 'Course DP-200T01-A: Implementing an Azure Data Solution'
 uid: course.dp-200t01
 courseNumber: 'DP-200T01-A'
 hoursToComplete: 72
@@ -36,8 +36,8 @@ summary: |-
   #### Профиль аудитории
   Основная аудитория этого курса - специалисты по данным, архитекторы данных и специалисты по бизнес-аналитике, которые хотят узнать о технологиях платформы данных, существующих в Microsoft Azure. Вторичной аудиторией этого курса являются люди, разрабатывающие приложения, которые доставляют контент из технологий платформы данных, существующих в Microsoft Azure.
 prerequisitesSection: |-
-  В дополнение к имеющемуся профессиональному опыту, слушатели данного курса должны обладать техническими знаниями, эквивалентными следующим курсам&#58; 
-  - [Azure Fundamentals](https://docs.microsoft.com/learn/modules/welcome-to-azure/)
+  В дополнение к имеющемуся профессиональному опыту, слушатели данного курса должны обладать техническими знаниями, эквивалентными следующим курсам&#58;
+  - [Azure Fundamentals](https://docs.microsoft.com/en-us/learn/modules/welcome-to-azure/)
 outlineSection: |-
   ### Модуль 1&#58; Azure для инженера данных
   Этот модуль посвящен изучению развития мира данных и тому, как технологии облачных платформ данных предоставляют предприятиям новые возможности для исследования своих данных различными способами. Слушателям будет представлен обзор различных доступных технологий платформ данных и того, как изменились роль и обязанности инженера данных в современных организациях.
@@ -54,7 +54,7 @@ outlineSection: |-
   - Определение задач, которые должен выполнять инженер данных
   - Завершение работы с данными инженерии
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснять развивающийся мир данных
   - Проводить обзор служб платформы данных Azure
   - Определять задачи, которые выполняет инженер данных
@@ -76,7 +76,7 @@ outlineSection: |-
   - Объяснение Azure Data Lake
   - Загрузка данных в Data Lake Store
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Выбор метода хранения данных в Azure
   - Создавать учетную запись в хранилище Azure
   - Объяснять хранилище Azure Data Lake 
@@ -98,7 +98,7 @@ outlineSection: |-
   - Чтение данных в Azure Databricks
   - Выполнение трансформаций в Azure Databricks
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Обзор Azure Databricks
   - Работа с Azure Databricks
   - Чтение данных в Azure Databricks
@@ -120,7 +120,7 @@ outlineSection: |-
   - Создание .Net Core приложения в VS Code для Azure Cosmos DB
   - Глобальное распределение данных в Azure Cosmos DB
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создание масштабируемой базы данных в Azure Cosmos DB
   - Вставка и запрос данных в базу данных Azure Cosmos DB
   - Создание .Net Core приложения в Visual Studio Code для Azure Cosmos DB
@@ -142,7 +142,7 @@ outlineSection: |-
   - Создание и запрос данных в облачном хранилище данных Azure SQL Data Warehouse
   - Использование PolyBase для загрузки данных в облачное хранилище данных Azure SQL Data Warehouse
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Использование базы данных Azure SQL
   - Описывать облачное хранилище данных Azure SQL Data Warehouse
   - Создавать и запрашивать данные из облачного хранилища данных Azure SQL Data Warehouse
@@ -162,7 +162,7 @@ outlineSection: |-
   - Прием данных с помощью Event Hubs
   - Обработка данных в задании Stream Analytics
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить потоки данных и обработку событий
   - Понимать прием данных с помощью Event Hubs
   - Понимать обработку данных в заданиях Stream Analytics
@@ -181,7 +181,7 @@ outlineSection: |-
   - Компоненты фабрики данных Azure Data Factory
   - Фабрика данных Azure Data Factory и блоки данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать фабрику данных Azure Data Factory и блоки данных
   - Понимать компоненты фабрик данных Azure Data Factory
   - Смогут объяснить работу фабрики данных Azure Data Factory
@@ -204,7 +204,7 @@ outlineSection: |-
   - Обеспечение безопасности хранилищ данных
   - Обеспечение безопасности потоковых данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Иметь представление о безопасности 
   - Понимать ключевые компоненты безопасности
   - Понимать процесс обеспечения безопасности учетных записей в хранилище и хранилища Data Lake
@@ -227,8 +227,9 @@ outlineSection: |-
   - Решение общих проблем обработки данных
   - Управление аварийным восстановлением
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Исследование доступных возможностей мониторинга
   - Решение общих проблем хранения данных
   - Решение общих проблем обработки данных
   - Управление аварийным восстановлением
+
