--- a/learn-certs-pr/courses/dp-201t01.yml
+++ b/learn-certs-pr/courses/dp-201t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
 title: Designing an Azure Data Solution
 metadata:
-  title: 'Курс DP-201T01-A: Проектирование решения Azure Data Solution'
-  description: 'Курс DP-201T01-A: Проектирование решения Azure Data Solution'
+  title: 'Course DP-201T01-A: Designing an Azure Data Solution'
+  description: 'Course DP-201T01-A: Designing an Azure Data Solution'
 uid: course.dp-201t01
 courseNumber: 'DP-201T01-A'
 hoursToComplete: 48
@@ -30,12 +30,12 @@ exams:
 - uid: exam.dp-201
 summary: |-
   Данный курс предлагает слушателям знания и навыки, необходимые для проектирования различных технологий платформы данных в решениях, соответствующих бизнесу и техническим требованиям. Включает в себя сценарии для локальных, облачных и гибридных решений, которые включают реляционные данные, данные NoSQL или хранилища данных. Слушатели также научатся разрабатывать архитектуры процессов с использованием целого ряда технологий как для потоковых, так и для пакетных данных. Слушатели также изучат способы разработки безопасности данных, включая доступ к данным, политики и стандарты в области данных. Они также разработают решения Azure для обработки данных, которые включают оптимизацию, доступность и аварийное восстановление больших данных, пакетную обработку и потоковую передачу данных.
-
+  
   #### Профиль аудитории
   Аудитория этого курса - специалисты по данным, архитекторы данных и специалисты по бизнес-аналитике, которые хотят узнать о технологиях платформы данных, существующих в Microsoft Azure. Вторичной аудиторией этого курса являются люди, разрабатывающие приложения, которые доставляют контент из технологий платформы данных, существующих в Microsoft Azure.
 prerequisitesSection: |-
-  В дополнение к имеющемуся профессиональному опыту, слушатели данного курса должны обладать техническими знаниями, эквивалентными следующим курсам&#58; 
-  - [Azure Fundamentals](https://docs.microsoft.com/learn/modules/welcome-to-azure/)
+  В дополнение к имеющемуся профессиональному опыту, слушатели данного курса должны обладать техническими знаниями, эквивалентными следующим курсам&#58;
+  - [Azure Fundamentals](https://docs.microsoft.com/en-us/learn/modules/welcome-to-azure/)
   - DP-200&#58; Внедрение решения для данных Azure Data Solution
 outlineSection: |-
   ### Модуль 1&#58; Особенности архитектуры платформы данных
@@ -55,7 +55,7 @@ outlineSection: |-
   - Разработка доступности и отказоустойчивости
   - Разработка эффективности и операций
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разработка с учетом требований безопасности
   - Учет производительности и масштабируемости
   - Разработка доступности и отказоустойчивости
@@ -76,7 +76,7 @@ outlineSection: |-
   - Автоматизация корпоративного BI решения в Azure
   - Автоматизация корпоративного BI решения в Azure
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Понимать основные принципы создания архитектуры
   - Описывать лямбду архитектуры из перспективы пакетного режима
   - Разработка корпоративного BI решения в Azure
@@ -99,7 +99,7 @@ outlineSection: |-
   - Разработка конвейера потоковой обработки в Azure Databricks
   - Создание эталонной архитектуры Azure IoT
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описывать лямбда-архитектуру для перспективы в режиме реального времени
   - Проектирование конвейера потоковой обработки в Azure Stream Analytics
   - Разработка конвейера потоковой обработки в Azure Databricks
@@ -121,7 +121,7 @@ outlineSection: |-
   - Защита в подходе Depth Security
   - Защита идентификаторов
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Защита в подходе Depth Security
   - Управление идентификаторами
   - Защита инфраструктуры
@@ -148,7 +148,7 @@ outlineSection: |-
   - Разработка решений высокой доступности
   - Включение аварийного восстановления в архитектуру
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Корректировка объема нагрузки для масштабируемости
   - Оптимизация производительности сети
   - Разработка оптимизации хранилища и производительности базы данных
@@ -171,7 +171,8 @@ outlineSection: |-
   - Использование мониторинга и аналитики для получения оперативной информации
   - Использование автоматизации для уменьшения усилий и ошибок
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Обеспечение максимальной эффективность облачной среды
   - Использование мониторинга и аналитики для получения оперативной информации
   - Использование автоматизации для уменьшения усилий и ошибок
+
