--- a/learn-certs-pr/courses/mb-200t01.yml
+++ b/learn-certs-pr/courses/mb-200t01.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: 'Dynamics 365: Приложения Power Platform'
+title: 'Dynamics 365: Power Platform applications'
 metadata:
-  title: 'Курс MB-200T01-A: Dynamics 365: Приложения Power Platform'
-  description: 'Курс MB-200T01-A: Dynamics 365: Приложения Power Platform'
+  title: 'Course MB-200T01-A: Dynamics 365: Power Platform applications'
+  description: 'Course MB-200T01-A: Dynamics 365: Power Platform applications'
 uid: course.mb-200t01
 courseNumber: 'MB-200T01-A'
 hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Определение компонентов платформы
-- skill: Понимание параметров администратора
-- skill: Эффективное моделирование данных
-- skill: Создание приложения на основе базовой модели на Power Platform
-- skill: Создание базового приложения Canvas на платформе Power
-- skill: Управление доступом пользователей к данным и функциям с помощью средств безопасности
+- skill: Определение компонентов платформы.
+- skill: Понимание средств администратора.
+- skill: Эффективное моделирование данных.
+- skill: Создание приложения на основе базовой модели на Power Platform.
+- skill: Создание базового приложения Canvas на платформе Power.
+- skill: Управление доступом пользователей к данным и функциям с помощью средств безопасности.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -40,7 +40,7 @@ prerequisitesSection: |-
   Этот курс предназначен для лиц, которые претендуют на роль администратора Microsoft 365 Enterprise и прошли один из путей сертификации администратора рабочей нагрузки Microsoft 365.
 outlineSection: |-
   ### Модуль 1&#58; Обзор платформы
-  В этом модуле студенты изучат основы Power Platform.  Они узнают о различных порталах и параметрах администратора, а также установят приложения.
+  В этом модуле студенты изучат основы Power Platform.  Они пройдут по различным порталам и опциям администратора, а также установят приложения.
   #### Уроки
   - Обзор
   - Настройка сред Power Platform
@@ -48,7 +48,7 @@ outlineSection: |-
   - Открытие и планирование
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Определять общие компоненты платформы и их использование
 
 
@@ -62,36 +62,36 @@ outlineSection: |-
   - Интернационализация
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать отношения и объекты
 
 
   ### Модуль 3&#58; Модельно-ориентированных приложения
   В этом модуле студенты узнают о модельно-ориентированных приложениях и о том, как их настраивать и использовать.
   #### Уроки
-  - Настройка приложений, управляемых моделями 
-  - Настройка форм, управляемых моделями 
+  - Настройка модельно-ориентированных приложений
+  - Настройка модельно-ориентированных форм
   - Настройка представлений
-  - Настройка диаграмм, управляемых моделями 
-  - Настройка информационных панелей, управляемых моделями 
+  - Настройка модельно-ориентированных диаграмм
+  - Настройка модельно-ориентированных панелей
   - Настройка отчетов
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и изменять формы, представления, информационные панели и другие компоненты взаимодействия с пользователем.
 
 
   ### Модуль 4&#58; Приложения Canvas
-  В этом модуле студенты узнают, как создавать и использовать приложения canvas, а также узнают о различиях между приложениями canvas и приложениями, управляемыми моделями.
+  В этом модуле студенты узнают, как создавать и использовать приложения canvas, а также узнают о различиях между приложениями canvas и приложениями на основе моделей.
   #### Уроки
   - Основы применения
   - Работа с данными и сервисами
   - Настройка взаимодействия с пользователем
-  - Интеграция с приложениями, управляемыми моделями 
+  - Интеграция с модельно-ориентированными приложениями
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать приложение canvas 
+  После завершения этого модуля студенты получат следующее&#58;
+  - Создать приложение canvas 
   - Работать с данными CDS
 
 
@@ -105,6 +105,7 @@ outlineSection: |-
   - Настройка иерархии безопасности 
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать и использовать бизнес-единицы (Business Units)
+  После завершения этого модуля студенты получат следующее&#58;
+  - Создание и использование бизнес-единиц (Business Units)
   - Создавать, изменять и использовать роли безопасности (Security Roles)
+
