--- a/learn-certs-pr/courses/mb-200t02.yml
+++ b/learn-certs-pr/courses/mb-200t02.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: 'Dynamics 365: Автоматизация Power Platform'
+title: 'Dynamics 365: Power Platform automation'
 metadata:
-  title: 'Курс MB-200T02-A: Dynamics 365: Автоматизация Power Platform'
-  description: 'Курс MB-200T02-A: Dynamics 365: Автоматизация Power Platform'
+  title: 'Course MB-200T02-A: Dynamics 365: Power Platform automation'
+  description: 'Course MB-200T02-A: Dynamics 365: Power Platform automation'
 uid: course.mb-200t02
 courseNumber: 'MB-200T02-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Определение вариантов автоматизации, доступных в Power Platform
-- skill: Определение типов автоматизации и сценариев их использования
-- skill: Создание и использование бизнес-правил
-- skill: Создание и использование рабочих процессов
-- skill: Создание и использование Microsoft Flows
-- skill: Создание и использование потоков бизнес-процессов
+- skill: Определять варианты автоматизации, доступные в Power Platform.
+- skill: Определять, когда какую автоматизацию  использовать.
+- skill: Создавать и использовать бизнес-правила.
+- skill: Создавать и использовать рабочие процессы.
+- skill: Создавать и использовать Microsoft Flows.
+- skill: Создавать и использовать потоки бизнес-процессов.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -45,8 +45,8 @@ outlineSection: |-
   - Обзор средств автоматизации платформы
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Определить общие средства автоматизации платформы и их использование
+  После завершения этого модуля студенты получат следующее&#58;
+  - Определить общие средства  автоматизации платформы и их использование
 
 
   ### Модуль 2&#58; Бизнес-правила
@@ -56,7 +56,7 @@ outlineSection: |-
   - Дополнительные детали бизнес-правил
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать бизнес-правила
 
 
@@ -68,7 +68,7 @@ outlineSection: |-
   - Расширенный рабочий процесс
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать рабочие процессы
 
 
@@ -83,7 +83,7 @@ outlineSection: |-
   - Вопросы развертывания потока
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать потоки Microsoft Flow
 
 
@@ -95,5 +95,6 @@ outlineSection: |-
   - Дополнительные детали потоков бизнес-процессов
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать потоки бизнес-процессов
+
