--- a/learn-certs-pr/courses/mb-200t03.yml
+++ b/learn-certs-pr/courses/mb-200t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: 'Dynamics 365: Интеграция Power Platform'
+title: 'Dynamics 365: Power Platform integrations'
 metadata:
-  title: 'Курс MB-200T03-A: Dynamics 365: Интеграция Power Platform'
-  description: 'Курс MB-200T03-A: Dynamics 365: Интеграция Power Platform'
+  title: 'Course MB-200T03-A: Dynamics 365: Power Platform integrations'
+  description: 'Course MB-200T03-A: Dynamics 365: Power Platform integrations'
 uid: course.mb-200t03
 courseNumber: 'MB-200T03-A'
 hoursToComplete: 24
@@ -12,7 +12,7 @@ skillsGained:
 - skill: Настройка и использование интегрированной электронной почты.
 - skill: Настройка и использование интеграции с Outlook.
 - skill: Настройка и использование дополнительных интеграции Office.
-- skill: Импорт и экспорт данных.
+- skill: Импорт и экспорт данных
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -31,7 +31,7 @@ exams:
 summary: |-
   Платформа Microsoft Power Platform помогает организациям оптимизировать свои операции, автоматизируя рутинные задачи и стандартизируя лучшие практики. В этом тренинге представлен общий обзор возможностей Microsoft Dynamics 365 и Power Platform, а также заложена основа для других предложений по обучению Microsoft Dynamics 365 и Power Platform.
 
-  В этом курсе наши всемирно признанные эксперты проведут студентов через различные доступные варианты интеграции и способы их использования в реальных сценариях.
+  В этом курсе наши признанные во всем мире эксперты рассказывают студентам о различных доступных вариантах автоматизации и о том, как их использовать в реальных сценариях.
 
   #### Профиль аудитории
   Функциональный консультант по взаимодействию с клиентами Dynamics 365 отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
@@ -45,8 +45,8 @@ outlineSection: |-
   - Интеграция с электронной почтой
   - Интеграция с Outlook
   - Краткое содержание модуля
-
-  После завершения этого модуля студенты смогут&#58;
+  
+  После завершения этого модуля студенты получат следующее&#58;
   - Определять общие интеграции
   - Настраивать и использовать интеграции электронной почты
 
@@ -56,11 +56,11 @@ outlineSection: |-
   #### Уроки
   - Шаблоны
   - SharePoint
-  - Команды Microsoft
+  - Microsoft Teams
   - Дополнительные интеграции
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать и использовать интеграции с продуктами Office
 
 
@@ -74,7 +74,8 @@ outlineSection: |-
   - Массовое удаление
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Импортировать и экспортировать данные
   - Создавать и использовать карты данных
   - Выполнять массовое удаление
+
