--- a/learn-certs-pr/courses/mb-200t04.yml
+++ b/learn-certs-pr/courses/mb-200t04.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: 'Dynamics 365: Тестирование и развертывание Power Platform'
+title: 'Dynamics 365: Power Platform test and deploy'
 metadata:
-  title: 'Курс MB-200T04-A: Dynamics 365: Тестирование и развертывание Power Platform'
-  description: 'Курс MB-200T04-A: Dynamics 365: Тестирование и развертывание Power Platform'
+  title: 'Course MB-200T04-A: Dynamics 365: Power Platform test and deploy'
+  description: 'Course MB-200T04-A: Dynamics 365: Power Platform test and deploy'
 uid: course.mb-200t04
 courseNumber: 'MB-200T04-A'
 hoursToComplete: 24
@@ -31,7 +31,7 @@ exams:
 summary: |-
   Платформа Microsoft Power Platform помогает организациям оптимизировать свои операции, автоматизируя рутинные задачи и стандартизируя лучшие практики. В этом тренинге представлен общий обзор возможностей Microsoft Dynamics 365 и Power Platform, а также заложена основа для других предложений по обучению Microsoft Dynamics 365 и Power Platform.
 
-  В этом курсе наши всемирно признанные эксперты помогут студентам в управлении решениями и их развертывании.
+  В этом курсе наши признанные во всем мире эксперты рассказывают студентам о различных доступных вариантах автоматизации и о том, как их использовать в реальных сценариях.
 
   #### Профиль аудитории
   Функциональный консультант по взаимодействию с клиентами Dynamics 365 отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
@@ -45,7 +45,7 @@ outlineSection: |-
   - Управление приложениями
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Включать и обновлять сторонние приложения
   - Устанавливать сторонние приложения
 
@@ -60,7 +60,7 @@ outlineSection: |-
   - Работа с управляемыми решениями
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать, управлять и развертывать настройки с помощью решений.
 
 
@@ -72,7 +72,7 @@ outlineSection: |-
   - Мобильная конфигурация
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать для мобильных устройств
   - Развертывать компоненты
 
@@ -87,6 +87,7 @@ outlineSection: |-
   - Взаимодействие с заказчиком
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать планы тестирования
   - Определять инструменты настройки производительности
+
