--- a/learn-certs-pr/courses/mb-210t01.yml
+++ b/learn-certs-pr/courses/mb-210t01.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Course
-title: Dynamics 365 для привлечения клиентов для продаж
+title: Microsoft Dynamics 365 Sales
 metadata:
-  title: 'Курс MB-210T01-A: Dynamics 365 для вовлечения клиентов в продажи'
-  description: 'Курс MB-210T01-A: Dynamics 365 для вовлечения клиентов в продажи'
+  title: 'Course MB-210T01: Microsoft Dynamics 365 Sales'
+  description: 'Course MB-210T01: Microsoft Dynamics 365 Sales'
 uid: course.mb-210t01
-courseNumber: 'MB-210T01-A'
+courseNumber: 'MB-210T01'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
@@ -13,7 +13,7 @@ skillsGained:
 - skill: Завершение цикла продаж
 - skill: Настройка каталога продукции
 - skill: Управление записями клиентов
-- skill: Обработка клиентских данных аналитическими инструментами
+- skill: Обработка клиентских данных  аналитическими инструментами
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -43,7 +43,7 @@ outlineSection: |-
   - Настройка продаж
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Устанавливать и настраивать приложение для продаж
   - Определять общие сценарии продаж
 
@@ -58,7 +58,7 @@ outlineSection: |-
   - Интегрированные инструменты продаж
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать записи клиентов
   - Использовать инструменты продаж
 
@@ -72,7 +72,7 @@ outlineSection: |-
   - Создание и управление заказами и счетами
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создать и использовать каталог продукции
   - Добавлять цитаты к возможностям
   - Завершить процесс продажи сделкой
@@ -86,7 +86,8 @@ outlineSection: |-
   - Искусственный интеллект для продаж
   - Сводка модулей
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать цели
   - Интегрировать с PowerBI
   - Включать функции продаж искусственного интеллекта
+
