--- a/learn-certs-pr/courses/mb-220t01.yml
+++ b/learn-certs-pr/courses/mb-220t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка параметров и основных функций маркетинга Dynamics 365
+title: Configure settings and core functionality in Dynamics 365 for Marketing
 metadata:
-  title: 'Курс MB-220T01-A: Настройка параметров и основных функций маркетинга Dynamics 365'
-  description: 'Курс MB-220T01-A: Настройка параметров и основных функций маркетинга Dynamics 365'
+  title: 'Course MB-220T01-A: Configure settings and core functionality in Dynamics 365 for Marketing'
+  description: 'Course MB-220T01-A: Configure settings and core functionality in Dynamics 365 for Marketing'
 uid: course.mb-220t01
 courseNumber: 'MB-220T01-A'
 hoursToComplete: 72
@@ -11,10 +11,10 @@ skillsGained:
 - skill: Конфигурация расширенных настроек
 - skill: Управление маркетинговым контентом, шаблонами и интеграциями
 - skill: Создание лидов (потенциальных клиентов) и управление ими
-- skill: Оценка готовности продаж с помощью моделей оценки потенциальных клиентов
-- skill: Проектирование и создание маркетинговых форм и страниц
+- skill: Оценка готовности продаж с помощью моделей оценки потенциальных клиентов.
+- skill: Дизайн и создание маркетинговых форм и страниц
 - skill: Создание и управление сегментами, центрами подписки, списками и двойной подпиской
-- skill: Проектирование и создание сообщений электронной почты
+- skill: Дизайн и создание сообщений электронной почты
 - skill: Настройка и запуск прогулок клиентов
 - skill: Просмотр, понимание и управление мнениями клиентов
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
@@ -32,7 +32,7 @@ exams:
 summary: |-
   Здесь начинаются маркетинговая трансформация, организация и рост. Благодаря Dynamics 365 для маркетинга перспективы могут превратиться в деловые отношения. Найдите и вырастите больше горячих лидов, выйдя за рамки базового маркетинга по электронной почте. Объединяйте продажи и маркетинг, автоматизируйте процессы и принимайте более разумные решения для максимизации рентабельности маркетинга.
 
-  В этом курсе рассматриваются настройки маркетингового приложения, необходимые для начала работы. Он погружает в создание лида, управление лидом и оценку лида. В этом аспекте курс охватывает создание маркетинговых форм и страниц. Затем студенты узнают, как разделять лиды и контакты с помощью сегментации, чтобы сосредоточить маркетинговые усилия. Затем студенты узнают, как создавать маркетинговые сообщения электронной почты, используя расширенные функциональные возможности дизайнера. Затем все части связываются вместе с прогулкой клиента. Dynamics 365 for Marketing позволяет создавать модель для клиентских прогулок, которая помогает направлять участников выбранного маркетингового сегмента через этот процесс с помощью автоматического обмена сообщениями, генерации активности, интерактивных точек принятия решений и многого другого. Наконец, студенты узнают, как просматривать и понимать мнения клиентов и управлять ими.
+  В этом курсе рассматриваются настройки маркетингового приложения, необходимые для начала работы. Он погружает в создание лида, управление лидом и оценку лида. В этом аспекте курс охватывает создание маркетинговых форм и страниц. Затем студенты узнают, как разделять лиды и контакты с помощью сегментации, чтобы сосредоточить маркетинговые усилия. Затем студенты узнают, как создавать маркетинговые сообщения электронной почты, используя расширенные функциональные возможности дизайнера. Затем все части связываются вместе с прогулкой клиента. Dynamics 365 for Marketing позволяет  создавать модель для клиентских прогулок, которая помогает направлять участников выбранного маркетингового сегмента через этот процесс с помощью автоматического обмена сообщениями, генерации активности, интерактивных точек принятия решений и многого другого. Наконец, студенты узнают, как просматривать и понимать мнения клиентов и управлять ими.
 
   Изучите все параметры и основные функции Dynamics 365 for Marketing с помощью пользовательских демонстраций, ответьте на вопросы и выполните практические занятия.
 
@@ -48,8 +48,8 @@ outlineSection: |-
   - Конфигурация дополнительных параметров
   - Управление маркетинговым контентом и шаблонами
   - Управление интеграциями в LinkedIn и Power BI.
-
-  После завершения этого модуля студенты смогут&#58;
+  
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать дополнительные параметры, такие как&#58; организация, управление бизнесом, контент, маркетинг и настройки событий
   - Управление маркетинговым контентом и шаблонами  
 
@@ -60,7 +60,7 @@ outlineSection: |-
   - Создавать лидов и управлять ими
   - Оценка готовности к продажам
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать лидов и управлять ими 
   - Синхронизировать лидов из LinkedIn
   - Оценивать готовность к продажам с использованием моделей оценки потенциальных клиентов.
@@ -73,7 +73,7 @@ outlineSection: |-
   - Создание маркетинговых страниц
   - Управление интернет-маркетингом
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать маркетинговые формы и вставлять их на маркетинговые страницы
   - Создавать маркетинговые страницы
   - Предварительно просматривать, проверять и запускать маркетинговые страницы
@@ -82,7 +82,7 @@ outlineSection: |-
 
   ### Модуль 4&#58; Сегменты и списки
   В этом модуле рассказывается, как управлять сегментами, центрами подписки, списками и двойным согласием.
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настроить статические и динамические сегменты
   - Создать список подписки
   - Настроить страницу центра подписки
@@ -94,9 +94,9 @@ outlineSection: |-
   #### Уроки
   - Создание сообщений электронной почты
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и оформлять сообщения электронной почты
-  - Предварительно просматривать, проверять и отправлять сообщения электронной почты
+  -  Предварительно просматривать, проверять и отправлять сообщения электронной почты
   - Сохранять сообщение электронной почты в качестве шаблона
 
 
@@ -105,11 +105,11 @@ outlineSection: |-
   #### Уроки
   - Создание прогулок клиентов
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать путь клиента по шаблону
-  - Определять плитки действия и свойства пути клиента 
-  - Подтверждать и запускать путь клиента 
-  - Создавать путь клиента на основе учетных записей
+  После завершения этого модуля студенты получат следующее&#58;
+  - Создавать прогулки клиентов по шаблону
+  - Определять укладку и свойства прогулок клиентов
+  - Подтверждать и запускать прогулки клиентов
+  - Создавать прогулки клиентов на основе учетных записей
   - Понимать особенности календаря маркетинга
 
 
@@ -122,6 +122,7 @@ outlineSection: |-
   - Идеи управления лидами
   - Идеи интернет-маркетинга
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Находить идеи
-  Понимать такие маркетинговые идеи, как&#58; контакт, сегмент, прогулка клиента, маркетинговая электронная почта, лиды, оценка потенциальных клиентов, маркетинговая форма, маркетинговая страница, веб-сайт и URL-адреса перенаправления
+  Понимать такие маркетинговые идеи,  как&#58; контакт, сегмент, прогулка клиента, маркетинговая электронная почта, лиды, оценка потенциальных клиентов, маркетинговая форма, маркетинговая страница, веб-сайт и URL-адреса перенаправления
+
