--- a/learn-certs-pr/courses/mb-230t01.yml
+++ b/learn-certs-pr/courses/mb-230t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Dynamics 365 для привлечения клиентов к обслуживанию
+title: Dynamics 365 for customer engagement for customer service
 metadata:
-  title: 'Курс MB-230T01-A: Dynamics 365 для привлечения клиентов к обслуживанию'
-  description: 'Курс MB-230T01-A: Dynamics 365 для привлечения клиентов к обслуживанию'
+  title: 'Course MB-230T01-A: Dynamics 365 for customer engagement for customer service'
+  description: 'Course MB-230T01-A: Dynamics 365 for customer engagement for customer service'
 uid: course.mb-230t01
 courseNumber: 'MB-230T01-A'
 hoursToComplete: 24
@@ -13,7 +13,7 @@ skillsGained:
 - skill: Завершение процесс разрешения кейса
 - skill: Анализ данных обслуживания клиентов
 - skill: Автоматизация обработки записей управления кейсами
-- skill: Создание и использование статей базы знаний
+- skill: Создание и использование статей базы  знаний
 - skill: Создание и использование разрешений и соглашений об уровне обслуживания
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -28,7 +28,7 @@ products:
 exams:
 - uid: exam.mb-230
 summary: |-
-  Microsoft Dynamics 365 для обслуживания клиентов предлагает любой организации возможность достижения успеха в работе с клиентами. Использование таких инструментов, как автоматическое создание кейсов и управление очередями, высвобождает время для того, чтобы уделять больше внимания непосредственно клиентам.
+  Microsoft Dynamics 365 для обслуживания клиентов предлагает любой организации возможность  достижения успеха в работе с клиентами. Использование таких инструментов, как автоматическое создание кейсов и управление очередями, высвобождает время для того, чтобы уделять больше внимания непосредственно клиентам.
 
   Наша команда всемирно признанных экспертов проводит студентов шаг за шагом, от создания кейсов, до взаимодействия с клиентами и решения этих кейсов. Как только эти кейсы будут решены, учащиеся изучат ключевые детали на основе анализа данных, чтобы быстрее решить подобные кейсы или вообще избежать новых проблем.
 
@@ -46,8 +46,8 @@ outlineSection: |-
   - Урок 4&#58; ИИ для сервиса
   - Урок 5&#58; Настройка обслуживания клиентов
   - Урок 6&#58; Краткое содержание модуля
-
-  После завершения этого модуля студенты смогут&#58;
+  
+  После завершения этого модуля студенты получат следующее&#58;
   - Установить и настроить приложение обслуживания клиентов
   - Определить общие сценарии обслуживания клиентов
 
@@ -62,8 +62,8 @@ outlineSection: |-
   - Урок 5&#58; Разрешение кейсов
   - Урок 6&#58; Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Открывать и разрешать кейсы обслуживания клиентов
+  После завершения этого модуля студенты получат следующее&#58;
+  - Открывать и разрешать кейсы  обслуживания клиентов
   - Автоматизировать создание кейсов и маршрутизацию
 
 
@@ -75,7 +75,7 @@ outlineSection: |-
   - Урок 3&#58; Создание и управление SLA
   - Урок 4&#58; Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать и использовать соглашения об уровне обслуживания
   - Создавать и использовать права
 
@@ -89,5 +89,6 @@ outlineSection: |-
   - Урок 4&#58; Управление контентом базы знаний
   - Урок 5&#58; Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать контент базы знаний и управлять им
+  После завершения этого модуля студенты получат следующее&#58;
+  - Создавать контент базы знаний и управлять им 
+
