--- a/learn-certs-pr/courses/mb-240t01.yml
+++ b/learn-certs-pr/courses/mb-240t01.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: Настройка полевого сервиса Dynamics 365 Field Service
+title: Configuring Dynamics 365 Field Service
 metadata:
-  title: 'Курс MB-240T01-A: Настройка Dynamics 365 Field Service'
-  description: 'Курс MB-240T01-A: Настройка Dynamics 365 Field Service'
+  title: 'Course MB-240T01-A: Configuring Dynamics 365 Field Service'
+  description: 'Course MB-240T01-A: Configuring Dynamics 365 Field Service'
 uid: course.mb-240t01
 courseNumber: 'MB-240T01-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Определение ключевых компонентов, участвующих в реализации услуг на местах
-- skill: Определение продуктов и услуг, которые будут доставлены клиентам
-- skill: Определение того, какие варианты ценообразования использовать в определенных сценариях
-- skill: Определение того, какие ресурсы требуются
-- skill: Настройка системы поддержки потребностей в ресурсах
-- skill: Определение часто сообщаемых проблем и их шаблонирование для более легкого решения
+- skill: Определение ключевых компонентов, участвующих в реализации услуг на местах.
+- skill: Определение продуктов и услуг, которые будут доставлены клиентам.
+- skill: Определение того, какие варианты ценообразования использовать в определенных сценариях.
+- skill: Определение того, какие ресурсы требуются.
+- skill: Настройка системы поддержки потребностей в ресурсах.
+- skill: Определение часто сообщаемых проблем и их шаблонирование для более легкого решения.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -27,10 +27,9 @@ products:
 exams:
 - uid: exam.mb-240
 summary: |-
-  Dynamics 365 for Field Service помогает организациям лучше позиционировать себя на рынке, предоставляя различные инструменты, которые помогают идентифицировать и планировать ресурсы и управлять рабочими нагрузками для мобильных сотрудников. Этот курс даст студентам навыки, необходимые для определения и настройки ключевых компонентов, которые используются для предоставления услуг на местах и ​​мобильных решений. Ключевые темы включают определение организационных соображений, которые будут определять решения о конфигурации и общие аспекты конфигурации. 
+  Dynamics 365 for Field Service помогает организациям лучше позиционировать себя на рынке, предоставляя различные инструменты, которые помогают идентифицировать и планировать ресурсы и управлять рабочими нагрузками для мобильных сотрудников. Этот курс даст студентам навыки, необходимые для определения и настройки ключевых компонентов, которые используются для предоставления услуг на местах и ​​мобильных решений. Ключевые темы включают определение организационных соображений, которые будут определять решения о конфигурации и её общие аспекты. 
 
   Этот курс помогает студентам лучше понять общую картину и конечные цели, сосредоточенные вокруг реализаций, которые помогают в разработке более эффективных решений, соответствующих целям заказчика и организации.
-
 prerequisitesSection: |-
   Базовое понимание особенностей, функций и навигации Dynamics 365.
 outlineSection: |-
@@ -59,3 +58,4 @@ outlineSection: |-
   - Создание инцидентов
   - Использование сервисных задач
   - Определение продуктов, услуг и навыков
+
