--- a/learn-certs-pr/courses/mb-240t02.yml
+++ b/learn-certs-pr/courses/mb-240t02.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Course
-title: Заказ на работу и выполнение поставки для Dynamics 365 for Field Service
+title: Work order and delivery execution for Dynamics 365 for Field Service
 metadata:
-  title: 'Курс MB-240T02-A: Заказ на работу и выполнение поставки для Dynamics 365 for Field Service'
-  description: 'Курс MB-240T02-A: Заказ на работу и выполнение поставки для Dynamics 365 for Field Service'
+  title: 'Course MB-240T02-A: Work order and delivery execution for Dynamics 365 for Field Service'
+  description: 'Course MB-240T02-A: Work order and delivery execution for Dynamics 365 for Field Service'
 uid: course.mb-240t02
 courseNumber: 'MB-240T02-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Определение ключевых областей, вовлеченных в жизненный цикл заказа на работу
-- skill: Создание соглашений, которые можно использовать для автоматического создания заказа на работу
-- skill: Использование возможности управления запасами в Dynamics 365 for Field Service
-- skill: Создание и работа с заказами на покупку в течение их жизненного цикла
-- skill: Развертывание и настройка мобильного приложения для обслуживания на местах
+- skill: Определение ключевых областей, вовлеченных в жизненный цикл рабочего заказа.
+- skill: Создание соглашений, которые можно использовать для автоматического создания рабочих заданий.
+- skill: Использование возможности управления запасами в Dynamics 365 для обслуживания на местах.
+- skill: Создание и работа с заказами на покупку в течение их жизненного цикла.
+- skill: Развертывание и настройка мобильного приложения для обслуживания на местах.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -31,7 +31,6 @@ summary: |-
   Этот курс даст студентам навыки, необходимые для выполнения, определения и настройки ключевых компонентов, которые используются для предоставления услуг на местах и ​​мобильных решений. Ключевые темы курса включают определение того, как выглядит типичный жизненный цикл рабочего задания, а также организационные соображения, которые будут определять решения о конфигурации. Кроме того, этот курс будет посвящен компонентам, которые обычно используются в отношении рабочих заданий, включая соглашения, компоненты запасов, стратегии закупок и мобильности.     
 
   Этот курс помогает студентам лучше понять общую картину и конечные цели, сосредоточенные вокруг доставки и выполнения заказов на работу, которые помогают разрабатывать более эффективные решения, соответствующие целям заказчика и организации.
-
 prerequisitesSection: |-
   Базовое понимание особенностей, функций и навигации Dynamics 365.
 outlineSection: |-
@@ -58,7 +57,8 @@ outlineSection: |-
 
   ### Модуль 4&#58; Мобильные приложения по обслуживанию на местах
   #### Уроки
-  - Обзор мобильных приложений по обслуживанию на местах
+  - Обзор мобильных приложений Field Service
   - Установка и развертывание мобильных проектов по обслуживанию на местах
   - Управление мобильными проектами
-  - Развертывание мобильного клиента
+  - Развертывание мобильного  клиента
+
