--- a/learn-certs-pr/courses/mb-300t01.yml
+++ b/learn-certs-pr/courses/mb-300t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Основные общие характеристики Dynamics 365 for Finance and Operations
+title: Core common features of Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-300T01-A: Основные общие характеристики Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-300T01-A: Основные общие характеристики Dynamics 365 for Finance and Operations'
+  title: 'Course MB-300T01-A: Core common features of Dynamics 365 for Finance and Operations'
+  description: 'Course MB-300T01-A: Core common features of Dynamics 365 for Finance and Operations'
 uid: course.mb-300t01
 courseNumber: 'MB-300T01-A'
 hoursToComplete: 24
@@ -21,17 +21,17 @@ products:
 exams:
 - uid: exam.mb-300
 summary: |-
-  Организации используют Dynamics 365 дfor Finance and Operations, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей. 
-
-  В этом курсе рассматриваются основные компоненты Microsoft Dynamics 365 for Finance and Operations.
-
+  Организации используют Dynamics 365 для финансов и операций, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей. 
+  
+  В этом курсе рассматриваются основные компоненты Microsoft Dynamics 365 для финансов и операций.
+  
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
-  ### Модуль 1&#58; Начало работы с Dynamics 365 for Finance and Operations
-  Этот модуль дает представление о том, что такое Dynamics 365 for Finance and Operations, и об отраслях, которые он поддерживает. В нем описываются модули в Финансах и операциях, назначение функций этих модулей и как они поддерживают отраслевые области.
+  ### Модуль 1&#58; Начало работы с Dynamics 365 для финансов и операций
+  Этот модуль дает представление о том, что такое Dynamics 365 для финансов и операций, и об отраслях, которые он поддерживает. В нем описываются модули в Финансах и операциях, назначение функций этих модулей и как они поддерживают отраслевые области.
   #### Уроки
   - Введение
   - Отраслевая направленность
@@ -40,31 +40,31 @@ outlineSection: |-
   - Введение в управление цепочками поставок
   - Краткое содержание модуля
 
-  Студенты будут иметь представление о том, что такое «Финансы и операции», и какие отрасли поддерживаются. Они будут знакомы с модулями Финансов и операций, а также с назначением функций в этих модулях и с тем, как они поддерживают отраслевые области.
+  Студенты будут иметь представление о том, что такое Финансы и операции, и какие отрасли поддерживаются. Они будут знакомы с модулями Финансов и операций, а также с назначением функций в этих модулях и с тем, как они поддерживают отраслевые области.
 
-  ### Модуль 2&#58; Начало работы с Lifecycle Services
-  Microsoft Dynamics Lifecycle Services (LCS) - это рабочее пространство для совместной работы, которое клиенты и их партнеры используют для управления проектов Dynamics 365 for Finance and Operations от предпродажного обслуживания до внедрения и, наконец, до производственного цикла, как в облаке, так и локально. Он предоставляет контрольные списки и инструменты, которые помогают управлять проектом, включая методологии, которые могут помочь в управлении процессом внедрения.
+  ### Модуль 2&#58; Начало работы с  Lifecycle Services
+  Microsoft Dynamics Lifecycle Services (LCS) - это рабочее пространство для совместной работы, которое клиенты и их партнеры используют для управления Dynamics 365 для проектов в области финансов и операций от предпродажного обслуживания до внедрения и, наконец, до производственного цикла, как в облаке, так и локально. Он предоставляет контрольные списки и инструменты, которые помогают управлять проектом, включая методологии, которые могут помочь в управлении процессом внедрения.
   #### Уроки
   - Понимание функций и инструментов Lifecycle Services
   - Повторное использование существующих активов, копирование и обмен данными
   - Понимание функций регистратора задач
-  - Создавать модели бизнес-процесса
-  - Запускать инструменты поиска проблем LCS и анализировать результаты
+  - Создание модели бизнес-процесса.
+  - Запуск инструмента поиска проблем LCS и анализ результатов
   - Использование инструмента автоматизации Regression Suite
   - Лабораторные практикумы
   - Краткое содержание модуля
 
   Студенты смогут&#58;
-  - Понимать функции и инструменты LCS for Finance and Operations
-  - Повторно использовать существующие активы, копировать и обмениваться данными
+  - Понимание функций и инструментов LCS для финансов и операций
+  - Повторное использование существующих активов, копирование и обмен данными
   - Понимание функций регистратора задач
-  - Создавать модели бизнес-процесса
-  - Выявлять и анализировать пробелы с помощью моделировщика бизнес-процессов (BPM)
-  - Запускать инструменты поиска проблем LCS и анализировать результаты
+  - Создание модели бизнес-процесса.
+  - Выявление и анализ пробелов с помощью моделировщика бизнес-процессов (BPM)
+  - Запуск инструмента поиска проблем LCS и анализ результатов
 
 
   ### Модуль 3&#58; Использование служб жизненного цикла для проектирования и планирования
-  При правильном планировании внедрение Dynamics 365 for Finance and Operations будет успешным. После того, как клиент подписывает соглашение о приобретении лицензий на «Финансы и операции», работа в качестве Функционального консультанта начинается с управления жизненным циклом этого приложения и перехода к его предсказуемому, воспроизводимому, высококачественному внедрению.
+  При правильном планировании внедрение Dynamics 365 для финансов и операций будет успешным. После того, как клиент подписывает соглашение о приобретении лицензий на Финансы и операции, работа в качестве Функционального консультанта начинается с управления жизненным циклом этого приложения и перехода к его предсказуемому, воспроизводимому, высококачественному внедрению.
   #### Уроки
   - Введение
   - Фазы облачного внедрения
@@ -78,18 +78,18 @@ outlineSection: |-
   - Участвовать в создании документов функциональных требований (FRD)
   - Понимать важность создания и поддержки документированных процессов
   - Участвовать в фазовых процессах планирования и разработки решений.
-  - Описывать будущее состояние бизнес-процессов на основе предложенного решения
-  - Делать выбор между приобретением и самостоятельной разработкой решения под конкретные нужды
+  - Описать будущее состояние бизнес-процессов на основе предложенного решения
+  - Определить, когда покупать, а когда делать самостоятельно
   - Создание функциональной проектной документации (FDD)
 
 
   ### Модуль 4&#58; Обзор отчетности и аналитики
-  Отчет в Dynamics 365 for Finance and Operations можно определить просто как структурированное представление данных.
+  Отчет в Dynamics 365 для финансов и операций можно определить просто как структурированное представление данных.
   В идеальных условиях отчеты материализуют данные таким образом, чтобы пользователь мог принимать обоснованные решения.
-  Приложение «Финансы и операции» поддерживает широкий спектр сценариев доступа к информации.
+  Приложение Финансы и Операции поддерживает широкий спектр сценариев доступа к информации.
   #### Уроки
   - Понимание отчетов и запросов
-  - Узнайте о Финансовая отчетность
+  - Финансовая отчетность
   - Настройка PowerBI для элемента
   - Лабораторные практикумы
   - Краткое содержание модуля
@@ -131,5 +131,6 @@ outlineSection: |-
   - Итоговая оценка
   - Краткое содержание курса
   - Опрос после курса
-
+  
   Студенты закончили курс
+
