--- a/learn-certs-pr/courses/mb-300t02.yml
+++ b/learn-certs-pr/courses/mb-300t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Базовая конфигурация в Dynamics 365 for Finance and Operations
+title: Core configuration in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-300T02-A: Базовая конфигурация в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-300T02-A: Базовая конфигурация в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-300T02-A: Core configuration in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-300T02-A: Core configuration in Dynamics 365 for Finance and Operations'
 uid: course.mb-300t02
 courseNumber: 'MB-300T02-A'
 hoursToComplete: 24
@@ -21,17 +21,17 @@ products:
 exams:
 - uid: exam.mb-300
 summary: |-
-  Организации используют Dynamics 365 дfor Finance and Operations, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей. 
+  Организации используют Dynamics 365 для финансов и операций, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей. 
 
-  В этом курсе обсуждается, как настроить основные компоненты Microsoft Dynamics 365 for Finance and Operations.
-
+  В этом курсе обсуждается, как настроить основные компоненты Microsoft Dynamics 365 для финансов и операций.
+  
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
   ### Модуль 1&#58; Настройка и конфигурация юридических лиц
-  В этом модуле объясняется настройка и конфигурация юридических лиц и последовательности номеров в Dynamics 365 for Finance and Operations.
+  В этом модуле объясняется настройка и конфигурация юридических лиц и последовательности номеров в Dynamics 365 для финансов и операций.
   #### Уроки
   - Создание юридических лиц и генерация числовых последовательностей
   - Создание последовательности номеров
@@ -40,12 +40,12 @@ outlineSection: |-
   - Настройка календарей и интервалов дат
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
+
 
   Студенты научились создавать юридическое лицо и генерировать числовые последовательности вручную или с помощью мастера. Студенты также настроили календари и интервалы дат. Кроме того, они узнали, как создавать организационные иерархии, применять цели и настраивать политики для оптимизации бизнес-политик и структур отчетности.
 
   ### Модуль 2&#58; Управление пользователями и безопасностью
-  Microsoft Dynamics 365 for Finance and Operations имеет множество параметров безопасности и конфигурации, которые помогают сохранять конфиденциальные данные в безопасности. Все это означает, что пользователи могут оставаться сосредоточенными на своих ролях, в то время как система остается максимально упорядоченной.
+  Microsoft Dynamics 365 для финансов и операций имеет множество параметров безопасности и конфигурации, которые помогают сохранять конфиденциальные данные в безопасности. Все это означает, что пользователи могут оставаться сосредоточенными на своих ролях, в то время как система остается максимально упорядоченной.
   Знание того, как реализовать различные параметры безопасности, поможет компаниям покрыть их требования безопасности. Когда архитектура безопасности финансов и операций понятна, можно намного легче настроить безопасность в соответствии с требованиями бизнеса.
   #### Уроки
   - Понимание архитектуры безопасности
@@ -55,7 +55,7 @@ outlineSection: |-
   - Настройка пакетных заданий и оповещений
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
+
 
   В этом модуле студенты получат понимание следующего&#58;
   - Архитектура безопасности финансов и операций
@@ -73,12 +73,12 @@ outlineSection: |-
   - Создание и поддержка шаблонов записей
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  Теперь студенты узнали, как использовать и применять пользовательские параметры, создавать персонализацию и экспортировать ее для использования другими пользователями с помощью функции персонализации раздела «Финансы и операции». Они также узнали разницу между настройкой и персонализацией. В частности, как персонализация помогает сэкономить время на персонализацию часто используемых значений полей и позволяет создавать и поддерживать шаблоны записей.
+
+  Теперь студенты узнали, как использовать и применять пользовательские параметры, создавать персонализацию и экспортировать ее для использования другими пользователями с помощью функции персонализации раздела «Финансы и операции». Они также узнали разницу между настройкой и персонализацией. In particular, how personalization helps save time personalizing often-used field values and allows for creation and maintenance of record templates.
 
   ### Модуль 4&#58; Реализация общих функций интеграции
-  Microsoft Dynamics 365 интегрируется со многими другими распространенными программами: например, электронная почта, Microsoft Office и Power BI.
+  Microsoft Dynamics 365 интегрируется со многими другими распространенными программами&#58; например, электронная почта, Microsoft Office и Power BI.
   #### Уроки
   - Интеграция с Microsoft Office
   - Настройка электронной почты
@@ -88,9 +88,9 @@ outlineSection: |-
   - Интеграция данных в службы общих данных Common Data Services для приложений
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  В этом модуле студенты узнают, как в Dynamics 365 for Finance and Operations использовать интеграцию Microsoft Office, настраивать электронную почту (SMTP/Exchange), а также создавать и поддерживать шаблоны электронной почты для стандартизации сообщений при отправке электронных писем клиентам. Корпоративные сетевые принтеры можно использовать удаленно, настраивая функции сетевой печати. Наконец, этот модуль предоставил обзор того, как интегрировать данные из нескольких источников в Common Data Service для приложений и интегрировать данные в Dynamics 365 for Finance and Operations с помощью рабочей области «Управление данными».
+
+  В этом модуле студенты узнают, как  в Dynamics 365 для финансов и операций использовать интеграцию Microsoft Office, настраивать электронную почту (SMTP/Exchange), а также создавать и поддерживать шаблоны электронной почты для стандартизации сообщений при отправке электронных писем клиентам. Корпоративные сетевые принтеры можно использовать удаленно, настраивая функции сетевой печати. Наконец, этот модуль предоставил обзор того, как интегрировать данные из нескольких источников в Common Data Service для приложений и интегрировать данные в Dynamics 365 для финансов и операций с помощью рабочей области «Управление данными».
 
   ### Модуль 5&#58; Завершение курса
   Итоговая оценка и краткое изложение курса, а также опрос по окончании курса.
@@ -98,6 +98,7 @@ outlineSection: |-
   - Итоговая оценка
   - Краткое содержание курса
   - Опрос после курса
-  
+
 
   Студенты закончили курс.
+
