--- a/learn-certs-pr/courses/mb-310t01.yml
+++ b/learn-certs-pr/courses/mb-310t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование основных компонентов финансового управления в Dynamics 365 for Finance and Operations
+title: Configure and use essential components of financial management in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-310T01-A: Настройка и использование основных компонентов финансового управления в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-310T01-A: Настройка и использование основных компонентов финансового управления в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-310T01-A: Configure and use essential components of financial management in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-310T01-A: Configure and use essential components of financial management in Dynamics 365 for Finance and Operations'
 uid: course.mb-310t01
 courseNumber: 'MB-310T01-A'
 hoursToComplete: 48
@@ -20,29 +20,29 @@ products:
 exams:
 - uid: exam.mb-310
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы поднять свои финансовые показатели за счет повышения прибыльности, оптимизации производительности рабочей силы, сокращения операционных расходов, быстрой адаптации к изменениям требований и оптимизации управления активами.
+  Организации используют Dynamics 365 для финансов и операций, чтобы поднять свои финансовые показатели за счет повышения прибыльности, оптимизации производительности рабочей силы, сокращения операционных расходов, быстрой адаптации к изменениям требований и оптимизации управления активами.
 
-  В этом курсе обсуждается, как настроить и использовать основные компоненты финансового управления в Dynamics 365 for Finance and Operations.
+  В этом курсе обсуждается, как настроить и использовать основные компоненты финансового управления в Dynamics 365 для финансов и операций.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
   ### Модуль 1&#58; Финансовый менеджмент
-  В этом модуле студенты узнают о некоторых преимуществах финансового управления Dynamics 365 for Finance and Operations.
+  В этом модуле студенты узнают о некоторых преимуществах финансового управления Dynamics 365 для финансов и операций.
   #### Уроки
   - Преимущества финансового менеджмента
   - Финансовый менеджмент
   - Краткое содержание модуля
-
-  Студенты познакомились с модулями в "Финансы и Операци", связанными с управлением финансами, а также с их общими особенностями и функциями.
+  
+  Студенты познакомились с модулями в области финансов и операций, связанных с управлением финансами, а также с их общими особенностями и функциями.
 
   ### Модуль 2&#58; Настройка валют
-  Одним из первых и наиболее важных этапов внедрения финансового менеджмента в Dynamics 365 for Finance and Operations является настройка валюты. Настройка валюты является обязательным шагом в настройке системы и используется для записи финансовых транзакций. Этот модуль объясняет управление валютой в разделе «Финансы и Операции».
+  Одним из первых и наиболее важных этапов внедрения финансового менеджмента в Dynamics 365 для финансов и операций является настройка валюты. Настройка валюты является обязательным шагом в настройке системы и используется для записи финансовых транзакций. Этот модуль объясняет управление валютой в разделе «Финансы и Операции».
   #### Уроки
   - Введение
-  - Настройка валюты юридического лица и ее конвертации
+  - Настройка валюты юридического лица  и ее конвертации
   - Настройка и импорт курсов валют
   - Лабораторный практикум
   - Краткое содержание модуля
@@ -58,7 +58,7 @@ outlineSection: |-
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   - Различия бухгалтерских и фискальных календарей
   - Конфигурация и настройка финансовых календарей, лет и периодов
   - Создание и использование интервалов дат
@@ -69,36 +69,36 @@ outlineSection: |-
   #### Уроки
   - Введение
   - Определение и настройка плана счетов
-  - Определение и настройка финансовых аспектов
+  - - Определение и настройка финансовых аспектов
   - Определение и настройка структуры и правил счета.
   - Лабораторные практикумы
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Определять необходимые компоненты плана счетов
+  В этом модуле студенты научились следующему&#58;
+  - Определение необходимых компонентов плана счетов
   - Определение и настройка плана счетов
-  - Определять и настраивать финансовую аналитику и наборы измерений
-  - Настраивать планы счетов, основные счета, категории, шаблоны, псевдонимы учетной записи и контроль баланса
-  - Настраивать структуры счета и расширенные правила
+  - Определение и настройка финансовых измерений и наборов измерений
+  - Настройка плана счетов, основных счетов, категорий, шаблонов, псевдонима учетной записи и контроля баланса
+  - Настройка структуры счета и расширенных правил
 
 
   ### Модуль 5&#58; Настройка книги и журналов
   Журнал - это рабочий лист, который можно использовать, прежде чем вручную вводить проводки в систему. При правильной настройке журналы позволяют быстро и эффективно управлять проводками. Чтобы использовать журнал, должно быть название журнала, при этом должна быть завершена настройка книги, журнала и проводки модуля Главной книги. Используя журнал Главной книги напрямую или через рабочую область обработки Главной книги, можно выполнять повседневные действия как лицо, которому назначена надлежащая роль безопасности для доступа к Главной книге. Название журнала дает финансовым лидерам возможность контролировать проверку ввода данных и по-разному ограничивать публикацию названия журнала для пользователей.
   #### Уроки
   - Журналы и их настройка
-  - Настройка книги учета и настройка журнала
+  - Настройка бухгалтерской книги и установки журнала
   - Пользовательские журналы
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Узнать о различных типах журналов и их настройке
-  - Настраивать книгу учета и проводку
-  - Настраивать и использовать журналы
+  В этом модуле студенты научились следующему&#58;
+  - Различные типы журналов и их настройка
+  - Как настроить книгу и проводку
+  - Как настроить и использовать журналы
 
 
   ### Модуль 6&#58; Настройка управления кассой и банком
-  В Dynamics 365 for Finance and Operations организации используют модуль управления денежными средствами и банком для создания и ведения банковских счетов. Таблица банковских счетов содержит записи для каждого банковского счета. Каждая запись содержит такую информацию о банковском счете, как&#58; Регистрационный номер и номер счета; Адрес; Другая контактная информация; Валюта; Настройки; и основной счет для проводок. «Финансы и операции» используют эту информацию для обработки всех банковских транзакций, таких как платежи и депозиты.
+  В Dynamics 365 для финансов и операций организации используют модуль управления денежными средствами и банком для создания и ведения банковских счетов. Таблица банковских счетов содержит записи для каждого банковского счета.  Каждая запись содержит такую информацию о банковском счете, как&#58; Регистрационный номер и номер счета; Адрес; Другая контактная информация; Валюта; Настройки; и основной счет для проводок. Финансы и операции используют эту информацию для обработки всех банковских транзакций, таких как платежи и депозиты.
   #### Уроки
   - Введение
   - Типы и группы банковских операций
@@ -109,27 +109,27 @@ outlineSection: |-
   - Лабораторные практикумы
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать и настраивать банки
-  - Создавать и настраивать банковские макетов
-  - Настраивать параметры управления денежными средствами и банком
-  - Настраивать банки поставщиков и клиентов
-  - Настраивать прогнозы движения денежных средств и отчетов
+  В этом модуле студенты научились следующему&#58;
+  - Создание и настройка банков
+  - Создание и настройка банковских макетов
+  - Настройка параметров управления денежными средствами и банком
+  - Настройка банков поставщиков и клиентов
+  - Настройка прогнозов движения денежных средств и отчетов
 
 
-  ### Модуль 7&#58; Использование управления кассой и банком
-  Этот модуль охватывает основные процедуры модуля «Управление денежными средствами и банком» в разделе «Финансы и операции». Студенты узнали, как работать с наличными деньгами и рабочими областями управления банком, такими как управление банком и обзоры кассовых операций. Студенты также узнали о процессах и процедурах управления денежными средствами и банком, например, о том, как делать вклады и отменять платежи (депозиты). «Финансы и операции» предоставляют функциональность для управления чековыми платежами, а также процедуры для разрешения особых ситуаций с чеками. Можно удалять, возвращать и аннулировать чеки, в дополнение к генерации и выдаче чеков в соответствии со спецификациями компании. Поскольку приложение «Финансы и Операции» регистрирует все финансовые транзакции, компании могут использовать функцию выверки банковских счетов для сопоставления записей транзакций внутри компании с выписками по счетам.
+  ### Модуль 7&#58; Использование  управления кассой и банком
+  Этот модуль охватывает основные процедуры модуля «Управление денежными средствами и банком» в разделе «Финансы и операции». Студенты узнали, как работать с наличными деньгами и рабочими областями управления банком, такими как управление банком и обзоры кассовых операций. Студенты также узнали о процессах и процедурах управления денежными средствами и банком, например, о том, как делать вклады и отменять платежи (депозиты). Финансы и операции предоставляют функциональность для управления чековыми платежами, а также процедуры для разрешения особых ситуаций с чеками. Можно удалять, возвращать и аннулировать чеки, в дополнение к генерации и выдаче чеков в соответствии со спецификациями компании. Поскольку приложение «Финансы и Операции» регистрирует все финансовые транзакции, компании могут использовать функцию выверки банковских счетов для сопоставления записей транзакций внутри компании с выписками по счетам.
   #### Уроки
   - Внесение депозитов и отмена платежей
   - Использование кассовых и банковских рабочих мест
   - Лабораторные практикумы
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Работать с процессами управления денежными и банковскими операциями
+  В этом модуле студенты научились следующему&#58;
+  - Работа с кассовыми и банковскими процессами
   - Использование кассовых и банковских рабочих мест
-  - Вносить депозиты
-  - Отменять платежи
+  - Внесение депозитов
+  - Отмена платежей
 
 
   ### Модуль 8&#58; Настройка аккредитивов и гарантий
@@ -143,7 +143,7 @@ outlineSection: |-
   Студенты будут понимать банковские письма, аккредитивы и гарантии.
 
   ### Модуль 9&#58; Ежедневные процедуры
-  Каждая проводка вручную, введенная в «Финансы и операции», вводится через журнал. Журнал - это тип рабочего листа, где записи публикуются не сразу. Можно просматривать, изменять и проверять заполненные журналы, пока они не будут готовы к публикации. Шаблон ваучера - это ваучер, который можно использовать в качестве основы для будущих ваучеров в других записях журнала. Можно использовать шаблоны ваучеров с общим журналом или любым из журналов финансовой подгруппы, таких как журналы «Счета к оплате» и «Счета к получению». Можно установить ограничения на компанию, тип счета и значения сегмента.
+  Каждая проводка вручную, введенная в Финансы и Операции, вводится через журнал. Журнал - это тип рабочего листа, где записи публикуются не сразу. Можно просматривать, изменять и проверять заполненные журналы, пока они не будут готовы к публикации. Шаблон ваучера - это ваучер, который можно использовать в качестве основы для будущих ваучеров в других записях журнала. Можно использовать шаблоны ваучеров с общим журналом или любым из журналов финансовой подгруппы, таких как журналы «Счета к оплате» и «Счета к получению». Можно установить ограничения на компанию, тип счета и значения сегмента.
   #### Уроки
   - Процессы Главной книги
   - Создание шаблонов ваучеров
@@ -152,19 +152,19 @@ outlineSection: |-
   - Краткое содержание модуля
 
   Теперь учащиеся научились обрабатывать ежедневные действия в главной книге и использовать управление журналом для применения правил при вводе данных. Они работали с контрольными счетами баланса для просмотра остатков на счетах банков или счетах ликвидности. 
-  
+
   Студенты также узнали, что перед проводкой можно использовать только контроль баланса, чтобы убедиться, что записи правильны.
-  
+
   Наконец, они узнали, как извлечь выгоду из шаблонов ваучеров для суммы, которая просто копирует точную сумму шаблона в виде новых строк, или процентов, которые преобразуют суммы в ваучере в процентные коэффициенты; это позволяет применять любую сумму при выборе шаблона ваучера.
 
-  ### Модуль 10&#58; Внутрихолдинговый счет
-  Внутрихолдинковый счет может помочь организациям, предоставляя единую точку входа для транзакций, которые должны регистрироваться несколькими компаниями. Выполнение транзакций от одной компании экономит время ввода данных и помогает гарантировать, что транзакции, затрагивающие несколько компаний, регистрируются в каждой компании. «Финансы и операции» также помогают отслеживать внутрихолдинговые поступления через систему. Этот раздел обладает функциональностью, которая требуется большинству компаний, обрабатывающих внутрихолдинковые транзакции. Это включает в себя возможность эффективной записи внутрихолдинговых заказов на продажу, заказов на покупку и выплат наличными.
+  ### Модуль 10&#58; Внутрикорпоративный учет
+  Внутрикорпоративный учет может помочь организациям, предоставляя единую точку входа для транзакций, которые должны регистрироваться несколькими компаниями. Выполнение транзакций от одной компании экономит время ввода данных и помогает гарантировать, что транзакции, затрагивающие несколько компаний, регистрируются в каждой компании. Финансы и операции также помогают отслеживать внутрикорпоративные записи через систему. Этот раздел обладает функциональностью, которая требуется большинству компаний, обрабатывающих внутрикорпоративные транзакции. Это включает в себя возможность эффективной записи внутрифирменных заказов на продажу, заказов на покупку и выплат наличными.
   #### Уроки
-  - Настройка и использование внутрихолдингового счета
+  - Настройка и использование внутрикорпоративного учета
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  Студенты смогут настроить и использовать внутрихолдинковый счет
+  - Студенты смогут настроить и использовать внутрикорпоративный учет
 
   ### Модуль 11&#58; Настройка распределения и начислений Главной книги
   Раздел «Финансы и операции» предоставляет возможности для поддержки схем начисления.
@@ -176,20 +176,20 @@ outlineSection: |-
   - Краткое содержание модуля
 
   Студенты узнают, как настраивать и использовать правила распределения, а также как настраивать и использовать схемы начисления. Раздел «Финансы и операции» предоставляет следующие возможности для поддержки этого процесса&#58;
-  - Распределение сумм транзакций вручную, используя разделенное действие в распределениях учета или по умолчанию применяя к документу шаблоны финансового измерения.
+  - Распределение сумм транзакций вручную, используя разделенное действие в распределениях учета или  по умолчанию применяя  к документу шаблоны финансового измерения.
   - Автоматическое распределение сумм транзакций на основе условий распределения, определенных индивидуально на основном счете. Для каждого журнала будут создаваться записи счетов на основе процентов и целевого регистра, когда учетная запись соответствует критериям, определенным как исходный регистр.
   - Автоматическое распределение сальдо бухгалтерской книги или фиксированных сумм на основе правил распределения бухгалтерской книги. Правила распределения главной книги периодически обрабатываются с использованием журналов распределения.
 
 
   ### Модуль 12&#58; Настройка налога с продаж
-  Требования к исчислению налогов и налоговой отчетности существенно различаются для разных стран или регионов. Поэтому налоговый модуль Dynamics 365 for Finance and Operations является чрезвычайно обширным.
+  Требования к исчислению налогов и налоговой отчетности существенно различаются для разных стран или регионов. Поэтому налоговый модуль Dynamics 365 для финансов и операций является чрезвычайно наполненным.
   #### Уроки
   - Понимание компонентов налогового двигателя
   - Лабораторный практикум
   - Краткое содержание модуля
 
   Теперь студенты узнали о возможностях налоговой отчетности в странах и регионах в разделе финансов и операций.
-  
+
   В этом модуле студенты узнали, как настроить налоговые компоненты, такие как налоговые органы, периоды расчетов и коды налога с продаж. Кроме того, они узнали, что коды налога с продаж являются основным компонентом для определения налоговых расчетов и подключения всех других компонентов в налоге, так что раздел финансов и операций может автоматически рассчитывать и проводить операции для расчета на основе интервала периода, назначенного органом.
 
   ### Модуль 13&#58; Завершение курса
