--- a/learn-certs-pr/courses/mb-310t02.yml
+++ b/learn-certs-pr/courses/mb-310t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование кредиторской, дебиторской задолженности и сборов в Финансах и Операциях
+title: Configure and use accounts payable, receivable, and collections in Finance and Operations
 metadata:
-  title: 'Курс MB-310T02-A: Настройка и использование кредиторской, дебиторской задолженности и сборов в Финансах и Операциях'
-  description: 'Курс MB-310T02-A: Настройка и использование кредиторской, дебиторской задолженности и сборов в Финансах и Операциях'
+  title: 'Course MB-310T02-A: Configure and use accounts payable, receivable, and collections in Finance and Operations'
+  description: 'Course MB-310T02-A: Configure and use accounts payable, receivable, and collections in Finance and Operations'
 uid: course.mb-310t02
 courseNumber: 'MB-310T02-A'
 hoursToComplete: 24
@@ -20,12 +20,12 @@ products:
 exams:
 - uid: exam.mb-310
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы поднять свои финансовые показатели за счет повышения прибыльности, оптимизации производительности рабочей силы, сокращения операционных расходов, быстрой адаптации к изменениям требований и оптимизации управления активами.
-  
+  Организации используют Dynamics 365 для финансов и операций, чтобы поднять свои финансовые показатели за счет повышения прибыльности, оптимизации производительности рабочей силы, сокращения операционных расходов, быстрой адаптации к изменениям требований и оптимизации управления активами.
+
   В этом курсе обсуждается настройка и использование кредиторской, дебиторской задолженности и сборов в Dynamics 365 for Finance and Operations.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
@@ -34,17 +34,17 @@ outlineSection: |-
   #### Уроки
   - Понимание функций регистратора задач
   - Настройка параметров кредиторской задолженности
-  - Создавать и поддерживать поставщиков
+  - Создание и поддержка поставщиков
   - Настройка счетов к оплате
   - Настройка и использование положительной оплаты
   - Лабораторный практикум
   - Краткое содержание модуля
-
-  После завершения этого модуля студенты смогут&#58;
-  - Настраивать компоненты кредиторской задолженности
-  - Создавать и поддерживать поставщиков
-  - Настраивать платежи поставщика
-  - Настраивать профили разноски поставщика
+  
+  В этом модуле студенты научились следующему&#58;
+  - Настройка компонентов кредиторской задолженности
+  - Создание и поддержка поставщиков
+  - Настройка платежей поставщика
+  - Настройка профилей проводок поставщика
   - Настройка счетов к оплате
 
 
@@ -66,14 +66,14 @@ outlineSection: |-
   - Введение
   - Расчет транзакций и отмена расчетов
   - Распределение средств
-  - Настраивать политики проверки счетов
+  - Настройка политик проверки счетов
   - Лабораторные практикумы
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Производить расчет транзакций и отмену расчетов
-  - Распределять средства с помощью распределения по счетам
-  - Настраивать политики проверки счетов
+  В этом модуле студенты научились следующему&#58;
+  - Расчет транзакций и отмена расчетов
+  - Распределение фондов с помощью учета распределения
+  - Настройка политик проверки счетов
 
 
   ### Модуль 4&#58; Настройка счетов к получению
@@ -82,16 +82,16 @@ outlineSection: |-
   #### Уроки
   - Настройка дебиторской задолженности
   - Создание и поддержка клиентов
-  - Настройка профилей разноски клиентов
+  - Настройка профилей проводок клиентов
   - Настройка дебиторской задолженности
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Настраивать компоненты дебиторской задолженности
-  - Создавать и поддерживать клиентов
-  - Создавать и поддерживать платежи
-  - Настраивать профили разноски клиентов
+  В этом модуле студенты научились следующему&#58;
+  - Настройка компонентов дебиторской задолженности
+  - Создание и поддержка клиентов
+  - Создание и поддержка клиентов
+  - Настройка платежей клиентов
   - Настройка дебиторской задолженности
 
 
@@ -104,12 +104,12 @@ outlineSection: |-
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Распределять средства с помощью распределения по счетам
+  В этом модуле студенты научились следующему&#58;
+  - Распределение фондов с помощью учета распределения
   - Создание бесплатных текстовых счетов и запись платежей клиентов
-  - Настраивать повторяющиеся счета
-  - Использовать возвраты в дебиторской задолженности
-  - Обрабатывать заказы, регистрировать счета и обрабатывать платежи
+  - Настройка повторяющихся счетов
+  - Использование возвратов в дебиторской задолженности
+  - Обработка заказов, запись счетов и обработка платежей
 
 
   ### Модуль 6&#58; Настройка долгов и их сбора
@@ -117,18 +117,18 @@ outlineSection: |-
 
   #### Уроки
   - Введение
-  - Настраивать компоненты кредита и сборов
+  - Настройка компонентов кредита и сборов
   - Настройка и управление интересами
   - Отказ, восстановление или реверс
   - Настройка и управление письмами сбора 
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Настраивать компоненты кредита и сборов
-  - Настраивать ведомости сроков задолженности, пулы клиентов, агентов по сбору долгов и определение периода просрочки.
-  - Настраивать и управлять интересами
-  - Настраивать коллекторские письма и управлять ими
+  В этом модуле студенты научились следующему&#58;
+  - Настройка компонентов кредита и сборов
+  - Настройка отчетов о старении, пулов клиентов, агентов по сбору долгов и определений периода старения.
+  - Настройка и управление интересами
+  - Настройка коллекторских писем и управление ими
 
 
   ### Модуль 7&#58; Обработка долгов и их сбора
@@ -140,9 +140,9 @@ outlineSection: |-
   - Лабораторные практикумы
   - Краткое содержание модуля
 
-  После завершения этого модуля студенты смогут&#58;
-  - Работать с заявлениями клиентов
-  - Осуществлять сбор дебиторской задолженности
+  В этом модуле студенты научились следующему&#58;
+  - Заявления клиентов
+  - Как обработать коллекцию
 
 
   ### Модуль 8&#58; Завершение курса
@@ -153,3 +153,4 @@ outlineSection: |-
   - Опрос после курса
 
   Студенты закончили курс.
+
