--- a/learn-certs-pr/courses/mb-310t03.yml
+++ b/learn-certs-pr/courses/mb-310t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование бюджетирования, основных средств и дополнительных функций в Финансах и Операциях
+title: Configure and use budgeting, fixed assets, and additional functionality in Finance and Operations
 metadata:
-  title: 'Курс MB-310T03-A: Настройка и использование бюджетирования, основных средств и дополнительных функций в Финансах и Операциях'
-  description: 'Курс MB-310T03-A: Настройка и использование бюджетирования, основных средств и дополнительных функций в Финансах и Операциях'
+  title: 'Course MB-310T03-A: Configure and use budgeting, fixed assets, and additional functionality in Finance and Operations'
+  description: 'Course MB-310T03-A: Configure and use budgeting, fixed assets, and additional functionality in Finance and Operations'
 uid: course.mb-310t03
 courseNumber: 'MB-310T03-A'
 hoursToComplete: 24
@@ -20,30 +20,30 @@ products:
 exams:
 - uid: exam.mb-310
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы поднять свои финансовые показатели за счет повышения прибыльности, оптимизации производительности рабочей силы, сокращения операционных расходов, быстрой адаптации к изменениям требований и оптимизации управления активами. В этом курсе обсуждается, как настроить и использовать бюджетирование, основные средства и дополнительные функции в Dynamics 365 for Finance and Operations.
+  Организации используют Dynamics 365 для финансов и операций, чтобы поднять свои финансовые показатели за счет повышения прибыльности, оптимизации производительности рабочей силы, сокращения операционных расходов, быстрой адаптации к изменениям требований и оптимизации управления активами. В этом курсе обсуждается, как настроить и использовать бюджетирование, основные средства и дополнительные функции в Dynamics 365 для финансов и операций.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
   ### Модуль 1&#58; Настройка датированных чеков
-  Чеки, датированные числом, представляют собой чеки, которые выдаются для осуществления и получения платежей в будущем. Поэтому такой чек не может быть обналичен до указанной даты. Microsoft Dynamics 365 for Finance and Operations поддерживает полный цикл управления чеками с датой и в дебиторской, и в кредиторской задолженностях. В этом разделе объясняется, как настраивать и обрабатывать датированные чеки.
+  Чеки, датированные числом, представляют собой чеки, которые выдаются для осуществления и получения платежей в будущем. Поэтому такой чек не может быть обналичен до указанной даты. Microsoft Dynamics 365 для финансов и операций поддерживает полный цикл управления чеками с датой и в дебиторской, и в кредиторской задолженностях. В этом разделе объясняется, как настраивать и обрабатывать датированные чеки.
 
   #### Уроки
   - Введение
   - Управление чеками с датой
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Обрабатывать чеки, датированные будущим числом с датой
-  - Настраивать чеки, датированные будущим числом
-  - Регистрировать и разносить чеки, датированные будущим числом для клиента
-  - Проводить расчеты по чекам, чек, датированным будущим числом от клиента
-  - Регистрировать и разносить чеки, датированные будущим числом для поставщика
-  - Проводить расчеты по чекам, чек, датированным будущим числом для поставщика
+
+  В этом модуле студенты научились следующему&#58;
+  - Обработка чеков с датой
+  - Установка чеков с датой
+  - Регистрация и проводка чека с датой для клиента
+  - Расчет чека с датой от клиента
+  - Регистрация и проводка чека с датой для поставщика
+  - Установка чеков с датой для поставщика
 
 
   ### Модуль 2&#58; Настройка и использование базовых процессов бюджетирования и бюджетного контроля
@@ -56,13 +56,13 @@ outlineSection: |-
   - Использование запросов и отчетов
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
+
+  В этом модуле студенты научились следующему&#58;
   - Настройка основных компонентов бюджетирования
   - Настройка компонентов контроля бюджета
-  - Использовать запросы и отчеты
-  - Создавать и проверять записи реестра бюджета
+  - Использование запросов и отчетов
+  - Создание и проверка записей реестра бюджета
 
 
   ### Модуль 3&#58; Настройка и использование процессов бюджетного планирования
@@ -70,20 +70,20 @@ outlineSection: |-
 
   #### Уроки
   - Введение
-  - Настройка компонентов бюджетного планирования
+  - Настройка компонентов бюджетного планирования.
   - Лабораторный практикум
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Настройка компонентов бюджетного планирования
-  - Создавать шаблоны бюджетного плана
-  - Настраивать процессы бюджетирования
-  - Создавать бюджетный план с помощью мастера бюджетного плана
+
+  В этом модуле студенты научились следующему&#58;
+  - Настройка компонентов бюджетного планирования.
+  - Создание шаблона бюджетного плана
+  - Настройка процессов бюджетирования
+  - Создание бюджетного плана с помощью мастера бюджетного плана.
 
 
   ### Модуль 4&#58; Настройка управления основными фондами
-  Этот модуль начинается с объяснения концепций основных средств, а затем показывает студентам, как настроить и использовать модуль основных средств в Dynamics 365 for Finance and Operations.
+  Этот модуль начинается с объяснения концепций основных средств, а затем показывает студентам, как настроить и использовать модуль основных средств в Dynamics 365 для финансов и операций.
 
   #### Уроки
   - Введение
@@ -92,29 +92,29 @@ outlineSection: |-
   - Создание основных средств
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Настраивать компоненты основных средств
-  - Настраивать параметры основных средств
-  - Включать интеграцию основных средств с покупками
+
+  В этом модуле студенты научились следующему&#58;
+  - Настройка компонентов основных средств
+  - Настройка параметров основных средств
+  - Включение интеграции основных средств с покупками
   - Создание основных средств
 
 
-  ### Модуль 5&#58; Управление основными средствами
-  Для записи операций с основными фондами с использованием журналов необходимо создать хотя бы одно имя журнала с использованием типа журнала «Проводка основных средств» в настройке модуля Главной книги. Если требуются бюджеты для основных фондов, необходимо также создать имя журнала, которое использует тип журнала «Бюджет основных средств». Этот модуль объясняет, как обрабатывать и управлять основными средствами.
+  ### Модуль 5&#58; Управление основными фондами
+  Для записи операций с основными фондами с использованием журналов необходимо создать хотя бы одно имя журнала с использованием типа журнала «Проводка основных фондов» в настройке модуля Главной книги. Если требуются бюджеты для основных фондов, необходимо также создать имя журнала, которое использует тип журнала «Бюджет основных фондов». Этот модуль объясняет, как обрабатывать и управлять основными фондами.
 
   #### Уроки
   - Введение
   - Выполнение задач по основным средствам
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Приобретать основные средства
-  - Амортизировать основные средства
-  - Списывать основные средства
+
+  В этом модуле студенты научились следующему&#58;
+  - Приобретение основных фондов
+  - Амортизация основных фондов
+  - Списание основных фондов
 
 
   ### Модуль 6&#58; Настройка и использование учета затрат
@@ -125,11 +125,11 @@ outlineSection: |-
   - Рабочая область контроля затрат
   - Лабораторный практикум
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
+
+  В этом модуле студенты научились следующему&#58;
   - Рабочая область контроля затрат
-  - Создавать отчеты по учету затрат с помощью мастера по учету затрат
+  - Как создать отчет по учету затрат с помощью мастера начала работы по учету затрат
 
 
   ### Модуль 7&#58; Настройка и использование периодических процессов
@@ -144,18 +144,18 @@ outlineSection: |-
   - Процесс закрытия в конце года
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
+
+  В этом модуле студенты научились следующему&#58;
   - Настройка закрытия финансового периода
-  - Выверять банки
-  - Выполнять операции по закрытию отчётного периода и закрытию финансового года
-  - Подготовка периодических заявок 
-  - Настраивать и тестировать процесс Vendor 1099s
+  - Сверка банков
+  - Выполнение процессов закрытия  периода и года
+  - Подготовка периодических заявок
+  - Configure and test Vendor 1099s process
   - Запуск процессов переоценки иностранной валюты
-  - Выполнять процессы финансовой консолидации и ликвидации
-  - Использовать раздел «Финансовые отчеты» для создания финансовых отчетов.
-  - Обрабатывать налоговую отчетность на конец года
+  - Выполнение процессов финансовой консолидации и ликвидации
+  - Использование раздела «Финансовые отчеты» для создания финансовых отчетов.
+  - Процесс налоговой отчетности на конец года
 
 
   ### Модуль 8&#58; Настройка структуры электронной отчетности
@@ -167,13 +167,13 @@ outlineSection: |-
   - Дизайнер формул в электронной отчетности
   - Лабораторный практикум
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Настраивать ER
-  - Создавать конфигурации ER
-  - Выполнять операции по закрытию отчётного периода и закрытию финансового года
-  - Создавать формулы в ER
+
+  В этом модуле студенты научились следующему&#58;
+  - Настройка ER
+  - Создание конфигураций ER
+  - Выполнение процессов закрытия  периода и года
+  - Дизайнер формул в ER
 
 
   ### Модуль 9&#58; Настройка локализованных функций
@@ -188,16 +188,16 @@ outlineSection: |-
   - Электронные счета
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
+
+  В этом модуле студенты научились следующему&#58;
   - Локализация и регулятивные функции
-  - Иметь представление о классификации особенностей локализации
-  - Применять контекст страны и региона
-  - Настраивать и демонстрировать возможности фискальных учреждений и фискальных документов для локализации в Бразилии
-  - Тестировать процесс переводного векселя
-  - Настраивать и использовать простые вексели 
-  - Настраивать и тестировать электронные счет-фактуры (CFDI) для локализации в Мексике 
+  - Классификация особенностей локализации
+  - Как применить контекст страны и региона
+  - Как настроить и продемонстрировать возможности фискальных учреждений и фискальных документов для бразильской локализации
+  - Процесс тестирования векселя
+  - Настройка и использование векселя
+  - Настройка и тестирование электронных счетов-фактур (CFDI) для мексиканской локализации
 
 
   ### Модуль 10&#58; Настройка управления финансами для государственного сектора
@@ -209,14 +209,14 @@ outlineSection: |-
   - Настройка биллинговых кодов для свободных текстовых счетов
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать фонды для государственного сектора
-  - Понимать методы банковской сверки
-  - Настраивать производные размеры
-  - Настраивать производные финансовые иерархии для государственного сектора
-  - Иметь представление о расширенной функциональности записей ГК для государственного сектора
+
+  В этом модуле студенты научились следующему&#58;
+  - Создание фондов для государственного сектора
+  - Понимание методов банковской сверки
+  - Настройка производных размеров
+  - Установка производных финансовых иерархий для государственного сектора
+  - Расширенная функциональность записей ГК для государственного сектора
   - Настройка биллинговых кодов для свободных текстовых счетов
 
 
@@ -226,6 +226,7 @@ outlineSection: |-
   - Итоговая оценка
   - Краткое содержание курса
   - Опрос после курса
-  
+
 
   Студенты закончили курс.
+
