--- a/learn-certs-pr/courses/mb-320t01.yml
+++ b/learn-certs-pr/courses/mb-320t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование дискретного производства в Dynamics 365 for Finance and Operations
+title: Configure and use discrete manufacturing in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-320T01-A: Настройка и использование дискретного производства в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-320T01-A: Настройка и использование дискретного производства в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-320T01-A: Configure and use discrete manufacturing in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-320T01-A: Configure and use discrete manufacturing in Dynamics 365 for Finance and Operations'
 uid: course.mb-320t01
 courseNumber: 'MB-320T01-A'
 hoursToComplete: 48
@@ -20,16 +20,16 @@ products:
 exams:
 - uid: exam.mb-320
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы более разумно работать с подключенными операциями, выбирая наиболее подходящие производственные процессы, улучшая операционные процедуры, упрощая управление ресурсами, ускоряя доставку товаров и повышая качество услуг и удовлетворенность клиентов. В этом курсе обсуждается, как настроить и использовать дискретное производство в Dynamics 365 for Finance and Operations.
+  Организации используют Dynamics 365 для финансов и операций, чтобы более разумно работать с подключенными операциями, выбирая наиболее подходящие производственные процессы, улучшая операционные процедуры, упрощая управление ресурсами, ускоряя доставку товаров и повышая качество услуг и удовлетворенность клиентов. В этом курсе обсуждается, как настроить и использовать дискретное производство в Dynamics 365 для финансов и операций.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
   ### Модуль 1&#58; Начало работы с контролем производства
   Этот модуль объясняет понятия, используемые в модуле контроля производства в Финансах и Операциях.
-
+  
   #### Уроки
   - Введение
   - Сравнение дискретного, интенсивного и процессного производства
@@ -40,14 +40,14 @@ outlineSection: |-
   - Резюме
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Приобрести знания о дискретных, бережливых и технологических методах производства
-  - Приобрести знания об унифицированном производстве
-  - Настроить управление для унифицированного производства
-  - Планировать мощности
-  - Устанавливать взаимосвязь между Главной книгой и модулями управления производством
-  - Иметь представление о производственных пулах
-  - Работать с ключами распределения
+  В этом модуле студенты научились следующему&#58;
+  - Дискретные, интенсивные и процессные производственные методологии
+  - Унифицированное производство
+  - Как настроить управление для унифицированного производства
+  - Планирование мощности
+  - Взаимосвязь между Главной книгой и модулями управления производством.
+  - Производственные пулы
+  - Как работать с ключами распределения
 
 
   ### Модуль 2&#58; Начало работы с дискретным производством
@@ -63,17 +63,17 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Иметь представление о концепциях дискретного производства 
-  - Иметь представление о сСтатусах производственного процесса
-  - Иметь представление об этапах производства
-  - Иметь представление о спецификациях
-  - Иметь представление о ресурсах
-  - Иметь представление о маршрутах и операциях
+  В этом модуле студенты научились следующему&#58;
+  - Концепции дискретного производства 
+  - Статусы производственного процесса
+  - Этапы производства
+  - Спецификации
+  - Ресурсы
+  - Маршруты и операции
 
 
   ### Модуль 3&#58; Настройка дискретного производства
-  Прежде чем можно будет работать в модуле управления производством и создавать производственные заказы, необходимо настроить параметры производства. Выбранные параметры оказывают непосредственное влияние на производственный заказ и производственный цикл. Параметры могут быть установлены компанией или участком. Это определяет, использует ли Dynamics 365 for Finance and Operations параметры уровня компании или параметры, специфичные для конкретного участка. Параметры, производственные заказы и производственный цикл анализируют, как определяются эти параметры, как используются имена журналов, как создаются производственные заказы и как они обрабатываются в процессе производства на основе их статуса и жизненного цикла производства. Этот урок объясняет, как настроить Дискретное производство в Финансах и Операциях.
+  Прежде чем можно будет работать в модуле управления производством и создавать производственные заказы, необходимо настроить параметры производства. Выбранные параметры оказывают непосредственное влияние на производственный заказ и производственный цикл. Параметры могут быть установлены компанией или участком. Это  определяет, использует ли Dynamics 365 for Finance and Operations параметры уровня компании или параметры, специфичные для конкретного участка. Параметры, производственные заказы и производственный цикл анализируют, как определяются эти параметры, как используются имена журналов, как создаются производственные заказы и как они обрабатываются в процессе производства на основе их статуса и жизненного цикла производства. Этот урок объясняет, как настроить Дискретное производство в Финансах и Операциях.
 
   #### Уроки
   - Введение
@@ -86,10 +86,10 @@ outlineSection: |-
 
 
   В этом модуле студенты научились следующему&#58;
-  - Настраивать размеры инвентаризации в производстве
-  - Настраивать параметры производственные заказы и статус производства
-  - Настраивать календари и ресурсы
-  - Настраивать операции и маршруты
+  - Настройка размеров инвентаризации в производстве
+  - Настройка параметров, производственных заказов и статуса производства
+  - Настройка календарей и ресурсов
+  - Настройка операций и маршрутов
 
 
   ### Модуль 4&#58; Создание и завершение производственных заказов
@@ -102,24 +102,24 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   - Понимание планирования мощностей
-  - Создавать отдельные производственные заказы
-  - Планировать график производственных заказов
-  - Обрабатывать производственные заказы
-  - Контролировать и завершать производство
+  - Создание отдельных производственных заказов
+  - График производственного заказа
+  - Обработка производственных заказов
+  - Контроль и окончание производства
 
 
   ### Модуль 5&#58; Работа с калькуляцией
   Этот модуль описывает, как настроить калькуляцию, которая включает материал и производство, а также как эта настройка влияет на результаты расчета спецификации. Студенты научатся настраивать и управлять таблицей калькуляции в Финансах и Операциях.
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   - Как работать с калькуляцией
 
 
-  ### Модуль 6&#58; Использование Manufacturing Execution для организации производства
-  Организация производства в первую очередь предназначена для производственных компаний. Рабочие могут регистрировать время операций и расход при выполнении производственных работ, используя форму регистрации работ. Позже все регистрации подтверждаются и передаются в соответствующие модули Dynamics 365 for Finance и Operations. Непрерывное подтверждение и передача регистраций дает менеджерам возможность легко отслеживать фактические затраты на производственные заказы.
+  ### Модуль 6&#58; Использование производственного исполнения
+  Производственное исполнение в первую очередь предназначено для использования производственными компаниями. Рабочие могут регистрировать время и расход предметов на производственных работах и ​​проектных работах, используя форму регистрации работ. Все регистрации утверждаются и впоследствии передаются в соответствующие модули Dynamics 365 for Finance и Operations. Непрерывное утверждение и передача регистраций дает менеджерам возможность легко отслеживать фактические затраты на производственные заказы.
   #### Уроки
   - Введение
   - Понимание производственного исполнения
@@ -131,11 +131,11 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понимать организацию производства 
-  - Определять роли в организации производства
-  - Обрабатывать производственные заказы
-  - Понимать рабочие потоки процесса для управления производством
+  В этом модуле студенты научились&#58;
+  - Понимание производственного исполнения
+  - Определение роли в производственном исполнении
+  - Обработка производственных заказов
+  - Понимание рабочих потоков процесса для управления производством
 
 
   ### Модуль 7&#58; Начало работы с конфигурацией товара
@@ -148,12 +148,12 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Знать терминологию, которая важна для понимания концепций и процессов, связанных с конфигурацией продукта
-  - Изучить комплексные сценарии конфигурации продукта
-  - Знать различные области, которые охватывают процесс конфигурации продукта
-  - Изучат модели конфигурации продукта
-  - Строить модели конфигурации продукта
+  В этом модуле студенты научились следующему&#58;
+  - Терминология, которая важна для понимания концепций и процессов, связанных с конфигурацией продукта
+  - Сквозной сценарий конфигурации продукта
+  - Различные области, которые охватывают процесс конфигурации продукта
+  - Модель конфигурации продукта
+  - Как построить модель конфигурации продукта
 
 
   ### Модуль 8&#58; Завершение курса
@@ -165,3 +165,4 @@ outlineSection: |-
 
 
   Студенты закончили курс.
+
