--- a/learn-certs-pr/courses/mb-320t03.yml
+++ b/learn-certs-pr/courses/mb-320t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование процессного производства в Dynamics 365 for Finance and Operations
+title: Configure and use process manufacturing in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-320T03-A: Настройка и использование процессного производства в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-320T03-A: Настройка и использование процессного производства в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-320T03-A: Configure and use process manufacturing in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-320T03-A: Configure and use process manufacturing in Dynamics 365 for Finance and Operations'
 uid: course.mb-320t03
 courseNumber: 'MB-320T03-A'
 hoursToComplete: 24
@@ -20,9 +20,8 @@ products:
 exams:
 - uid: exam.mb-320
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы более разумно работать с подключенными операциями, выбирая наиболее подходящие производственные процессы, улучшая операционные процедуры, упрощая управление ресурсами, ускоряя доставку товаров и повышая качество услуг и удовлетворенность клиентов.
-  В этом курсе обсуждается, как настроить и использовать процессное производство в Dynamics 365 for Finance and Operations.
-
+  Организации используют Dynamics 365 для финансов и операций, чтобы более разумно работать с подключенными операциями, выбирая наиболее подходящие производственные процессы, улучшая операционные процедуры, упрощая управление ресурсами, ускоряя доставку товаров и повышая качество услуг и удовлетворенность клиентов.
+  В этом курсе обсуждается, как настроить и использовать процессное производство в Dynamics 365 для финансов и операций.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
@@ -38,11 +37,11 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   - Понятие процесса производства
   - Понимание формул управления
   - Понимание побочных и основных продуктов
-  - Понимать утвержденных поставщиков
+  - Понимание утвержденных поставщиков
 
 
   ### Модуль 2&#58; Определение и настройка атрибутов партии для производственного процесса
@@ -57,11 +56,11 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понимать атрибуты партии
+  В этом модуле студенты научились&#58;
+  - Понимание атрибутов партии
   - Определение и настройка атрибутов партии
-  - Понимать процессыв управления лотами и партиями
-  - Настраивать доработку партий 
+  - Понимание процессов управления лотами и партиями
+  - Настройка пакетной переделки
 
 
   ### Модуль 3&#58; Настройка цен на товары и соответствия продукции
@@ -74,7 +73,7 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились&#58;
   - Настройка цен на товары
   - Настройте соответствия товара
 
@@ -88,3 +87,4 @@ outlineSection: |-
 
 
   Студенты закончили курс.
+
