--- a/learn-certs-pr/courses/mb-330t01.yml
+++ b/learn-certs-pr/courses/mb-330t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование управления цепочками поставок в Dynamics 365 for Finance and Operations
+title: Configure and use supply chain management in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-330T01-A: Настройка и использование управления цепочками поставок в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-330T01-A: Настройка и использование управления цепочками поставок в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-330T01-A: Configure and use supply chain management in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-330T01-A: Configure and use supply chain management in Dynamics 365 for Finance and Operations'
 uid: course.mb-330t01
 courseNumber: 'MB-330T01-A'
 hoursToComplete: 48
@@ -20,39 +20,39 @@ products:
 exams:
 - uid: exam.mb-330
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы автоматизировать и оптимизировать свою цепочку поставок, модернизируя бизнес-логистику, обеспечивая своевременное реагирование на запросы клиентов, продвигаясь вперед с помощью прогнозирования, оптимизируя закупки и объединяя процессы от продаж до выполнения заказов. В этом курсе обсуждается, как настроить и использовать управление цепочкой поставок в Dynamics 365 for Finance and Operations.
+  Организации используют Dynamics 365 для финансов и операций, чтобы автоматизировать и оптимизировать свою цепочку поставок, модернизируя бизнес-логистику, обеспечивая своевременное реагирование на запросы клиентов, продвигаясь вперед с помощью прогнозирования, оптимизируя закупки и объединяя процессы от продаж до выполнения заказов. В этом курсе обсуждается, как настроить и использовать управление цепочкой поставок в Dynamics 365 для финансов и операций.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
   ### Модуль 1&#58; Управление поставками
   Чтобы настроить инвентаризацию, нужно сначала понять ежедневные операции инвентаризации. В этом уроке мы сначала обсудим входящие и исходящие операции инвентаризации.
-
+  
   В этом модуле объясняется, как настроить компоненты инвентаризации для процессов управления цепочками поставок в Финансах и Операциях.
   #### Уроки
   - Введение
   - Настройка серийных номеров и номеров партии
   - Настройка разбивки инвентаризации
-  - Настройка инвентаризации и складских журналов
+  - Настройка журналов инвентаризации и складских журналов
   - Настройка размеров инвентаризации
   - Закрытие и настройка инвентаризации
   - Лабораторные практикумы
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   - Выполнять входящие и исходящие операции инвентаризации
-  - Настраивать параметры инвентаризации
-  - Настраивать группы отслеживания номеров
+  - Настройка параметров инвентаризации
+  - Настройка групп отслеживания номеров
   - Настройка разбивки инвентаризации
-  - Настройка инвентаризации и складских журналов
-  - Настраивать единицы
+  - Настройка журналов инвентаризации и складских журналов
+  - Настройка единиц
   - Настройка размеров инвентаризации
-  - Настраивать калькуляцию запасов
-  - Настраивать распространение
-  - Понимать закрытие и корректировки запасов
+  - Настройка калькуляции запасов
+  - Настройка распространения
+  - Понимание закрытия и корректировки запасов
 
 
   ### Модуль 2&#58; Использование инвентарных журналов
@@ -85,11 +85,11 @@ outlineSection: |-
 
   В этом модуле студенты научились следующему&#58;
   - Понимание классификации ABC
-  - Использовать запросы и отчеты инвентаризации 
+  - Использование запросов и отчетов инвентаризации 
 
 
   ### Модуль 4&#58; Создание товаров и мастеров товаров
-  Раздел «Управление информацией о товарах» в Dynamics 365 for Finance and Operations предназначен для создания и обслуживания репозитория корпоративных продуктов. Он поддерживает централизованный, структурированный подход крупных организаций к созданию и ведению основных основных данных, таких как определения продуктов. Небольшие организации, которым требуется более децентрализованный подход, могут с некоторыми ограничениями создавать и поддерживать свои соответствующие товары, в то время как их товары автоматически добавляются в общий репозиторий.
+  Раздел «Управление информацией о товарах» в Dynamics 365 for Finance and Operations предназначен для создания и обслуживания репозитория корпоративных продуктов. Он поддерживает централизованный, структурированный подход  крупных организаций к созданию и ведению основных основных данных, таких как определения продуктов. Небольшие организации, которым требуется более децентрализованный подход, могут с некоторыми ограничениями создавать и поддерживать свои соответствующие товары, в то время как их товары автоматически добавляются в общий репозиторий.
 
   В этом разделе объясняется, как настроить товары для процессов управления цепочками поставок в Финансах и Операциях.
   #### Уроки
@@ -102,7 +102,7 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   - Создавать товарные позиции как тип товара и услуги
   - Настраивать параметры заказа по умолчанию
   - Создавать мастера товаров с предопределенными вариантами.
@@ -119,54 +119,54 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   Создавать спецификации и версии спецификаций с помощью конструктора спецификаций 
 
 
-  ### Модуль 6&#58; Настройка и выполнение процесса оProcure-to-Purchase 
+  ### Модуль 6&#58; Настройка и выполнение процесса от-производства-до-покупки
   В этом разделе объясняется, как настроить и выполнить процесс закупки в отделе финансов и операций.
   #### Уроки
   - Введение
-  - Сценарий закупок и поиска поставщиков
+  - Procurement and sourcing business scenario
   - Создание рабочего потока заявки
   - Создание заявок на покупку
-  - Создать запрос на ценовое предложение
-  - Использовать политики закупок
-  - Лабораторные практикумы
-  - Краткое содержание модуля
-
-
-  После завершения этого модуля студенты смогут&#58;
-  - Применять процессы закупок и источников в бизнес-сценарии
-  - Использовать политики закупок
-  - Создавать и поддерживать поставщиков
-  - Создание заявок на покупку
-  - Создавать запрос на расценки
-
-
-  ### Модуль 7&#58; Настройка совместной работы с поставщиками
-  В этом разделе объясняется, как настроить совместную работу с поставщиками в отделе финансов и операций.
-  #### Уроки
-  - Введение
-  - Настройка совместной работы с поставщиками
-  - Использование совместной работы с поставщиками
+  - Создать запрос на ценовое  предложение
+  - Использование политики закупок
   - Лабораторные практикумы
   - Краткое содержание модуля
 
 
   В этом модуле студенты научились следующему&#58;
-  - Настраивать совместную работу с поставщиками
-  - Работать с рабочим пространством совместной работы с поставщиками
-  - Использовать совместной работы с поставщиками как часть процесса procure-to-pay
+  - Применение процессов закупок и источников в бизнес-сценарии.
+  - Использование политики закупок
+  - Создание и поддержка поставщиков
+  - Создание заявок на покупку
+  - Создание запроса на расценки
 
 
-  ### Модуль 8&#58; Настройка и выполнение процесса Purchase-to-Pay
+  ### Модуль 7&#58; Настройка сотрудничество с поставщиками
+  В этом разделе объясняется, как настроить совместную работу поставщиков в отделе финансов и операций.
+  #### Уроки
+  - Введение
+  - Настройка сотрудничества с поставщиками
+  - Использование сотрудничества с поставщиками
+  - Лабораторные практикумы
+  - Краткое содержание модуля
+
+
+  В этом модуле студенты научились следующему&#58;
+  - Настройка коллабораций поставщиков
+  - Работа с рабочей областью сотрудничества с поставщиками
+  - Использование совместной работы с поставщиками как часть процесса закупок к оплате
+
+
+  ### Модуль 8&#58; Настройка и выполнение процесса от-производства-до-покупки
   Модуль «Заказы на покупку» рассматривает процесс, необходимый для создания и управления заказами на покупку в Dynamics 365 for Finance and Operations. Компания использует заказы на покупку для записи информации о товарах и услугах, которые она покупает у различных поставщиков.
   #### Уроки
   - Введение
   - Создание заказов на покупку
   - Использование управления изменениями заказа на покупку
-  - Использование опций заказов и прихода товаров
+  - Использование заказов и прибытия товаров
   - Управление избыточной и недостаточной доставкой и расходами
   - Создание возврата продавца
   - Лабораторные практикумы
@@ -174,13 +174,13 @@ outlineSection: |-
 
 
   В этом модуле студенты научились следующему&#58;
-  - Понимать сценария purchase-to-pay 
+  - Понимание обзора сценария покупки до оплаты
   - Использование управления изменениями заказа на покупку
-  - Создавать заказ на покупку
-  - Использовать опции риход товарав и обзор прихода
-  - Создавать и размещать счет-фактуры
-  - Создавать журнал счетов
-  - Создавать и выставлять платежей поставщика
+  - Создание заказа на покупку
+  - Использование прибытий товаров и обзор прибытия
+  - Создание и публикация счета
+  - Создание журнала счетов
+  - Создание и выставление платежей поставщика
   - Создание возврата продавца
 
 
@@ -192,51 +192,51 @@ outlineSection: |-
   - Создание договоров купли-продажи
   - Создание соглашения о покупке
   - Настройка торгового разрешения
-  - Настройка брокерских комиссий
+  - Настройка брокерских
   - Настройка роялти
-  - Настройка скидок
+  - Настройка бонусов
   - Лабораторные практикумы
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились следующему&#58;
   - Поддержка торговых соглашений
-  - Настраивать умное округление
+  - Настройка умного округления
   - Создание договоров купли-продажи
-  - Использовать политики закупок
+  - Использование политики закупок
   - Создание соглашения о покупке
   - Настройка торгового разрешения
-  - Настройка брокерских комиссий 
+  - Настройка брокерских
   - Настройка роялти
-  - Настройка скидок
+  - Настройка бонусов
 
 
-  ### Модуль 10&#58; Настройка и использование процесса Order-to-Cash
-  В этом разделе объясняется, как настроить и использовать процесс Order-to-Cash в Финансах и Операциях.
+  ### Модуль 10&#58;  Настройка и использование процесса  от-заказа-до-наличных
+  В этом разделе объясняется, как настроить и использовать процесс от-заказа-до-наличных в Финансах и Операциях.
   #### Уроки
   - Введение
   - Понимание сценария от-заказа-до-наличных
-  - Настройка и использование комиссий
+  - Настраивать и использовать комиссии
   - Настройка поиска клиентов и товаров
-  - Создание и подтверждение коммерческих предложений и заказов
-  - Настройка оценки выполнимости заказов
+  - Создание и подтверждение коммерческих предложений и заказов.
+  - Настройка заказа как многообещающего
   - Настройка кодов удержания заказа
-  - Распечатка и размещение отгрузочных накладных
-  - Обработка возвратов продукции
+  - Распечатка и размещение списков выбора
+  - Обработка возвратов клиентов
   - Лабораторный практикум
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Выполнять процесс order-to-cash 
-  - Настройка и использование комиссий
+  В этом модуле студенты научились следующему&#58;
+  - Выполнять процесс от заказа до наличных
+  - Настраивать и использовать комиссии
   - Настройка поиска клиентов и товаров
-  - Создавать и подтверждать коммерческие предложения
-  - Создавать и подтверждать заказы на продажу
-  - Распечатка и размещение отгрузочных накладных 
-  - Создавать и размещать счет-фактуры 
+  - Создание и подтверждение коммерческих предложений
+  - Создание и подтверждение заказов на продажу.
+  - Распечатка и размещение списков выбора
+  - Создание и публикация счета
   - Настройка кодов удержания заказа
-  - Обработка возвратов продукции
+  - Обработка возвратов клиентов
 
 
   ### Модуль 11&#58; Завершение курса
@@ -248,3 +248,4 @@ outlineSection: |-
 
 
   Студенты закончили курс.
+
