--- a/learn-certs-pr/courses/mb-330t02.yml
+++ b/learn-certs-pr/courses/mb-330t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Использование управления качеством, внутрихолдинговой торговли и сводного планирования в Dynamics 365 for Finance and Operations
+title: Use quality management, Intercompany trading and master planning in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-330T02-A: Использование управления качеством, внутрихолдинговой торговли и сводного планирования в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-330T02-A: Использование управления качеством, внутрихолдинговой торговли и сводного планирования в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-330T02-A: Use quality management, Intercompany trading and master planning in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-330T02-A: Use quality management, Intercompany trading and master planning in Dynamics 365 for Finance and Operations'
 uid: course.mb-330t02
 courseNumber: 'MB-330T02-A'
 hoursToComplete: 24
@@ -20,10 +20,10 @@ products:
 exams:
 - uid: exam.mb-330
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы автоматизировать и оптимизировать свою цепочку поставок, модернизируя бизнес-логистику, обеспечивая своевременное реагирование на запросы клиентов, продвигаясь вперед с помощью прогнозирования, оптимизируя закупки и объединяя процессы от продаж до выполнения заказов. В этом курсе обсуждается, как использовать управление качеством, внутрихолдинговую торговлю и сводное планирование в Dynamics 365 for Finance and Operations.
+  Организации используют Dynamics 365 для финансов и операций, чтобы автоматизировать и оптимизировать свою цепочку поставок, модернизируя бизнес-логистику, обеспечивая своевременное реагирование на запросы клиентов, продвигаясь вперед с помощью прогнозирования, оптимизируя закупки и объединяя процессы от продаж до выполнения заказов. В этом курсе обсуждается, как использовать управление качеством, межкорпоративную торговлю и общее планирование в Dynamics 365 для финансов и операций.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
@@ -32,61 +32,61 @@ outlineSection: |-
   #### Уроки
   - Введение
   - Выполнение процессов контроля и управления качеством
-  - Применение блокировки товара 
-  - Управление карантином 
+  - Применение инвентарной блокировки 
+  - Выполнение карантинного управления
   - Лабораторные практикумы
   - Краткое содержание модуля
+  
 
-
-  После завершения этого модуля студенты смогут&#58;
+  В этом модуле студенты научились&#58;
   - Выполнять процессы контроля и управления качеством
-  - Применение блокировки товара 
-  - Управление карантином 
+  - Применение инвентарной блокировки
+  - Выполнение карантинного управления
 
 
-  ### Модуль 2&#58; Настройка и использование внутрихолдинговых торговых отношений
-  Внутрихолдинговая функциональность Dynamics 365 for Finance and Operations предоставляет механизм для консолидации статических и динамических данных от нескольких компаний в виде отдельных юридических лиц в одной базе данных. Внутрихолдинговая торговля позволяет объединить производственные площадки, распределительные центры и дочерние предприятия по всему миру в единую организацию. В этом разделе объясняется, как настроить и использовать внутрихолдинговые торговые отношения и обрабатывать внутрихолдинговые заказы в "Финансы и операции".
+  ### Модуль 2&#58; Настройка и использование внутрикорпоративных торговых отношений
+  Внутрикорпоративная функциональность Intercompany в Dynamics 365 для финансов и операций предоставляет механизм для консолидации статических и динамических данных от нескольких компаний в виде отдельных юридических лиц в одной базе данных. Внутрикорпоративная торговля Intercompany Trade позволяет объединить производственные площадки, распределительные центры и дочерние предприятия по всему миру в единую организацию. В этом разделе объясняется, как настроить и использовать внутрикорпоративные торговые отношения и обрабатывать внутрифирменные заказы в отделе финансов и операций.
   #### Уроки
   - Введение
-  - Понимание внутрихолдинговой торговли
-  - Настройка внутрихолдинговых торговых отношений
-  - Обработка заказов внутрихолдинговой цепочки
-  - Настройка внутрихолдинговых соглашений и прямых поставок
+  - Понимание внутрикорпоративной торговли
+  - Настройка внутрикорпоративных торговых отношений
+  - Обработка заказов внутрикорпоративной цепочки
+  - Настройка внутрикорпоративных соглашений и прямых поставок
   - Лабораторные практикумы
   - Краткое содержание модуля
 
 
   В этом модуле студенты научились следующему&#58;
-  - Настраивать продукты для внутрихолдинговых торговых отношений
-  - Настраивать внутрихолдинговые торговые отношения
-  - Настраивать внутрихолдинговые соглашения
-  - Обрабатывать внутрихолдинговые заказы
-  - Обрабатывать внутрихолдинговые прямых поставок
-  - Обрабатывать внутрихолдинговые сборы
-  - Понимать внутрихолдинговые цепочки заказов 
+  - Настройка продуктов для внутрикорпоративных торговых отношений
+  - Настройка внутрикорпоративных торговых отношений
+  - Настройка внутрикорпоративных соглашений
+  - Обработка внутрикорпоративных заказов
+  - Обработка внутрикорпоративных прямых поставок
+  - Обработка внутрикорпоративных сборов
+  - Понимание цепочки заказов внутри компании
 
 
-  ### Модуль 3&#58; Настройка и использование сводного планирования 
-  В этом разделе объясняется, как настроить и использовать сводное планирование в Финансах и Операциях.
+  ### Модуль 3&#58; Настройка и использование мастер-планирования
+  В этом разделе объясняется, как настроить и использовать мастер-планирование в Финансах и Операциях.
   #### Уроки
   - Введение
-  - Особенности и настройки сводного планирвоания
-  - Создание сводного плана
-  - Узнайте о прогнозах спроса и предложения
-  - Настройка включения позиций
-  - Краткое введение во внутрихолдинговое планирование
-  - Планирование и утвержденные спланированные заказы
+  - Мастер планирования и настройки
+  - Создание генеральных планов
+  - Узнали о прогнозах спроса и предложения
+  - Настройка покрытия товара
+  - Краткое введение во внутрикорпоративное планирование
+  - Выполнение планов и твердых плановых заказов
   - Лабораторные практикумы
   - Краткое содержание модуля
 
 
   В этом модуле студенты научились следующему&#58;
-  - Определять политики сводного планирования
-  - Узнайте о прогнозах спроса и предложения
-  - Настраивать рассчет задержек
-  - Настройка включения позиций
-  - Понимать внутрихолдинговое сводное планирование
-  - Планирование и утвержденные спланированные заказы
+  - Определять основные политики планирования
+  - Узнали о прогнозах спроса и предложения
+  - Настройка рассчитанных задержек
+  - Настройка покрытия товара
+  - Понимание краткого введения во внутрикорпоративное планирование
+  - Выполнение планов и твердых плановых заказов
 
 
   ### Модуль 4&#58; Завершение курса
@@ -98,3 +98,4 @@ outlineSection: |-
 
 
   Студенты закончили курс.
+
