--- a/learn-certs-pr/courses/mb-330t03.yml
+++ b/learn-certs-pr/courses/mb-330t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование управления складом и транспортом в Dynamics 365 for Finance and Operations
+title: Configure and use warehouse, and transportation management in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-330T03-A: Настройка и использование управления складом и транспортом в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-330T03-A: Настройка и использование управления складом и транспортом в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-330T03-A: Configure and use warehouse, and transportation management in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-330T03-A: Configure and use warehouse, and transportation management in Dynamics 365 for Finance and Operations'
 uid: course.mb-330t03
 courseNumber: 'MB-330T03-A'
 hoursToComplete: 24
@@ -20,10 +20,10 @@ products:
 exams:
 - uid: exam.mb-330
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы автоматизировать и оптимизировать свою цепочку поставок, модернизируя бизнес-логистику, обеспечивая своевременное реагирование на запросы клиентов, продвигаясь вперед с помощью прогнозирования, оптимизируя закупки и объединяя процессы от продаж до выполнения заказов. В этом курсе обсуждается, как настроить и использовать управление складом и транспортировкой в Dynamics 365 for Finance and Operations.
+  Организации используют Dynamics 365 для финансов и операций, чтобы автоматизировать и оптимизировать свою цепочку поставок, модернизируя бизнес-логистику, обеспечивая своевременное реагирование на запросы клиентов, продвигаясь вперед с помощью прогнозирования, оптимизируя закупки и объединяя процессы от продаж до выполнения заказов. В этом курсе обсуждается, как настроить и использовать управление складом и транспортировкой в Dynamics 365 для финансов и операций.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
@@ -40,42 +40,42 @@ outlineSection: |-
   - Краткое содержание модуля
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Настраивать параметры управления складом
-  - Создавать склады и локации
-  - Настраивать рабочие пулы, зоны, формат местоположения и профили
-  - Создавать иерархии бронирования
-  - Настраивать директивы местоположения
-  - Настраивать Waves
-  - Настраивать Loads
-  - Настраивать статусы товара
-  - Настраивать подсчет циклов
-  - Настраивать упаковку и контейнеризацию
-  - Настраивать и генерировать ярлыкы
+  В этом модуле студенты научились следующему&#58;
+  - Настройка параметров управления складом
+  - Создание складов и локаций
+  - Настройка рабочих пулов, зон, формата местоположения и профилей.
+  - Создание иерархии бронирования
+  - Настройка директив местоположения
+  - Настройка волн
+  - Настройка нагрузок
+  - Настройка инвентарных статусов
+  - Настройка подсчета циклов
+  - Настройка упаковки и контейнеризации
+  - Настройка и генерация ярлыков
 
 
   ### Модуль 2&#58; Настройка мобильных устройств для управления складом
   В этом разделе объясняется, как настроить мобильное устройство для управления складами в Финансах и Операциях.
   #### Уроки
   - Введение
-  - Настраивать конфигурацию мобильных устройств
+  - Конфигурация мобильных устройств
   - Лабораторный практикум
   - Краткое содержание модуля
 
 
   В этом модуле студенты научились следующему&#58;
   - Создавать новые рабочие классы
-  - Настраивать конфигурацию мобильных устройств
-  - Настраивать пункты меню для действий и запросов
-  - Настраивать пунктыв меню для создания работы для другого работника или процесса
-  - Настраивать пункты меню для обработки существующей работы
-  - Определять схему меню мобильного устройства
-  - Настраивать общий внешний вид мобильных устройств
-  - Создавать пользователей мобильных устройств
-  - Настраивать макеты этикеток и настраивать параметры печати этикеток
+  - Конфигурация мобильных устройств
+  - Настройка пунктов меню для действий и запросов
+  - Настройка пунктов меню для создания работы для другого работника или процесса
+  - Настройка пунктов меню для обработки существующей работы
+  - Определение расположения меню мобильного устройства
+  - Настройка базового внешнего вида мобильных устройств
+  - Создание пользователей мобильных устройств
+  - Установка макетов этикеток и настройка параметров печати этикеток.
 
 
-  ### Модуль 3&#58; Использование управления складом
+  ### Модуль 3&#58; Использование  управления складом
   Перед использованием мобильного устройства для управления складом должно быть установлено приложение. В этом разделе объясняется, как использовать процессы управления складом в Финансах и Операциях.
   #### Уроки
   - Введение
@@ -99,8 +99,8 @@ outlineSection: |-
   - Переводы и пополнение
 
 
-  ### Модуль 4&#58; Настройка управления перевозками
-  В этом модуле дается обзор функций управления транспортировкой в ​​Microsoft Dynamics 365 for Finance and Operations и рассказывается, как настроить и использовать управление транспортировкой.
+  ### Модуль 4&#58;  Настройка управления перевозками
+  В этом модуле дается обзор функций управления транспортировкой в ​​Microsoft Dynamics 365 для финансов и операций и рассказывается, как настроить и использовать управление транспортировкой.
   #### Уроки
   - Введение
   - Планирование и настройка управления перевозками
@@ -129,3 +129,4 @@ outlineSection: |-
 
 
   Студенты закончили курс.
+
