--- a/learn-certs-pr/courses/mb-500t00.yml
+++ b/learn-certs-pr/courses/mb-500t00.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
 title: 'Microsoft Dynamics 365: Finance and Operations Apps Developer'
 metadata:
-  title: 'Курс MB-500T00-A: Microsoft Dynamics 365: Finance and Operations Apps Developer'
-  description: 'Курс MB-500T00-A: Microsoft Dynamics 365: Finance and Operations Apps Developer'
+  title: 'Course MB-500T00-A: Microsoft Dynamics 365: Finance and Operations Apps Developer'
+  description: 'Course MB-500T00-A: Microsoft Dynamics 365: Finance and Operations Apps Developer'
 uid: course.mb-500t00
 courseNumber: 'MB-500T00-A'
 hoursToComplete: 120
@@ -20,75 +20,75 @@ products:
 exams:
 - uid: exam.mb-500
 summary: |-
-  Обучение разработчиков. Разработчики приложений к Microsoft Dynamics 365 for Finance and Operations внедряют и расширяют приложения в соответствии с требованиями бизнеса. Кандидаты предоставляют полностью реализованные решения, используя стандартизированные шаблоны кодирования приложений, расширяемые функции и внешние интеграции.
+  Обучение разработчиков. Разработчики приложений к Microsoft Dynamics 365 для финансов и операций внедряют и расширяют приложения в соответствии с требованиями бизнеса. Кандидаты предоставляют полностью реализованные решения, используя стандартизированные шаблоны кодирования приложений, расширяемые функции и внешние интеграции.
 
   #### Профиль аудитории
-  
-  Разработчики приложений к Microsoft Dynamics 365 for Finance and Operations  
 
+  Разработчики приложений к Microsoft Dynamics 365 для финансов и операций 
 outlineSection: |-
   ### Модуль 1&#58; Обзор и архитектура
-  
-  Описание экосистемы Dynamics 365 и основных компонентов программного обеспечения Dynamics 365 Finance and Operations (FO), описание архитектуры D365FO, соответствующих вопросов проектирования и развертывания D365FO.
-  
-  #### Лабораторная работа&#58; Конфигурация среды разработки и создание проекта/модели
-  
-  #### Модуль 2&#58; Инструменты разработчика
 
-  Управление реализацией системы с помощью Lifecycle Services, настройка D365FO с использованием Visual Studio, управление исходным кодом и артефактами с помощью контроля версий, работа с другими инструментами разработки для выполнения задач.
-  
-  #### Лабораторная работа&#58; Контроль исходного кода с использованием DevOps
+  Опишите экосистему Dynamics 365 и основные компоненты программного обеспечения Dynamics 365 Finance and Operations (FO), опишите архитектуру D365FO, опишите соответствующие вопросы проектирования и развертывания D365FO
 
-  #### Модуль 3&#58; Разработка решения
-  Определение необходимых компонентов стека приложений и архитектуры сервера, реализация управления жизненным циклом приложений (ALM), разработка решения для D365FO
+  #### Лабораторная работа &#58; Конфигурация среды разработки и создание проекта/модели
 
-  #### Лабораторная работа&#58; Разработка структуры данных
-  
+  ### Модуль 2&#58; Инструменты разработчика
+
+  Управление реализацией системы с помощью Lifecycle Services, настройка D365FO с использованием Visual Studio, управление исходным кодом и артефактами с помощью контроля версий, работа с другими инструментами разработки для выполнения задач
+
+  #### Лабораторная работа &#58; Контроль исходного кода с использованием DevOps
+
+  ### Модуль 3&#58; Разработка решения
+  Определите необходимые компоненты стека приложений и архитектуру сервера, внедрите управление жизненным циклом приложений (ALM), разработайте решение для D365FO
+
+  #### Лабораторная работа &#58; Разработка структуры данных
+
   ### Модуль 4&#58; Элементы AOT
-  
+
   Создание форм, создание и расширение таблиц, создание расширенных типов данных (EDT) и перечислений, создание классов и расширение элементов AOT
-  
-  #### Лабораторная работа&#58; Расширение и разработка метаданных
-  
+
+  #### Лабораторная работа &#58; Расширение и разработка метаданных
+
   ### Модуль 5&#58; Разработка и тестирование кода
-  
-  Разработка кода X ++, Разработка объектно-ориентированного кода, Расширение функциональности D365 FO, Описание инфраструктуры и инструментов тестирования, Выполнение модульноготестирования
-  
-  #### Лабораторная работа&#58; Разработка и расширение кода
-  
+
+  Разработка кода X ++, Разработка объектно-ориентированного кода, Расширение функциональности D365 FO, Описать инфраструктуру и инструменты тестирования, Выполнить модульное тестирование
+
+  #### Лабораторная работа &#58; Расширение и разработка кода
+
   ### Модуль 6&#58; Перенос данных
-  
-  Описание инструментов и методологии миграции, планирование стратегии миграции, подготовка данных для миграции и перенос данных
 
-  #### Лабораторная работа&#58; Экспорт/импорт данных с использованием Data Entity
-  
-  #### Лабораторная работа&#58; Передача повторяющихся данных 
-  
+  Опишите инструменты и методологии миграции, спланируйте стратегию миграции, подготовьте данные для миграции и перенесите данные
+
+  #### Лабораторная работа &#58; Экспорт/импорт данных с использованием Data Entity
+
+  #### Лабораторная работа &#58; Повторяющаяся передача данных
+
   ### Модуль 7&#58; Фреймворки
-  
-  Внедрение функциональности D365 FO
-  
-  #### Лабораторная работа&#58; SysExtension Framework
-  
-  ### Модуль 8&#58; Интеграция
-  
-  Выявление шаблонов и сценариев интеграции данных, Внедрение концепций и решений интеграции данных, Внедрение повторяющихся интеграций, Интеграция D365FO с Microsoft Azure, Устранение ошибок интеграции, Внедрение API пакета управления данными
-  
-  #### Лабораторная работа&#58; Интеграция OData
 
-  #### Лабораторная работа&#58; Интеграция приложений логики
-  
-  #### Лабораторная работа&#58; Вызов внешнего веб-сервиса
+  Внедрение функциональности D365 FO
+
+  #### Лабораторная работа &#58; SysExtension Framework
+
+  ### Модуль 8&#58; Интеграция
+
+  Выявление шаблонов и сценариев интеграции данных, Внедрение концепций и решений интеграции данных, Внедрение повторяющихся интеграций, Интеграция D365FO с Microsoft Azure, Устранение ошибок интеграции, Внедрение API пакета управления данными
+
+  #### Лабораторная работа &#58; Интеграция OData
+
+  #### Лабораторная работа &#58; Интеграция приложений логики
+
+  #### Лабораторная работа &#58; Вызов внешнего веб-сервиса
 
   ### Модуль 9&#58; Отчетность
-  
-  Описание возможности и ограничения инструментов отчетности в D365FO, Проектирование, создание и редактирование динамических отчетов, Проектирование, создание и редактирование
+
+  Опишите возможности и ограничения инструментов отчетности в D365FO, Проектируйте, создавайте и редактируйте Динамические отчеты, Проектируйте, создавайте и редактируйте
   Рабочие пространства Dynamics. Проектирование, создание и редактирование источников данных, которые подключаются к хранилищам данных, внешним по отношению к D365FO.
 
-  #### Лабораторная работа&#58; Отчеты Power BI из Финансов и операций
-  
+  #### Лабораторная работа &#58; Отчеты Power BI из Финансов и операций
+
   ### Модуль 10&#58; Безопасность и производительность
-  
-  Описание и внедрение инструментов производительности и инструментов мониторинга среды LCS, Внедрение политики и требований к безопасности на основе ролей, Применение фундаментальных методов оптимизации производительности, Оптимизация производительности для пакетных процессов, Оптимизация производительности пользовательского интерфейса, Повышение производительности интеграции, Оптимизация производительности отчетов
-  
-  #### Лабораторная работа&#58; Функциональность Async & Sandbox
+
+  Опишите и внедрите инструменты производительности и инструменты мониторинга среды LCS, Внедрите политики и требования к безопасности на основе ролей, Примените фундаментальные методы оптимизации производительности, Оптимизируйте производительность для пакетных процессов, Оптимизируйте производительность пользовательского интерфейса, Увеличьте производительность интеграции, Оптимизируйте производительность отчетов
+
+  #### Лабораторная работа &#58; Функциональность Async & Sandbox
+
