--- a/learn-certs-pr/courses/mb-900t01.yml
+++ b/learn-certs-pr/courses/mb-900t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Основы Dynamics 365
+title: Dynamics 365 fundamentals
 metadata:
-  title: 'Курс MB-900T01-A: Основы Dynamics 365'
-  description: 'Курс MB-900T01-A: Основы Dynamics 365'
+  title: 'Course MB-900T01-A: Dynamics 365 fundamentals'
+  description: 'Course MB-900T01-A: Dynamics 365 fundamentals'
 uid: course.mb-900t01
 courseNumber: 'MB-900T01-A'
 hoursToComplete: 24
@@ -24,12 +24,11 @@ products:
 exams:
 - uid: exam.mb-900
 summary: |-
-  Dynamics 365 - это многогранный инструмент для привлечения клиентов, унифицированных операций, маркетинга, розничной торговли и управления талантами. Этот курс знакомит с функциональностью Dynamics 365 и деловой ценностью. Курс содержит изучение приложений Dynamics 365, Power Platform, концепций облачных вычислений, моделей безопасности и вопросов лицензирования.
-
+  Dynamics 365 - это многогранный инструмент для привлечения клиентов, унифицированных операций, маркетинга, розничной торговли и управления талантами. Этот курс познакомит учащегося с функциональностью Dynamics 365 и деловой ценностью. Курс будет охватывать приложения Dynamics 365, Power Platform, концепции облачных вычислений, модель безопасности и вопросы лицензирования.
 prerequisitesSection: |-
   Основное понимание принципов ИТ и интерес к Dynamics 365.
 outlineSection: |-
-  ### Модуль 1&#58; Введение в бизнес-приложения
+  ### Модуль 1&#58; Введение в  бизнес-приложения
   В этом модуле будут представлены все модули и функции бизнес-приложений, в которых основное внимание уделяется взаимодействию с клиентами, унифицированным операциям, Power Platform и соответствующим бизнес-приложениям.
   #### Уроки
   - Обзор приложений
@@ -51,7 +50,7 @@ outlineSection: |-
   В этом модуле мы рассмотрим важные аспекты реализации, включая типы развертываний, кадры выпусков и дизайн модели безопасности.
   #### Уроки
   - Типы развертываний
-  - Типы релизов
+  - Типы выпусков
   - Концепции и роли безопасности
   - Роли и команды
   - GDPR
@@ -63,3 +62,4 @@ outlineSection: |-
   - Поиск и работа с партнером
   - Варианты лицензирования
   - Начало работы
+
