--- a/learn-certs-pr/courses/md-100t02.yml
+++ b/learn-certs-pr/courses/md-100t02.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: Настройка Windows 10
+title: Configuring Windows 10
 metadata:
-  title: 'Курс MD-100T02-A: Настройка Windows 10'
-  description: 'Курс MD-100T02-A: Настройка Windows 10'
+  title: 'Course MD-100T02-A: Configuring Windows 10'
+  description: 'Course MD-100T02-A: Configuring Windows 10'
 uid: course.md-100t02
 courseNumber: 'MD-100T02-A'
 hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Настройка устройств и драйверов для Windows
-- skill: Настройка хранилища для Windows
-- skill: Настройка параметров сети в Windows
-- skill: Настройка удаленного управления Windows
-- skill: Настройка и управление приложениями Windows
-- skill: Настройка Internet Explorer
+- skill: Настройка устройств и драйверов для Windows.
+- skill: Настройка хранилища для Windows.
+- skill: Настройка параметров сети в Windows.
+- skill: Настройка удаленного управления Windows.
+- skill: Настройка и управление приложениями Windows.
+- skill: Настройка Internet Explorer.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -27,7 +27,8 @@ products:
 exams:
 - uid: exam.md-100
 summary: |-
-  В этом курсе студенты узнают, как поддерживать задачи конфигурации,
+  В
+  этом курсе студенты узнают, как поддерживать задачи конфигурации,
   связанные с Windows 10. Студенты будут развивать навыки, которые включают в себя управление
   хранением, файлами, драйверами и принтерами, а также как настроить сетевое
   подключение для Windows 10. Этот курс также будет охватывать управление и развертывание
@@ -53,11 +54,11 @@ outlineSection: |-
   - Управление принтерами
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать понятия, связанные с драйверами
-  - Устанавливать драйверы устройства
-  - Описывать концепции управления принтером
-  - Настраивать печать на стороне клиента и управление свойствами сервера печати
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать понятия, связанные с драйверами
+  - Установить драйвер устройства
+  - Описать концепции управления принтером
+  - Настройка печати на стороне клиента и управление свойствами сервера печати.
 
 
   ### Модуль 2&#58; Настройка сети
@@ -70,11 +71,11 @@ outlineSection: |-
   - Удаленное управление
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать различные типы приложений
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать различные типы приложений
   - Устанавливать приложения вручную и используя автоматизированные методы
   - Управлять развертыванием приложений с помощью Магазина Windows
-  - Узнавать о возможностях веб-браузера в Windows 10
+  - Узнать о возможностях веб-браузера в Windows 10
 
 
   ### Модуль 3&#58; Конфигурация хранилища
@@ -83,11 +84,11 @@ outlineSection: |-
   - Обзор вариантов хранения
   - Использование OneDrive
   - Управление дисками, разделами и томами
-  - Ведение дисков и томов
+  - Обслуживание дисков и томов
   - Управление пространством хранения
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум&#58; Управление хранилищем
+  #### Лабораторная &#58; Лабораторный практикум&#58; Управление хранилищем
   - Добавление диска
   - Создание простого тома
   - Сжатие папки
@@ -95,15 +96,15 @@ outlineSection: |-
   - Создание пространства для хранения
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать варианты и преимущества локального, облачного и виртуального хранилища
-  - Настраивать OneDrive
-  - Настраивать локальных разделов диска и томов
-  - Описывать возможности и преимущества складских помещений
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать варианты и преимущества локального, облачного и виртуального хранилища
+  - Настроить OneDrive
+  - Настройка локальных разделов диска и томов
+  - Описать возможности и преимущества складских помещений
 
 
   ### Модуль 4&#58; Управление приложениями в Windows 10
-  В этом модуле студенты будут ознакомлены с управлением приложениями в Windows 10. Этот модуль будет охватывать различные типы приложений и поддерживаемые методы установки.  Студенты узнают, как устанавливать приложения с помощью ручных и автоматических методов, а также управлять доставкой приложений с помощью Магазина Windows. Наконец, этот модуль будет охватывать различия между Internet Explorer и Microsoft Edge.
+  В этом модуле студенты ознакомятся с управлением приложениями в Windows 10. Этот модуль охватывает различные типы приложений и поддерживаемые методы установки.  Студенты узнают, как устанавливать приложения с помощью ручных и автоматических методов, а также управлять доставкой приложений с помощью Магазина Windows. Наконец, в этом модуль рассматриваются различия между Internet Explorer и Microsoft Edge.
   #### Уроки
   - Предоставление приложений пользователям
   - Управление универсальными приложениями Windows
@@ -111,11 +112,11 @@ outlineSection: |-
   - Веб-браузеры в Windows 10
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать различные типы приложений
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать различные типы приложений
   - Устанавливать приложения вручную и используя автоматизированные методы
   - Управлять развертыванием приложений с помощью Магазина Windows
-  - Узнавать о возможностях веб-браузера в Windows 10
+  - Узнать о возможностях веб-браузера в Windows 10
 
 
   ### Модуль 5&#58; Завершение курса
@@ -123,4 +124,5 @@ outlineSection: |-
   - Заключительный экзамен
 
 
-  #### Лабораторная работа&#58; Комплексная лабораторная работа
+  #### Лабораторная &#58; С оценкой
+
