--- a/learn-certs-pr/courses/md-100t03.yml
+++ b/learn-certs-pr/courses/md-100t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Защита Windows 10
+title: Protecting Windows 10
 metadata:
-  title: 'Курс MD-100T03-A: Защита Windows 10'
-  description: 'Курс MD-100T03-A: Защита Windows 10'
+  title: 'Course MD-100T03-A: Protecting Windows 10'
+  description: 'Course MD-100T03-A: Protecting Windows 10'
 uid: course.md-100t03
 courseNumber: 'MD-100T03-A'
 hoursToComplete: 24
@@ -29,11 +29,11 @@ summary: |-
   В этом курсе студенты узнают, как обезопасить ОС Windows 10 и защитить данные на устройстве. Студенты познакомятся с общими методами аутентификации и контроля доступа. Этот курс научит настраивать разрешения для файлов и папок и создавать политики безопасности. Кроме того, студенты познакомятся с различными типами внешних угроз и узнают, как использовать такие функции, как шифрование и брандмауэры, а также такие инструменты, как Защитник Windows.
 
   #### Профиль аудитории
-  Кандидатами на прохождение этого экзамена являются IT-специалисты, которые осуществляют установку, настройку, общее локальное управление и техническое обслуживание для основных служб Windows 10. Кандидаты также могут быть знакомы с корпоративными сценариями и облачными сервисами.
+  Кандидатами на этот экзамен являются ИТ-специалисты, которые выполняют установку, настройку, общее локальное управление и обслуживание основных сервисов Windows 10. Кандидаты также могут быть знакомы с корпоративными сценариями и облачными сервисами.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Базовое понимание компьютерных сетей и аппаратных концепций.
-  - Базовое понимание концепций ОС и приложений.
+  - Базовое понимание концепций ОС и  приложений.
   - Опыт работы с ОС Windows.
 outlineSection: |-
   ### Модуль 1&#58; Настройка авторизации и аутентификации
@@ -45,11 +45,11 @@ outlineSection: |-
   - Аутентификация
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать различные методы защиты данных и ОС Windows 10
-  - Описывать различные типы учетных записей пользователей и служб
-  - Настраивать Windows Hello
-  - Настраивать управление учетными записями пользователей
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать различные методы защиты данных и ОС Windows 10.
+  - Описать различные типы учетных записей пользователей и служб.
+  - Настройка Windows Hello.
+  - Настройка контроля учетной записи пользователя.
 
 
   ### Модуль 2&#58; Настройка доступа к данным и их использования
@@ -61,42 +61,42 @@ outlineSection: |-
   - Управление безопасностью с помощью политик
 
 
-  #### Лабораторная работа&#58; Настройка и управление разрешениями и общими ресурсами
+  #### Лабораторная &#58; Настройка и управление разрешениями и общими ресурсами
   - Создание, управление и совместное использование папки
   - Использование условий для контроля доступа и действующих разрешений
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать различия и преимущества поддерживаемых файловых систем
-  - Настраивать права доступа к файлам и папкам
-  - Настраивать общие папки
-  - Защищать Windows через локальные параметры политики
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать различия и преимущества поддерживаемых файловых систем.
+  - Настроить права доступа к файлам и папкам.
+  - Настроить общие папки.
+  - Защитить Windows через локальные параметры политики.
 
 
   ### Модуль 3&#58; Настройка защиты от угроз
   Этот модуль знакомит студентов с защитой устройств от внешних угроз. Студенты узнают о различных типах общих угроз. Этот модуль научит студентов использовать шифрование, межсетевые экраны и IPSec для защиты от угроз. Модуль завершится изучением того, как настроить и использовать Защитник Windows и AppLocker.
   #### Уроки
   - Защита от вредоносных программ и угроз
-  - Защитник Windows
+  - Windows Defender
   - Правила безопасности подключения
   - Расширенные методы защиты
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум&#58; Управление безопасностью сети
+  #### Лабораторная &#58; Лабораторный практикум&#58; Управление безопасностью сети
   - Создание и тестирование входящих правил
   - Создание и тестирование исходящих правил
   - Создание и тестирование правил безопасности подключения
   - Настройка Защитника Windows
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Выявлять общие угрозы безопасности
-  - Описывать методы, с помощью которых можно уменьшить эти общие угрозы безопасности
-  - Описывать различные методы шифрования
-  - Описывать , как брандмауэр Windows может защитить устройство
-  - Описывать преимущества использования IPSec
-  - Описывать различные функции Защитника Windows
-  - Описывать преимущества использования AppLocker
+  После завершения этого модуля студенты получат следующее&#58;
+  - Выявить общие угрозы безопасности
+  - Описать методы, с помощью которых можно уменьшить эти общие угрозы безопасности.
+  - Описать различные методы шифрования.
+  - Описать, как брандмауэр Windows может защитить устройство.
+  - Описать преимущества использования IPSec.
+  - Описать различные функции Защитника Windows.
+  - Описать преимущества использования AppLocker.
 
 
   ### Модуль 4&#58; Завершение курса
@@ -104,4 +104,5 @@ outlineSection: |-
   - Заключительный экзамен
 
 
-  #### Лабораторная работа&#58; Комплексная лабораторная работа
+  #### Лабораторная &#58; С оценкой
+
