--- a/learn-certs-pr/courses/md-100t04.yml
+++ b/learn-certs-pr/courses/md-100t04.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: Обслуживание Windows 10
+title: Maintaining Windows 10
 metadata:
-  title: 'Курс MD-100T04-A: Обслуживание Windows 10'
-  description: 'Курс MD-100T04-A: Обслуживание Windows 10'
+  title: 'Course MD-100T04-A: Maintaining Windows 10'
+  description: 'Course MD-100T04-A: Maintaining Windows 10'
 uid: course.md-100t04
 courseNumber: 'MD-100T04-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Использование средств устранения неполадок и мониторинга Windows
-- skill: Устранение неполадок при установке Windows
-- skill: Устранение неполадок при установке приложений
-- skill: Устранение неполадок в настройках веб-браузера
-- skill: Устранение неполадок аутентификации Windows
-- skill: Устранение аппаратных неполадок в машинах на Windows
+- skill: Использование средств устранения неполадок и мониторинга Windows.
+- skill: Устранение неполадок при установке Windows.
+- skill: Устранение неполадок при установке приложений.
+- skill: Устранение неполадок в настройках веб-браузера.
+- skill: Устранение неполадок аутентификации Windows.
+- skill: Устранение аппаратных неполадок в  машинах на Windows.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -34,7 +34,7 @@ summary: |-
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Базовое понимание компьютерных сетей и аппаратных концепций.
-  - Базовое понимание концепций ОС и приложений.
+  - Базовое понимание концепций ОС и  приложений.
   - Опыт работы с ОС Windows.
 outlineSection: |-
   ### Модуль 1&#58; Поддержка среды Windows 10
@@ -44,32 +44,32 @@ outlineSection: |-
   - Инструменты устранения неполадок
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум&#58; Мониторинг Windows 10
+  #### Лабораторная &#58; Лабораторный практикум&#58; Мониторинг Windows 10
   - Мониторинг событий
   - Мониторинг надежности и производительности
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать архитектуру Windows
-  - Описывать ключевые этапы устранения неполадок
-  - Описывать назначение и преимущества различных инструментов в Windows
-  - Использовать инструменты мониторинга, чтобы установить базовый уровень производительности
-  - Оптимизировать производительность на клиентах Windows 10
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать архитектуру Windows
+  - Описать ключевые этапы устранения неполадок
+  - Описать назначение и преимущества различных инструментов в Windows
+  - Использовать инструменты мониторинга, чтобы установить базовый уровень производительности.
+  - Оптимизация производительности на клиентах Windows 10
 
 
   ### Модуль 2&#58; Устранение неполадок Windows OS
-  В этом модуле учащиеся узнают, как решать проблемы с запуском и обслуживанием, связанные с операционной системой.  Этот модуль научит различным параметрам запуска и восстановления, а также способам устранения неполадок в различных службах Windows.
+  В этом модуле студенты узнают, как устранять неполадки запуска и обслуживания, связанные с операционной системой.  Этот модуль научит различным параметрам запуска и восстановления, а также способам устранения неполадок в различных сервисах Windows.
   #### Уроки
   - Устранение неполадок при запуске Windows
   - Устранение неполадок, связанных с обслуживанием операционной системы
   - Устранение неполадок при входе в систему
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать различные методы выявления и устранения проблем при запуске
-  - Описывать использование различных дополнительных параметров запуска
-  - Определять и отключать службу, в работе которой произошел сбой
-  - Выявлять устранять распространенные сценарии заблокированных учетных записей
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать различные методы выявления и устранения проблем при запуске
+  - Описать, когда использовать различные дополнительные параметры запуска
+  - Определить и отключить отказавший сервис
+  - Выявить и устранить распространенные сценарии заблокированных учетных записей.
 
 
   ### Модуль 3&#58; Устранение неполадок файлов и приложений
@@ -79,19 +79,19 @@ outlineSection: |-
   - Устранение неполадок приложения
 
 
-  #### Лабораторная работа&#58; Устранение неполадок в настольных приложениях
+  #### Лабораторная &#58; Устранение неполадок в настольных приложениях
   - Устранение неполадок приложений политики AppLocker
   - Устранение проблем совместимости приложений
   - Устранение неполадок в Microsoft Internet Explorer
   - Устранение неполадок с Microsoft Edge
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать различные методы восстановления файлов
-  - Настраивать Windows 10 для поддержки отдельных файлов и восстановления системы
-  - Восстанавливать конфигурацию устройства с помощью функции «Сброс настроек этого ПК»
-  - Решать проблемы совместимости приложений с помощью Application Compatibility Toolkit
-  - Устранять распространенные проблемы с браузером
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать различные методы восстановления файлов
+  - Настроить Windows 10 для поддержки отдельных файлов и восстановления системы
+  - Восстановить конфигурацию устройства с помощью функции «Сброс настроек этого ПК»
+  - Решить проблемы совместимости приложений с помощью Application Compatibility Toolkit
+  - Устранение распространенных проблем с браузером
 
 
   ### Модуль 4&#58; Устранение неполадок оборудования и драйверов
@@ -102,17 +102,17 @@ outlineSection: |-
   - Устранение физических сбоев
 
 
-  #### Лабораторная работа&#58; Устранение неполадок с драйвером устройства
+  #### Лабораторная &#58; Устранение неполадок с драйвером устройства
   - Устранение неполадок с отсутствующим драйвером устройства
   - Решение аппаратных проблем
   - Устранение проблем с драйвером устройства
   - Настройка параметров групповой политики для управления установкой устройства
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Устранять неполадки и проблемы с драйверами
-  - Устранять неполадки периферийных устройств
-  - Производить диагностику и замену оборудования
+  После завершения этого модуля студенты получат следующее&#58;
+  - Устранение неполадок и проблем с драйверами
+  - Устранение неполадок периферийных устройств
+  - Диагностика и замена оборудования
 
 
   ### Модуль 5&#58; Завершение курса
@@ -120,4 +120,5 @@ outlineSection: |-
   - Заключительный экзамен
 
 
-  #### Лабораторная работа&#58; Комплексная лабораторная работа
+  #### Лабораторная &#58; С оценкой
+
