--- a/learn-certs-pr/courses/md-101t01.yml
+++ b/learn-certs-pr/courses/md-101t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Развертывание современного рабочего стола
+title: Deploying the Modern Desktop
 metadata:
-  title: 'Курс MD-101T01-A: Развертывание современного рабочего стола'
-  description: 'Курс MD-101T01-A: Развертывание современного рабочего стола'
+  title: 'Course MD-101T01-A: Deploying the Modern Desktop'
+  description: 'Course MD-101T01-A: Deploying the Modern Desktop'
 uid: course.md-101t01
 courseNumber: 'MD-101T01-A'
 hoursToComplete: 48
@@ -10,7 +10,7 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Разработка стратегии развертывания и обновления операционной системы
 - skill: Понимание различных методов развертывания
-- skill: Понимание ого, какие сценарии локальных и облачных решений могут быть использованы
+- skill: Понимание  ого, какие сценарии локальных и облачных решений могут быть использованы
 - skill: Развертывание и миграция рабочих столов на Windows 10
 - skill: Планирование и настройка политик Центра обновления Windows
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
@@ -29,7 +29,7 @@ summary: |-
   По мере развития десктопов появляются методы их развертывания и обновления. В этом курсе вы узнаете, как планировать и реализовывать стратегию развертывания операционной системы. Этот курс поможет студентам понять различные доступные методы, сценарии, для которых они подходят, а также способы развертывания Windows с использованием современных методов. Этот курс также охватывает планирование и реализацию стратегии обновления Windows.
 
   #### Профиль аудитории
-  Modern Desktop Administrator (MDA) развертывает, настраивает, защищает, управляет и контролирует устройства и клиентские приложения в корпоративной среде. Его/ее обязанности включают управление идентификацией, доступом, политиками, обновлениями и приложениями. MDA сотрудничает с M365 Enterprise Administrator для разработки и реализации стратегии устройства, которая отвечает бизнес-потребностям современной организации. (MDA) должен быть знаком с рабочими нагрузками M365 и обладать сильными навыками и опытом развертывания, настройки и обслуживания устройств на Windows 10 и не на Windows. Роль MDA больше фокусируется на облачных службах, а не на локальных технологиях управления.
+  Modern Desktop Administrator (MDA) развертывает, настраивает, защищает, управляет и контролирует устройства и клиентские приложения в корпоративной среде. Его/ее обязанности включают управление идентификацией, доступом, политиками, обновлениями и приложениями. MDA сотрудничает с M365 Enterprise Administrator для разработки и реализации стратегии устройства, которая отвечает бизнес-потребностям современной организации. (MDA) должен быть знаком с рабочими нагрузками M365 и обладать сильными навыками и опытом развертывания, настройки и обслуживания устройств на Windows 10 и не на Windows. Роль MDA больше фокусируется на облачных сервисах, а не на локальных технологиях управления.
 prerequisitesSection: |-
   Администратор 
   Современного рабочего стола (MDA) должен быть знаком с рабочими нагрузками M365 и иметь
@@ -45,36 +45,36 @@ outlineSection: |-
   - Рекомендации по развертыванию Windows 10
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Планирование развертывания Windows 10
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать Windows как службу
-  - Описывать различные методы развертывания
-  - Понимать разницу между локальными и облачными решениями
-  - Описывать методы динамического обеспечения
-  - Описывать различные инструменты, доступные в комплекте для оценки и развертывания Windows
-  - Описывать сценарии и ограничения для обновления на месте и миграции
+  #### Лабораторная &#58; Лабораторный практикум - Планирование развертывания Windows 10
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать Windows как сервис.
+  - Описать различные методы развертывания.
+  - Понимать разницу между локальными и облачными решениями.
+  - Описать методы динамического обеспечения.
+  - Описать различные инструменты, доступные в комплекте для оценки и развертывания Windows.
+  - Описать сценарии и ограничения для обновления на месте и миграции.
 
 
   ### Модуль 2&#58; Внедрение Windows 10
-  Этот модуль описывает новые современные методы развертывания Windows 10, такие как Windows Autopilot и пакеты контроля использования. Этот модуль также охватывает инструмент, используемый при планировании обновления, совместимости приложений и методах миграции.
+  Этот модуль описывает новые современные методы развертывания Windows 10, такие как Windows Autopilot и пакеты подготовки. Этот модуль также охватывает инструмент, используемый при планировании обновления, совместимости приложений и методах миграции.
   #### Уроки
   - Внедрение Windows 10 с использованием динамического развертывания
-  - Внедрение Windows 10 с помощью Windows AutoPilot
+  - Внедрение Windows 10 с помощью автопилота Windows
   - Обновление устройств до Windows 10
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Внедрение Windows 10
-  - Создание и развертывание пакета контроля использования
-  - Перенос настроек пользователя
-  - Развертывание Windows 10 с помощью AutoPilot
+  #### Лабораторная &#58; Лабораторный практикум - Внедрение Windows 10
+  - Создание и развертывание пакета обеспечения
+  - Миграция пользовательских настроек
+  - Развертывание Windows 10 на автопилоте
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Разрабатывать стратегии развертывания и обновления операционной системы
-  - Понимать различные методы развертывания
-  - Понимать, для каких сценариев можно использовать локальные и облачные решения
-  - Развертывать и переносить рабочие столы на Windows 10
-  - Планировать и настраивать политики Центра обновления Windows
+  После завершения этого модуля студенты получат следующее&#58;
+  - Разрабатывать стратегии развертывания и обновления операционной системы.
+  - Понимать различные методы развертывания.
+  - Понять, для каких сценариев можно использовать локальные и облачные решения.
+  - Развертывать и переносить рабочие столы на Windows 10.
+  - Планировать и настраивать политики Центра обновления Windows.
 
 
   ### Модуль 3&#58; Управление обновлениями Windows 10
@@ -85,16 +85,16 @@ outlineSection: |-
   - Введение в Windows Analytics
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Управление обновлениями Windows 10
+  #### Лабораторная &#58; Лабораторный практикум - Управление обновлениями Windows 10
   - Ручная настройка параметров Центра обновления Windows
   - Настройка Центра обновления Windows с помощью объектов групповой политики
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать каналы обслуживания Windows 10
-  - Настраивать политику обновления Windows, используя параметры групповой политики
-  - Настраивать Центр обновления Windows для бизнеса для развертывания обновлений ОС
-  - Использовать Windows Analytics для оценки готовности к обновлению и соответствия обновлений
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать каналы обслуживания Windows 10.
+  - Настроить политику обновления Windows, используя параметры групповой политики.
+  - Настроить Центр обновления Windows для бизнеса для развертывания обновлений ОС.
+  - Использовать Windows Analytics для оценки готовности к обновлению и соответствия обновлений.
 
 
   ### Модуль 4&#58; Завершение курса
@@ -102,9 +102,10 @@ outlineSection: |-
   - Заключительный экзамен
 
 
-  #### Лабораторная работа&#58; Комплексная лабораторная работа
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать пакет контроля использования
-  - Настраивать развертывание с помощью Autopilot
-  - Описывать инструменты, используемые для планирования обновлений и миграций
-  - Описывать методы, используемые для переноса пользовательских данных
+  #### Лабораторная &#58; С оценкой
+  После завершения этого модуля студенты получат следующее&#58;
+  - Создать пакет обеспечения.
+  - Настроить развертывание на автопилоте.
+  - Описать инструменты, используемые для планирования обновлений и миграций.
+  - Описать методы, используемые для переноса пользовательских данных.
+
