--- a/learn-certs-pr/courses/md-101t02.yml
+++ b/learn-certs-pr/courses/md-101t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление современными рабочими столами и устройствами
+title: Managing Modern Desktops and Devices
 metadata:
-  title: 'Курс MD-101T02-A: Управление современными рабочими столами и устройствами'
-  description: 'Курс MD-101T02-A: Управление современными рабочими столами и устройствами'
+  title: 'Course MD-101T02-A: Managing Modern Desktops and Devices'
+  description: 'Course MD-101T02-A: Managing Modern Desktops and Devices'
 uid: course.md-101t02
 courseNumber: 'MD-101T02-A'
 hoursToComplete: 48
@@ -40,8 +40,7 @@ summary: |-
   управление приложениями и браузерными приложениями.
 
   #### Профиль аудитории
-  Modern Desktop Administrator (MDA) развертывает, настраивает, защищает, управляет и контролирует устройства и клиентские приложения в корпоративной среде. Его/ее обязанности включают управление идентификацией, доступом, политиками, обновлениями и приложениями. MDA сотрудничает с M365 Enterprise Administrator для разработки и реализации стратегии устройства, которая отвечает бизнес-потребностям современной организации. Администратор современного рабочего стола (MDA) должен быть знаком с рабочими нагрузками M365 и иметь
-  отличные навыки и опыт развертывания, настройки и обслуживания устройств на Windows 10 и не на Windows. Роль MDA больше фокусируется на облачных службах, а не на локальных технологиях управления.
+  Modern Desktop Administrator (MDA) развертывает, настраивает, защищает, управляет и контролирует устройства и клиентские приложения в корпоративной среде. Его/ее обязанности включают управление идентификацией, доступом, политиками, обновлениями и приложениями. MDA сотрудничает с M365 Enterprise Administrator для разработки и реализации стратегии устройства, которая отвечает бизнес-потребностям современной организации. MDA должен быть знаком с рабочими нагрузками M365 и обладать сильными навыками и опытом развертывания, настройки и обслуживания устройств на Windows 10 и не на Windows. Роль MDA больше фокусируется на облачных сервисах, а не на локальных технологиях управления.
 prerequisitesSection: |-
   Администратор
   современного рабочего стола должен быть знаком с рабочими нагрузками M365 и должен иметь
@@ -56,7 +55,7 @@ outlineSection: |-
   - Управление регистрацией устройств Intune и инвентаризацией
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Device Enrollment and Management
+  #### Лабораторная &#58; Лабораторный практикум - Device Enrollment and Management
   - Установка средства анализа миграции MDM (MMAT)
   - Получение лицензий Intune и Azure AD Premium и включение управления устройствами
   - Регистрация устройств в Intune
@@ -64,12 +63,12 @@ outlineSection: |-
   - Создание отчетов инвентаризации устройства
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать преимущества и методы перехода к совместному управлению
-  - Развертывать MDM с помощью Microsoft Intune
-  - Настраивать регистрацию устройства
-  - Зарегистрировать настольные и мобильные устройства в Windows Intune
-  - Настраивать и загружать отчеты об инвентаризации
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать преимущества и методы перехода к совместному управлению
+  - Развернуть MDM с помощью Microsoft Intune.
+  - Настроить регистрацию устройства
+  - Зарегистрировать настольные и мобильные устройства в Windows Intune.
+  - Настроить и загрузить отчеты об инвентаризации.
 
 
   ### Модуль 2&#58; Конфигурация профилей
@@ -80,17 +79,17 @@ outlineSection: |-
   - Мониторинга устройств
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Управление профилями
+  #### Лабораторная &#58; Лабораторный практикум - Управление профилями
   - Настройка перемещаемых профилей пользователей и перенаправление папок.
   - Создание и развертывание профиля устройства на основе сценария
   - Изменение развернутой политики и мониторинг активности пользователей и устройств.
   - Настройка Enterprise State Roaming
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать типы профилей устройств
-  - Создавать и назначать профили устройств
-  - Настраивать профиль пользователя и перенаправление папок
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать типы профилей устройств
+  - Создать и назначить профили устройств
+  - Настроить профиль пользователя и перенаправление папок.
   - Вести мониторинг и отчетность на устройствах с помощью Intune и Windows Analytics
 
 
@@ -102,19 +101,19 @@ outlineSection: |-
   - Администрирование приложений
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Управление приложениями
+  #### Лабораторная &#58; Лабораторный практикум - Управление приложениями
   - Развертывание приложений с помощью Intune
   - Настройка и развертывание Office 365 ProPlus из Intune.
   - Настройка политики MAM в Intune.
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать методы управления приложениями
-  - Развертывать приложения с использованием Intune и групповой политики.
-  - Настраивать Microsoft Store для бизнеса
-  - Развертывать Office365 ProPlus с помощью Intune
-  - Управлять и сообщать об инвентаризации приложений и лицензий
-  - Настраивать Internet Explorer Enterprise Mode
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать методы управления приложениями
+  - Развертывание приложений с использованием Intune и групповой политики.
+  - Настройка Microsoft Store для бизнеса
+  - Развертывание Office365 ProPlus с помощью Intune.
+  - Управление и отчетность инвентаризации приложений и лицензий
+  - Настройка Internet Explorer Enterprise Mode
 
 
   ### Модуль 4&#58; Завершение курса
@@ -122,9 +121,10 @@ outlineSection: |-
   - Заключительный экзамен
 
 
-  #### Лабораторная работа&#58; Комплексная лабораторная работа
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать типы профилей устройств
-  - Создавать и назначать профили устройств
-  - Настраивать профиль пользователя и перенаправление папок
+  #### Лабораторная &#58; С оценкой
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать типы профилей устройств
+  - Создать и назначить профили устройств
+  - Настроить профиль пользователя и перенаправление папок.
   - Вести мониторинг и отчетность на устройствах с помощью Intune и Windows Analytics
+
