--- a/learn-certs-pr/courses/md-101t03.yml
+++ b/learn-certs-pr/courses/md-101t03.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: Защита современных настольных компьютеров и устройств
+title: Protecting Modern Desktops and Devices
 metadata:
-  title: 'Курс MD-101T03-A: Защита современных настольных компьютеров и устройств'
-  description: 'Курс MD-101T03-A: Защита современных настольных компьютеров и устройств'
+  title: 'Course MD-101T03-A: Protecting Modern Desktops and Devices'
+  description: 'Course MD-101T03-A: Protecting Modern Desktops and Devices'
 uid: course.md-101t03
 courseNumber: 'MD-101T03-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Описать преимущества и возможности Azure AD
-- skill: Управление пользователями с помощью Azure AD с Active Directory DS
-- skill: Внедрение Windows Hello для бизнеса
-- skill: Настройка правил условного доступа на основе политик соответствия
-- skill: Описать различные инструменты, используемые для защиты устройств и данных
-- skill: Реализовать расширенная защиту от угроз Windows Defender
+- skill: Описать преимущества и возможности Azure AD.
+- skill: Управление пользователями с помощью Azure AD с Active Directory DS.
+- skill: Внедрение Windows Hello для бизнеса.
+- skill: Настройка правил условного доступа на основе политик соответствия.
+- skill: Описать различные инструменты, используемые для защиты устройств и данных.
+- skill: Реализовать расширенная защиту от угроз Windows Defender.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -27,13 +27,13 @@ products:
 exams:
 - uid: exam.md-101
 summary: |-
-  Каждый день все больше организаций просят ИТ поддержать мобильность рабочей силы. В современных средах администратор рабочего стола должен иметь возможность управлять телефонами, планшетами и компьютерами и поддерживать их, независимо от того, принадлежат ли они организации или лично принадлежат сотруднику. В то же время ИТ-отдел должен иметь возможность защищать данные, к которым имеют доступ эти устройства. На этом курсе студент познакомится с ключевыми понятиями безопасности в современном управлении. Этот курс охватывает аутентификацию, идентификацию и доступ, а также способы защиты этих категорий. Слушатель познакомится с Azure Active Directory и узнает, как использовать Microsoft Intune для защиты устройств и данных с помощью политик соответствия. Наконец, в этом курсе будут рассмотрены ключевые возможности Azure Information Protection и расширенной защиты от угроз Защитника Windows и способы их реализации.
+  Каждый день все больше организаций просят ИТ поддержать мобильную связь с рабочей силой. В современных средах администратор рабочего стола должен иметь возможность управлять телефонами, планшетами и компьютерами и поддерживать их, независимо от того, принадлежат ли они организации или лично принадлежат сотруднику. В то же время ИТ-отдел должен иметь возможность защищать данные, к которым имеют доступ эти устройства. На этом курсе студент познакомится с ключевыми понятиями безопасности в современном управлении. Этот курс охватывает аутентификацию, идентификацию и доступ, а также способы защиты этих категорий. Слушатель познакомится с Azure Active Directory и узнает, как использовать Microsoft Intune для защиты устройств и данных с помощью политик соответствия. Наконец, в этом курсе будут рассмотрены ключевые возможности Azure Information Protection и расширенной защиты от угроз Защитника Windows и способы их реализации.
 
   #### Профиль аудитории
-  Modern Desktop Administrator (MDA) развертывает, настраивает, защищает, управляет и контролирует устройства и клиентские приложения в корпоративной среде. Его/ее обязанности включают управление идентификацией, доступом, политиками, обновлениями и приложениями. MDA сотрудничает с M365 Enterprise Administrator для разработки и реализации стратегии устройства, которая отвечает бизнес-потребностям современной организации. Администратор современного рабочего стола (MDA) должен быть знаком с рабочими нагрузками M365 и иметь отличные навыки и опыт развертывания, настройки и обслуживания устройств на Windows 10 и не на Windows. Роль MDA больше фокусируется на облачных службах, а не на локальных технологиях управления.
+  Modern Desktop Administrator (MDA) развертывает, настраивает, защищает, управляет и контролирует устройства и клиентские приложения в корпоративной среде. Его/ее обязанности включают управление идентификацией, доступом, политиками, обновлениями и приложениями. MDA сотрудничает с M365 Enterprise Administrator для разработки и реализации стратегии устройства, которая отвечает бизнес-потребностям современной организации. MDA должен быть знаком с рабочими нагрузками M365 и обладать сильными навыками и опытом развертывания, настройки и обслуживания устройств на Windows 10 и не на Windows. Роль MDA больше фокусируется на облачных сервисах, а не на локальных технологиях управления.
 prerequisitesSection: |-
   Администратор
-  современного рабочего стола (MDA) должен быть знаком с рабочими нагрузками M365 и должен иметь
+  современного рабочего стола (MDA)   должен быть знаком с рабочими нагрузками M365 и должен иметь
   отличные навыки и опыт развертывания, настройки и обслуживания устройств на Windows
   10 и не на Windows. Роль MDA больше фокусируется на облачных сервисах, а не на
   локальных технологиях управления.
@@ -48,19 +48,19 @@ outlineSection: |-
   - Включение корпоративного доступа
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Управление объектами и аутентификацией в Azure AD
-  - Включение и настройка Azure AD Premium с клиентом Enterprise Mobility + Security (EMS)
-  - Создание пользовательских и групповых объектов с помощью пользовательского интерфейса и Windows PowerShell
+  #### Лабораторная &#58; Лабораторный практикум - Управление объектами и аутентификацией в Azure AD
+  - Включение и настройка Azure AD Premium с клиентом Enterprise Mobility + Security (EMS).
+  - Создание пользовательских и групповых объектов с помощью пользовательского интерфейса и Windows PowerShell.
   - Настройка самостоятельного сброса пароля (SSPR) для учетных записей пользователей в Azure AD
   - Присоединение устройства к Azure AD
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать возможности Azure AD
-  - Управлять пользователями с помощью Azure AD с Active Directory DS
-  - Внедрять Windows Hello for Business
-  - Присоединять устройства к Azure AD
-  - Описывать способы обеспечения доступа из внешних сетей
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать возможности Azure AD.
+  - Управлять пользователями с помощью Azure AD с Active Directory DS.
+  - Внедрить Windows Hello для бизнеса.
+  - Присоединять устройства к Azure AD.
+  - Описать способы обеспечения доступа из внешних сетей.
 
 
   ### Модуль 2&#58; Управление устройствами и политиками устройств
@@ -71,17 +71,17 @@ outlineSection: |-
   - Реализация политик соответствия устройств
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Управление устройствами
+  #### Лабораторная &#58; Лабораторный практикум - Управление устройствами
   - Настройка Microsoft Intune для управления устройствами
   - Настройка политик соответствия и профилей устройств
   - Регистрация устройств Windows 10 и управление соответствием
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать управление мобильными устройствами с помощью Intune
-  - Создавать и назначать профили устройств для защиты данных на устройствах
-  - Развертывать политики соответствия и условного доступа
-  - Использовать Intune для мониторинга соответствия устройств
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать управление мобильными устройствами с помощью Intune.
+  - Создавать и назначать профили устройств для защиты данных на устройствах.
+  - Развертывать политики соответствия и условного доступа.
+  - Использовать Intune для мониторинга соответствия устройств.
 
 
   ### Модуль 3&#58; Управление безопасностью
@@ -92,17 +92,17 @@ outlineSection: |-
   - Управление Защитником Windows в Windows 10
 
 
-  #### Лабораторная работа&#58; Лабораторный практикум - Управление безопасностью в Windows 10
+  #### Лабораторная &#58; Лабораторный практикум - Управление безопасностью в Windows 10
   - Настройка шифрованной файловой системы (EFS)
   - Настройка BitLocker
   - Настройка политики WIP в Intune
   - Настройка Защитника Windows
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать методы защиты данных устройства
-  - Описывать возможности и преимущества Защитника Windows ATP
-  - Развертывать и управлять настройками для клиентов Защитника Windows
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать методы защиты данных устройства.
+  - Описать возможности и преимущества Защитника Windows ATP
+  - Развертывать и управлять настройками для клиентов Защитника Windows.
 
 
   ### Модуль 4&#58; Завершение курса
@@ -110,4 +110,5 @@ outlineSection: |-
   - Заключительный экзамен
 
 
-  #### Лабораторная работа&#58; Комплексная лабораторная работа
+  #### Лабораторная &#58; С оценкой
+
