--- a/learn-certs-pr/courses/ms-100t00.yml
+++ b/learn-certs-pr/courses/ms-100t00.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Идентификация и службы в Microsoft 365
+title: Microsoft 365 Identity and Services
 metadata:
-  title: 'Курс MS-100T00-A: Идентификация и службы в Microsoft 365'
-  description: 'Курс MS-100T00-A: Идентификация и службы в Microsoft 365'
+  title: 'Course MS-100T00-A: Microsoft 365 Identity and Services'
+  description: 'Course MS-100T00-A: Microsoft 365 Identity and Services'
 uid: course.ms-100t00
 courseNumber: 'MS-100T00-A'
 hoursToComplete: 120
@@ -46,7 +46,7 @@ outlineSection: |-
   - Планирование идентификации и аутентификации
   - Планирование настройки вашего сервиса
   - Планирование вашей гибридной среды
-  - Планирование миграции в Office 365
+  - Планирование миграции на Office 365
 
 
   ### Модуль 2&#58; Настройка арендатора Microsoft 365 Tenant
@@ -59,22 +59,22 @@ outlineSection: |-
   - Использование FastTrack и партнерских услуг
 
 
-  ### Модуль 3&#58; Лабораторная 1 - Настройка Microsoft 365 Tenant
+  ### Модуль 3&#58; Лабораторная 1 - Настройка арендатора Microsoft 365 Tenant
 
-  #### Лабораторная работа&#58; Настройка Microsoft 365 Tenant
-  - Упражнение 1 - Настройка пр Microsoft 365 Trial Tenant
+  #### Лабораторная &#58; Настройка арендатора Microsoft 365 Tenant
+  - Упражнение 1 - Настройка пробного арендатора Microsoft 365
 
 
-  ### Модуль 4&#58; Управление Microsoft 365 Tenant
+  ### Модуль 4&#58; Управление арендатором Microsoft 365 Tenant
   #### Уроки
   - Настройка ролей арендатора
-  - Управление здоровьем и услугами арендатора 
+  - Управление состоянием и сервисами арендатора
 
 
-  ### Модуль 5&#58; Лабораторная 2 - Управление Microsoft 365 Tenant
+  ### Модуль 5&#58; Лабораторная 2 - Управление арендатором Microsoft 365 Tenant
 
-  #### Лабораторная работа&#58; Управление Microsoft 365 Tenant
-  - Упражнение 1 - Управление делегированием администрирования 
+  #### Лабораторная &#58; Управление арендатором Microsoft 365 Tenant
+  - Упражнение 1 - Управление делегированием администрации
   - Упражнение 2 - Настройка шифрования сообщений Office 365 (OME)
   - Упражнение 3 - Контроль и устранение неполадок в Office 365
 
@@ -90,7 +90,7 @@ outlineSection: |-
 
   ### Модуль 7&#58; Лабораторная 3 - Обзор Office 365
 
-  #### Лабораторная работа&#58; Обзор Office 365
+  #### Лабораторная &#58; Обзор Office 365
   - Упражнение 1 - Обзор Exchange Online
   - Упражнение 2 - Обзор SharePoint Online
   - Упражнение 3 - Обзор команд
@@ -112,7 +112,7 @@ outlineSection: |-
 
   ### Модуль 10&#58; Лабораторная 4 - Управление установками Office 365 ProPlus
 
-  #### Лабораторная работа&#58; Управление установками Office 365 ProPlus
+  #### Лабораторная &#58; Управление установками Office 365 ProPlus
   - Упражнение 1 - Подготовка управляемой установки Office 365 ProPlus
   - Упражнение 2 - Управление централизованной установкой Office 365 ProPlus
   - Упражнение 3 - Развертывание и настройка компонентов телеметрии в офисе
@@ -129,8 +129,8 @@ outlineSection: |-
 
   ### Модуль 12&#58; Лабораторная 5 - Внедрение синхронизации идентификаторов
 
-  #### Лабораторная работа&#58; Внедрение синхронизации идентификаторов
-  - Упражнение 1 - Настройка организации для синхронизации идентификаторов
+  #### Лабораторная &#58; Внедрение синхронизации идентификаторов
+  - Упражнение 1 - Настройка  организации для синхронизации идентификаторов
   - Упражнение 2 - Реализация синхронизации идентификаторов
 
 
@@ -139,3 +139,4 @@ outlineSection: |-
   - Реализация приложений в Azure AD
   - Настройка прокси приложения Azure AD
   - Разработка решений для внешнего доступа
+
