--- a/learn-certs-pr/courses/ms-101t02.yml
+++ b/learn-certs-pr/courses/ms-101t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление соответствием в Microsoft 365
+title: Microsoft 365 Compliance Management
 metadata:
-  title: 'Курс MS-101T02-A: Управление соответствием в Microsoft 365'
-  description: 'Курс MS-101T02-A: Управление соответствием в Microsoft 365'
+  title: 'Course MS-101T02-A: Microsoft 365 Compliance Management'
+  description: 'Course MS-101T02-A: Microsoft 365 Compliance Management'
 uid: course.ms-101t02
 courseNumber: 'MS-101T02-A'
 hoursToComplete: 48
@@ -95,20 +95,21 @@ outlineSection: |-
 
   ### Модуль 6&#58; Лабораторный практикум
 
-  #### Лабораторная работа&#58; Настройка вашей лабораторной среды
+  #### Лабораторная &#58; Настройка вашей лабораторной среды
   - Exercise 1&#58; Инициализация соответствия в вашей организации
 
 
-  #### Лабораторная работа&#58; Архивирование и хранение в Microsoft 365
+  #### Лабораторная &#58; Архивирование и хранение в Microsoft 365
   - Упражнение 1&#58; Настройка тегов и политики хранения
-  - Упражнение 2&#58; Настройка AIP и WIP
+  - Упражнение 2&#58; Настройка AIP и  WIP
 
 
-  #### Лабораторная работа&#58; Внедрение принципов управления данными
+  #### Лабораторная &#58; Внедрение принципов управления данными
   - Упражнение 1&#58; Тестирование политики DLP
   - Упражнение 2&#58; Использование защиты информации Azure
   - Упражнение 3&#58; Использование защиты информации Windows
 
 
-  #### Лабораторная работа&#58; Проверьте свои политики управления данными
-  - Упражнение 1&#58; Исследуйте ваши данные Microsoft 365
+  #### Лабораторная &#58; Проверьте свои политики управления данными
+  - Exercise 1&#58; Исследуйте ваши данные Microsoft 365
+
