--- a/learn-certs-pr/courses/ms-200t02.yml
+++ b/learn-certs-pr/courses/ms-200t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление клиентским доступом и потоком почты
+title: Managing Client Access and Mail Flow
 metadata:
-  title: 'Курс MS-200T02-A: Управление клиентским доступом и потоком почты'
-  description: 'Курс MS-200T02-A: Управление клиентским доступом и потоком почты'
+  title: 'Course MS-200T02-A: Managing Client Access and Mail Flow'
+  description: 'Course MS-200T02-A: Managing Client Access and Mail Flow'
 uid: course.ms-200t02
 courseNumber: 'MS-200T02-A'
 hoursToComplete: 48
@@ -62,7 +62,7 @@ outlineSection: |-
   #### Уроки
   - Обзор сервисов транспортировки
   - Настройка передачи сообщений
-  - Управление передачей сообщений 
+  - Управление передачей сообщений
 
 
   ### Модуль 4&#58; Управление и устранение неполадок потока почты
@@ -75,10 +75,11 @@ outlineSection: |-
 
   ### Модуль 5&#58; Завершение курса
 
-  #### Лабораторная работа&#58; Управление клиентским доступом и потоком почты
+  #### Лабораторная &#58; Управление клиентским доступом и потоком почты
   - Создание пользовательского соединения получения
   - Создание пользовательского соединения отправки
   - Включение и отключение ActiveSync для одного почтового ящика
   - Включение и отключение ActiveSync для нескольких почтовых ящиков
   - Включение и отключение доступа MAPI к одному почтовому ящику
   - Включение и отключение доступа MAPI к нескольким почтовым ящикам
+
