--- a/learn-certs-pr/courses/ms-200t03.yml
+++ b/learn-certs-pr/courses/ms-200t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление высокой доступностью сообщений и аварийное восстановление
+title: Managing Messaging High Availability and Disaster Recovery
 metadata:
-  title: 'Курс MS-200T03-A: Управление высокой доступностью сообщений и аварийное восстановление'
-  description: 'Курс MS-200T03-A: Управление высокой доступностью сообщений и аварийное восстановление'
+  title: 'Course MS-200T03-A: Managing Messaging High Availability and Disaster Recovery'
+  description: 'Course MS-200T03-A: Managing Messaging High Availability and Disaster Recovery'
 uid: course.ms-200t03
 courseNumber: 'MS-200T03-A'
 hoursToComplete: 48
@@ -31,7 +31,7 @@ exams:
 - uid: exam.ms-200
 summary: |-
   На этом курсе студенты узнают о традиционных и современных решениях для обеспечения высокой доступности сообщений и аварийного восстановления. Системы обмена сообщениями становятся все более сложными, учитывая обилие новых функций, которые были добавлены в последние несколько лет, а также повышенное значение доступности и аварийного восстановления. Традиционные подходы к обеспечению высокой доступности и аварийного восстановления все еще применяются и существуют в основном на аппаратном уровне, например системы RAID для хранения, репликация блочных устройств и решения для архивирования с использованием внешнего хранилища. Хотя Microsoft Exchange поддерживает эти традиционные подходы, он также предлагает решения, которые модернизируют высокую доступность и аварийное восстановление, предоставляя решения, непосредственно интегрированные в системы обмена сообщениями. Это включает в себя такие вещи, как решения для непрерывной репликации и хранения, которые встроены непосредственно в базы данных сообщений. Это экономит администраторам много времени и усилий, поддерживая различные уровни сторонних решений в области аппаратного и программного обеспечения.
-  
+
   На этом курсе слушатели познакомятся с каждым решением, узнают, когда использовать одно или другое, как спланировать развертывание и как выполнить реальную реализацию.
 
   #### Профиль аудитории
@@ -76,6 +76,7 @@ outlineSection: |-
 
   ### Модуль 4&#58; Лабораторная - Управление общими папками и их аварийное восстановление
 
-  #### Лабораторная работа&#58; Управление общими папками и их аварийное восстановление
+  #### Лабораторная &#58; Управление общими папками и их аварийное восстановление
   - Упражнение 1&#58; Устранение проблем потока почты и соединения
   - Упражнение 2&#58; Аварийное восстановление с использованием eDiscovery и удержаний на месте
+
