--- a/learn-certs-pr/courses/ms-201t01.yml
+++ b/learn-certs-pr/courses/ms-201t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Определение стратегии гибридного обмена сообщениями
+title: Defining a Hybrid Messaging Strategy
 metadata:
-  title: 'Курс MS-201T01-A: Определение стратегии гибридного обмена сообщениями'
-  description: 'Курс MS-201T01-A: Определение стратегии гибридного обмена сообщениями'
+  title: 'Course MS-201T01-A: Defining a Hybrid Messaging Strategy'
+  description: 'Course MS-201T01-A: Defining a Hybrid Messaging Strategy'
 uid: course.ms-201t01
 courseNumber: 'MS-201T01-A'
 hoursToComplete: 48
@@ -48,7 +48,7 @@ outlineSection: |-
   - Выполнение миграции IMAP 
   - Выполнение смены и поэтапной миграции
   - Выполнение продвинутых миграций
-
+  
 
   ### Модуль 2&#58; Планирование гибридной среды
   #### Уроки
@@ -66,6 +66,7 @@ outlineSection: |-
 
   ### Модуль 4&#58; Лабораторная - Гибридное развертывание и управление
 
-  #### Лабораторная работа&#58; Гибридное развертывание и управление
+  #### Лабораторная &#58; Гибридное развертывание и управление
   - Упражнение 1&#58; Выполнение миграции почтового ящика в Microsoft 365
   - Упражнение 2&#58; Управление гибридными сценариями
+
