--- a/learn-certs-pr/courses/ms-201t02.yml
+++ b/learn-certs-pr/courses/ms-201t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление безопасностью, гигиеной и соответствием сообщений
+title: Managing Messaging Security, Hygiene, and Compliance
 metadata:
-  title: 'Курс MS-201T02-A: Управление безопасностью, гигиеной и соответствием сообщений'
-  description: 'Курс MS-201T02-A: Управление безопасностью, гигиеной и соответствием сообщений'
+  title: 'Course MS-201T02-A: Managing Messaging Security, Hygiene, and Compliance'
+  description: 'Course MS-201T02-A: Managing Messaging Security, Hygiene, and Compliance'
 uid: course.ms-201t02
 courseNumber: 'MS-201T02-A'
 hoursToComplete: 48
@@ -60,12 +60,13 @@ outlineSection: |-
   #### Уроки
   - Управление ролями администратора
   - Управление ролями пользователей
-  - Настройка обмена - допуск разделения RBAC и AD
+  - Настройка обмена - допуск  разделения RBAC и AD
 
 
-  ### Модуль 4&#58; Лабораторная - Управление гигиеной сообщений
+  ### Модуль 4&#58; Лабораторная -  Управление гигиеной сообщений
 
-  #### Лабораторная работа&#58; Управление гигиеной сообщений
-  - Упражнение 1&#58; Управление гигиеной сообщений в локальном решении
-  - Упражнение 2&#58; Управление гигиеной сообщений в облачном решении
-  - Упражнение 3&#58; Управление гигиеной сообщений в гибридном решении
+  #### Лабораторная &#58;  Управление гигиеной сообщений
+  - Упражнение 1&#58;  Управление гигиеной сообщений в локальном решении
+  - Упражнение 2&#58;  Управление гигиеной сообщений в облачном решении
+  - Упражнение 3&#58;  Управление гигиеной сообщений в гибридном решении
+
