--- a/learn-certs-pr/courses/ms-300t01.yml
+++ b/learn-certs-pr/courses/ms-300t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление контентными службами Office 365
+title: Managing Office 365 Content Services
 metadata:
-  title: 'Курс MS-300T01-A: Управление контентными службами Office 365s'
-  description: 'Курс MS-300T01-A: Управление контентными службами Office 365s'
+  title: 'Course MS-300T01-A: Managing Office 365 Content Services'
+  description: 'Course MS-300T01-A: Managing Office 365 Content Services'
 uid: course.ms-300t01
 courseNumber: 'MS-300T01-A'
 hoursToComplete: 48
@@ -34,7 +34,7 @@ summary: |-
   Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют инфраструктурой командной работы в своей организации. 
 
   Это первый из четырех курсов для роли администратора коллективной работы. Эти курсы помогают подготовиться к экзамену MS-300&#58; Развертывание Microsoft 365 Teamwork.
-
+  
   #### Профиль аудитории
   Этот курс предназначен для роли администратора коллективной работы Microsoft 365. Эта роль отвечает за настройку, развертывание и управление рабочими нагрузками Office 365 и Azure, ориентированными на эффективное и результативное сотрудничество и принятие. Они управляют приложениями, службами и поддерживающей инфраструктурой для удовлетворения бизнес-требований. Администратор знает о товарах и ​​услугах и может различать их, но не может напрямую управлять каждым товаром или услугой.
 
@@ -55,7 +55,7 @@ outlineSection: |-
   - Управление семейством сайтов
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить концепции семейства сайтов
   - Создавать семейства сайтов
   - Управлять лимитами хранения семейства сайтов
@@ -72,7 +72,7 @@ outlineSection: |-
   - Управление OneDrive для бизнеса
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять лимитами хранения пользователей
   - Настраивать хранение данных в OneDrive для бизнеса
   - Использовать групповую политику для управления настройками клиента синхронизации OneDrive.
@@ -90,7 +90,7 @@ outlineSection: |-
   - Мониторинг SharePoint и OneDrive
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать внешний обмен в SharePoint Online и OneDrive для бизнеса
   - Описать параметры управления доступом устройств к SharePoint Online и OneDrive для бизнеса.
   - Просматривать отчеты Office 365, которые измеряют SharePoint Online и OneDrive для использования в бизнесе
@@ -98,4 +98,5 @@ outlineSection: |-
 
   ### Модуль 4&#58; Завершение курса
 
-  #### Лабораторная работа&#58; Создание и настройка семейства сайтов
+  #### Лабораторная &#58; Создание и настройка семейства сайтов
+
