--- a/learn-certs-pr/courses/ms-300t03.yml
+++ b/learn-certs-pr/courses/ms-300t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Включение команд Microsoft Teams для совместной работы
+title: Enabling Microsoft Teams for Collaboration
 metadata:
-  title: 'Курс MS-300T03-A: Включение команд Microsoft Teams для совместной работы'
-  description: 'Курс MS-300T03-A: Включение команд Microsoft Teams для совместной работы'
+  title: 'Course MS-300T03-A: Enabling Microsoft Teams for Collaboration'
+  description: 'Course MS-300T03-A: Enabling Microsoft Teams for Collaboration'
 uid: course.ms-300t03
 courseNumber: 'MS-300T03-A'
 hoursToComplete: 24
@@ -33,7 +33,7 @@ summary: |-
   Microsoft Teams является центром совместной работы в Microsoft 365. В этом курсе вы узнаете, как планировать, развертывать и управлять командами Microsoft Teams. В частности, в этом курсе обсуждаются взаимоотношения команд с группами SharePoint, OneDrive и Office 365. Он предоставляет лучшие практики для принятия и развертывания команд в вашей организации. В нем также рассказывается, как установить гостевые политики и управление данными для ваших команд.
 
   Этот курс предназначен для ИТ-специалистов, которые управляют и разворачивают команды Microsoft Teams в своей организации. 
-  
+
   Это третий из четырех курсов на роль администратора коллективной работы. Эти курсы помогают подготовиться к экзамену MS-300&#58; Развертывание Microsoft 365 Teamwork.
 
   #### Профиль аудитории
@@ -57,7 +57,7 @@ outlineSection: |-
   - Аутентификация и доступ
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить, как команды взаимодействуют с SharePoint Online, Exchange Online и OneDrive
   - Описать клиентов различных команд и как их можно использовать
   - Описать, как подготовить свою сеть для трафика Команд
@@ -68,15 +68,15 @@ outlineSection: |-
 
 
   ### Модуль 2&#58; Настройка команд Microsoft
-  В этом модуле объясняется, как настроить команды Microsoft.  В нем обсуждается использование вкладок, ботов и коннекторов в командах.  В нем представлены концепции, связанные с управлением встречами в командах.
+  В этом модуле объясняется, как  настроить команды Microsoft.  В нем обсуждается использование вкладок, ботов и коннекторов в командах.  В нем представлены концепции, связанные с управлением встречами в командах.
   #### Уроки
   - Настраивать команды Microsoft в Office 365
   - Приложения в командах Microsoft
   - Встречи в командах
 
 
-  #### Лабораторная работа&#58; Настройка команд Microsoft Teams
-  После завершения этого модуля студенты смогут&#58;
+  #### Лабораторная &#58; Настройка команд Microsoft Teams
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать команды Microsoft в Office 365
   - Описать и администрировать приложения в командах Microsoft
   - Использовать ботов и вкладки в командах
@@ -94,10 +94,11 @@ outlineSection: |-
   - Управление и отчетность
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать функции безопасности и соответствия, доступные для команд
   - Описать, как Microsoft Intune можно использовать для защиты данных команд на мобильных устройствах.
   - Провести аудит журнала и поиск контента для команд
   - Описать подход Microsoft к конфиденциальности данных в Office 365
   - Выполнять просмотр отчетов Office 365, которые измеряют использование команд
   - Включить качество обслуживания для команд Microsoft
+
