--- a/learn-certs-pr/courses/ms-301t02.yml
+++ b/learn-certs-pr/courses/ms-301t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Внедрение сервисных приложений SharePoint 2019
+title: Implementing SharePoint 2019 Service Applications
 metadata:
-  title: 'Курс MS-301T02-A: Внедрение сервисных приложений SharePoint 2019'
-  description: 'Курс MS-301T02-A: Внедрение сервисных приложений SharePoint 2019'
+  title: 'Course MS-301T02-A: Implementing SharePoint 2019 Service Applications'
+  description: 'Course MS-301T02-A: Implementing SharePoint 2019 Service Applications'
 uid: course.ms-301t02
 courseNumber: 'MS-301T02-A'
 hoursToComplete: 48
@@ -36,16 +36,16 @@ exams:
 - uid: exam.ms-301
 summary: |-
   Платформа SharePoint Server 2019 разработана с учетом требований современных стилей работы. Она предоставляет новые современные возможности для пользователей, которые являются интуитивно понятными и знакомыми по SharePoint Online. В этом курсе вы узнаете, как планировать, настраивать и управлять сервисными приложениями в SharePoint 2019, такими как управляемые метаданные, службы Business Connectivity Services и корпоративный поиск.
-  
+
   Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют инфраструктурой командной работы в своей организации.
-  
+
   Это второй из четырех курсов для администратора Teamwork. Эти курсы помогают подготовиться к экзамену MS-301&#58; Развертывание SharePoint Server Hybrid.
 
   #### Профиль аудитории
   Этот курс предназначен для роли администратора коллективной работы Microsoft 365. Эта роль отвечает за настройку, развертывание и управление рабочими нагрузками Office 365 и Azure, ориентированными на эффективное и результативное сотрудничество и принятие. Они управляют приложениями, службами и поддерживающей инфраструктурой для удовлетворения бизнес-требований. Администратор знает и может различать продукты и услуги, но не может напрямую управлять каждым продуктом или услугой.
-  
+
   Администратор совместной работы должен иметь возможность развертывать, управлять, переносить и защищать SharePoint (в сети, локально и гибридно), OneDrive и группы.
-  
+
   Администратор Teamwork обладает фундаментальным пониманием точек интеграции со следующими приложениями и службами&#58; Office, PowerApps, Flow, Yammer, Microsoft Graph, Stream, Planner и Project. Администратор понимает, как интегрировать сторонние приложения и сервисы, в том числе бизнес-приложения.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
@@ -63,7 +63,7 @@ outlineSection: |-
   - Планирование и настройка Business Connectivity Services (BCS) и Secure Store
   - Планирование и настройка профилей пользователей
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить ключевые компоненты модели BDC.
   - Описать архитектуру высокого уровня BCS.
   - Привести пример сервисного приложения BDC.
@@ -85,12 +85,12 @@ outlineSection: |-
   - Управляемые метаданные
   - Настройка службы управляемых метаданных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить функции и использование типов контента.
   - Описать функции службы управляемых метаданных.
   - Объяснить, как создавать и публиковать типы контента в семействах сайтов.
   - Определить возможности службы управляемых метаданных.
-  - Создавать и управлять группами терминов, наборами терминов и терминами.
+  - Создавать и управлять группами терминов, наборами терминов и терминами
   - Настроить наборы терминов и термины для управляемой навигации.
 
 
@@ -101,7 +101,7 @@ outlineSection: |-
   - Настройка поиска предприятия
   - Управление поиском предприятия
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать функцию поиска компонентов.
   - Объяснить, как спланировать и настроить топологию поиска.
   - Описать, как планировать и настраивать источники контента.
@@ -116,3 +116,4 @@ outlineSection: |-
   ### Модуль 4&#58; Завершение курса
 
   #### Лабораторная работа&#58; Настройка поисковой системы предприятия
+
