--- a/learn-certs-pr/courses/ms-301t03.yml
+++ b/learn-certs-pr/courses/ms-301t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Реализация гибридных сценариев SharePoint
+title: Implementing SharePoint Hybrid Scenarios
 metadata:
-  title: 'Курс MS-301T03-A: Реализация гибридных сценариев SharePoint'
-  description: 'Курс MS-301T03-A: Реализация гибридных сценариев SharePoint'
+  title: 'Course MS-301T03-A: Implementing SharePoint Hybrid Scenarios'
+  description: 'Course MS-301T03-A: Implementing SharePoint Hybrid Scenarios'
 uid: course.ms-301t03
 courseNumber: 'MS-301T03-A'
 hoursToComplete: 24
@@ -34,16 +34,16 @@ exams:
 - uid: exam.ms-301
 summary: |-
   Деловой климат изменился. Люди хотят общаться и сотрудничать без барьеров. Предприятиям нужны решения, которые были бы экономически эффективными и гибкими. Гибридная среда позволяет корпоративным пользователям подключаться к необходимым им ресурсам и контенту практически из любого места. В этом курсе вы узнаете, как планировать и реализовывать гибридные сценарии SharePoint, которые обеспечивают удобство работы пользователей. Мы также продолжим обсуждение гибридного поиска SharePoint, который предоставляет пользователям легкий доступ к нужным им файлам.
-  
+
   Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют инфраструктурой командной работы в своей организации.
-  
+
   Это третий из четырех курсов для администратора Teamwork. Эти курсы помогают подготовиться к экзамену MS-301&#58; Развертывание SharePoint Server Hybrid.
 
   #### Профиль аудитории
   Этот курс предназначен для роли администратора коллективной работы Microsoft 365. Эта роль отвечает за настройку, развертывание и управление рабочими нагрузками Office 365 и Azure, ориентированными на эффективное и результативное сотрудничество и принятие. Они управляют приложениями, службами и поддерживающей инфраструктурой для удовлетворения бизнес-требований. Администратор знает и может различать продукты и услуги, но не может напрямую управлять каждым продуктом или услугой.
-  
+
   Администратор совместной работы должен иметь возможность развертывать, управлять, переносить и защищать SharePoint (в сети, локально и гибридно), OneDrive и группы.
-  
+
   Администратор Teamwork обладает фундаментальным пониманием точек интеграции со следующими приложениями и службами&#58; Office, PowerApps, Flow, Yammer, Microsoft Graph, Stream, Planner и Project. Администратор понимает, как интегрировать сторонние приложения и сервисы, в том числе бизнес-приложения.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
@@ -61,7 +61,7 @@ outlineSection: |-
   - Обзор сценариев SharePoint Hybrid
   - Планирование гибридных сценариев SharePoint Server Hybrid
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать доступные гибридные сценарии SharePoint.
   - Описать требования для гибридной конфигурации SharePoint.
   - Планировать для SharePoint Server hybrid.
@@ -74,7 +74,7 @@ outlineSection: |-
   - Внедрение гибридных сценариев SharePoint
   - Настройка локального шлюза данных
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настроить гибридные сценарии SharePoint.
   - Настроить локальный шлюз данных.
 
@@ -83,9 +83,9 @@ outlineSection: |-
   Этот модуль ориентирован на гибридный поиск SharePoint. Он описывает различные типы гибридного поиска, включая облачный гибридный поиск и гибридный федеративный поиск. В нем объясняется, как настроить гибридный поиск и результаты поиска.
   #### Уроки
   - Обзор гибридного поиска SharePoint
-  - Настройка гибридного поиска SharePoint
+  - Настройка гибридного поиска SharePoint.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать разницу между облачным гибридным поиском и гибридным федеративным поиском.
   - Оценить различные виды гибридного поиска.
   - Настроить облачный гибридный поиск.
@@ -94,4 +94,5 @@ outlineSection: |-
 
   ### Модуль 4&#58; Завершение курса
 
-  #### Лабораторная работа&#58; Конфигурация SharePoint Hybrid
+  #### Лабораторная &#58; Конфигурация SharePoint Hybrid
+
