--- a/learn-certs-pr/courses/ms-301t04.yml
+++ b/learn-certs-pr/courses/ms-301t04.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Миграция на SharePoint Online
+title: Migrating to SharePoint Online
 metadata:
-  title: 'Курс MS-301T04-A: Миграция на SharePoint Online'
-  description: 'Курс MS-301T04-A: Миграция на SharePoint Online'
+  title: 'Course MS-301T04-A: Migrating to SharePoint Online'
+  description: 'Course MS-301T04-A: Migrating to SharePoint Online'
 uid: course.ms-301t04
 courseNumber: 'MS-301T04-A'
 hoursToComplete: 24
@@ -30,16 +30,16 @@ exams:
 - uid: exam.ms-301
 summary: |-
   Деловой климат изменился. Люди хотят общаться и сотрудничать без барьеров. Предприятия начинают рассматривать перенос контента в облако как экономически эффективное решение, позволяющее пользователям подключаться практически из любого места к необходимым им ресурсам и контенту. В этом курсе вы узнаете, как планировать процесс миграции контента, а также доступные ресурсы и инструменты для использования при переносе контента в SharePoint Online и OneDrive для бизнеса. В частности, в этом курсе рассказывается, как использовать средство оценки миграции SharePoint (SMAT) и средство миграции SharePoint (SPMT) в различных сценариях миграции.
-  
+
   Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют инфраструктурой командной работы в своей организации.
-  
+
   Это последний из четырех курсов для администратора Teamwork. Эти курсы помогают подготовиться к экзамену MS-301&#58; Развертывание SharePoint Server Hybrid.
 
   #### Профиль аудитории
   Этот курс предназначен для роли администратора коллективной работы Microsoft 365. Эта роль отвечает за настройку, развертывание и управление рабочими нагрузками Office 365 и Azure, ориентированными на эффективное и результативное сотрудничество и принятие. Они управляют приложениями, службами и поддерживающей инфраструктурой для удовлетворения бизнес-требований. Администратор знает и может различать продукты и услуги, но не может напрямую управлять каждым продуктом или услугой.
-  
+
   Администратор совместной работы должен иметь возможность развертывать, управлять, переносить и защищать SharePoint (в сети, локально и гибридно), OneDrive и группы.
-  
+
   Администратор Teamwork обладает фундаментальным пониманием точек интеграции со следующими приложениями и службами&#58; Office, PowerApps, Flow, Yammer, Microsoft Graph, Stream, Planner и Project. Администратор понимает, как интегрировать сторонние приложения и сервисы, в том числе бизнес-приложения.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
@@ -57,9 +57,9 @@ outlineSection: |-
   - Обзор процесса миграции
   - Использование FastTrack и партнерских услуг
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Планировать процесс миграции контента.
-  - Описать ресурсы и инструменты, доступные для использования в процессе миграции.
+  - Описать ресурсы и инструменты, доступные  для использования в процессе миграции.
 
 
   ### Модуль 2&#58; Миграция на SharePoint Online
@@ -70,7 +70,7 @@ outlineSection: |-
   - Перенос контента в облако
   - Управление процессом миграции
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Получать доступ к данным, подлежащим миграции, с помощью средства оценки миграции SharePoint (SMAT).
   - Переносить контент в облако с помощью SharePoint Migration Tool (SPMT).
   - Управлять и контролировать процесс миграции
@@ -78,4 +78,5 @@ outlineSection: |-
 
   ### Модуль 3&#58; Завершение курса
 
-  #### Лабораторная работа&#58; перенос файлов на SharePoint Online
+  #### Лабораторная &#58; перенос файлов на SharePoint Online
+
