--- a/learn-certs-pr/courses/ms-500t01.yml
+++ b/learn-certs-pr/courses/ms-500t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление идентификацией и доступом Microsoft 365
+title: Managing Microsoft 365 Identity and Access
 metadata:
-  title: 'Курс MS-500T01-A: Управление идентификацией и доступом Microsoft 365'
-  description: 'Курс MS-500T01-A: Управление идентификацией и доступом Microsoft 365'
+  title: 'Course MS-500T01-A: Managing Microsoft 365 Identity and Access'
+  description: 'Course MS-500T01-A: Managing Microsoft 365 Identity and Access'
 uid: course.ms-500t01
 courseNumber: 'MS-500T01-A'
 hoursToComplete: 24
@@ -33,17 +33,17 @@ summary: |-
 
   #### Профиль аудитории
   Этот курс предназначен для роли администратора безопасности Microsoft 365. Эта роль сотрудничает с Microsoft 365 Enterprise Administrator, заинтересованными сторонами в бизнесе и другими администраторами рабочей нагрузки для планирования и реализации стратегий безопасности и обеспечивает соответствие решений политикам и нормам организации. 
-  
+
   Эта роль активно защищает корпоративные среды Microsoft 365. В его или ее обязанности входит реагирование на угрозы, внедрение, управление и мониторинг решений по обеспечению безопасности и соответствию требованиям для среды Microsoft 365. Они реагируют на инциденты, расследования и обеспечение управления данными. 
-  
-  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft 365 и включает в себя гибридные среды.
+
+  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft  365 и включает в себя гибридные среды.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Основное концептуальное понимание Microsoft Azure.
-  - Опыт работы с устройствами Windows 10.
+  - Опыт работы с устройствами на Windows 10.
   - Опыт работы с Office 365.
   - Понимание основ авторизации и аутентификации.
-  - Понимание основ компьютерных сетей.
+  - Основы понимания компьютерных сетей.
   - Рабочие знания по управлению мобильными устройствами.
 outlineSection: |-
   ### Модуль 1&#58; Безопасность пользователя и группы
@@ -55,21 +55,21 @@ outlineSection: |-
   - Защита личных данных Azure AD
 
 
-  #### Лабораторная работа&#58; Управление средой Microsoft 365 Identity
+  #### Лабораторная &#58; Управление вашей средой личных данных Microsoft 365 Identity
   - Настройка вашей лабораторной среды
-  - Управление вашей средой идентификации в Microsoft 365 с помощью центра администрирования Microsoft 365
+  - Управление вашей средой идентификации Microsoft 365 с помощью центра администрирования Microsoft 365
   - Назначение администраторов сервиса
 
   После завершения этого модуля студенты должны уметь&#58;
-  - Описывать личные данные пользователя в Microsoft 365
-  - Создавать учетные записи пользователей как из административного центра Microsoft 365, так и в Windows PowerShell
-  - Описывать и использовать роли администратора Microsoft 365
-  - Описывать различные типы групп, доступных в Microsoft 365
+  - Описать личные данные пользователя в Microsoft 365
+  - Создавать учетные записи пользователей как из административного центра Microsoft 365, так и в Windows PowerShell.
+  - Описать и использовать роли администратора Microsoft 365
+  - Описать различные типы групп, доступных в Microsoft 365
   - Планировать политику паролей и аутентификацию
-  - Реализовывать многофакторную аутентификацию в Office 365
-  - Описывать Azure Identity Protection и какие типы удостоверений можно защитить
-  - Описывать , как включить Azure Identity Protection
-  - Определять уязвимости и риски событий
+  - Реализовать многофакторную аутентификацию в Office 365
+  - Описать Azure Identity Protection и какие типы удостоверений можно защитить
+  - Описать, как включить Azure Identity Protection
+  - Определить уязвимости и риски событий
 
 
   ### Модуль 2&#58; Синхронизация личных данных
@@ -81,20 +81,20 @@ outlineSection: |-
   - Управление синхронизированными удостоверениями
 
 
-  #### Лабораторная работа&#58; Внедрение синхронизации идентификаторов
+  #### Лабораторная &#58; Внедрение синхронизации идентификаторов
   - Настройка вашей организации для синхронизации удостоверений личности
 
   После завершения этого модуля студенты должны уметь&#58;
-  - Описывать параметры аутентификации Microsoft 365
-  - Уметь объяснять синхронизацию каталогов
-  - Уметь планировать синхронизацию каталогов
-  - Описывать и спланировать Azure AD Connect
+  - Описать параметры аутентификации Microsoft 365
+  - Объяснить синхронизацию каталогов
+  - Планировать синхронизацию каталогов
+  - Описать и спланировать Azure AD Connect
   - Настраивать предварительные условия Azure AD Connect
   - Настраивать Azure AD Connect
   - Управлять пользователями с синхронизацией каталогов
   - Управлять группами с синхронизацией каталогов
   - Использовать группы безопасности Azure AD Connect Sync
-  
+
 
   ### Модуль 3&#58; Федеративные идентичности
   Этот модуль полностью посвящен федеративным службам Active Directory (ADFS). В частности, вы узнаете, как планировать и управлять AD FS для достижения уровня доступа, который вы хотите предоставлять пользователям из других каталогов.
@@ -104,12 +104,12 @@ outlineSection: |-
   - Внедрение AD FS
 
   После завершения этого модуля студенты должны уметь&#58;
-  - Описывать аутентификацию на основе утверждений и федеративного доверия 
-  - Описывать работу AD FS
-  - Планировать среду AD FS, включая лучшие практики, высокую доступность и планирование емкости
+  - Описать аутентификацию на основе утверждений и федеративного доверия 
+  - Описать, как работает AD FS
+  - Планировать среду AD FS, включая лучшие практики, высокую доступность и планирование емкости.
   - Планировать федеративные сервисы Active Directory в Microsoft Azure
-  - Устанавливать и настраивать прокси веб-приложения для AD FS
-  - Настраивать AD FS с помощью Azure AD Connects
+  - Устанавливать и настраивать прокси веб-приложения для AD FS.
+  - Настраивать AD FS с помощью Azure AD Connect.
 
 
   ### Модуль 4&#58; Управление доступом
@@ -121,11 +121,12 @@ outlineSection: |-
   - Решения для внешнего доступа
 
   После завершения этого модуля студенты должны уметь&#58;
-  - Описывать понятие условного доступа
-  - Описывать политики условного доступа
+  - Описать понятие условного доступа
+  - Описать политики условного доступа
   - Планировать соответствие устройства
   - Настраивать условных пользователей и группы
   - Настраивать RBAC
   - Различать административные роли Azure RBAC и Azure AD
   - Управлять внешним доступом
   - Объяснить руководство по лицензированию для совместной работы Azure AD B2B
+
