--- a/learn-certs-pr/courses/ms-500t02.yml
+++ b/learn-certs-pr/courses/ms-500t02.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Course
-title: Внедрение защиты от угроз Microsoft 365 Threat Protection
+title: Implementing Microsoft 365 Threat Protection
 metadata:
-  title: 'Курс MS-500T02-A: Внедрение защиты от угроз Microsoft 365 Threat Protection'
-  description: 'Курс MS-500T02-A: Внедрение защиты от угроз Microsoft 365 Threat Protection'
+  title: 'Course MS-500T02-A: Implementing Microsoft 365 Threat Protection'
+  description: 'Course MS-500T02-A: Implementing Microsoft 365 Threat Protection'
 uid: course.ms-500t02
 courseNumber: 'MS-500T02-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Описать векторы угроз кибератак
+- skill: Описать векторы угроз кибератак.
 - skill: Описать решения безопасности для Microsoft 365
-- skill: Использование Microsoft Secure Score для оценки вашего состояния безопасности
-- skill: Использование панели безопасности в центре безопасности и соответствия Microsoft
-- skill: Настройка различных расширенных служб защиты от угроз для Microsoft 365
-- skill: Настройка расширенного анализа угроз
-- skill: Планирование и развертывание управления мобильными устройствами
+- skill: Использование Microsoft Secure Score для оценки вашего состояния безопасности.
+- skill: Использование панели безопасности в центре безопасности и соответствия Microsoft.
+- skill: Настройка различных расширенных служб защиты от угроз для Microsoft 365.
+- skill: Настройка расширенного анализа угроз.
+- skill: Планирование и развертывание управления мобильными устройствами.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -30,20 +30,20 @@ exams:
 - uid: exam.ms-500
 summary: |-
   Защита от угроз помогает предотвратить опасные атаки благодаря встроенной и автоматической защите. В этом курсе вы узнаете о технологиях защиты от угроз, которые помогают защитить вашу среду Microsoft 365. В частности, вы узнаете об векторах угроз и решениях Microsoft для них. Вы узнаете о безопасных показателях, защите Exchange Online, расширенной защите угроз Azure, расширенной защите угроз Защитника Windows и о том, как использовать Microsoft 365 Threat Intelligence. Также обсуждаются вопросы защиты мобильных устройств и приложений. Цель этого курса - помочь вам настроить развертывание Microsoft 365 для достижения желаемого уровня безопасности.
-
+  
   #### Профиль аудитории
   Этот курс предназначен для роли администратора безопасности Microsoft 365. Эта роль сотрудничает с Microsoft 365 Enterprise Administrator, заинтересованными сторонами в бизнесе и другими администраторами рабочей нагрузки для планирования и реализации стратегий безопасности и обеспечивает соответствие решений политикам и нормам организации. 
-  
+
   Эта роль активно защищает корпоративные среды Microsoft 365. В его или ее обязанности входит реагирование на угрозы, внедрение, управление и мониторинг решений по обеспечению безопасности и соответствию требованиям для среды Microsoft 365. Они реагируют на инциденты, расследования и обеспечение управления данными.
-  
-  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft 365 и включает в себя гибридные среды.
+
+  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft  365 и включает в себя гибридные среды.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Основное концептуальное понимание Microsoft Azure.
-  - Опыт работы с устройствами Windows 10.
+  - Опыт работы с устройствами на Windows 10.
   - Опыт работы с Office 365.
   - Понимание основ авторизации и аутентификации.
-  - Понимание основ компьютерных сетей.
+  - Основы понимания компьютерных сетей.
   - Рабочие знания по управлению мобильными устройствами.
 outlineSection: |-
   ### Модуль 1&#58; Безопасность Microsoft 365
@@ -53,57 +53,57 @@ outlineSection: |-
   - Решения безопасности для Microsoft 365
   - Microsoft Secure Score
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать несколько методов, которые хакеры используют для взлома учетных записей пользователей по электронной почте.
-  - Описывать методы, используемые хакерами для получения контроля над ресурсами.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать несколько методов, которые хакеры используют для взлома учетных записей пользователей по электронной почте.
+  - Описать методы, используемые хакерами для получения контроля над ресурсами.
   - Перечислить типы угроз, которых можно избежать с помощью Exhange Online Protection и Office 365 ATP.
-  - Описывать, как служба Microsoft 365 Threat Intelligence может быть полезен для сотрудников и администраторов безопасности вашей организации.
-  - Описывать преимущества Secure Score и какие услуги можно анализировать.
-  - Описывать, как использовать инструмент для выявления пробелов между вашим текущим состоянием и тем, где бы вы хотели быть в отношении безопасности.
+  - Описать, как сервис Microsoft 365 Threat Intelligence может быть полезен для сотрудников и администраторов безопасности вашей организации.
+  - Описать преимущества Secure Score и какие услуги можно анализировать.
+  - Описать, как использовать инструмент для выявления пробелов между вашим текущим состоянием и тем, где бы вы хотели быть в отношении безопасности.
 
 
   ### Модуль 2&#58; Расширенная защита Advanced Threat Protection
   Этот модуль объясняет различные технологии и службы защиты от угроз, доступные в Microsoft 365. В частности, модуль охватывает защиту сообщений с помощью Exchange Online Protection, расширенную защиту от угроз Azure и расширенную защиту от угроз Windows Defender.
   #### Уроки
-  - Защита Exchange Online
-  - Расширенная защита от угроз Office 365
+  - Exchange Online Protection
+  - Office 365 Advanced Threat Protection
   - Управление безопасными вложениями
   - Управление безопасными ссылками
-  - Расширенная защита Azure
-  - Расширенная защита Windows Advanced Threat Protection 
+  - Azure Advanced Threat Protection
+  - Windows Defender Advanced Threat Protection
 
 
-  #### Лабораторная работа&#58; Расширенная защита от угроз Advanced Threat Protection
+  #### Лабораторная &#58; Расширенная защита от угроз Advanced Threat Protection
   - Настройка вашей лабораторной среды
   - Редактирование политики безопасных ссылок ATP и создание политики безопасного вложения
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать конвейер защиты от вредоносных программ при анализе электронной почты Exchange Online Protection.
-  - Описывать, как безопасные вложения используются для блокировки вредоносных программ нулевого дня в почтовых вложениях и документах.
-  - Описывать, как безопасные ссылки защищают пользователей от вредоносных URL-адресов, встроенных в электронную почту и документы, которые указывают на вредоносные веб-сайты.
-  - Настраивать расширенную защиту от угроз Azure.
-  - Настраивать Windows Defender ATP.
-  - Интегрировать Защитника Windows ATP с Azure ATP.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать конвейер защиты от вредоносных программ при анализе электронной почты Exchange Online Protection.
+  - Описать, как безопасные вложения используются для блокировки вредоносных программ нулевого дня в почтовых вложениях и документах.
+  - Описать, как безопасные ссылки защищают пользователей от вредоносных URL-адресов, встроенных в электронную почту и документы, которые указывают на вредоносные веб-сайты.
+  - Настроить расширенную защиту от угроз Azure.
+  - Настроить Windows Defender ATP.
+  - Интеграция Защитника Windows ATP с Azure ATP.
 
 
   ### Модуль 3&#58; Анализ угроз Threat Intelligence
   Этот модуль объясняет сервис Microsoft Threat Intelligence, который предоставляет вам инструменты для оценки и устранения киберугроз. Вы узнаете, как использовать панель безопасности в Центре безопасности и соответствия требованиям Microsoft 365. Он также объясняет настройку Microsoft Advanced Threat Analytics.
   #### Уроки
-  - Анализатор угроз Microsoft 365 Threat Intelligence
+  - Microsoft 365 Threat Intelligence
   - Использование панели безопасности
   - Настройка расширенной аналитики угроз
 
 
-  #### Лабораторная работа&#58; Расширенный анализ угроз Advanced Threat Analytics
+  #### Лабораторная &#58; Расширенный анализ угроз Advanced Threat Analytics
   - Включение и установка центра ATA
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать, как интеллектуальный анализ угроз в Microsoft 365 основан на графике интеллектуальной безопасности Microsoft.
-  - Описывать, как Threat Explorer можно использовать для расследования угроз и помощи в защите вашего клиента.
-  - Описывать, как приборная панель безопасности дает руководителям уровня С понимание основных рисков, глобальных тенденций, качества защиты и подверженности организации угрозам.
-  - Описывать, как панель мониторинга безопасности может использоваться в качестве отправной точки, чтобы дать возможность аналитикам по безопасности детализировать подробности с помощью Threat Explorer.
-  - Описывать, что такое Advanced Thread Analytics (ATA) и какие требования необходимы для его развертывания.
-  - Настраивать расширенную аналитику угроз.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать, как интеллектуальный анализ угроз в Microsoft 365 основан на графике интеллектуальной безопасности Microsoft.
+  - Описать, как Threat Explorer можно использовать для расследования угроз и помощи в защите вашего клиента.
+  - Описать, как приборная панель безопасности дает руководителям уровня С понимание основных рисков, глобальных тенденций, качества защиты и подверженности организации угрозам.
+  - Описать, как панель мониторинга безопасности может использоваться в качестве отправной точки, чтобы дать возможность аналитикам по безопасности детализировать подробности с помощью Threat Explorer.
+  - Описать, что такое Advanced Thread Analytics (ATA) и какие требования необходимы для его развертывания.
+  - Настроить расширенную аналитику угроз.
 
 
   ### Модуль 4&#58; Мобильность
@@ -114,13 +114,14 @@ outlineSection: |-
   - Развертывание управления мобильными устройствами
   - Регистрация устройств в Mobile Device Management
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать соображения в отношении мобильных приложений
-  - Использовать Intune для управления мобильными приложениями
-  - Управлять устройствами с помощью MDM
-  - Сравнивать MDM для Office 365 и Intune
-  - Настраивать домены для MDM
-  - Управлять политиками безопасности устройства
-  - Определять корпоративную политику регистрации устройств
-  - Регистрировать устройства в MDM
-  - Настраивать роль диспетчера регистрации устройств
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать соображения в отношении  мобильных приложений.
+  - Использовать Intune для управления мобильными приложениями.
+  - Управлять устройствами с помощью MDM.
+  - Сравнить MDM для Office 365 и Intune.
+  - Настраивать домены для MDM.
+  - Управлять политиками безопасности устройства.
+  - Определить корпоративную политику регистрации устройств.
+  - Регистрировать устройства в MDM.
+  - Настраивать роль диспетчера регистрации устройств.
+
