--- a/learn-certs-pr/courses/ms-500t04.yml
+++ b/learn-certs-pr/courses/ms-500t04.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: Администрирование встроенного соответствия Microsoft 365
+title: Administering Microsoft 365 Built-in Compliance
 metadata:
-  title: 'Курс MS-500T04-A: Администрирование встроенного соответствия Microsoft 365'
-  description: 'Курс MS-500T04-A: Администрирование встроенного соответствия Microsoft 365'
+  title: 'Course MS-500T04-A: Administering Microsoft 365 Built-in Compliance'
+  description: 'Course MS-500T04-A: Administering Microsoft 365 Built-in Compliance'
 uid: course.ms-500t04
 courseNumber: 'MS-500T04-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Планирование и развертывание системы архивации и хранения данных
-- skill: Выполнение оценки в Compliance Manager
-- skill: Управление хранением электронной почты через Exchange
-- skill: Проведение аудиторского расследования
-- skill: Создание и управление расследованием электронного обнаружения eDiscovery
-- skill: Управление запросами субъекта данных GDPR
+- skill: Планирование и развертывание системы архивации и хранения данных.
+- skill: Выполнение оценки в Compliance Manager.
+- skill: Управление хранением электронной почты через Exchange.
+- skill: Проведение аудиторского расследования.
+- skill: Создание и управление расследованием электронного обнаружения eDiscovery.
+- skill: Управление запросами субъекта данных GDPR.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -29,13 +29,13 @@ exams:
 - uid: exam.ms-500
 summary: |-
   Вашей организации могут быть необходимы внутренние политики и внешние требования по хранению и исследованию данных. В этом курсе вы узнаете об архивировании и хранении в Microsoft 365, а также об управлении данными и о том, как проводить поиск и исследование контента. В частности, этот курс охватывает политики и теги хранения данных, управление записями на месте для SharePoint, хранение электронной почты и способы поиска контента, который поддерживает исследования eDiscovery. Курс также помогает вашей организации подготовиться к глобальному регулированию защиты данных (GDPR).
-
+  
   #### Профиль аудитории
   Этот курс предназначен для роли администратора безопасности Microsoft 365. Эта роль сотрудничает с Microsoft 365 Enterprise Administrator, заинтересованными сторонами в бизнесе и другими администраторами рабочей нагрузки для планирования и реализации стратегий безопасности и обеспечивает соответствие решений политикам и нормам организации. 
-  
+
   Эта роль активно защищает корпоративные среды Microsoft 365. В его или ее обязанности входит реагирование на угрозы, внедрение, управление и мониторинг решений по обеспечению безопасности и соответствию требованиям для среды Microsoft 365. Они реагируют на инциденты, расследования и обеспечение управления данными. 
-  
-  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft 365 и включает в себя гибридные среды.
+
+  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft  365 и включает в себя гибридные среды.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Базовое концептуальное понимание Microsoft Azure
@@ -56,20 +56,20 @@ outlineSection: |-
   - Управление локальными записями в SharePoint
 
 
-  #### Лабораторная работа&#58; Архивирование и хранение
+  #### Лабораторная &#58; Архивирование и хранение
   - Создание и лицензирование пользователей в вашей организации
   - Настройка тегов и политик хранения
   - Правила хранения MRM
 
   После завершения этого модуля, вы должны уметь&#58;
-  - Описывать управление данными в Microsoft 365
-  - Описывать разницу между локальным архивированием и управлением записями
-  - Описывать архивацию данных в Exchange
-  - Описывать преимущества управления локальными записями в SharePoint
-  - Объяснить разницу между управлением записями сообщений (MRM) в Exchange и хранением в центре безопасности и соответствия
-  - Объяснить политика хранения
-  - Создавать политику хранения
-  - Включать и отключать архивирование на месте
+  - Описать управление данными в Microsoft 365.
+  - Описать разницу между локальным архивированием и управлением записями.
+  - Объяснить, как данные архивируются в Exchange.
+  - Описать преимущества управления локальными записями в SharePoint.
+  - Объяснить разницу между управлением записями сообщений (MRM) в Exchange и хранением в центре безопасности и соответствия.
+  - Объяснить, как работает политика хранения.
+  - Создать политику хранения.
+  - Включить и отключить архивирование на месте.
   - Создавать полезные теги хранения
 
 
@@ -83,13 +83,13 @@ outlineSection: |-
   - Аналитика и телеметрия
 
   После завершения этого модуля, вы должны уметь&#58;
-  - Планировать роли безопасности и соответствия
-  - Описывать, что необходимо учитывать для GDPR
-  - Описывать, что такое этическая стена в Exchange и как она работает
+  - Планировать роли безопасности и соответствия.
+  - Описать, что вам нужно учитывать для GDPR.
+  - Описать, что такое этическая стена в Exchange и как она работает.
   - Работать с тегами хранения в почтовых ящиках
-  - Описыватьполитики хранения сообщений и папок электронной почты
-  - Объяснять рассчет срока хранения элементов
-  - Корректировать политики хранения, которые не работают должным образом
+  - Описать политики хранения сообщений и папок электронной почты
+  - Объяснить, как рассчитывается срок хранения элементов.
+  - Корректировать политики хранения, которые не работают должным образом.
 
 
   ### Модуль 3&#58; Управление поиском и расследованиями
@@ -100,19 +100,20 @@ outlineSection: |-
   - Расширенное eDiscovery
 
 
-  #### Лабораторная работа&#58; eDiscovery
+  #### Лабораторная &#58; eDiscovery
   - Создание и лицензирование пользователей в вашей организации
   - Исследование ваших данных Microsoft 365
 
   После завершения этого модуля, вы должны уметь&#58;
-  - Описывать использование поиска контента.
-  - Разрабатывать поиск контента
-  - Настраивать фильтр разрешений на поиск.
-  - Описывать, что такое журнал аудита и какие разрешения необходимы для поиска в журнале аудита Office 365
+  - Описать, как использовать поиск контента.
+  - Разработать поиск контента.
+  - Настроить фильтрацию разрешений на поиск.
+  - Описать, что такое журнал аудита и какие разрешения необходимы для поиска в журнале аудита Office 365.
   - Настраивать политики аудита.
-  - Вводить критерии поиска в журнале аудита
-  - Экспортировать результаты поиска в файл CSV
-  - Описывать, что такое Advanced eDiscovery и какие требования необходимо выполнить
-  - Анализировать данные в Advanced eDiscovery
-  - Просматривать журнал событий Advanced eDiscovery
-  - Использовать экспресс-аналитику
+  - Вводить критерии поиска в журнале аудита.
+  - Экспортировать результаты поиска в файл CSV.
+  - Описать, что такое Advanced eDiscovery и какие требования необходимо выполнить.
+  - Анализировать данные в Advanced eDiscovery.
+  - Просматривать журнал событий Advanced eDiscovery.
+  - Использовать экспресс-аналитику.
+
