--- a/learn-certs-pr/courses/ms-900t01.yml
+++ b/learn-certs-pr/courses/ms-900t01.yml
@@ -1,24 +1,24 @@
 ### YamlMime:Course
-title: Основы Microsoft 365
+title: Microsoft 365 Fundamentals
 metadata:
-  title: 'Курс MS-900T01-A: Основы Microsoft 365'
-  description: 'Курс MS-900T01-A: Основы Microsoft 365'
+  title: 'Course MS-900T01-A: Microsoft 365 Fundamentals'
+  description: 'Course MS-900T01-A: Microsoft 365 Fundamentals'
 uid: course.ms-900t01
 courseNumber: 'MS-900T01-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Различение моделей облачных служб
-- skill: Определение ключевых различий между Microsoft 365 и Office 365
-- skill: Планирование перехода на сервисы Microsoft 365
-- skill: Определение ключевых различий между локальными службами Microsoft и облачными службами Microsoft 365
-- skill: Определение мобильности предприятия в Microsoft 365
-- skill: Определение того, как службы Microsoft 365 поддерживают командную работу
-- skill: Описание удостоверений, включая облачные, локальные и гибридные удостоверения
-- skill: Описание управления облачными устройствами и их защиту, включая использование Intune
-- skill: Описание защиты данных, включая использование Azure Information Protection
-- skill: Описание соответствия в целом и функции соответствия в Microsoft 365
-- skill: Описание подписок, лицензий, биллинга и поддержки Microsoft 365
+- skill: Различение моделей облачных сервисов.
+- skill: Определение ключевых различий между Microsoft 365 и Office 365.
+- skill: Планирование перехода на сервисы Microsoft 365.
+- skill: Определение ключевых различий между локальными службами Microsoft и облачными службами Microsoft 365.
+- skill: Определение мобильности предприятия в Microsoft 365.
+- skill: Определение того, как сервисы Microsoft 365 поддерживают командную работу.
+- skill: Описать удостоверения, включая облачные, локальные и гибридные личные данные.
+- skill: Описать управление облачными устройствами и их защиту, включая использование Intune.
+- skill: Описать защиту данных, включая использование Azure Information Protection.
+- skill: Описать соответствие в целом и функции соответствия в Microsoft 365.
+- skill: Описать подписки, лицензии, биллинг и поддержку Microsoft 365
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -43,7 +43,7 @@ prerequisitesSection: |-
   для ИТ-специалистов, которые стремятся развертывать облачные сервисы и управлять ими в своих
   организациях. Студенты должны иметь следующую подготовку&#58;
   - Общие знания в области ИТ или любой общий опыт работы в ИТ-среде
-  - Общий опыт работы (уровень продаж) с соответствующими локальными продуктами Microsoft, такими как Exchange Server, SharePoint, Office Professional, AD RMS и другие.
+  - Общий опыт работы (уровень продаж)  с соответствующими локальными продуктами Microsoft, такими как Exchange Server, SharePoint, Office Professional, AD RMS и другие.
   - Опыт выполнения бизнес/юридических/требований безопасности для ИТ
 outlineSection: |-
   ### Модуль 1&#58; Облачные принципы
@@ -53,19 +53,19 @@ outlineSection: |-
   - Переход на облачные сервисы
 
 
-  #### Лабораторная работа&#58;Основы облачных технологий 
-  - Упражнение 1&#58; Определение подходящей облачной модели (лабораторная на бумаге)
+  #### Лабораторная &#58;Основы облачных технологий 
+  - Упражнение 1&#58; Определите подходящую облачную модель (лабораторная на бумаге)
 
 
   ### Модуль 2&#58; Основные службы Microsoft 365
   #### Уроки
-  - Основные службы Microsoft 365
-  - Локальные службы Microsoft и облачные службы в Microsoft 365
+  - Основные сервисы Microsoft 365
+  - Локальные сервисы Microsoft и облачные сервисы в Microsoft 365
   - Унифицированное управление конечными точками в Microsoft 365
   - Совместная работа в Microsoft 365
 
 
-  #### Лабораторная работа&#58; Включение и настройка арендатора Microsoft 365
+  #### Лабораторная &#58; Включение и настройка арендатора Microsoft 365
   - Упражнение 1&#58; Активация и настройка клиента Microsoft 365
   - Упражнение 2&#58; Изучение пользовательского и административного портала Microsoft 365
   - Упражнение 3&#58; Настройка новых учетных записей пользователей и групп
@@ -80,10 +80,10 @@ outlineSection: |-
   - Соответствие в Microsoft 365
 
 
-  #### Лабораторная работа&#58; Безопасность в Microsoft 365
+  #### Лабораторная &#58; Безопасность в Microsoft 365
   - Упражнение 1&#58; Управление пользователями и устройствами в Azure Active Directory
-  - Упражнение 2&#58; Оценка защиты личных данных
-  - Упражнение 3&#58; Изучение инструментов для соответствия
+  - Упражнение 2&#58; Оценить защиту личности
+  - Упражнение 3&#58; Инструменты для соответствия
 
 
   ### Упражнение 4&#58; Цены и поддержка Microsoft 365 
@@ -92,7 +92,8 @@ outlineSection: |-
   - Поддержка в Microsoft 365
 
 
-  #### Лабораторная работа&#58; Управление подписками, лицензированием и поддержкой в M365
-  - Упражнение 1&#58; Исследование интерфейсов для выставления счетов и подписок
-  - Упражнение 2&#58; Добавление пробных лицензий для арендатора
-  - Упражнение 3&#58; Просмотр вариантов поддержки
+  #### Lab &#58; Управление подписками, лицензированием и поддержкой в M365
+  - Упражнение 1&#58; Исследуйте интерфейсы для выставления счетов и подписок
+  - Упражнение 2&#58; Добавить пробные лицензии для арендатора
+  - Упражнение 3&#58; Просмотреть варианты поддержки
+
