--- a/learn-certs-pr/courses/az-300t01.yml
+++ b/learn-certs-pr/courses/az-300t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Развертывание и настройка инфраструктуры
+title: Deploying and Configuring Infrastructure
 metadata:
-  title: 'Курс AZ-300T01-A: Развертывание и настройка инфраструктуры'
-  description: 'Курс AZ-300T01-A: Развертывание и настройка инфраструктуры'
+  title: 'Course AZ-300T01-A: Deploying and Configuring Infrastructure'
+  description: 'Course AZ-300T01-A: Deploying and Configuring Infrastructure'
 uid: course.az-300t01
 courseNumber: 'AZ-300T01-A'
 hoursToComplete: 24
@@ -48,29 +48,29 @@ summary: |-
   Этот курс учит ИТ-специалистов, как управлять ресурсами Azure, включая развертывание и настройку виртуальных машин, виртуальных сетей, учетных записей хранилищ и Azure AD, включая внедрение и управление гибридными идентификаторами.  Слушатели узнают, как облачные ресурсы управляются в Azure через пользовательские и групповые учетные записи, и как предоставлять доступ к пользователям, группам и службам Azure AD с помощью управления доступом на основе ролей (RBAC).
 
   Слушатели познакомятся с различными учетными записями и службами хранения, а также основными концепциями репликации данных и доступными схемами репликациями. Слушатели также познакомятся с Storage Explorer как удобным способом работы с данными хранения Azure. Изучат типы хранилищ и способы работы с управляемыми и настраиваемыми дисками.
-  
+
   Хранилище Azure blob - это способ хранения неструктурированных данных в облаке Azure (предполагает работу с контейнерами blobs и blob). В дополнение к блочному хранилищу, в курсе рассматривается хранилище таблиц и очереди как параметры хранения структурированных данных.
-  
+
   Слушатели узнают, как создавать и развертывать виртуальные машины в Azure, используя портал Azure, PowerShell и шаблоны ARM. Слушатели познакомятся с развертыванием пользовательских образов и виртуальных машин Linux. Узнают как настраивать компоненты сети и хранилищ виртуальных машин. Развертывание виртуальных машин высокой доступности имеет решающее значение для запланированных и незапланированных событий, и слушатели узнают, как использовать наборы доступности для обеспечения доступности ресурсов виртуальных машин во время простоя.
-  
+
   Слушатели изучат инструменты и возможности мониторинга, предоставляемые Azure, в том числе Azure Alerts и Activity Log. Помимо Azure Alerts и Activity Log, слушатели познакомятся с инструментом Log Analytics, который является эффективным решением для анализа данных для понимания состояния системы. И, возможно, самое интересное, что узнают учащиеся - это использование модели развертывания Azure Resource Manager (ARM) для работы с ресурсами, группами ресурсов и шаблонами ARM.
-  
+
   Поскольку этот курс является первым курсом в серии для подготовки к сертификации Azure Solutions Architect, в нем представлено достаточное количество вводного материала для подготовки к другим курсам этой серии в учебной программе. Слушателям предлагаться вводный урок, который включает советы и рекомендации по работе на портале Azure, а также введение в ключевые инструменты, используемые в среде Azure, такие как Cloud Shell и Resource Explorer. При этом акцент делается на PowerShell и интерфейсе командной строки (CLI) как важных навыках для работы, которые необходимо приобретать не только при подготовке к экзамену, но и для самой рабочей роли.
 
   #### Профиль аудитории
-  Для успешного прохождения курса Cloud Solutions Architects необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
+  Для успешного прохождения курса Cloud Solutions Architects  необходимо иметь практический опыт работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения, биллингами и сетями.
 outlineSection: |-
   ### Модуль 1&#58; Управление подписками и ресурсами Azure
   В этом модуле рассматриваются возможности мониторинга Azure, используя оповещения Azure, журналы активности Azure и Log Analytics. Слушатели учатся запрашивать, анализировать и интерпретировать данные, просматриваемые в Log Analytics.
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять подписками и ресурсами Azure
 
 
   ### Модуль 2&#58; Реализация и управление хранилищем
   В этом модуле содержатся данные об учетных записях хранилища Azure, репликации данных, о том, как использовать Azure Storage Explorer и мониторинг хранилища.
-  
-  После завершения этого модуля студенты смогут&#58;
+
+  После завершения этого модуля студенты получат следующее&#58;
   - Внедрять и управлять хранилищем
 
 
@@ -81,10 +81,10 @@ outlineSection: |-
   - Создание виртуальных машин (VM) с помощью шаблонов ARM
   - Развертывание виртуальных машин (VM) Linux
   - Мониторинг виртуальных машин (VM) 
-  
+
   Дополнительно вы узнаете о защите данных с помощью резервного копирования - моментальный снимок, резервное копирование Azure Backup или Azure Site Recovery
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Развертывать и управлять виртуальными машинами
 
 
@@ -96,17 +96,18 @@ outlineSection: |-
   - Виртуальная сеть для региональных и глобальных задач
   - Перевод шлюза
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настраивать и управлять виртуальными сетями
 
 
   ### Модуль 5&#58; Управление идентификаторами
   Этот модуль рассматривает Azure Active Directory (Azure AD) для ИТ-администраторов и разработчиков, уделяя основное внимание мультитенантной облачной службе каталогов и службе управления удостоверениями Azure AD.
   #### Уроки
-  - Управление доступом на основе ролей (RBAC)
+  - Ролевое управление доступом (RBAC)
   - Встроенные роли
   - Самостоятельный сброс пароля (Self-Service Password Reset, SSPR)
   - Методы проверки подлинности для сброса пароля
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять идентификационными данными, используя Azure Active Directory
+
