--- a/learn-certs-pr/courses/az-400t02.yml
+++ b/learn-certs-pr/courses/az-400t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Реализация непрерывной интеграции
+title: Implementing Continuous Integration
 metadata:
-  title: 'Курс AZ-400T02-A: Реализация непрерывной интеграции'
-  description: 'Курс AZ-400T02-A: Реализация непрерывной интеграции'
+  title: 'Course AZ-400T02-A: Implementing Continuous Integration'
+  description: 'Course AZ-400T02-A: Implementing Continuous Integration'
 uid: course.az-400t02
 courseNumber: 'AZ-400T02-A'
 hoursToComplete: 24
@@ -55,7 +55,7 @@ outlineSection: |-
   #### Лабораторная работа&#58; Включение непрерывной интеграции с конвейерами Azure
 
   #### Лабораторная работа&#58; Создание Jenkins Build Job и Triggering CI
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить почему непрерывная интеграция имеет значение
   - Внедрять непрерывную интеграцию с помощью Azure DevOps
 
@@ -70,7 +70,7 @@ outlineSection: |-
   #### Лабораторная работа&#58; Управление техническим долгом с помощью Azure DevOps и SonarCloud
 
   #### Лабораторная работа&#58; Проверка уязвимостей с помощью WhiteSource Bolt и Azure DevOps
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять качеством кода, включая&#58; технические долги, SonarCloud и другие инструментальные решения.
   - Управлять политиками безопасности с открытым исходным кодом, OWASP и WhiteSource Bolt.
   - Управлять качеством кода, включая&#58; технические долги, SonarCloud и другие инструментальные решения.
@@ -83,6 +83,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Существующие приложения .NET с изображениями Azure и Docker
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Реализовывать контейнерную стратегию, включая то, как контейнеры отличаются от виртуальных машин и как микросервисы используют контейнеры.
   - Реализация контейнеров с использованием Docker.
+
