--- a/learn-certs-pr/courses/mb-220t02.yml
+++ b/learn-certs-pr/courses/mb-220t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка событий и опросов для маркетинга в Dynamics 365
+title: Set up events and surveys in Dynamics 365 for Marketing
 metadata:
-  title: 'Курс MB-220T02-A: Настройка событий и опросов для маркетинга в Dynamics 365'
-  description: 'Курс MB-220T02-A: Настройка событий и опросов для маркетинга в Dynamics 365'
+  title: 'Course MB-220T02-A: Set up events and surveys in Dynamics 365 for Marketing'
+  description: 'Course MB-220T02-A: Set up events and surveys in Dynamics 365 for Marketing'
 uid: course.mb-220t02
 courseNumber: 'MB-220T02-A'
 hoursToComplete: 24
@@ -25,7 +25,7 @@ products:
 exams:
 - uid: exam.mb-220
 summary: |-
-  События, вебинары и опросы часто являются важной частью маркетинговых компаний для привлечения клиентов. События и вебинары содержат много составляющих и могут быть сложными для управления. Dynamics 365 for Marketing упрощает этот процесс, объединяя все данные планирования в одной централизованной локации и предоставляя каналы выполнения через настраиваемый портал событий. Опросы часто проводятся после мероприятия, но также могут использоваться на протяжении всего жизненного цикла маркетинговой кампании для получения обратной связи. Благодаря решению Microsoft «Голос клиента» опросы легко настраивать, управлять, выполнять и связывать с событием.
+  События, вебинары и опросы часто являются важной частью того, как маркетинговая организация получает клиентов. События и вебинары содержат много составляющих и могут быть сложными для управления. Dynamics 365 for Marketing упрощает этот процесс, объединяя все данные планирования в одной централизованной локации и предоставляя каналы выполнения через настраиваемый портал событий. Опросы часто проводятся после мероприятия, но также могут использоваться на протяжении всего маркетингового жизненного цикла для получения обратной связи. Благодаря решению Microsoft «Голос клиента» опросы легко настраивать, управлять, выполнять и связывать с событием.
 
   Этот курс будет охватывать планирование мероприятий, включая настройку и управление сессиями, докладчиками, пропусками, списками ожидания, местами проведения, спонсорами, поставщиками, логистикой и размещением; а также выполнение событий, таких как создание пользовательских полей регистрации, управление регистрациями и проверками, а также портал событий. Затем курс будет посвящен созданию и распространению опросов. Наконец, он завершится результатами мероприятия и опроса.
 
@@ -42,8 +42,8 @@ outlineSection: |-
   #### Уроки
   - Управление планированием мероприятий
   - Управление ходом событий
-
-  После завершения этого модуля студенты смогут&#58;
+  
+  После завершения этого модуля студенты получат следующее&#58;
   - Создавать персональные мероприятия и вебинары
   - Настраивать функции планирования мероприятий, таких как сеансы, докладчики, пропуски, списки ожидания, места проведения и спонсоры.
   - Создавать и управлять повторяющимися событиями
@@ -57,10 +57,10 @@ outlineSection: |-
   #### Уроки
   - Создание опросов
 
-  После завершения этого модуля студенты смогут&#58;
-  - Создавать темы опроса с возможностью повторного использования
-  - Создавать, оформлять, предварительно просматривать и публиковать опросы
-  - Распространять опросы через каналы Dynamics 365 для маркетинга.
+  После завершения этого модуля студенты получат следующее&#58;
+  - Создать тему опроса с возможностью повторного использования
+  - Создать, оформить, предварительно просмотреть и опубликовать опрос
+  - Распространять опросы через каналы Dynamics 365 для  маркетинга.
   - Клонировать, импортировать, переводить, закрывать, останавливать или удалять опрос
 
 
@@ -69,6 +69,7 @@ outlineSection: |-
   #### Уроки
   - Обзор событий и результатов опроса
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Использовать информационную панель событий, чтобы оценить их результат
   - Просматривать результаты опросов
+
