--- a/learn-certs-pr/courses/mb-300t03.yml
+++ b/learn-certs-pr/courses/mb-300t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Перенос данных и подготовка к работе с Dynamics 365 for Finance and Operations
+title: Data migration and preparing for go-live with Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-300T03-A: Перенос данных и подготовка к работе с Dynamics 365 дfor Finance and Operations'
-  description: 'Курс MB-300T03-A: Перенос данных и подготовка к работе с Dynamics 365 дfor Finance and Operations'
+  title: 'Course MB-300T03-A: Data migration and preparing for go-live with Dynamics 365 for Finance and Operations'
+  description: 'Course MB-300T03-A: Data migration and preparing for go-live with Dynamics 365 for Finance and Operations'
 uid: course.mb-300t03
 courseNumber: 'MB-300T03-A'
 hoursToComplete: 24
@@ -21,12 +21,12 @@ products:
 exams:
 - uid: exam.mb-300
 summary: |-
-  Организации используют Dynamics 365 дfor Finance and Operations, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей.
+  Организации используют Dynamics 365 для финансов и операций, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей.
 
-  В этом курсе рассматриваются вопросы миграции данных и подготовки к работе для Microsoft Dynamics 365 for Finance and Operations.
+  В этом курсе рассматриваются вопросы миграции данных и подготовки к работе для Microsoft Dynamics 365 для финансов и операций.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
@@ -40,26 +40,26 @@ outlineSection: |-
   
 
   Когда приходит время переноса данных, то чем больше вы знаете, тем легче контролировать сложность операций и снижать затраты. Приоритетом должна быть непрерывность бизнеса клиента. В этом модуле студенты узнают, как подготовить данные для успешной миграции, определив важные факторы, такие как устаревшие системы, а также статические и общие данные.
-  
-  
-  После завершения этого модуля студенты смогут&#58;
-  - Выбирать стратегию интеграции данных (импорт/экспорт)
-  - Определять общие сценарии и инструменты миграции в "Финансах и Операциях".
-  - Понимать функции «принести свою собственную базу данных» (BYOD) 
-  - Определять соответствующие (унаследованные) системы
-  - Идентифицировать и импортировать статические данные, которые являются общими для отраслей
-  - Создавать и проверять планы тестирования для переноса данных
-  - Определять и извлекать исходные данные
-  - Определять соответствующие объекты данных и элементов
-  - Формировать сопоставление полей между исходной и целевой структурами данных
+
+
+  В этом модуле студенты научились следующему&#58;
+  - Выбор стратегии интеграции данных (импорт/экспорт)
+  - Определение общих сценариев и инструментов миграции в Финансах и Операциях.
+  - Понимание функции «принести свою собственную базу данных» (BYOD) 
+  - Определение соответствующих (унаследованных) систем
+  - Идентификация и импорт статических данных, которые являются общими для отраслей
+  - Создание и проверка планов тестирования для переноса данных.
+  - Определение и извлечение исходных данных
+  - Определение соответствующих объектов данных и элементов
+  - Картографирование полей между исходной и целевой структурами данных.
   - Выполнение тестовой миграции и проверка вывода
-  - Поддерживать переход между существующими и перенесенными системами
+  - Поддержка перехода между существующими и перенесенными системами.
 
 
   ### Модуль 2&#58; Использование управления данными
   В этом модуле студенты получат обзор основных концепций платформы управления данными. Студенты также узнают, как импортировать и экспортировать данные в Dynamics 365 for Finance and Operations с помощью рабочей области «Управление данными».
 
-  Наконец, они узнают, как использовать функции асинхронной повторяющейся интеграции платформы управления данными. Платформа управления данными может использоваться для управления объектами данных и пакетами объектов данных в "Финансах и Операциях".
+  Наконец, они узнают, как использовать функции асинхронной повторяющейся интеграции платформы управления данными. Платформа управления данными может использоваться для управления объектами данных и пакетами объектов данных в Финансах и Операциях.
   #### Уроки
   - Введение
   - Понимание управления данными и их интеграции
@@ -68,19 +68,19 @@ outlineSection: |-
   - Импорт, экспорт и копирование данных в юридическое лицо
   - Лабораторные практикумы
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Определять правильные шаблоны для данного сценария для использования платформы управления данными для интеграции с использованием объектов данных.
-  - Работать с рабочей областью управления данными
-  - Экспортировать данные из юридического лица
-  - Импортировать данные в юридическое лицо
-  - Работать с данными импорта и экспорта заданий
-  - Очищать промежуточные таблицы
+
+  В этом модуле студенты научились следующему&#58;
+  Определение правильного шаблона для данного сценария для использования платформы управления данными для интеграции с использованием объектов данных.
+  - Работа с рабочей областью управления данными
+  - Экспорт данных из юридического лица
+  - Импорт данных в юридическое лицо
+  - Работа с данными импорта и экспорта заданий
+  - Очистка промежуточных таблиц
 
 
   ### Модуль 3&#58; Выполнение тестирования принятия пользователем
-  Чтобы протестировать и оценить клиентское решение до начала эксплуатации, необходимо иметь среду Dynamics 365 for Finance and Operations, которая имеет все конфигурации и возможные настройки с помощью расширений.
+  Чтобы протестировать и оценить клиентское решение до начала эксплуатации, необходимо иметь среду Dynamics 365 для финансов и операций, которая имеет все конфигурации и возможные настройки с помощью расширений.
 
   Всегда полезно иметь методологию, гарантирующую, что создание и тестирование организованы и спланированы должным образом для коротких, эффективных и ролевых сценариев тестирования кейсов.
   #### Уроки
@@ -88,33 +88,33 @@ outlineSection: |-
   - Создание и выполнение тестовых кейсов для принятия пользователем
   - Лабораторный практикум
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понимать корреляцию между тестовыми сценариями и бизнес-требованиями
-  - Узнают о лучших практиках для записи тестовых сценариев
-  - Регистрировать задачи
-  - Создавать библиотеки BPM Scenario Acceptance Testing
-  - Синхронизировать и настраивать план тестирования в DevOps Azure
-  - Выполнять тесты
+
+  В этом модуле студенты научились следующему&#58;
+  - Как понять корреляцию между тестовыми кейсами и бизнес-требованиями
+  - Лучшие практики для записи тестовых кейсов
+  - Регистратор задач
+  - Как создать библиотеку BPM Scenario Acceptance Testing
+  - Как синхронизировать и настроить план тестирования в DevOps Azure
+  - Как выполнять тесты
 
 
   ### Модуль 4&#58; Подготовка к запуску
-  Вся тяжелая работа становится успешной благодаря переносу в производственную среду решения, внедренного в Dynamics 365 for Finance and Operations. Это критический и последний этап этого захватывающего опыта завершения внедрения.
+  Вся тяжелая работа становится успешной благодаря переносу в производственную среду решения, внедренного в Dynamics 365 для финансов и операций. Это критический и последний этап этого захватывающего опыта завершения внедрения.
 
-  Цель - довольный клиент, качественное решение и душевное спокойствие на этом важном этапе, который известен как начало работы. Невозможно гарантировать успех, не зная, как подготовиться к запуску "Финансов и операции" и завершающей стадии внедрения.
+  Цель - довольный клиент, качественное решение и душевное спокойствие на этом важном этапе, который известен как начало работы. Невозможно гарантировать успех, не зная, как подготовиться к запуску Финансов и операций и завершающей стадии внедрения.
 
   #### Уроки
   - Введение
   - Подготовка к запуску
   - Краткое содержание модуля
-  
 
-  После завершения этого модуля студенты смогут&#58;
-  - Подготавливаться к запуску проектов
-  - Заполнять методологию Lifecycle Services (LCS)
-  - Проводить пользовательское приёмочное тестирование (UAT) для решения
-  - Понимать оценку запуска проекта по FastTrack в реальном времени
+
+  В этом модуле студенты научились следующему&#58;
+  - Подготовка к запуску
+  - Заполнение методологии Lifecycle Services (LCS)
+  - Проведение тестирования принятия  пользователем (UAT) для вашего решения.
+  - Понимание оценки FastTrack в реальном времени
   - Запрос производственной среды
 
 
@@ -124,6 +124,7 @@ outlineSection: |-
   - Итоговая оценка
   - Краткое содержание курса
   - Опрос после курса
-  
+
 
   Студенты закончили курс.
+
