--- a/learn-certs-pr/courses/mb-320t02.yml
+++ b/learn-certs-pr/courses/mb-320t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Настройка и использование интенсивного производства в Dynamics 365 for Finance and Operations
+title: Configure and use lean manufacturing in Dynamics 365 for Finance and Operations
 metadata:
-  title: 'Курс MB-320T02-A: Настройка и использование интенсивного производства в Dynamics 365 for Finance and Operations'
-  description: 'Курс MB-320T02-A: Настройка и использование интенсивного производства в Dynamics 365 for Finance and Operations'
+  title: 'Course MB-320T02-A: Configure and use lean manufacturing in Dynamics 365 for Finance and Operations'
+  description: 'Course MB-320T02-A: Configure and use lean manufacturing in Dynamics 365 for Finance and Operations'
 uid: course.mb-320t02
 courseNumber: 'MB-320T02-A'
 hoursToComplete: 24
@@ -20,31 +20,29 @@ products:
 exams:
 - uid: exam.mb-320
 summary: |-
-  Организации используют Dynamics 365 for Finance and Operations, чтобы более разумно работать с подключенными операциями, выбирая наиболее подходящие производственные процессы, улучшая операционные процедуры, упрощая управление ресурсами, ускоряя доставку товаров и повышая качество услуг и удовлетворенность клиентов. 
-
-  В этом курсе обсуждается, как настроить и использовать интенсивное производство в Dynamics 365 for Finance and Operations.
-
+  Организации используют Dynamics 365 для финансов и операций, чтобы более разумно работать с подключенными операциями, выбирая наиболее подходящие производственные процессы, улучшая операционные процедуры, упрощая управление ресурсами, ускоряя доставку товаров и повышая качество услуг и удовлетворенность клиентов. 
+  
+  В этом курсе обсуждается, как настроить и использовать интенсивное производство в Dynamics 365 для финансов и операций.
+  
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 for Finance and Operations отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовое понимание концепций ERP и CRM.
 outlineSection: |-
   ### Модуль 1&#58; Начало работы с интенсивным производством 
   Здесь объясняется, как начать работу с интенсивным производством в разделе финансов и операций.
-
+  
   #### Уроки
   - Введение
   - Понятия и терминология
   - Краткое содержание модуля
-
-
+  
   На этом уроке студенты научились следующему&#58;
   - Понятие интенсивного производства
-  - Терминология интенсивного производства
-
-
-  ### Модуль 2&#58; Настройка интенсивного производства
-   В этом разделе объясняется, как настроить интенсивное производство в разделе финансов и операций. Сценарий интенсивного производства обычно представляет собой нечто большее, чем скопление несвязанных правил Kanban или политик поставок материалов. Поток материалов и продуктов по рабочим ячейкам и местам для конкретного сценария производства или поставки может быть описан как последовательность или небольшая сеть процессов или операций переноса, называемая производственным потоком. Производственные потоки в Финансах и Операциях представлены на основе видов деятельности, чтобы установить контекст производства и затрат для различных сценариев Kanban. Все правила Kanban напрямую связаны с этой заранее определенной структурой. Модель, основанная на действиях, позволяет пользователям настраивать более широкий диапазон сценариев, чем поддерживали предыдущие версии Lean manufacturing for Finance и Operations, не добавляя сложности для рабочих цеха, поскольку во всех сценариях используется один и тот же пользовательский интерфейс, основанный на действиях.
+  - Терминология  интенсивного производства
+  
+  ### Модуль 2&#58; Настройка  интенсивного производства
+  В этом разделе объясняется, как настроить интенсивное производство в разделе финансов и операций. Сценарий интенсивного производства обычно представляет собой нечто большее, чем скопление несвязанных правил Kanban или политик поставок материалов. Поток материалов и продуктов по рабочим ячейкам и местам для конкретного сценария производства или поставки может быть описан как последовательность или небольшая сеть процессов или операций переноса, называемая производственным потоком. Производственные потоки в Финансах и Операциях представлены на основе видов деятельности, чтобы установить контекст производства и затрат для различных сценариев Kanban. Все правила Kanban напрямую связаны с этой заранее определенной структурой. Модель, основанная на действиях, позволяет пользователям настраивать более широкий диапазон сценариев, чем поддерживали предыдущие версии Lean manufacturing for Finance и Operations, не добавляя сложности для рабочих цеха, поскольку во всех сценариях используется один и тот же пользовательский интерфейс, основанный на действиях.
   #### Уроки
   - Введение
   - Настройка параметров
@@ -56,13 +54,13 @@ outlineSection: |-
 
   В этом модуле студенты научились следующему&#58;
   - Настройка параметров
-  - Настраивать потоки создания ценности
+  - Настройка потоков создания ценности
   - Создание производственных потоков
-  - Настраивать рабочие ячейки интенсивного производства 
+  - Настройка рабочих ячеек интенсивного производства 
 
 
   ### Модуль 3&#58; Создание и обработка фиксированных правил Kanban
-  В Dynamics 365 for Finance and Operations Kanban реализован в качестве основы для планирования, отслеживания и обработки на основе сигналов Pull. Kanban является неотъемлемой частью системы снабжения, которая является критически важным элементом интенсивного производства и снабжения. Когда Kanban израсходован, он должен вызвать источник снабжения для пополнения. Этот источник снабжения определяется производственными потоками, с которыми связан Kanban. Правила Kanban в Финансах и Операциях связаны с производственными потоками как основа, которая определяет деятельность Kanban. Правила Kanban могут быть установлены для поддержки различных сценариев производства «на склад» и «на заказ».
+  В Dynamics 365 для финансов и операций Kanban реализован в качестве основы для планирования, отслеживания и обработки на основе сигналов Pull. Kanban является неотъемлемой частью системы снабжения, которая является критически важным элементом интенсивного производства и снабжения. Когда Kanban израсходован, он должен вызвать источник снабжения для  пополнения. Этот источник снабжения определяется производственными потоками, с которыми связан Kanban. Правила Kanban в Финансах и Операциях связаны с производственными потоками как основа, которая определяет деятельность Kanban. Правила Kanban могут быть установлены для поддержки различных сценариев производства «на склад» и «на заказ».
   #### Уроки
   - Введение
   - Доски Kanban
@@ -99,13 +97,13 @@ outlineSection: |-
   - Правилами Kanban
   - Kanban для производства
   - Kanban для снятия
-  - Создавать и управлять спецификацией линии Канбан
-  - Создавать и управлять спецификацией линии Канбан
-  - Разбираться в примерах сценариев для процессов событий Kanban и различных типах событий Kanban.
+  - Создание и управление спецификацией линии Канбан
+  - Создание и управление спецификацией линии Канбан
+  - Студенты также разбираются в примерах сценариев для процессов событий Kanban и различных типов событий Kanban.
 
 
   ### Модуль 5&#58; Создание и обработка запланированных правил Kanban
-  Плановые заказы типа Kanban создаются на основе правила Kanban и следуют стандартной логике и горизонту сводного плана. Настройки включения позиций в Сводном планировании определяют, как создаются запланированные заказы и будут ли они утверждены автоматически или вручную. В этом модуле мы обсуждаем запланированный Kanban в Dynamics 365 for Finance and Operations.
+  Плановые заказы типа Kanban создаются на основе правила Kanban и следуют стандартной логике и горизонту генерального планирования. Параметры покрытия основного элемента планирования определяют, как создаются запланированные заказы и будут ли они закреплены автоматически или вручную. В этом модуле мы обсуждаем запланированный Kanban в Dynamics 365 для финансов и операций.
   #### Уроки
   - Введение
   - Настройка запланированных правил Канбан
@@ -124,7 +122,7 @@ outlineSection: |-
 
 
   ### Модуль 6&#58; Настройка субподряда на основе деятельности и калькуляция производственного потока
-  Основной принцип производственного потока не меняется, если деятельность субподряда осуществляется с использованием раздела Финансов и операций; материал по-прежнему перемещается между локациями, технологические операции преобразуют материал в товары, а операции переноса перемещают материал или товары из одного места в другое. В Dynamics 365 for Finance and Operations есть два подхода к субподряду&#58; Производственные заказы и Интенсивное производство. Первый подход моделирует субподрядную работу как услугу, связанную с деятельностью производственного потока. Требуется настроить тип группы затрат, прямой аутсорсинг, чтобы услуги субподряда не входили в спецификацию. Учет затрат на субподрядные работы полностью интегрирован в новую калькуляцию затрат на производство в Microsoft Dynamics 365 for Finance and Operations.
+  Основной принцип производственного потока не меняется, если деятельность субподряда осуществляется с использованием раздела Финансов и операций; материал по-прежнему перемещается между локациями, технологические операции преобразуют материал в товары, а операции переноса перемещают материал или товары из одного места в другое. В Dynamics 365 для финансов и операций есть два подхода к субподряду&#58; Производственные заказы и Интенсивное производство. Первый подход моделирует субподрядную работу как услугу, связанную с деятельностью производственного потока. Требуется настроить тип группы затрат, прямой аутсорсинг, чтобы услуги субподряда не входили в спецификацию. Учет затрат на субподрядные работы полностью интегрирован в новую калькуляцию затрат на производство в Microsoft Dynamics 365 для финансов и операций.
   #### Уроки
   - Введение
   - Настройка субподряда на основе деятельности
