--- a/learn-certs-pr/courses/md-100t01.yml
+++ b/learn-certs-pr/courses/md-100t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Установка Windows 10
+title: Installing Windows 10
 metadata:
-  title: 'Курс MD-100T01-A: Установка Windows 10'
-  description: 'Курс MD-100T01-A: Установка Windows 10'
+  title: 'Course MD-100T01-A: Installing Windows 10'
+  description: 'Course MD-100T01-A: Installing Windows 10'
 uid: course.md-100t01
 courseNumber: 'MD-100T01-A'
 hoursToComplete: 24
@@ -25,12 +25,13 @@ products:
 exams:
 - uid: exam.md-100
 summary: |-
-  В этом курсе, студенты узнают, как поддержать задачи установки,
+  В
+  этом курсе, студенты узнают, как поддержать задачи установки,
   связанные с Windows 10. Студенты будут развивать навыки, которые включают в себя обучение
   установке и настройке операционных систем Windows 10. Студенты также
   узнают о новой модели обслуживания Windows и методах и методах поддержания Windows 
   в актуальном состоянии. Курс завершится общими постустановочными задачами.
-
+  
   #### Профиль аудитории
   Кандидаты
   на прохождение этого экзамена - это ИТ-специалисты, которые выполняют установку, настройку,
@@ -40,7 +41,7 @@ summary: |-
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Базовое понимание компьютерных сетей и аппаратных концепций.
-  - Базовое понимание концепций ОС и приложений.
+  - Базовое понимание концепций ОС и  приложений.
   - Опыт работы с ОС Windows.
 outlineSection: |-
   ### Модуль 1&#58; Установка Windows
@@ -53,15 +54,15 @@ outlineSection: |-
   - Обновление до Windows 10
 
 
-  #### Лабораторная работа&#58; Установка Windows 10
+  #### Лабораторная &#58; Установка Windows 10
   - Обновление Windows 7 до Windows 10
-  - Перенос настроек пользователя
+  - Миграция пользовательских настроек
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Понимать различные редакции и функцийиWindows 10
-  - Понимать параметрыв установки клиента Windows 10
-  - Устанавливать Windows 10 с помощью онлайн-виртуальной машины
+  После завершения этого модуля студенты получат следующее&#58;
+  - Понимание различных редакций и функций Windows 10
+  - Понимание параметров установки клиента Windows 10
+  - Практика установки Windows 10 с помощью онлайн-виртуальной машины
 
 
   ### Модуль 2&#58; Обновление Windows
@@ -72,38 +73,38 @@ outlineSection: |-
   - Применение приложений и обновлений Windows
 
 
-  #### Лабораторная работа&#58; Обновление Windows 10
+  #### Лабораторная &#58; Обновление Windows 10
   - Настройка обновлений для одного устройства
   - Настройка обновлений с помощью объектов групповой политики
 
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать модель обслуживания Windows
-  - Настраивать параметры обновления Windows
-  - Описывать обновление Windows с помощью WSUS
-  - Описывать обновление Windows с помощью Центра обновления Windows для бизнеса
-  - Настраивать обновления Windows с помощью групповой политики
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать модель обслуживания Windows
+  - Настройка параметров обновления Windows
+  - Описать обновление Windows с помощью WSUS
+  - Описать обновление Windows с помощью Центра обновления Windows для бизнеса
+  - Настройка обновления Windows с помощью групповой политики.
 
 
   ### Модуль 3&#58; Настройка и персонализация после установки
-  Этот модуль охватывает общие задачи после установки в Windows 10. Студенты научатся настраивать пользовательский интерфейс, а также использовать панель управления и приложение настроек для конфигурации общих настроек ОС. Этот курс также познакомит студентов с Windows PowerShell.
+  Этот модуль охватывает общие задачи, выполняемые после установки Windows 10. Студенты научатся настраивать пользовательский интерфейс, а также использовать панель управления и приложение настроек для конфигурации общих настроек ОС. Этот курс также познакомит студентов с Windows PowerShell.
   #### Уроки
   - Настроить интерфейс Windows 10
-  - Настройка параметров устройства, таких как схемы электропитания и параметры мобильного устройства
-  - Использование панели управления Windows и настройка приложения для настройки параметров
+  - Настроить параметры устройства, таких как схемы электропитания и параметры мобильного устройства.
+  - Использовать панель управления Windows и настройку приложения для настройки параметров.
   - Описание с помощью Windows PowerShell
 
 
-  #### Лабораторная работа&#58; Настройка Windows 10
+  #### Лабораторная &#58; Настройка Windows 10
   - Использование приложения настроек
   - Использование панели управления с использованием панели управления
   - Использование Windows PowerShell
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Настроить интерфейс Windows 10
-  - Настройка параметров устройства, таких как схемы электропитания и параметры мобильного устройства
-  - Использование панели управления Windows и настройка приложения для настройки параметров
+  - Настроить параметры устройства, таких как схемы электропитания и параметры мобильного устройства.
+  - Использовать панель управления Windows и настройку приложения для настройки параметров.
   - Описание с помощью Windows PowerShell
 
 
@@ -112,4 +113,5 @@ outlineSection: |-
   - Заключительный экзамен
 
 
-  #### Лабораторная работа&#58; Комплексная лабораторная работа
+  #### Лабораторная &#58; С оценкой
+
