--- a/learn-certs-pr/courses/ms-100t02.yml
+++ b/learn-certs-pr/courses/ms-100t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление арендаторами и услугами Microsoft 365
+title: Microsoft 365 Tenant & Service Management
 metadata:
-  title: 'Курс MS-100T02-A: Microsoft 365 Управление арендаторами и услугами'
-  description: 'Курс MS-100T02-A: Microsoft 365 Управление арендаторами и услугами'
+  title: 'Course MS-100T02-A: Microsoft 365 Tenant & Service Management'
+  description: 'Course MS-100T02-A: Microsoft 365 Tenant & Service Management'
 uid: course.ms-100t02
 courseNumber: 'MS-100T02-A'
 hoursToComplete: 24
@@ -55,13 +55,14 @@ outlineSection: |-
   ### Модуль 3&#58; Управление арендатором Microsoft 365 Tenant
   #### Уроки
   - Настройка ролей арендатора
-  - Управление здоровьем и услугами арендатора
+  - Управление состоянием и сервисами арендатора
 
 
   ### Модуль 4&#58; Лабораторный практикум
 
-  #### Лабораторная работа&#58; Управление состоянием и услугами арендатора Microsoft 365 Tenant
+  #### Лабораторная &#58; Управление состоянием и услугами арендатора Microsoft 365 Tenant
   - Упражнение 1&#58; Настройка пробного арендатора Microsoft 365
   - Упражнение 2&#58; Управление пользователями, группами и администрацией Microsoft 365
   - Упражнение 3&#58; Настройка управления правами и соответствия
   - Упражнение 4&#58; Мониторинг и устранение неполадок Microsoft 365
+
