--- a/learn-certs-pr/courses/ms-100t03.yml
+++ b/learn-certs-pr/courses/ms-100t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление идентификацией в Microsoft 365
+title: Microsoft 365 Identity Management
 metadata:
-  title: 'Курс MS-100T03-A: Управление идентификацией в Microsoft 365'
-  description: 'Курс MS-100T03-A: Управление идентификацией в Microsoft 365'
+  title: 'Course MS-100T03-A: Microsoft 365 Identity Management'
+  description: 'Course MS-100T03-A: Microsoft 365 Identity Management'
 uid: course.ms-100t03
 courseNumber: 'MS-100T03-A'
 hoursToComplete: 48
@@ -50,10 +50,10 @@ outlineSection: |-
   - Управление паролями в Microsoft 365
 
 
-  #### Лабораторная работа&#58; Управление средой Microsoft 365 Identity
+  #### Лабораторная &#58; Управление вашей средой личных данных Microsoft 365 Identity
   - Упражнение 1&#58; Настройка вашей лабораторной среды
-  - Упражнение 2&#58; Управление средой идентификации в Microsoft 365 с помощью центра администрирования Microsoft 365
-  - Упражнение 3&#58;Управление средой идентификации в Microsoft 365 с помощью Windows PowerShell
+  - Упражнение 2&#58; Управление вашей средой личных данных Microsoft 365 Identity используя центр администрирования Microsoft 365
+  - Упражнение 3&#58;Управление вашей средой личных данных Microsoft 365 Identity используя Windows PowerShell
 
 
   ### Модуль 2&#58; Планирование и внедрение синхронизации личных данных
@@ -64,7 +64,7 @@ outlineSection: |-
   - Управление синхронизированными удостоверениями
 
 
-  #### Лабораторная работа&#58; Внедрение синхронизации идентификаторов
+  #### Лабораторная &#58; Внедрение синхронизации идентификаторов
   - Упражнение 1&#58; Настройка организации для синхронизации идентификаторов
   - Упражнение 2&#58; Внедрение синхронизации идентификаторов
 
@@ -76,8 +76,9 @@ outlineSection: |-
   - Внедрение AD FS
 
 
-  ### Модуль 4&#58; Внедрение приложений и внешнего доступа
+  ### Модуль 4&#58; Внедрение  приложений и внешнего доступа
   #### Уроки
   - Реализация приложений в Azure AD
   - Настройка прокси приложения Azure AD Application Proxy
   - Разработка решений для внешнего доступа
+
