--- a/learn-certs-pr/courses/ms-101t03.yml
+++ b/learn-certs-pr/courses/ms-101t03.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление устройствами в Microsoft 365
+title: Microsoft 365 Device Management
 metadata:
-  title: 'Курс MS-101T03-A: Управление устройствами в Microsoft 365'
-  description: 'Курс MS-101T03-A: Управление устройствами в Microsoft 365'
+  title: 'Course MS-101T03-A: Microsoft 365 Device Management'
+  description: 'Course MS-101T03-A: Microsoft 365 Device Management'
 uid: course.ms-101t03
 courseNumber: 'MS-101T03-A'
 hoursToComplete: 24
@@ -35,7 +35,7 @@ products:
 exams:
 - uid: exam.ms-101
 summary: |-
-  Этот курс представляет собой введение в мир управления устройствами Microsoft 365 - от создания Microsoft Intune до регистрации устройств в Intune, мониторинга устройств, до контроля того, что пользователи могут делать с зарегистрированных устройств, с помощью политик условного доступа. Если вы уже управляете устройствами с помощью традиционного инструмента управления устройствами, такого как Configuration Manager, вам будет интересно узнать, как беспрепятственно перейти к современному управлению, в котором устройства управляются Intune, и как можно извлечь выгоду из таких возможностей управления новыми устройствами, как соответствие требованиям, условный доступ и автопилот Windows для развертывания новых устройств из облака.
+  Этот курс представляет собой введение в мир управления устройствами Microsoft 365 - от создания Microsoft Intune до регистрации устройств в Intune, мониторинга устройств, до контроля того, что пользователи могут делать с зарегистрированных устройств, с помощью политик условного доступа. Если вы уже управляете устройствами с помощью традиционного инструмента управления устройствами, такого как Configuration Manager, вам будет интересно узнать, как беспрепятственно перейти к современному управлению, в котором устройства управляются Intune, и как можно извлечь выгоду из  таких возможностей управления новыми устройствами, как соответствие требованиям, условный доступ и автопилот Windows для развертывания новых устройств из облака.
 
   #### Профиль аудитории
   Этот курс предназначен для лиц, которые претендуют на роль администратора Microsoft 365 Enterprise и прошли один из путей сертификации администратора на основе ролей Microsoft 365.
@@ -71,14 +71,15 @@ outlineSection: |-
 
   ### Модуль 4&#58; Лабораторный практикум
 
-  #### Лабораторная работа&#58; Работа с магазином Microsoft Store для бизнеса
+  #### Лабораторная &#58; Работа с магазином Microsoft Store для бизнеса
   - Упражнение 1&#58; Обеспечение и управление Microsoft Store для бизнеса
   - Упражнение 2&#58; Использование магазина Microsoft Store для бизнеса
 
 
-  #### Лабораторная работа&#58; Управление устройствами с помощью Intune
+  #### Лабораторная &#58; Управление устройствами с помощью Intune
   - Упражнение 1&#58; Заимейте Intune и включите управление устройствами
   - Упражнение 2&#58; Конфигурация Azure AD под Intune
   - Упражнение 3&#58; Создание политик Intune
   - Упражнение 4&#58; Регистрация устройства Windows 10
   - Упражнение 5&#58; Управление и мониторинг устройства в Intune
+
