--- a/learn-certs-pr/courses/ms-300t02.yml
+++ b/learn-certs-pr/courses/ms-300t02.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Управление SharePoint Online
+title: Managing SharePoint Online
 metadata:
-  title: 'Курс MS-300T02-A: Управление SharePoint Online'
-  description: 'Курс MS-300T02-A: Управление SharePoint Online'
+  title: 'Course MS-300T02-A: Managing SharePoint Online'
+  description: 'Course MS-300T02-A: Managing SharePoint Online'
 uid: course.ms-300t02
 courseNumber: 'MS-300T02-A'
 hoursToComplete: 24
@@ -39,7 +39,7 @@ summary: |-
   Этот курс предназначен для роли администратора коллективной работы Microsoft 365. Эта роль отвечает за настройку, развертывание и управление рабочими нагрузками Office 365 и Azure, ориентированными на эффективное и результативное сотрудничество и принятие. Они управляют приложениями, службами и поддерживающей инфраструктурой для удовлетворения бизнес-требований. Администратор знает о товарах и ​​услугах и может различать их, но не может напрямую управлять каждым товаром или услугой.
 
   Администратор совместной работы должен иметь возможность развертывать, управлять, переносить и защищать SharePoint (в сети, локально и гибридно), OneDrive и группы. 
-  
+
   Администратор Teamwork обладает фундаментальным пониманием точек интеграции со следующими приложениями и службами&#58; Office, PowerApps, Flow, Yammer, Microsoft Graph, Stream, Planner и Project. Администратор понимает, как интегрировать сторонние приложения и сервисы, в том числе бизнес-приложения.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
@@ -55,7 +55,7 @@ outlineSection: |-
   - Планирование и конфигурация настроек и приложений
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать, как настроить свойства профиля пользователя
   - Описать, как управлять аудиторией
   - Описать, как использовать каталог приложений для создания пользовательских приложений
@@ -70,7 +70,7 @@ outlineSection: |-
   - Планирование и настройка служб Business Connectivity Services (BCS) и службы Secure Store.
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать функции управляемых метаданных
   - Создавать и управлять группами терминов, наборами терминов и терминами
   - Объяснить ключевые компоненты модели BDC
@@ -86,7 +86,7 @@ outlineSection: |-
   - Управление поиском
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать разницу между современным и классическим поиском
   - Описать , как планировать и настраивать источники контента
   - Описать, как управлять схемой поиска
@@ -96,4 +96,5 @@ outlineSection: |-
 
   ### Модуль 4&#58; Завершение курса
 
-  #### Лабораторная работа&#58; Импорт наборов терминов
+  #### Лабораторная &#58; Импорт наборов терминов
+
