--- a/learn-certs-pr/courses/ms-300t04.yml
+++ b/learn-certs-pr/courses/ms-300t04.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Включение рабочих нагрузок Office 365 для совместной работы
+title: Enabling Office 365 Workloads for Collaboration
 metadata:
-  title: 'Курс MS-300T04-A: Включение рабочих нагрузок Office 365 для совместной работы'
-  description: 'Курс MS-300T04-A: Включение рабочих нагрузок Office 365 для совместной работы'
+  title: 'Course MS-300T04-A: Enabling Office 365 Workloads for Collaboration'
+  description: 'Course MS-300T04-A: Enabling Office 365 Workloads for Collaboration'
 uid: course.ms-300t04
 courseNumber: 'MS-300T04-A'
 hoursToComplete: 48
@@ -32,16 +32,16 @@ exams:
 - uid: exam.ms-300
 summary: |-
   Преобразование командной работы и совместной работы внутри и вне организации становится все более важным в современном рабочем пространстве. В этом курсе вы узнаете, как использовать рабочие нагрузки для совместной работы Office 365 для повышения производительности ваших организаций, таких как Yammer, Stream, PowerApps и Flow. Мы будем оценивать доступные инструменты для совместной работы и анализировать бизнес-требования. Вы также узнаете, как планировать и разрабатывать управление цифровыми преобразованиями, включая принятие пользователей и управление изменениями. 
-  
-  Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют инфраструктурой командной работы в своей организации. 
-  
-  Это последний из четырех курсов для администратора Teamwork. Эти курсы помогают подготовиться к экзамену MS-300&#58; Развертывание Microsoft 365 Teamwork.
 
+  Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют инфраструктурой командной работы в своей организации. 
+
+  Это последний из четырех курсов для администратора Teamwork. Эти курсы помогают подготовиться к экзамену MS-300&#58; Развертывание Microsoft 365 Teamwork.
+  
   #### Профиль аудитории
   Этот курс предназначен для роли администратора коллективной работы Microsoft 365. Эта роль отвечает за настройку, развертывание и управление рабочими нагрузками Office 365 и Azure, ориентированными на эффективное и результативное сотрудничество и принятие. Они управляют приложениями, службами и поддерживающей инфраструктурой для удовлетворения бизнес-требований. Администратор знает и может различать продукты и услуги, но не может напрямую управлять каждым продуктом или услугой.
 
   Администратор совместной работы должен иметь возможность развертывать, управлять, переносить и защищать SharePoint (в сети, локально и гибридно), OneDrive и группы. 
-  
+
   Администратор Teamwork обладает фундаментальным пониманием точек интеграции со следующими приложениями и службами&#58; Office, PowerApps, Flow, Yammer, Microsoft Graph, Stream, Planner и Project. Администратор понимает, как интегрировать сторонние приложения и сервисы, в том числе бизнес-приложения.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
@@ -56,7 +56,7 @@ outlineSection: |-
   - Анализ бизнес-требований
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Оценить доступные технологические инструменты
   - Выполнить анализ бизнес-требований
 
@@ -70,14 +70,14 @@ outlineSection: |-
   - Мониторинг решений для совместной работы
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Разработать принципы цифровой трансформации
   - Внедрение управления приложениями
   - Управление принятием и изменением пользователей
   - Мониторинг решений для совместной работы
 
 
-  ### Модуль 3&#58; Управление рабочими нагрузками Office 365 для совместной работы
+  ### Модуль 3&#58;  Управление рабочими нагрузками Office 365 для совместной работы
   В Office 365 есть много приложений и функций, которые вы можете использовать для совместной работы. Вам необходимо понять, как настроить эти приложения и функции в соответствии с потребностями вашей организации. В этом модуле вы узнаете об управлении группами Office 365, Power BI, Microsoft Stream, Yammers, Flow и PowerApps.
   #### Уроки
   - Управление рабочими нагрузками Office 365 для совместной работы.
@@ -86,8 +86,9 @@ outlineSection: |-
   - Управление возможностями Flow и PowerApps
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Управлять Office 365 для совместной работы
   - Управлять возможностями Stream
   - Управлять возможностями Yammer
   - Управлять возможностями Flow и PowerApps
+
