--- a/learn-certs-pr/courses/ms-301t01.yml
+++ b/learn-certs-pr/courses/ms-301t01.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Внедрение инфраструктуры SharePoint 2019
+title: Implementing SharePoint 2019 Infrastructure
 metadata:
-  title: 'Курс MS-301T01-A: Внедрение инфраструктуры SharePoint 2019'
-  description: 'Курс MS-301T01-A: Внедрение инфраструктуры SharePoint 2019'
+  title: 'Course MS-301T01-A: Implementing SharePoint 2019 Infrastructure'
+  description: 'Course MS-301T01-A: Implementing SharePoint 2019 Infrastructure'
 uid: course.ms-301t01
 courseNumber: 'MS-301T01-A'
 hoursToComplete: 48
@@ -10,7 +10,7 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Описать функцию MinRole в SharePoint 2019
 - skill: Описать, как установить и настроить SharePoint 2019
-- skill: Описать как реализовать высокую доступность для SharePoint
+- skill: Описать  как реализовать высокую доступность для SharePoint
 - skill: Описать инфраструктуру аутентификации в SharePoint 2019
 - skill: Объяснить концепции федеративной идентичности
 - skill: Описать, как создавать семейства сайтов
@@ -32,23 +32,23 @@ exams:
 - uid: exam.ms-301
 summary: |-
   Платформа SharePoint Server 2019 разработана с учетом требований современных стилей работы. Она предоставляет новые современные возможности для пользователей, которые являются интуитивно понятными и знакомыми по SharePoint Online. В этом курсе вы узнаете, как развернуть и настроить SharePoint Server 2019. Мы также обсудим, как планировать и настраивать SharePoint на основе аутентификации и безопасности для защиты среды. Вы также узнаете, как управлять контентом SharePoint в соответствии с современной информационной архитектурой. 
-  
+
   Этот курс предназначен для ИТ-специалистов, которые развертывают и управляют инфраструктурой командной работы в своей организации. 
-  
+
   Это первый из четырех курсов для администратора Teamwork. Эти курсы помогают подготовиться к экзамену MS-301&#58; Развертывание SharePoint Server Hybrid.
 
   #### Профиль аудитории
   Этот курс предназначен для роли администратора коллективной работы Microsoft 365. Эта роль отвечает за настройку, развертывание и управление рабочими нагрузками Office 365 и Azure, ориентированными на эффективное и результативное сотрудничество и принятие. Они управляют приложениями, службами и поддерживающей инфраструктурой для удовлетворения бизнес-требований. Администратор знает и может различать продукты и услуги, но не может напрямую управлять каждым продуктом или услугой. 
-  
+
   Администратор совместной работы должен иметь возможность развертывать, управлять, переносить и защищать SharePoint (в сети, локально и гибридно), OneDrive и группы. 
-  
+
   Администратор Teamwork обладает фундаментальным пониманием точек интеграции со следующими приложениями и службами&#58; Office, PowerApps, Flow, Yammer, Microsoft Graph, Stream, Planner и Project. Администратор понимает, как интегрировать сторонние приложения и сервисы, в том числе бизнес-приложения.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Опыт работы с Windows PowerShell
   - Основы понимания управления SQL Server
   - Основы понимания сетей, в том числе DNS
-  - Знание администрирования Windows Server
+  - Знание администрирования Windows Server.
   - Основы понимания Active Directory и Azure AD
   - Основы понимания управления мобильными устройствами и альтернативных операционных систем (Android и macOS)
 outlineSection: |-
@@ -61,7 +61,7 @@ outlineSection: |-
   - Установка и управление SharePoint Farm
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать функцию MinRole в SharePoint 2019
   - Описать, как установить и настроить SharePoint 2019
   - Описать, как реализовать высокую доступность для SharePoint
@@ -76,7 +76,7 @@ outlineSection: |-
   - Настройка федеративной аутентификации
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Описать инфраструктуру аутентификации в SharePoint 2019
   - Описать аутентификацию NTLM и Kerberos
   - Описать межсерверную аутентификацию
@@ -92,14 +92,15 @@ outlineSection: |-
   - Управление семействами сайтов
 
 
-  После завершения этого модуля студенты смогут&#58;
+  После завершения этого модуля студенты получат следующее&#58;
   - Объяснить концепции семейства сайтов
   - Описать, как создавать семейства сайтов
   - Описать, как планировать авторизацию в SharePoint 2019
   - Описать, как управлять уровнями разрешений в SharePoint 2019
-  - Описать, как управлять группами SharePoint в SharePoint 2019
+  - Описать,  как управлять группами SharePoint в SharePoint 2019
 
 
   ### Модуль 4&#58; Завершение курса
 
   #### Лабораторная работа&#58; Создание и настройка веб-приложений
+
