--- a/learn-certs-pr/courses/ms-500t03.yml
+++ b/learn-certs-pr/courses/ms-500t03.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Course
-title: Внедрение защиты информации Microsoft 365 Information Protection
+title: Implementing Microsoft 365 Information Protection
 metadata:
-  title: 'Курс MS-500T03-A: Внедрение защиты информации Microsoft 365 Information Protection'
-  description: 'Курс MS-500T03-A: Внедрение защиты информации Microsoft 365 Information Protection'
+  title: 'Course MS-500T03-A: Implementing Microsoft 365 Information Protection'
+  description: 'Course MS-500T03-A: Implementing Microsoft 365 Information Protection'
 uid: course.ms-500t03
 courseNumber: 'MS-500T03-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Внедрение управления правами на информацию
-- skill: Защита сообщений в Office 365
-- skill: Настройка политики предотвращения потери данных
-- skill: Развертывание и управление Cloud App Security
-- skill: Реализация защиты информации Azure для Microsoft 365
-- skill: Реализация защиты информации Windows для устройств
+- skill: Внедрение управления правами на информацию.
+- skill: Защита сообщений в Office 365.
+- skill: Настройка политики предотвращения потери данных.
+- skill: Развертывание и управление Cloud App Security.
+- skill: Реализация защиты информации Azure для Microsoft 365.
+- skill: Реализация защиты информации Windows для устройств.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -29,13 +29,13 @@ exams:
 - uid: exam.ms-500
 summary: |-
   Защита информации - это концепция размещения и классификации данных в любом месте, где они находятся. В этом курсе вы узнаете о технологиях защиты информации, которые помогают защитить вашу среду Microsoft 365. В частности, в этом курсе рассматриваются контент, управляемый правами на информацию, шифрование сообщений, а также метки, политики и правила, поддерживающие предотвращение потери данных и защиту информации. Наконец, курс объясняет развертывание Microsoft Cloud App Security.
-
+  
   #### Профиль аудитории
   Этот курс предназначен для роли администратора безопасности Microsoft 365. Эта роль сотрудничает с Microsoft 365 Enterprise Administrator, заинтересованными сторонами в бизнесе и другими администраторами рабочей нагрузки для планирования и реализации стратегий безопасности и обеспечивает соответствие решений политикам и нормам организации. 
-  
+
   Эта роль активно защищает корпоративные среды Microsoft 365. В его или ее обязанности входит реагирование на угрозы, внедрение, управление и мониторинг решений по обеспечению безопасности и соответствию требованиям для среды Microsoft 365. Они реагируют на инциденты, расследования и обеспечение управления данными.
 
-  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft 365 и включает в себя гибридные среды.
+  Администратор безопасности Microsoft 365 Security знаком с рабочими нагрузками Microsoft 365 и обладает обширными навыками и опытом в области защиты идентификационных данных, защиты информации, защиты от угроз, управления безопасностью и управления данными. Эта роль ориентирована на среду Microsoft  365 и включает в себя гибридные среды.
 prerequisitesSection: |-
   Учащиеся должны начать этот курс, уже имея следующие навыки&#58;
   - Базовое концептуальное понимание Microsoft Azure
@@ -56,18 +56,18 @@ outlineSection: |-
   - Защита информации Windows
 
 
-  #### Лабораторная работа&#58; Предотвращение потери данных
+  #### Лабораторная &#58; Предотвращение потери данных
   - Создание и лицензирование пользователей в вашей организации
   - Настройка автоматической регистрации MDM
   - Настройка AIP и WIP
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать различные параметры шифрования Microsoft 365
-  - Описывать использование S/MIME
-  - Описывать работу шифрования сообщений Office 365
-  - Настраивать метки и политики для защиты информации Azure
-  - Настраивать предварительные параметры службы AIP для шаблонов службы управления правами (RMS)
-  - Планировать развертывания политик защиты информации Windows
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать различные параметры шифрования Microsoft 365.
+  - Описать использование S/MIME.
+  - Описать, как работает шифрование сообщений Office 365.
+  - Настроить метки и политики для защиты информации Azure.
+  - Настраивать предварительные параметры службы AIP для шаблонов службы управления правами (RMS).
+  - Планировать развертывания политик защиты информации Windows.
 
 
   ### Модуль 2&#58; Предотвращение потери данных
@@ -80,22 +80,22 @@ outlineSection: |-
   - Советы по политике
 
 
-  #### Лабораторная работа&#58; Предотвращение потери данных
+  #### Лабораторная &#58; Предотвращение потери данных
   - Создание и лицензирование пользователей в вашей организации
   - Создание политики DLP
   - Тестирование политик DLP
 
   После завершения этого модуля учащиеся должны уметь&#58;
-  - Описывать предотвращение потери данных (DLP)
-  - Описывать, как действия и условия работают вместе для DLP
-  - Использовать шаблоны политик для реализации политик DLP для часто используемой информации
-  - Описывать различные встроенные шаблоны для политик DLP
-  - Правильно настраивать правила защиты контента
-  - Описывать изменение существующих правил политик DLP
-  - Настраивать параметры переопределения пользователей для правила DLP
-  - Описывать работу с управляемыми свойствами для политик DLP
-  - Объяснить, как SharePoint Online создает свойства для обхода из документов
-  - Описывать пользовательский опыт, когда пользователь создает сообщение электронной почты, которое содержит конфиденциальную информацию
+  - Описать предотвращение потери данных (DLP).
+  - Описать, как действия и условия работают вместе для DLP.
+  - Использовать шаблоны политик для реализации политик DLP для часто используемой информации.
+  - Описать различные встроенные шаблоны для политик DLP.
+  - Правильно настроить правила защиты контента.
+  - Описать, как изменить существующие правила политик DLP.
+  - Настроить параметр переопределения пользователя для правила DLP.
+  - Описать, как работать с управляемыми свойствами для политик DLP.
+  - Объяснить, как SharePoint Online создает свойства для обхода из документов.
+  - Описать пользовательский опыт, когда пользователь создает сообщение  электронной почты, которое содержит конфиденциальную информацию.
 
 
   ### Модуль 3&#58; Безопасность облачных приложений
@@ -103,14 +103,15 @@ outlineSection: |-
   #### Уроки
   - Объяснение безопасности облачных приложений
   - Использование информации о безопасности облачных приложений
-  - Безопасность приложения Office 365 Cloud
+  - Office 365 Cloud App Security
 
-  После завершения этого модуля студенты смогут&#58;
-  - Описывать безопасность облачных приложений
-  - Объяснять развертывание Cloud App Security
-  - Управлять облачными приложениями с помощью политик
-  - Устранять неполадки безопасности облачного приложения
-  - Использовать каталог облачных приложений
-  - Использовать инструментальную панель Cloud Discovery
-  - Подготовиться к Office 365 Cloud App Security
-  - Управлять разрешениями облачных приложений
+  После завершения этого модуля студенты получат следующее&#58;
+  - Описать безопасность облачных приложений.
+  - Объяснить, как развернуть Cloud App Security.
+  - Управлять своими облачными приложениями с помощью политик.
+  - Устранять неполадки безопасности облачного приложения.
+  - Использовать каталог облачных приложений.
+  - Использовать инструментальную панель Cloud Discovery.
+  - Подготовиться к Office 365 Cloud App Security.
+  - Управлять разрешениями облачных приложений.
+
